*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9082 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/be/foxtrick.properties
+++ b/content/locale/be/foxtrick.properties
@@ -162,16 +162,11 @@ module.RapidId.desc=Зручнае поле ўводу наверсе старо
 
 #Save for work
 
-#Embed Media
-
 #Extrashortcuts
 ExtraShortcuts.statistics=Статыстыка
 ExtraShortcuts.transfers=Трансфэры
 ExtraShortcuts.prefs=Налады
 ExtraShortcuts.ftprefs=Налады FoxTrick
-
-#lineupShortcut
-
 
 #HistoryStats
 
@@ -179,11 +174,9 @@ ExtraShortcuts.ftprefs=Налады FoxTrick
 #following string uses pluralForms
 YouthPromotes.today=Гулец можа быць пераведзены ў асноўны склад сёньня\!
 
-# links
-links.boxheader=Спасылкі
-
 #teamstats+filters
 TeamStats.boxheader=Агляд каманды
+TeamStats.General=Агульны
 TeamStats.PlayerNotToOld=Гульцы « 19 yr
 TeamStats.PlayerToOld=Гульцы »\= 19 yr
 TeamStats.Cards=Карткі
@@ -192,6 +185,12 @@ TeamStats.TransferListed=Высунуты на трансфэр
 TeamStats.Pictures=Выявы
 TeamStats.PlayedLatest=Граў у апошнім матчы
 TeamStats.NotPlayedLatest=Ня граў у апошнім матчы
+
+#PlayerBirthday
+PlayerBirthday.boxheader=Дні народзінаў
+PlayerBirthday.BirthdayToday=Народзіны сёньня
+PlayerBirthday.BirthdayLastWeek=Народзіны на мінулым тыдні
+PlayerBirthday.BirthdayNextWeek=Народзіны на гэтым тыдні
 
 #season stats
 #note to translators. use abreviations of league table where applicable
@@ -207,37 +206,42 @@ LeagueNewsFilter.friendlies=Таварыскія & зьмены трэнэраў
 LeagueNewsFilter.transfers=Трансфэры
 LeagueNewsFilter.lineupChanges=Зьмены пабудовы
 
-# AddLeaveConfButton
-AddLeaveConfButton.alert=Націсьніце значак 'Захаваць' на наступнай старонцы, каб пакінуць гэты форум.
-AddLeaveConfButton.LeaveForum=Пакінуць форум
+#team pages
+sidebarBox.actions=Дзеяньні
+TeamSelectBox.selectplayer=Абраць гульца
+ExtendedPlayerDetails.perseason=/сэзон
+ExtraPlayerInfo.defensiveTrainer=%s трэнэр, які аддае перавагу абароне.
+ExtraPlayerInfo.offensiveTrainer=%s трэнэр, які любіць атакаваць.
+ExtraPlayerInfo.balancedTrainer=%s трэнэр, які не аддае перавагі а ні атацы, а ні абароне.
+ManagerButtons.writeInGuestbook=Напісаць у гасьцёўню
 
-#ShowForumPrefButton
+#forum
+AddLeaveConfButton.LeaveForum=Пакінуць форум
+AddLeaveConfButton.alert=Націсьніце значак 'Захаваць' на наступнай старонцы, каб пакінуць гэты форум.
 ShowForumPrefButton.forumPreferences=Налады форуму
+HideSignatures.signaturetoggle=Подпіс
 
 # ForumTemplates
 ForumTemplates.make=Зрабіць шаблон з гэтага паведамленьня
+ForumTemplates.make.error=Шаблон ужо існуе ці пусты
 ForumTemplates.show=Паказаць шаблоны
 ForumTemplates.hide=Схаваць шаблоны
-ForumTemplates.make.error=Шаблон ужо існуе ці пусты
 ForumTemplates.templateTitle=Загаловак шаблона\:
 ForumTemplates.templateTitle.error=Сымбалі '[' і ']' не дазволеныя ў загалоўках
 ForumTemplates.delete.ask=Выдаліць шаблон?
 
-#PostPreview
+#ForumPreview
 ForumPreview.preview.title=Паказваць перадпрагляд паведамленьня
 ForumPreview.preview=Перадпрагляд
 ForumPreview.send=Даслаць
 
-
-ForumYouthIcons.toolbar.youth=Маладзёвыя спасылкі
+#ForumYouthIcons
 ForumYouthIcons.toolbar.main=Асноўныя спасылкі
+ForumYouthIcons.toolbar.youth=Маладзёвыя спасылкі
 ForumYouthIcons.youthplayerid=Уставіць тэг юнака.
 ForumYouthIcons.youthteamid=Уставіць тэг юнацкай каманды.
 ForumYouthIcons.youthmatchid=Уставіць тэг на матч юнакаў.
 ForumYouthIcons.youthseries=Уставіць тэг юнацкай лігі.
-
-
-#special bbcode, not really youth icons
 ForumSpecialBBCode.q=Дадаць выцемку
 ForumSpecialBBCode.br=Дадаць разрыў
 ForumSpecialBBCode.user=Дадаць userID
@@ -247,8 +251,6 @@ ForumSpecialBBCode.clock=Дадаць бягучы час
 ForumSpecialBBCode.spoiler=Дадаць спойлер(схаваны тэкст)
 ForumSpecialBBCode.pre=Уставіць тэг фармата 'pre'
 
-
-
 #Transferlistfilters
 TransferSearchFilters.boxheader=Фільтры FoxTrick
 TransferSearchFilters.enterName=Пазначце імя фільтра\:
@@ -256,16 +258,6 @@ TransferSearchFilters.deleteFilter.ask=Вы сапраўды жадаеце вы
 TransferSearchFilters.saveFilter=Захаваць новы фільтар
 
 #Filter
-
-#Locales for date and time
-#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
-#next 6 use pluralFroms
-datetimestrings.days=дзён
-datetimestrings.hours=гг
-datetimestrings.minutes=хв
-datetimestrings.short_seasons=сэк
-datetimestrings.short_weeks=тдн
-datetimestrings.short_days=дз
 
 #Transfer prices
 MedianTransferPrice.median=Медыянны кошт
@@ -304,16 +296,16 @@ categories.R=Зап
 categories.E1=Э1
 categories.E2=Э2
 
+#match positions
 
 
 
-TeamStats.General=Агульны
-
+# SkillTable
+Skill_table=Табліца здольнасьцяў
+Switch_view=Зьмяніць выгляд
+Switch_view.title=Зьмяніць выгляд табліцы.
 PlayerNumber=Нумар гульца
-
 TSI=Агульны Індэкс Здольнасьцяў
-
-
 Personality=Асоба
 Agreeability=Характар
 Agreeability.abbr=Хар
@@ -321,63 +313,48 @@ Aggressiveness=Тэмпэрамэнт
 Aggressiveness.abbr=Тэм
 Honesty=Сумленнасьць
 Honesty.abbr=Сум
-
 Leadership=Лідэрства
 Leadership.abbr=Лід
 Experience=Досьвед
-
 Stamina=Трываласьць
 Stamina.abbr=Тры
 Form=Форма
 Form.abbr=Фо
-
-
-
 Yellow_card=Жоўтыя карткі
 Red_card=Чырвоныя карткі
-
 Speciality=Спецыялізацыя
 Speciality.abbr=Сп
-
 Last_stars=Апошнія зоркі
 Last_stars.abbr=Зрк
 Last_position=Апошняя пазыцыя
 Last_position.abbr=Паз
 #following string uses pluralForms
-
 Bruised=Пашкоджаны
 Bruised.abbr=Паш
 Injured=Траўмаваны
 Injured.abbr=Трм
-
 Salary=Заробак
 Salary.abbr=Зар
-
 TransferListed=На трансфэры
-
 NrOfMatches=Матчаў згуляў
 LeagueGoals=Галоў у лізе
 CareerGoals=Галоў за кар’еру
+Coach=Трэнэр
+Nationality=Нацыянальнасьць
+Nationality.abbr=Нац
+Flag=Сьцягі
+Flag.abbr=Сьцяг
+Player=Гулец
+Age=Узрост
+Age.abbr=Узр
+Match=Сустрэча
+Series=Ліга
 
-
-
-
-
-#matchdetail
-match.ratings.midfield=Паўабарона
-match.ratings.attack=Атака
-match.ratings.defence=Абарона
-
-match.ratings.right=Справа
-match.ratings.center=Цэнтар
-match.ratings.left=Зьлева
-match.ratings.rightshort=П
-match.ratings.centershort=Ц
-match.ratings.leftshort=Л
-match.ratings.ifkshort=С
+#confirms
 ConfirmActions.bid=Ці вы жадаеце зрабіць прапанову за гэтага гульца?  Кошт\: %s.
-HideSignatures.signaturetoggle=Подпіс
-TeamSelectBox.selectplayer=Абраць гульца
+
+# links
+links.boxheader=Спасылкі
 links.custom.selecticon=Абраць значак
 links.custom.addpersonallink=Дадаць ўласную спасылку
 links.custom.addlink=Дадаць спасылку
@@ -390,33 +367,24 @@ links.custom.tags=Тэгі
 links.custom.help=Дапамога
 links.custom.helptext=Па-першае, гэта проста рэжым рэдагаваньня. ClickingПстрычка на загаловак гэтага простакутніку пераключае паміж звычайным і рэжымам рэдагаваньня. Толькі ў нармальным рэжыме вашыя ўласныя спасылкі функцыянуюць цалкам. Зьнешнія статычныя спасылку лёгка дадаць, проста дадайце url цалкам (Напрыклад\: http\: //alltid.org/league/427/). Для ўнутраных статычных старонак прыбярыце сэрверную частку (Напрыклад\: /World/Series/Default.aspx?LeagueLevelUnitID\=427). Тэгі спатрэбяцца вам толькі для дынамічных спасылак. З тэгамі спасылкі дынамічна зьмяняюцца, выкарыстоўваючы інфармацыю пра старонку, на якой вы знаходзіцеся. Напрыклад, http\://alltid.org/league/[leagueid] перамесьціць вас на старонку Alltid  для лігі, якую вы толькі што праглядалі ў Hattrick. Тэгі, якія даступныя на кожнай старонцы пералічаныя ў сьпісе. Вы можаце выкарыстоўваць толькі тыя з іх, якія прысутнічаюць на старонцы, дзе вы дадаеце ўласную спасылку. Тэкст прыведзены ў простакутніку толькі для прыкладу. Вы можаце падпісаць тэг уласнаручна (выкарыстоўвая []).
 links.custom.helptext2=Вы таксама маеце магчымасьць экпартаваць спасылкі і падзяліцца імі. Каб зрабіць гэта, націсьніце на кнопку экспартаваць і абярыце файл, у які захаваць гэтую спасылку. Спасылку будуць дададзены ў гэты файл, то бок можна захаваць некалькі ў адзін файл. Каб імпартаваць спасылкі, перайдзіце на старонку наладаў і імпартуйце налады. Толькі дадзеныя з абранага файлу будуць імпартаваныя, што ў гэтым выпадку азначае вашыя спасылкі. Ніякія з вашых папярэдніх спасылак ня будуць выдаленыя.
-matches.income=Даход\:
-PlayerBirthday.boxheader=Дні народзінаў
-PlayerBirthday.BirthdayToday=Народзіны сёньня
-PlayerBirthday.BirthdayLastWeek=Народзіны на мінулым тыдні
-PlayerBirthday.BirthdayNextWeek=Народзіны на гэтым тыдні
-copy.matchid=Націсьніце, каб зкапіяваць matchID
-ExtendedPlayerDetails.perseason=/сэзон
 
-ExtraPlayerInfo.defensiveTrainer=%s трэнэр, які аддае перавагу абароне.
-ExtraPlayerInfo.offensiveTrainer=%s трэнэр, які любіць атакаваць.
-ExtraPlayerInfo.balancedTrainer=%s трэнэр, які не аддае перавагі а ні атацы, а ні абароне.
 
 #following string uses pluralForms
 #following string uses pluralForms
 
 
-module.modules_allpages=Модулі, якія працуюць на ўсіх старонках
-
-Coach=Трэнэр
-
-
-ManagerButtons.writeInGuestbook=Напісаць у гасьцёўню
-copy.copyplayerad=Капіяваць аб’яву гульца
-copy.copied=Аб’ява пра гульца была зкапіявана
-
+# Context menu items
+# This would look like: Copy player ID: 123456789
+copy.id=Капіяваць %s\: %i
+copy.link=Капіяваць спасылку ў HT-ML
+copy.ht-ml=Капіяваць у HT-ML
+copy.table=Капіяваць табліцу у HT-ML
 
 #copy
+copy.copyplayerad=Капіяваць аб’яву гульца
+copy.copied=Аб’ява пра гульца была зкапіявана
+copy.matchid=Націсьніце, каб зкапіяваць matchID
+
 copy.PostID=Капіяваць PostID
 CopyPosting=Капіяваць паведамленьне у стылі %s
 CopyPosting.abbr=Капіяваць у %s стылі
@@ -432,9 +400,8 @@ copy.copied.matchid=ID матчу  быў зкапіяваны.
 copy.copied.postid=ID паведамленьня [post\=%s] было зкапіявана.
 copy.copied.posting=Паведамленьне было зкапіявана.
 
-
-
 #matches
+matches.income=Даход\:
 matches.attackdefensebars=Нападзеньне vs Абарона
 matches.right=Справа
 matches.left=Зьлева
@@ -444,12 +411,21 @@ matches.attack=нап
 matches.indfreekick=Непрамыя стандарты
 matches.wronglang=FoxTrick\: Статыстыка ня можа быць адлюстраваная, бо вашая мова не зарэгістраваная, альбо вы абралі няслушную мову ў наладах. Калі ласка, пераканайцеся, што вашая мова ў наладах Foxtrick тая ж, што і мова Хэттрыку.
 
-# Context menu items
-# This would look like: Copy player ID: 123456789
-copy.id=Капіяваць %s\: %i
-copy.link=Капіяваць спасылку ў HT-ML
-copy.ht-ml=Капіяваць у HT-ML
-copy.table=Капіяваць табліцу у HT-ML
+#matchdetail
+match.ratings.midfield=Паўабарона
+match.ratings.attack=Атака
+match.ratings.defence=Абарона
+
+match.ratings.right=Справа
+match.ratings.center=Цэнтар
+match.ratings.left=Зьлева
+match.ratings.rightshort=П
+match.ratings.centershort=Ц
+match.ratings.leftshort=Л
+match.ratings.ifkshort=С
+
+
+
 
 #teampopups
 Manager=Мэнэджэр
@@ -470,7 +446,6 @@ YouthMatches=Юнацкія матчы
 more=болей...
 less=меней...
 
-
 # FlagCollectionToMap
 flagCollectionToMap.ShowMap=Пакзваць мапу
 flagCollectionToMap.HideMap=Схаваць мапу
@@ -481,32 +456,14 @@ flagCollectionToMap.MEast=Сярэдні Ўсход
 flagCollectionToMap.SAmerica=Паўднёвая Амерыка
 flagCollectionToMap.World=Сьвет
 
-# SkillTable
-Skill_table=Табліца здольнасьцяў
-Switch_view=Зьмяніць выгляд
-
 
 
 # TransferSearchResultFilters
-
-# refer to transfer search form
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
 RapidId.view=Від
 RapidId.viewById=Глядзець па ID
 RapidId.senior=Дарослыя
-
-# SkillTable
-Switch_view.title=Зьмяніць выгляд табліцы.
-Nationality=Нацыянальнасьць
-Nationality.abbr=Нац
-Flag=Сьцягі
-Flag.abbr=Сьцяг
-Player=Гулец
-Age=Узрост
-Age.abbr=Узр
-Match=Сустрэча
-Series=Ліга
 
 
 # HTMSPrediction
@@ -536,7 +493,15 @@ CrossTable.table=Шахматная-табліца сэзону
 
 # fennec ui
 
-sidebarBox.actions=Дзеяньні
+#Locales for date and time
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
+datetimestrings.days=дзён
+datetimestrings.hours=гг
+datetimestrings.minutes=хв
+datetimestrings.short_seasons=сэк
+datetimestrings.short_weeks=тдн
+datetimestrings.short_days=дз
 
 # buttons
 button.cancel=Адмяніць
@@ -555,6 +520,7 @@ button.copy=Капіяваць
 
 
 # keep the following line untranslated
+
 
 # End of IN-GAME STRINGS.
 
