--- a/content/locale/ca/foxtrick.properties
+++ b/content/locale/ca/foxtrick.properties
@@ -290,18 +290,14 @@ module.TableSort.desc=Fa que totes les taules correctes i que tinguin capçalera
 
 #Save for work
 
-#Embed Media
-
 #Extrashortcuts
 ExtraShortcuts.statistics=Estadístiques
 ExtraShortcuts.transfers=Transferències
 ExtraShortcuts.prefs=Preferències
 ExtraShortcuts.ftprefs=Preferències de FoxTrick
 
-#lineupShortcut
-
-
 #HistoryStats
+HistoryStats.boxheader=Estadístiques històriques
 HistoryStats.season=Temporada
 HistoryStats.season.short=T
 HistoryStats.cup=Ronda de copa
@@ -310,7 +306,6 @@ HistoryStats.league=Lligues
 HistoryStats.league.short=Lliga
 HistoryStats.finalPosition=Posició final a la lliga
 HistoryStats.finalPosition.short=P
-HistoryStats.boxheader=Estadístiques històriques
 HistoryStats.cupwinner=Guanyador de la copa
 HistoryStats.cupwinner.short=CC
 
@@ -318,11 +313,9 @@ HistoryStats.cupwinner.short=CC
 #following string uses pluralForms
 YouthPromotes.today=Pots promocionar-lo avui
 
-# links
-links.boxheader=Enllaços
-
 #teamstats+filters
 TeamStats.boxheader=Vista general de l’equip
+TeamStats.General=General
 TeamStats.PlayerNotToOld=Jugadors < 19 anys
 TeamStats.PlayerToOld=Jugadors >\= 19 anys
 TeamStats.Cards=Targetes
@@ -331,6 +324,12 @@ TeamStats.TransferListed=Transferible
 TeamStats.Pictures=Cares
 TeamStats.PlayedLatest=Ha jugat el darrer partit
 TeamStats.NotPlayedLatest=No ha jugat el darrer partit
+
+#PlayerBirthday
+PlayerBirthday.boxheader=Aniversaris
+PlayerBirthday.BirthdayToday=Aniversaris avui
+PlayerBirthday.BirthdayLastWeek=Aniversaris la darrera setmana
+PlayerBirthday.BirthdayNextWeek=Aniversaris la propera setmana
 
 #season stats
 #note to translators. use abreviations of league table where applicable
@@ -357,36 +356,43 @@ LeagueNewsFilter.friendlies=Amistosos i canvis d'entrenador
 LeagueNewsFilter.transfers=Transferències
 LeagueNewsFilter.lineupChanges=Canvis a la alineació
 
-# AddLeaveConfButton
-AddLeaveConfButton.alert=Feu clic en el botó «Desa» de la següent pàgina per deixar aquest fòrum.
-AddLeaveConfButton.LeaveForum=Surt d'aquest fòrum
+#team pages
+sidebarBox.actions=Accions
+TeamSelectBox.selectplayer=Seleccioneu el jugador
+ExtendedPlayerDetails.perseason=/temporada
+ExtraPlayerInfo.defensiveTrainer=Un entrenador %s i defensiu.
+ExtraPlayerInfo.offensiveTrainer=Un entrenador %s i ofensiu.
+ExtraPlayerInfo.balancedTrainer=Un entrenador %s i neutre.
+ManagerButtons.writeInGuestbook=Escriu al llibre de visites
 
-#ShowForumPrefButton
+#forum
+AddLeaveConfButton.LeaveForum=Surt d'aquest fòrum
+AddLeaveConfButton.alert=Feu clic en el botó «Desa» de la següent pàgina per deixar aquest fòrum.
+HideSignatures.signaturetoggle=Signatura
+MarkUnread.markunread=Marca com pendents de llegit a partit d'aquí
+ForumStripHattrickLinks.ask=Voleu treure el nom del servidor de hattrick dels enllaços per fer que aquests funcionin en els fòrums?
 
 # ForumTemplates
 ForumTemplates.make=Crea una plantilla basada en el missatge
+ForumTemplates.make.error=La plantilla ja existeix o està buida
 ForumTemplates.show=Mostra les plantilles
 ForumTemplates.hide=Amaga les plantilles
-ForumTemplates.make.error=La plantilla ja existeix o està buida
 ForumTemplates.templateTitle=Títol de la plantilla\:
 ForumTemplates.templateTitle.error=No es permet «[» ni «]» als títols
 ForumTemplates.delete.ask=Supressió de la plantilla?
 
-#PostPreview
+#ForumPreview
 ForumPreview.preview.title=Vista prèvia del missatge
 ForumPreview.preview=Vista prèvia
 ForumPreview.send=Envia
 
-
-ForumYouthIcons.toolbar.youth=Enllaços del planter
+#ForumYouthIcons
 ForumYouthIcons.toolbar.main=Enllaços principals
+ForumYouthIcons.toolbar.youth=Enllaços del planter
 ForumYouthIcons.youthplayerid=Enllaç a un jugador del planter.
 ForumYouthIcons.youthteamid=Enllaç a un equip del planter.
 ForumYouthIcons.youthmatchid=Afegeix enllaç a un partit del planter.
 ForumYouthIcons.youthseries=Afegeix un enllaç a una lliga de juvenils.
-
-
-#special bbcode, not really youth icons
 ForumSpecialBBCode.q=Afegeix una cita
 ForumSpecialBBCode.br=Afegeix un salt de línia
 ForumSpecialBBCode.user=Afegeix un identificador d'usuari
@@ -399,8 +405,6 @@ ForumSpecialBBCode.table=Afegeix amb el format de taula mitjançant etiquetes «
 ForumSpecialBBCode.tableSeparator=Converteix a celes «%s»
 ForumSpecialBBCode.enterSeparator=Introdueix un separador personalitzat
 
-
-
 #Transferlistfilters
 TransferSearchFilters.boxheader=Filtres de FoxTrick
 TransferSearchFilters.enterName=Introduïu el nom del filtre\:
@@ -408,16 +412,8 @@ TransferSearchFilters.deleteFilter.ask=Voleu eliminar aquest filtre?
 TransferSearchFilters.saveFilter=Desa un filtre nou
 
 #Filter
-
-#Locales for date and time
-#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
-#next 6 use pluralFroms
-datetimestrings.days=dies
-datetimestrings.hours=h
-datetimestrings.minutes=min
-datetimestrings.short_seasons=t
-datetimestrings.short_weeks=set
-datetimestrings.short_days=d
+Filters.minimum=Almenys
+Filters.maximum=Màxim
 
 #Transfer prices
 MedianTransferPrice.median=Mediana
@@ -456,18 +452,18 @@ categories.R=RES
 categories.E1=E1
 categories.E2=E2
 
+#match positions
 
 
 
-TeamStats.General=General
-
+# SkillTable
+Skill_table=Taula d'habilitats
+Switch_view=Canvi de vista
+Switch_view.title=Canvia la visualització de la taula.
 PlayerNumber=Dorsal
 PlayerNumber.abbr=\#
-
 TSI=Índex Total d'Habilitats (TSI)
 TSI.abbr=TSI
-
-
 Personality=Personalitat
 Agreeability=Caràcter
 Agreeability.abbr=Ca
@@ -475,29 +471,22 @@ Aggressiveness=Agressivitat
 Aggressiveness.abbr=Ag
 Honesty=Honestedat
 Honesty.abbr=Ho
-
 Leadership=Lideratge
 Leadership.abbr=Lid
 Experience=Experiència
 Experience.abbr=Exp
-
 Stamina=Resistència
 Stamina.abbr=Res
 Form=Forma
 Form.abbr=Fo
-
-
 Status=Estadístiques
 Status.abbr=Estat
-
 Yellow_card=Targeta groga
 Yellow_card.abbr=G
 Red_card=Targeta vermella
 Red_card.abbr=TV
-
 Speciality=Especialitat
 Speciality.abbr=PA
-
 Last_match=Darrer partit
 Last_match.abbr=Últim
 Last_stars=Darrera ratis
@@ -505,18 +494,14 @@ Last_stars.abbr=Rt
 Last_position=Darrera posició
 Last_position.abbr=Pos
 #following string uses pluralForms
-
 Bruised=Tocat
 Bruised.abbr=Toc
 Injured=Lesionat
 Injured.abbr=Les
-
 Salary=Sou
 Salary.abbr=Sou
-
 TransferListed=Transferible
 TransferListed.abbr=LT
-
 NrOfMatches=Nombre de partits
 NrOfMatches.abbr=Pa
 LeagueGoals=Gols a la lliga
@@ -529,36 +514,41 @@ CareerGoals=Gols a la seva carrera
 CareerGoals.abbr=G
 Hattricks=Hattricks
 Hattricks.abbr=HT
-
 Current_club=Club actual
 Current_club.abbr=Club
 Current_league=lliga actual
 Current_league.abbr=Lliga
+Coach=Entrenador
+Nationality=Nacionalitat
+Nationality.abbr=Nac
+Flag=Bandera
+Flag.abbr=Bandera
+Player=Jugador
+Player.abbr=Jugador
+Age=Edat
+Age.abbr=Anys
+Match=Partit
+Series=Lliga
+Bookmark=Favorit
+Bookmark.abbr=fa
+Deadline=Data límit
+Deadline.abbr=Data límit
+CurrentBid=Oferta actual
+CurrentBid.abbr=Oferta
+CurrentBidder=Oferta actual
+CurrentBidder.abbr=Postor
+CurrentBidderShort=Oferta actual
+CurrentBidderShort.abbr=of
 
-
-
-
-#matchdetail
-match.ratings.midfield=Mig
-match.ratings.attack=Atac
-match.ratings.defence=Defensa
-
-match.ratings.right=Dreta
-match.ratings.center=Central
-match.ratings.left=Esquerra
-match.ratings.rightshort=D
-match.ratings.centershort=C
-match.ratings.leftshort=E
-match.ratings.ifkshort=I
+#confirms
 ConfirmActions.bid=Voleu fer una oferta per aquest jugador? El preu és %s.
 ConfirmActions.transferlist=Voleu posar el jugador a la llista de transferibles? El preu de venta és %s.
 ConfirmActions.hirestaff=Voleu contractar %num %kind?
 ConfirmActions.sackstaff=Voleu despatxar %num %kind?
 ConfirmActions.ntremove=Voleu afegir/eliminar aquest jugador de la plantilla?
-ForumStripHattrickLinks.ask=Voleu treure el nom del servidor de hattrick dels enllaços per fer que aquests funcionin en els fòrums?
-HideSignatures.signaturetoggle=Signatura
-MarkUnread.markunread=Marca com pendents de llegit a partit d'aquí
-TeamSelectBox.selectplayer=Seleccioneu el jugador
+
+# links
+links.boxheader=Enllaços
 links.custom.selecticon=Selecciona la icona
 links.custom.addpersonallink=Afegeix un enllaç personal
 links.custom.addlink=Afegeix un enllaç
@@ -571,34 +561,24 @@ links.custom.tags=Etiquetes
 links.custom.help=Ajuda
 links.custom.helptext=Primer, això és el mode d’edició. Si feu clic a la capçalera d’aquesta caixa canviareu entre el mode d’edició i el normal. Només quan esteu en mode normal els vostres enllaços funcionaran del tot. Els enllaços externs d’estadístiques son fàcils d’afegit, només cal afegir tota la URL (Exemple\: http\: //alltid.org/league/427/). Per pàgines internes d’estadístiques suprimiu la part del servidor (Exemple\: /World/Series/Default.aspx?LeagueLevelUnitID\=427). Només us calen les etiquetes per enllaços dinàmics poc corrents. Amb les etiquetes els enllaços es canvien de forma dinàmica emprant la informació del lloc on sou; per exemple http\://alltid.org/league/[leagueid] us portarà a la mateixa lliga en alltid que la que esteu mirant a hattrick. Les etiquetes que es poden emprar a cada lloc es mostren a la caixa de selecció. Només podeu emprar aquelles etiquetes que es mostren al lloc on afegiu l’enllaç personalitzat. El text que es mostra és tant sols una plantilla d’exemple. Podeu escriure l’etiqueta (amb els []).
 links.custom.helptext2=Podeu exportar també els vostres enllaços per compartir-los. Per fer-ho heu de fer clic al botó d’exportar i triar un fitxer on desar els enllaços. Els enllaços s’afegiran al fitxer, d’aquesta forma podeu tenir força enllaços en un mateix fitxer. Per importar enllaços heu d’anar a l’apartat d’importar de la finestra de preferències. Només s’importaran les preferències del fitxers seleccionat s’importaran, el que en aquest cas son els enllaços. No es suprimiran cap dels enllaços que ja teniu.
-matches.income=Ingressos\:
-PlayerBirthday.boxheader=Aniversaris
-PlayerBirthday.BirthdayToday=Aniversaris avui
-PlayerBirthday.BirthdayLastWeek=Aniversaris la darrera setmana
-PlayerBirthday.BirthdayNextWeek=Aniversaris la propera setmana
-copy.matchid=Fe-ho clic per copia al porta-retalls la id del partit
-ExtendedPlayerDetails.perseason=/temporada
 
-ExtraPlayerInfo.defensiveTrainer=Un entrenador %s i defensiu.
-ExtraPlayerInfo.offensiveTrainer=Un entrenador %s i ofensiu.
-ExtraPlayerInfo.balancedTrainer=Un entrenador %s i neutre.
 
 #following string uses pluralForms
 #following string uses pluralForms
 
 
-module.modules_allpages=Mòduls que s'executen a totes les pàgines
-ReadHtPrefs.HTLanguageChanged=FoxTrick a detectat un canvi d'idioma. S'ha fixat %s com l'idioma de Foxtrick.
-
-Coach=Entrenador
-
-
-ManagerButtons.writeInGuestbook=Escriu al llibre de visites
-copy.copyplayerad=Copia l’anunci del jugador al porta-retalls
-copy.copied=S’ha copiat l’anunci de jugador al porta-retalls.
-
+# Context menu items
+# This would look like: Copy player ID: 123456789
+copy.id=Copia %s\: %i
+copy.link=Copia l'enllaç en HT-ML
+copy.ht-ml=Copia com HT-ML
+copy.table=Copia la taula en HT-ML
 
 #copy
+copy.copyplayerad=Copia l’anunci del jugador al porta-retalls
+copy.copied=S’ha copiat l’anunci de jugador al porta-retalls.
+copy.matchid=Fe-ho clic per copia al porta-retalls la id del partit
+
 copy.PostID=Copia la id de missatge al porta-retalls
 CopyPosting=Copia el missatge amb estil %s
 CopyPosting.abbr=Copia amb estil %s
@@ -619,9 +599,8 @@ copy.copied.matchid=S’ha copiat l'identificador de partit al porta-retalls.
 copy.copied.postid=El ID de missatge [post\=%s] s'ha copial al porta-retalls.
 copy.copied.posting=S’han copiat els missatge %s al porta-retalls.
 
-
-
 #matches
+matches.income=Ingressos\:
 matches.attackdefensebars=Atac Vs. Defensa
 matches.right=Dreta
 matches.left=Esquerra
@@ -630,13 +609,23 @@ matches.defense=de.
 matches.attack=at.
 matches.indfreekick=Tirs Lliures indirectes
 matches.wronglang=FoxTrick\: No es poden mostrar les qualificacions ja que, o la vostra llengua no està registrada, o heu seleccionat en les preferències una llengua incorrecta. Comproveu que el vostre idioma a FoxTrick és el mateix que el de hattrick.
+total_stars=Nombre total d’estrelles
 
-# Context menu items
-# This would look like: Copy player ID: 123456789
-copy.id=Copia %s\: %i
-copy.link=Copia l'enllaç en HT-ML
-copy.ht-ml=Copia com HT-ML
-copy.table=Copia la taula en HT-ML
+#matchdetail
+match.ratings.midfield=Mig
+match.ratings.attack=Atac
+match.ratings.defence=Defensa
+
+match.ratings.right=Dreta
+match.ratings.center=Central
+match.ratings.left=Esquerra
+match.ratings.rightshort=D
+match.ratings.centershort=C
+match.ratings.leftshort=E
+match.ratings.ifkshort=I
+
+
+
 
 #teampopups
 Manager=Usuari
@@ -657,8 +646,6 @@ YouthMatches=Partits del planter
 more=més…
 less=menys…
 
-total_stars=Nombre total d’estrelles
-
 # FlagCollectionToMap
 flagCollectionToMap.ShowMap=Mostra el mapa
 flagCollectionToMap.HideMap=Amaga el mapa
@@ -669,18 +656,10 @@ flagCollectionToMap.MEast=Orient mitjà
 flagCollectionToMap.SAmerica=Amèrica del sud
 flagCollectionToMap.World=Món
 
-# SkillTable
-Skill_table=Taula d'habilitats
-Switch_view=Canvi de vista
-
 
 
 # TransferSearchResultFilters
 TransferSearchResultFilters.days=Dies\:
-
-# refer to transfer search form
-Filters.minimum=Almenys
-Filters.maximum=Màxim
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
 RapidId.view=Visualitza
@@ -688,29 +667,6 @@ RapidId.viewById=Mostra per ID
 RapidId.senior=Sènior
 RapidId.youth=Juvenil
 
-# SkillTable
-Switch_view.title=Canvia la visualització de la taula.
-Nationality=Nacionalitat
-Nationality.abbr=Nac
-Flag=Bandera
-Flag.abbr=Bandera
-Player=Jugador
-Player.abbr=Jugador
-Age=Edat
-Age.abbr=Anys
-Match=Partit
-Series=Lliga
-
-Bookmark=Favorit
-Bookmark.abbr=fa
-Deadline=Data límit
-Deadline.abbr=Data límit
-CurrentBid=Oferta actual
-CurrentBid.abbr=Oferta
-CurrentBidder=Oferta actual
-CurrentBidder.abbr=Postor
-CurrentBidderShort=Oferta actual
-CurrentBidderShort.abbr=of
 
 # HTMSPrediction
 HTMSPrediction.prediction=Resultat predit
@@ -739,7 +695,15 @@ CrossTable.table=Taula d'encreuaments de lliga
 
 # fennec ui
 
-sidebarBox.actions=Accions
+#Locales for date and time
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
+datetimestrings.days=dies
+datetimestrings.hours=h
+datetimestrings.minutes=min
+datetimestrings.short_seasons=t
+datetimestrings.short_weeks=set
+datetimestrings.short_days=d
 
 # buttons
 button.ok=D'acord
@@ -759,6 +723,8 @@ button.copy=Copia
 
 
 # keep the following line untranslated
+
+ReadHtPrefs.HTLanguageChanged=FoxTrick a detectat un canvi d'idioma. S'ha fixat %s com l'idioma de Foxtrick.
 
 # End of IN-GAME STRINGS.
 
