--- a/content/locale/cs/foxtrick.properties
+++ b/content/locale/cs/foxtrick.properties
@@ -386,9 +386,6 @@ module.RatingsDisplay.HatStats.desc=Jako HatStats
 
 #Save for work
 
-#Embed Media
-EmbedMedia.EmbeddedImage=Vložený obrázek
-
 #Extrashortcuts
 ExtraShortcuts.statistics=Statistiky
 ExtraShortcuts.transfers=Přestupy
@@ -396,10 +393,8 @@ ExtraShortcuts.ManageCHPP=Správa CHPP aplikací
 ExtraShortcuts.prefs=Nastavení
 ExtraShortcuts.ftprefs=Nastavení FoxTricku
 
-#lineupShortcut
-
-
 #HistoryStats
+HistoryStats.boxheader=Historické statistiky
 HistoryStats.season=Sezóna
 HistoryStats.season.short=S
 HistoryStats.cup=Pohár
@@ -408,7 +403,6 @@ HistoryStats.league=Liga
 HistoryStats.league.short=L
 HistoryStats.finalPosition=Konečné umístění
 HistoryStats.finalPosition.short=Poz.
-HistoryStats.boxheader=Historické statistiky
 HistoryStats.cupwinner=vítěz poháru
 HistoryStats.cupwinner.short=VP
 
@@ -417,11 +411,9 @@ HistoryStats.cupwinner.short=VP
 YouthPromotes.future=Hráč může být přeřazen za %1 dní (%2).
 YouthPromotes.today=Hráč již může být přeřazen\!
 
-# links
-links.boxheader=Odkazy
-
 #teamstats+filters
 TeamStats.boxheader=Přehled o týmu
+TeamStats.General=Obecný
 TeamStats.PlayerNotToOld=Hráči do 19 let
 TeamStats.PlayerToOld=Hráči nad 19 let
 TeamStats.Cards=Karty
@@ -435,6 +427,12 @@ TeamStats.ActivePlayers=Aktivní hráči
 TeamStats.HomeGrownPlayers=Odchovanci
 TeamStats.PurchasedPlayers=Zakoupení hráči
 TeamStats.FilterFor=Filtr pro
+
+#PlayerBirthday
+PlayerBirthday.boxheader=Narozeniny
+PlayerBirthday.BirthdayToday=Dnešní narozeniny
+PlayerBirthday.BirthdayLastWeek=Poslední týden
+PlayerBirthday.BirthdayNextWeek=Nadcházející týden
 
 #season stats
 #note to translators. use abreviations of league table where applicable
@@ -461,43 +459,52 @@ LeagueNewsFilter.friendlies=Přátelská utkání a změny trenérů
 LeagueNewsFilter.transfers=Přestupy
 LeagueNewsFilter.lineupChanges=Změny sestav
 
-# AddLeaveConfButton
-AddLeaveConfButton.alert=Pro opuštění této konference klikni na další stránce na tlačítko 'Uložit'.
-AddLeaveConfButton.LeaveForum=Opustit konferenci
+#team pages
+sidebarBox.actions=Úkony
+TeamSelectBox.selectplayer=Vyber hráče
+ExtendedPlayerDetails.perseason=/sezónu
+ExtraPlayerInfo.defensiveTrainer=%s trenér, který je defenzivního zaměření.
+ExtraPlayerInfo.offensiveTrainer=%s trenér, který je milovník útočné hry.
+ExtraPlayerInfo.balancedTrainer=%s trenér, který je neutrální typ.
+ManagerButtons.writeInGuestbook=Zobraz návštěvní knihu
 
-#ShowForumPrefButton
+#forum
+AddLeaveConfButton.LeaveForum=Opustit konferenci
+AddLeaveConfButton.alert=Pro opuštění této konference klikni na další stránce na tlačítko 'Uložit'.
 ShowForumPrefButton.forumPreferences=Nastavení konferencí
+FormatPostingText.ShowNestedQuotes=Zobrazit vložené citace
+HideSignatures.signaturetoggle=Podpis
+MarkUnread.markunread=Označit další příspěvky jako nepřečtené
+EmbedMedia.EmbeddedImage=Vložený obrázek
+ForumStripHattrickLinks.ask=Opravdu chceš odstranit číslo serveru z odkazů, aby byly použitelné na konferencích?
 
 # ForumTemplates
 ForumTemplates.make=Vytvořit šablonu z příspěvku
+ForumTemplates.make.error=Šablona již existuje nebo je prázdná
 ForumTemplates.show=Zobrazit šablony
 ForumTemplates.hide=Skrýt šablony
-ForumTemplates.make.error=Šablona již existuje nebo je prázdná
 ForumTemplates.templateTitle=Název šablony\:
 ForumTemplates.templateTitle.error=Znaky '[' a ']' nejsou v názvu šablony povoleny
 ForumTemplates.delete.ask=Odstranit šablonu?
 
-#PostPreview
+#ForumPreview
 ForumPreview.preview.title=Zobrazit náhled příspěvku
 ForumPreview.preview=Náhled
 ForumPreview.send=Poslat
 
-
+#ForumYouthIcons
+ForumYouthIcons.toolbar.main=Standardní odkazy
 ForumYouthIcons.toolbar.youth=Dorostenecké odkazy
 ForumYouthIcons.toolbar.tournament=Turnaje
-ForumYouthIcons.toolbar.main=Standardní odkazy
+ForumYouthIcons.toolbar.other=Další
 ForumYouthIcons.youthplayerid=Vložit odkaz na dorostence
 ForumYouthIcons.youthteamid=Vložit odkaz na dorostenecký tým
 ForumYouthIcons.youthmatchid=Vložit odkaz na dorostenecký zápas
 ForumYouthIcons.youthseries=Vložit odkaz na dorosteneckou ligu
 ForumYouthIcons.tournamentid=Vložit odkaz na turnaj
 ForumYouthIcons.tournamentmatchid=Vložit odkaz na zápas turnaje
-
-ForumYouthIcons.toolbar.other=Další
 ForumYouthIcons.debug=Vložit záznam z ladění FoxTricku
 ForumYouthIcons.settings=Vložit nastavení FoxTrick
-
-#special bbcode, not really youth icons
 ForumSpecialBBCode.q=Vložit citaci
 ForumSpecialBBCode.br=Vložit zalomení řádku
 ForumSpecialBBCode.user=Vložit odkaz na uživatele
@@ -512,9 +519,6 @@ ForumSpecialBBCode.enterSeparator=Vlastní oddělovací znak
 ForumSpecialBBCode.forumSymbol=Vložit "%s"
 ForumSpecialBBCode.symbols=Vložit symbol\: %s
 
-
-FormatPostingText.ShowNestedQuotes=Zobrazit vložené citace
-
 #Transferlistfilters
 TransferSearchFilters.boxheader=Foxtrick filtry
 TransferSearchFilters.enterName=Napiš název filtru\:
@@ -523,6 +527,7 @@ TransferSearchFilters.saveFilter=Uložit nový filtr
 
 #Filter
 Filters.label=Filtry
+Filters.addFilterOptions=Přidat možnosti filtru
 Filters.ok=Ok
 Filters.clear=Vymazat
 Filters.noFilter=Žádný filtr
@@ -534,17 +539,8 @@ Filters.Form=Forma
 Filters.XP=Zkušenost
 Filters.specialty=Specialita
 Filters.stars=Hvězdy
-Filters.addFilterOptions=Přidat možnosti filtru
-
-#Locales for date and time
-#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
-#next 6 use pluralFroms
-datetimestrings.days=dní
-datetimestrings.hours=h
-datetimestrings.minutes=m
-datetimestrings.short_seasons=s
-datetimestrings.short_weeks=t
-datetimestrings.short_days=d
+Filters.minimum=Alespoň
+Filters.maximum=Nejvýše
 
 #Transfer prices
 MedianTransferPrice.median=Medián ceny
@@ -609,6 +605,7 @@ categories.R=R
 categories.E1=O1
 categories.E2=O2
 
+#match positions
 match.pos.kp=Brankář
 match.pos.kp.abbr=Br
 match.pos.lb=Levý obránce
@@ -645,17 +642,22 @@ match.role.captain.abbr=Kap.
 
 match.player.unknown=Neznámý hráč
 
-TeamStats.General=Obecný
-
+# SkillTable
+Skill_table=Tabulka dovedností
+Switch_view=Změnit vzhled
+AddHomegrown=Přidat odchovance
+showTimeInClub=Zobrazit dobu v klubu
+Switch_view.title=Změnit rozložení tabulky.
+skillTable.addHomegrown=Přidat všechny odchovance
+skillTable.showTimeInClub=Zobrazit dobu, po kterou je hráč součástí hlavního týmu
+skilltable.youthplayer=odchovanec
+skilltable.rebought_youthplayer=znovukoupený odchovanec
 PlayerNumber=Číslo dresu
 PlayerNumber.abbr=\#
-
 TSI=Celkový dovednostní index
 TSI.abbr=TSI
-
 CanBePromotedIn=Může být přeřazen za
 CanBePromotedIn.abbr=Pře
-
 Personality=Osobnost
 Agreeability=Příjemnost
 Agreeability.abbr=Př
@@ -663,33 +665,26 @@ Aggressiveness=Temperament
 Aggressiveness.abbr=Te
 Honesty=Čestnost
 Honesty.abbr=Če
-
 Leadership=Vůdcovství
 Leadership.abbr=Vůd
 Experience=Zkušenosti
 Experience.abbr=Zk
-
 Stamina=Kondice
 Stamina.abbr=Kon
 Form=Forma
 Form.abbr=Fo
-
 Loyalty=Oddanost
 Loyalty.abbr=Odd
 MotherClubBonus=Odchovanecký bonus
 MotherClubBonus.abbr=Odch
-
 Status=Stav
 Status.abbr=Stav
-
 Yellow_card=Žlutá karta
 Yellow_card.abbr=ŽK
 Red_card=Červená karta
 Red_card.abbr=ČK
-
 Speciality=Specialita
 Speciality.abbr=Sp
-
 Last_match=Poslední zápas
 Last_match.abbr=Posl
 Last_stars=Hvězdičky v posledním zápase
@@ -703,18 +698,14 @@ Last_position.abbr=Poz
 #following string uses pluralForms
 Last_match_played_as_at=odehrál %1 minut jako %2 (%3).
 Last_match_didnot_play=Ještě nehrál.
-
 Bruised=Poraněný
 Bruised.abbr=Por
 Injured=Zraněný
 Injured.abbr=Zra
-
 Salary=Plat
 Salary.abbr=Plat
-
 TransferListed=Na přestupové listině
 TransferListed.abbr=PL
-
 NrOfMatches=Počet zápasů
 NrOfMatches.abbr=Záp
 LeagueGoals=Góly v lize
@@ -727,43 +718,48 @@ CareerGoals=Góly v kariéře
 CareerGoals.abbr=G
 Hattricks=Hattricky
 Hattricks.abbr=HT
-
 Current_club=Současný klub
 Current_club.abbr=Klub
 Current_league=Současná liga
 Current_league.abbr=Liga
-
 JoinedSince=Připojil se
 JoinedSince.abbr=Přišel
-
 Hotlist=Hotlist
 Hotlist.abbr=Hot
+Coach=Trenér
+CurrentSquad=Současný tým
+Nationality=Národnost
+Nationality.abbr=Nár
+Flag=Vlaječka
+Flag.abbr=Vl
+Player=Hráč
+Player.abbr=Hráč
+Age=Věk
+Age.abbr=Věk
+Match=Zápas
+Series=Liga
+TransferCompare=Porovnání přestupů
+TransferCompare.abbr=Por
+Bookmark=Do záložek
+Bookmark.abbr=Zál
+Deadline=Uzávěrka
+Deadline.abbr=Uzávěrka
+CurrentBid=Aktuální nabídka
+CurrentBid.abbr=Nabídka
+CurrentBidder=Tým s aktuálně nejvyšší nabídkou
+CurrentBidder.abbr=Zájemce
+CurrentBidderShort=Tým s nejvyšší nabídkou
+CurrentBidderShort.abbr=Záj
 
-skilltable.youthplayer=odchovanec
-skilltable.rebought_youthplayer=znovukoupený odchovanec
-
-#matchdetail
-match.ratings.midfield=Záloha
-match.ratings.attack=Útok
-match.ratings.defence=Obrana
-match.ratings.total=Celek
-
-match.ratings.right=Pravý
-match.ratings.center=Střední
-match.ratings.left=Levý
-match.ratings.rightshort=P
-match.ratings.centershort=S
-match.ratings.leftshort=L
-match.ratings.ifkshort=NK
+#confirms
 ConfirmActions.bid=Opravdu chceš za tohoto hráče nabídnout %s?
 ConfirmActions.transferlist=Opravdu chceš tohoto hráče umístit na přestupový trh? Jeho vyvolávací cena bude %s.
 ConfirmActions.hirestaff=Opravdu chceš, aby do klubu přišli %num %kind?
 ConfirmActions.sackstaff=Opravdu chceš, aby klub opustili %num %kind?
 ConfirmActions.ntremove=Opravdu chceš tohoto hráče vyřadit/zařadit z/do národního týmu?
-ForumStripHattrickLinks.ask=Opravdu chceš odstranit číslo serveru z odkazů, aby byly použitelné na konferencích?
-HideSignatures.signaturetoggle=Podpis
-MarkUnread.markunread=Označit další příspěvky jako nepřečtené
-TeamSelectBox.selectplayer=Vyber hráče
+
+# links
+links.boxheader=Odkazy
 links.custom.selecticon=Vybrat ikonu
 links.custom.addpersonallink=Přidat vlastní odkaz
 links.custom.addlink=Přidat odkaz
@@ -776,17 +772,7 @@ links.custom.tags=Parametry
 links.custom.help=Nápověda
 links.custom.helptext=Nejprve je třeba říci, že toto je pouze editor. Kliknutím na hlavičku oddílu s odkazy můžete přepínat mezi editorem a normálním zobrazením. Vaše vlastní odkazy jsou funkční jen v normálním zobrazení. Statické externí stránky přidáte snadno, stačí napsat celou URL adresu (příklad\: http\://alltid.org/league/427/). Pro odkaz na interní statické stránky vynechte část adresy týkající se serveru (příklad\: /World/Series/Default.aspx?LeagueLevelUnitID\=427). Stránky, na které odkazujete s parametry, se mohou dynamicky měnit na základě informací, které pomocí parametrů poskytnete. Například http\://alltid.org/league/[leagueid] vás vždy zavede na stránku Alltid.org s ligou, kterou si na Hattricku právě prohlížíte. Parametry, které jsou na dané stránce k dispozici, jsou uvedeny ve výběrovém poli. Můžete využít jen těch parametrů, které jsou k dispozici na stránce, na které chcete vlastní odkaz vytvořit. Text, který se poté objeví, je pouze ukázkový. Parametry můžete psát i ručně (pomocí hranatých závorek - []).
 links.custom.helptext2=Své vlastní odkazy můžete také exportovat a sdílet je s ostatními uživateli. Stačí kliknout na tlačítko Exportovat a zvolit soubor, do kterého bude odkaz uložen. Odkazy jsou k tomuto souboru připojovány, tudíž jeden soubor může obsahovat několik odkazů. Pro import odkazů jděte do nastavení a importujte nastavení. Budou naimportována jen nastavení uložená v tomto souboru, v tomto případě tedy vaše odkazy. Žádné z dříve přidaných odkazů nebudou smazány.
-matches.income=Příjem\:
-PlayerBirthday.boxheader=Narozeniny
-PlayerBirthday.BirthdayToday=Dnešní narozeniny
-PlayerBirthday.BirthdayLastWeek=Poslední týden
-PlayerBirthday.BirthdayNextWeek=Nadcházející týden
-copy.matchid=Klikněte pro zkopírování ID zápasu do schránky
-ExtendedPlayerDetails.perseason=/sezónu
 
-ExtraPlayerInfo.defensiveTrainer=%s trenér, který je defenzivního zaměření.
-ExtraPlayerInfo.offensiveTrainer=%s trenér, který je milovník útočné hry.
-ExtraPlayerInfo.balancedTrainer=%s trenér, který je neutrální typ.
 
 #following string uses pluralForms
 notify.newMail=Máš %s nových zpráv.
@@ -795,25 +781,18 @@ notify.newForumMessage=Na konferenci je %s tobě určených příspěvků.
 
 matchView.htLive=HT Live
 
-module.modules_allpages=Moduly, které jsou aktivní na všech strankách
-ReadHtPrefs.HTLanguageChanged=FoxTrick zjistil změnu jazyka Hattricku. Aktuálním jazykem Foxtricku nyní je %s.
-
-Coach=Trenér
-CurrentSquad=Současný tým
-
-
-ManagerButtons.writeInGuestbook=Zobraz návštěvní knihu
-copy.copyplayerad=Kopírovat vlastnosti hráče do schránky
-copy.copied=Informace o hráči byly vloženy do schránky.
-
-ratings.HatStats=HatStats
-ratings.LoddarStats=LoddarStats
-ratings.PeasoStats=PeasoStats
-ratings.VnukStats=VnukStats
-ratings.HTitaVal=HTitaVal
-ratings.GardierStats=GardierStats
+# Context menu items
+# This would look like: Copy player ID: 123456789
+copy.id=Kopírovat %s\: %i
+copy.link=Kopírovat umístění odkazu v HT-ML
+copy.ht-ml=Kopírovat v HT-ML
+copy.table=Kopírovat tabulku v HT-ML
 
 #copy
+copy.copyplayerad=Kopírovat vlastnosti hráče do schránky
+copy.copied=Informace o hráči byly vloženy do schránky.
+copy.matchid=Klikněte pro zkopírování ID zápasu do schránky
+
 copy.PostID=Kopírovat ID příspěvku do schránky
 CopyPosting=Kopírovat příspěvek ve stylu %s
 CopyPosting.abbr=Kopírovat v %s stylu
@@ -845,6 +824,39 @@ copy.copied.posting=Příspěvek %s byl zkopírován do schránky.
 copy.copySelected=Kopírovat výběr pomocí Ctrl + C.
 copy.operaPaste=Vložit pomocí Shift + levý klik.
 
+#matches
+matches.income=Příjem\:
+matches.attackdefensebars=Grafy útoků a obran
+matches.right=P
+matches.left=L
+matches.center=S
+matches.defense=obrana
+matches.attack=útok
+matches.indfreekick=Nepřímé kopy
+matches.wronglang=FoxTrick\: Statistiky nemohou být zobrazeny, neboť váš jazyk není registrován, případně je v nastavení zvolen špatný jazyk. Ujistěte se, že jazyk nastavený ve Foxtricku je stejný, jako váš jazyk na Hattricku.
+total_stars=Celkem hvězdiček
+
+#matchdetail
+match.ratings.midfield=Záloha
+match.ratings.attack=Útok
+match.ratings.defence=Obrana
+match.ratings.total=Celek
+
+match.ratings.right=Pravý
+match.ratings.center=Střední
+match.ratings.left=Levý
+match.ratings.rightshort=P
+match.ratings.centershort=S
+match.ratings.leftshort=L
+match.ratings.ifkshort=NK
+
+ratings.HatStats=HatStats
+ratings.LoddarStats=LoddarStats
+ratings.PeasoStats=PeasoStats
+ratings.VnukStats=VnukStats
+ratings.HTitaVal=HTitaVal
+ratings.GardierStats=GardierStats
+
 MatchReportFormat.MatchReport=Záznam zápasu
 MatchReportFormat.lineup=Sestava
 MatchReportFormat.kickOff=Výkop
@@ -854,23 +866,6 @@ MatchReportFormat.extraTime=Prodloužení
 MatchReportFormat.penaltyShootOut=Penaltový rozstřel
 MatchReportFormat.result=Výsledek
 
-
-#matches
-matches.attackdefensebars=Grafy útoků a obran
-matches.right=P
-matches.left=L
-matches.center=S
-matches.defense=obrana
-matches.attack=útok
-matches.indfreekick=Nepřímé kopy
-matches.wronglang=FoxTrick\: Statistiky nemohou být zobrazeny, neboť váš jazyk není registrován, případně je v nastavení zvolen špatný jazyk. Ujistěte se, že jazyk nastavený ve Foxtricku je stejný, jako váš jazyk na Hattricku.
-
-# Context menu items
-# This would look like: Copy player ID: 123456789
-copy.id=Kopírovat %s\: %i
-copy.link=Kopírovat umístění odkazu v HT-ML
-copy.ht-ml=Kopírovat v HT-ML
-copy.table=Kopírovat tabulku v HT-ML
 
 #teampopups
 Manager=Manažer
@@ -890,12 +885,6 @@ LastLineup=Poslední sestava
 YouthMatches=Zápasy dorostu
 more=více...
 less=méně...
-TeamPopupLinks.prefsCaption=Nastavení odkazů
-TeamPopupLinks.ShowByDefault=Zobrazovat implicitně
-TeamPopupLinks.ShowOnMore=Zobrazovat v rozšířené nabídce
-TeamPopupLinks.OpenNewTab=Otevřít v nové záložce
-
-total_stars=Celkem hvězdiček
 
 # FlagCollectionToMap
 flagCollectionToMap.ShowMap=Zobrazit mapu
@@ -907,12 +896,6 @@ flagCollectionToMap.MEast=Střední Východ
 flagCollectionToMap.SAmerica=Jižní Amerika
 flagCollectionToMap.World=Svět
 
-# SkillTable
-Skill_table=Tabulka dovedností
-Switch_view=Změnit vzhled
-AddHomegrown=Přidat odchovance
-showTimeInClub=Zobrazit dobu v klubu
-
 team.status.booked=Domluven přátelský zápas
 ShowFriendlyBooked.ShowFriendlies=Zobrazit přátelské zápasy
 
@@ -923,10 +906,6 @@ TransferSearchResultFilters.hideInjured=Skrýt zraněné
 TransferSearchResultFilters.hideSuspended=Skrýt vykartované
 TransferSearchResultFilters.days=Dny\:
 
-# refer to transfer search form
-Filters.minimum=Alespoň
-Filters.maximum=Nejvýše
-
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
 RapidId.view=Zobrazit
 RapidId.viewById=Zobrazit dle ID
@@ -935,33 +914,6 @@ RapidId.youth=Dorost
 RapidId.tournaments=Turnaje
 RapidId.tournament=Turnaj
 
-# SkillTable
-Switch_view.title=Změnit rozložení tabulky.
-skillTable.addHomegrown=Přidat všechny odchovance
-skillTable.showTimeInClub=Zobrazit dobu, po kterou je hráč součástí hlavního týmu
-Nationality=Národnost
-Nationality.abbr=Nár
-Flag=Vlaječka
-Flag.abbr=Vl
-Player=Hráč
-Player.abbr=Hráč
-Age=Věk
-Age.abbr=Věk
-Match=Zápas
-Series=Liga
-
-TransferCompare=Porovnání přestupů
-TransferCompare.abbr=Por
-Bookmark=Do záložek
-Bookmark.abbr=Zál
-Deadline=Uzávěrka
-Deadline.abbr=Uzávěrka
-CurrentBid=Aktuální nabídka
-CurrentBid.abbr=Nabídka
-CurrentBidder=Tým s aktuálně nejvyšší nabídkou
-CurrentBidder.abbr=Zájemce
-CurrentBidderShort=Tým s nejvyšší nabídkou
-CurrentBidderShort.abbr=Záj
 
 # HTMSPrediction
 HTMSPrediction.prediction=Předpokládaný výsledek
@@ -1033,7 +985,15 @@ pageAction.mainContent=Zobrazit hlavní obsah
 pageAction.leftMenu=Zobrazit levý sloupec
 pageAction.all=Zobrazit vše
 
-sidebarBox.actions=Úkony
+#Locales for date and time
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
+datetimestrings.days=dní
+datetimestrings.hours=h
+datetimestrings.minutes=m
+datetimestrings.short_seasons=s
+datetimestrings.short_weeks=t
+datetimestrings.short_days=d
 
 # buttons
 button.ok=OK
@@ -1080,6 +1040,8 @@ log.header=FoxTrick Log
 # keep the following line untranslated
 log.env=Version %1, %2 platform, %3 locale, %4 layout, %5 direction
 
+ReadHtPrefs.HTLanguageChanged=FoxTrick zjistil změnu jazyka Hattricku. Aktuálním jazykem Foxtricku nyní je %s.
+
 # End of IN-GAME STRINGS.
 
 
@@ -1088,6 +1050,10 @@ log.env=Version %1, %2 platform, %3 locale, %4 layout, %5 direction
 Links.feeds=Externí seznamy odkazů (každý seznam na vlastním řádku)
 TickerAlert.enable=Zapnout
 TickerAlert.sound=Zvuk
+TeamPopupLinks.prefsCaption=Nastavení odkazů
+TeamPopupLinks.ShowByDefault=Zobrazovat implicitně
+TeamPopupLinks.ShowOnMore=Zobrazovat v rozšířené nabídce
+TeamPopupLinks.OpenNewTab=Otevřít v nové záložce
 
 #toolbar
 toolbar.title=FoxTrick
