--- a/content/locale/da/foxtrick.properties
+++ b/content/locale/da/foxtrick.properties
@@ -246,54 +246,51 @@ module.MatchIncome.desc=Vis tilskuerindtægterne I kampreferatet
 
 #Save for work
 
-#Embed Media
-
 #Extrashortcuts
-
-#lineupShortcut
-
 
 #HistoryStats
 
 # YouthPromotes
 #following string uses pluralForms
 
-# links
-
 #teamstats+filters
+TeamStats.General=Generel
+
+#PlayerBirthday
+PlayerBirthday.BirthdayToday=Fødselsdage i dag
 
 #season stats
 #note to translators. use abreviations of league table where applicable
 
 #Newsfeed filter
 
-# AddLeaveConfButton
-AddLeaveConfButton.alert=Klik på knappen 'gem' på den næste side for at forlade denne konference.
-AddLeaveConfButton.LeaveForum=Forlad forum
+#team pages
+ExtendedPlayerDetails.perseason=/ Sæson
+ExtraPlayerInfo.defensiveTrainer=En %s træner, der er defensivt orienteret.
+ExtraPlayerInfo.offensiveTrainer=En %s træner, der er offensivt orienteret.
+ExtraPlayerInfo.balancedTrainer=En %s træner, der hverken er offensivt eller defensivt orienteret.
 
-#ShowForumPrefButton
+#forum
+AddLeaveConfButton.LeaveForum=Forlad forum
+AddLeaveConfButton.alert=Klik på knappen 'gem' på den næste side for at forlade denne konference.
+HideSignatures.signaturetoggle=Signatur
+MarkUnread.markunread=Markere som ulæst herfra
+ForumStripHattrickLinks.ask=Ønsker du at fravælge hattrick serveren fra linkene for at gøre det anvendeligt i forum?
 
 # ForumTemplates
 ForumTemplates.make=Lav skabeloner fra post
 ForumTemplates.make.error=Skabelon eksisterer allerede eller er tom
 ForumTemplates.delete.ask=Slet skabelon?
 
-#PostPreview
+#ForumPreview
 
-
-
-
-#special bbcode, not really youth icons
-
-
+#ForumYouthIcons
 
 #Transferlistfilters
 
 #Filter
-
-#Locales for date and time
-#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
-#next 6 use pluralFroms
+Filters.minimum=Mindst
+Filters.maximum=Maksimum
 
 #Transfer prices
 MedianTransferPrice.median=Median pris
@@ -315,6 +312,7 @@ Set_pieces=Dødbolde
 
 #note to translators. Copy abbreviations from HT translations using players page on HT (only supporters can see them in brackets next to players names)
 
+#match positions
 match.pos.rcd.abbr=HCF
 match.pos.rb=Højre back
 match.pos.rb.abbr=HB
@@ -342,17 +340,22 @@ match.role.captain.abbr=Anf.
 
 match.player.unknown=Ukendt spiller
 
-TeamStats.General=Generel
-
+# SkillTable
+Skill_table=Evneskema
+Switch_view=Skift visning
+AddHomegrown=Tilføj spiller af egenavl
+showTimeInClub=Vis tid i klubben
+Switch_view.title=Skift visningen af ​​tabellen.
+skillTable.addHomegrown=Tilføjer alle spillere af egen avl fra den aktuelle seniorhold liste
+skillTable.showTimeInClub=Viser tiden siden spiller tiltrådte klubbens seniorhold
+skilltable.youthplayer=ungdomsspiller
+skilltable.rebought_youthplayer=genkøbt ungdomspiller
 PlayerNumber=Spiller nummer
 PlayerNumber.abbr=\#
-
 TSI=Total Skill Index
 TSI.abbr=TSI
-
 CanBePromotedIn=Kan rykkes op om
 CanBePromotedIn.abbr=opryk
-
 Personality=Personlighed
 Agreeability=Omgængelighed
 Agreeability.abbr=Omg
@@ -360,30 +363,23 @@ Aggressiveness=Pågåenhed
 Aggressiveness.abbr=Påg
 Honesty=Hæderlighed
 Honesty.abbr=Hæ
-
 Leadership=Lederegenskab
 Leadership.abbr=LS
 Experience=Rutine
 Experience.abbr=RU
-
 Stamina=Kondition
 Stamina.abbr=Kon
 Form=Form
 Form.abbr=Fo
-
 MotherClubBonus.abbr=MK
-
 Status=Status
 Status.abbr=Status
-
 Yellow_card=Gult kort
 Yellow_card.abbr=G
 Red_card=Rødt kort
 Red_card.abbr=R
-
 Speciality=Specialitet
 Speciality.abbr=SP
-
 Last_match=Sidste Kamp
 Last_match.abbr=Sidste
 Last_stars=Seneste stjerner
@@ -393,18 +389,14 @@ Last_position=Seneste position
 Last_position.abbr=S-Pos
 #following string uses pluralForms
 Last_match_played_as_at=Spillet %1 min som %2 i sin sidste kamp på%3.
-
 Bruised=Mærket
 Bruised.abbr=Mær
 Injured=Skadet
 Injured.abbr=Sk
-
 Salary=Løn
 Salary.abbr=Løn
-
 TransferListed=Til salg
 TransferListed.abbr=﻿TL
-
 NrOfMatches=Antal kampe
 NrOfMatches.abbr=Ak
 LeagueGoals=﻿Ligamål
@@ -417,67 +409,61 @@ CareerGoals=Mål i karrieren
 CareerGoals.abbr=G
 Hattricks=Hattricks
 Hattricks.abbr=HT
-
 Current_club=Nuværende klub
 Current_club.abbr=Klub
 Current_league=Nuværende liga
 Current_league.abbr=Liga
-
 JoinedSince=Tiltrådte siden
 JoinedSince.abbr=Siden
-
 Hotlist=HotList
 Hotlist.abbr=Hot
+CurrentSquad=Nuværende trup
+Nationality=Nationalitet
+Nationality.abbr=Nationalitet
+Flag=Flag
+Flag.abbr=Flag
+Player=Spiller
+Player.abbr=Spiller
+Age=Alder
+Age.abbr=Alder
+Match=Kamp
+Series=Serie
+TransferCompare=Transfersammenligning
+TransferCompare.abbr=TC
+Bookmark=Bogmærk
+Bookmark.abbr=Bogmærk
+Deadline=Deadline
+Deadline.abbr=Deadline
+CurrentBid=Nuværende bud
+CurrentBid.abbr=Bud
+CurrentBidder=Nuværende højeste byder
+CurrentBidder.abbr=Budgiver
+CurrentBidderShort=Nuværende højestbydende
+CurrentBidderShort.abbr=Budt
 
-skilltable.youthplayer=ungdomsspiller
-skilltable.rebought_youthplayer=genkøbt ungdomspiller
-
-#matchdetail
-match.ratings.midfield=Midtbane
-match.ratings.attack=Angreb
-match.ratings.defence=Forsvar
-match.ratings.total=I alt
-
-match.ratings.right=Højre
-match.ratings.center=Center
-match.ratings.left=Venstre
-match.ratings.rightshort=H
-match.ratings.centershort=C
-match.ratings.leftshort=V
-match.ratings.ifkshort=I
+#confirms
 ConfirmActions.bid=Ønsker du at byde på denne spiller? Prisen er %s.
 ConfirmActions.transferlist=Ønsker du at transferliste denne spiller? Den valgte startpris er %s.
 ConfirmActions.hirestaff=Ønsker du at ansætte %num %slags?
 ConfirmActions.sackstaff=Ønsker du at fyr %num %slags?
-ForumStripHattrickLinks.ask=Ønsker du at fravælge hattrick serveren fra linkene for at gøre det anvendeligt i forum?
-HideSignatures.signaturetoggle=Signatur
-MarkUnread.markunread=Markere som ulæst herfra
-PlayerBirthday.BirthdayToday=Fødselsdage i dag
-ExtendedPlayerDetails.perseason=/ Sæson
 
-ExtraPlayerInfo.defensiveTrainer=En %s træner, der er defensivt orienteret.
-ExtraPlayerInfo.offensiveTrainer=En %s træner, der er offensivt orienteret.
-ExtraPlayerInfo.balancedTrainer=En %s træner, der hverken er offensivt eller defensivt orienteret.
+# links
+
 
 #following string uses pluralForms
 #following string uses pluralForms
 
 matchView.htLive=HT Live
 
-module.modules_allpages=Moduler kørende på alle sider
-
-CurrentSquad=Nuværende trup
-
-
-
-ratings.HatStats=HatStats
-ratings.LoddarStats=LoddarStats
-ratings.PeasoStats=PeasoStats
-ratings.VnukStats=VnukStats
-ratings.HTitaVal=HTitaVal
-ratings.GardierStats=GardierStats
+# Context menu items
+# This would look like: Copy player ID: 123456789
+copy.id=Kopi %s\: %i
+copy.link=Kopier linkdestination i HT-ML
+copy.ht-ml=Kopier i HT-ML
+copy.table=Kopier skema i HT-ML
 
 #copy
+
 
 CopyRatings.both=Kopiere ratings (i HT-ML)
 CopyRatings.home=Kopiere hjemmehold ratings (i HT-ML)
@@ -501,16 +487,6 @@ copy.copied.posting=Postede %s er kopieret til udklipsholderen.
 copy.copySelected=Kopier det markerede med Ctrl + C.
 copy.operaPaste=Indsæt med Shift + Venstre klik.
 
-MatchReportFormat.MatchReport=Kamprapport
-MatchReportFormat.lineup=Opstilling
-MatchReportFormat.kickOff=Kick-off
-MatchReportFormat.halfTime=Halveg
-MatchReportFormat.fullTime=Fuld tid
-MatchReportFormat.extraTime=Overtid
-MatchReportFormat.penaltyShootOut=Straffesparkskonkurrence
-MatchReportFormat.result=Resultat
-
-
 #matches
 matches.attackdefensebars=Angreb vs forsvar
 matches.right=Højre
@@ -520,13 +496,38 @@ matches.defense=Forsvar
 matches.attack=Angreb
 matches.indfreekick=Ind. frispark
 matches.wronglang=Foxtrick\: stats kan ikke vises, fordi dit sprog ikke er registreret eller fordi du har angivet et forkert sprog i indstillingerne.
+total_stars=Total stjerne tæller
 
-# Context menu items
-# This would look like: Copy player ID: 123456789
-copy.id=Kopi %s\: %i
-copy.link=Kopier linkdestination i HT-ML
-copy.ht-ml=Kopier i HT-ML
-copy.table=Kopier skema i HT-ML
+#matchdetail
+match.ratings.midfield=Midtbane
+match.ratings.attack=Angreb
+match.ratings.defence=Forsvar
+match.ratings.total=I alt
+
+match.ratings.right=Højre
+match.ratings.center=Center
+match.ratings.left=Venstre
+match.ratings.rightshort=H
+match.ratings.centershort=C
+match.ratings.leftshort=V
+match.ratings.ifkshort=I
+
+ratings.HatStats=HatStats
+ratings.LoddarStats=LoddarStats
+ratings.PeasoStats=PeasoStats
+ratings.VnukStats=VnukStats
+ratings.HTitaVal=HTitaVal
+ratings.GardierStats=GardierStats
+
+MatchReportFormat.MatchReport=Kamprapport
+MatchReportFormat.lineup=Opstilling
+MatchReportFormat.kickOff=Kick-off
+MatchReportFormat.halfTime=Halveg
+MatchReportFormat.fullTime=Fuld tid
+MatchReportFormat.extraTime=Overtid
+MatchReportFormat.penaltyShootOut=Straffesparkskonkurrence
+MatchReportFormat.result=Resultat
+
 
 #teampopups
 Matches=Kampe
@@ -538,12 +539,6 @@ TeamHistory=Klubhistorik
 NextMatch=Næste kamp
 AddNextMatch=Tilføj næste kamp til HT Live
 YouthMatches=Ungdomskampe
-TeamPopupLinks.prefsCaption=Linkindstillinger
-TeamPopupLinks.ShowByDefault=Vis som standard
-TeamPopupLinks.ShowOnMore=Vis mere
-TeamPopupLinks.OpenNewTab=Åben i ny fane
-
-total_stars=Total stjerne tæller
 
 # FlagCollectionToMap
 flagCollectionToMap.ShowMap=Vis kort
@@ -555,12 +550,6 @@ flagCollectionToMap.MEast=Mellemøsten
 flagCollectionToMap.SAmerica=Syd Amerika
 flagCollectionToMap.World=Verden
 
-# SkillTable
-Skill_table=Evneskema
-Switch_view=Skift visning
-AddHomegrown=Tilføj spiller af egenavl
-showTimeInClub=Vis tid i klubben
-
 team.status.booked=Venskabskamp arrangeret
 ShowFriendlyBooked.ShowFriendlies=﻿Vis venskabskampe
 
@@ -571,43 +560,12 @@ TransferSearchResultFilters.hideInjured=Skjul skadet
 TransferSearchResultFilters.hideSuspended=Skjul suspenderet
 TransferSearchResultFilters.days=Dage\:
 
-# refer to transfer search form
-Filters.minimum=Mindst
-Filters.maximum=Maksimum
-
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
 RapidId.view=Vis
 RapidId.viewById=Vis efter ID
 RapidId.senior=Senior
 RapidId.youth=Ungdom
 
-# SkillTable
-Switch_view.title=Skift visningen af ​​tabellen.
-skillTable.addHomegrown=Tilføjer alle spillere af egen avl fra den aktuelle seniorhold liste
-skillTable.showTimeInClub=Viser tiden siden spiller tiltrådte klubbens seniorhold
-Nationality=Nationalitet
-Nationality.abbr=Nationalitet
-Flag=Flag
-Flag.abbr=Flag
-Player=Spiller
-Player.abbr=Spiller
-Age=Alder
-Age.abbr=Alder
-Match=Kamp
-Series=Serie
-
-TransferCompare=Transfersammenligning
-TransferCompare.abbr=TC
-Bookmark=Bogmærk
-Bookmark.abbr=Bogmærk
-Deadline=Deadline
-Deadline.abbr=Deadline
-CurrentBid=Nuværende bud
-CurrentBid.abbr=Bud
-CurrentBidder=Nuværende højeste byder
-CurrentBidder.abbr=Budgiver
-CurrentBidderShort=Nuværende højestbydende
-CurrentBidderShort.abbr=Budt
 
 # HTMSPrediction
 HTMSPrediction.prediction=Forudsagt resultat
@@ -678,6 +636,9 @@ pageAction.mainContent=Vis hovedindhold
 pageAction.leftMenu=Vis venstre bjælke
 pageAction.all=Vis alt
 
+#Locales for date and time
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
 
 # buttons
 button.copy=kopiere
@@ -692,6 +653,7 @@ api.clearCache.title=Rydder FoxTricks Xml cache. FoxTrick henter ekstra oplysnin
 
 # keep the following line untranslated
 
+
 # End of IN-GAME STRINGS.
 
 
@@ -700,6 +662,10 @@ api.clearCache.title=Rydder FoxTricks Xml cache. FoxTrick henter ekstra oplysnin
 Links.feeds=Feeds af link lister (adskilt med linjeskift)
 TickerAlert.enable=Aktiver
 TickerAlert.sound=Lyd
+TeamPopupLinks.prefsCaption=Linkindstillinger
+TeamPopupLinks.ShowByDefault=Vis som standard
+TeamPopupLinks.ShowOnMore=Vis mere
+TeamPopupLinks.OpenNewTab=Åben i ny fane
 
 #toolbar
 
