--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -393,9 +393,6 @@ module.SafeForWork.desc=Ersetzt Icon und Titel von Hattrick Tabs um sie zB auf A
 SafeForWork.title=Titel
 SafeForWork.icon=Icon
 
-#Embed Media
-EmbedMedia.EmbeddedImage=Eingebettetes Bild
-
 #Extrashortcuts
 ExtraShortcuts.statistics=Statistiken
 ExtraShortcuts.transfers=Transfers
@@ -403,10 +400,8 @@ ExtraShortcuts.ManageCHPP=Deine CHPP Produkte
 ExtraShortcuts.prefs=Einstellungen
 ExtraShortcuts.ftprefs=FoxTrick-Einstellungen
 
-#lineupShortcut
-
-
 #HistoryStats
+HistoryStats.boxheader=History Stats
 HistoryStats.season=Saison
 HistoryStats.season.short=S
 HistoryStats.cup=Pokalrunde
@@ -415,7 +410,6 @@ HistoryStats.league=Liga
 HistoryStats.league.short=L
 HistoryStats.finalPosition=Endplatzierung
 HistoryStats.finalPosition.short=P
-HistoryStats.boxheader=History Stats
 HistoryStats.cupwinner=Pokalsieger
 HistoryStats.cupwinner.short=PS
 
@@ -424,11 +418,9 @@ HistoryStats.cupwinner.short=PS
 YouthPromotes.future=Spieler kann befördert werden in %1 Tagen am %2.
 YouthPromotes.today=Spieler kann heute befördert werden.
 
-# links
-links.boxheader=Links
-
 #teamstats+filters
 TeamStats.boxheader=Teamübersicht
+TeamStats.General=Allgemein
 TeamStats.PlayerNotToOld=Spieler < 19 Jahre
 TeamStats.PlayerToOld=Spieler >\= 19 Jahre
 TeamStats.Cards=Karten
@@ -442,6 +434,12 @@ TeamStats.ActivePlayers=Aktive Spieler
 TeamStats.HomeGrownPlayers=Eigengewächse
 TeamStats.PurchasedPlayers=Gekaufte
 TeamStats.FilterFor=Filtern nach
+
+#PlayerBirthday
+PlayerBirthday.boxheader=Geburtstage
+PlayerBirthday.BirthdayToday=Geburtstag heute
+PlayerBirthday.BirthdayLastWeek=Geburtstage der letzten Woche
+PlayerBirthday.BirthdayNextWeek=Geburtstage der kommenden Woche
 
 #season stats
 #note to translators. use abreviations of league table where applicable
@@ -468,43 +466,52 @@ LeagueNewsFilter.friendlies=Freundschaftsspiele
 LeagueNewsFilter.transfers=Transfers
 LeagueNewsFilter.lineupChanges=Aufstellungen
 
-# AddLeaveConfButton
-AddLeaveConfButton.alert=Auf den Speichern-Button im nächsten Fenster klicken um dieses Forum abzubestellen.
-AddLeaveConfButton.LeaveForum=Forum abbestellen
+#team pages
+sidebarBox.actions=Aktionen
+TeamSelectBox.selectplayer=Spieler auswählen
+ExtendedPlayerDetails.perseason=/ Saison
+ExtraPlayerInfo.defensiveTrainer=Seine Fähigkeit als Trainer ist %s. Außerdem ist er ein defensiver Trainer.
+ExtraPlayerInfo.offensiveTrainer=Seine Fähigkeit als Trainer ist %s. Außerdem ist er ein offensiver Trainer.
+ExtraPlayerInfo.balancedTrainer=Seine Fähigkeit als Trainer ist %s. Außerdem ist er ein ausgewogener Trainer.
+ManagerButtons.writeInGuestbook=Eintrag im Gästebuch verfassen
 
-#ShowForumPrefButton
+#forum
+AddLeaveConfButton.LeaveForum=Forum abbestellen
+AddLeaveConfButton.alert=Auf den Speichern-Button im nächsten Fenster klicken um dieses Forum abzubestellen.
 ShowForumPrefButton.forumPreferences=Foren-Einstellungen
+FormatPostingText.ShowNestedQuotes=Zeige verschachtelte Zitat an
+HideSignatures.signaturetoggle=Signatur
+MarkUnread.markunread=Als ungelesen markieren
+EmbedMedia.EmbeddedImage=Eingebettetes Bild
+ForumStripHattrickLinks.ask=Entfernen des Hattrick-Servers auf dem Link um ihn im Forum nutzbar zu machen?
 
 # ForumTemplates
 ForumTemplates.make=Vorlage aus dem Posting erstellen
+ForumTemplates.make.error=Die Vorlage existiert bereits oder ist leer
 ForumTemplates.show=Zeige Vorlagen
 ForumTemplates.hide=Verstecke Vorlagen
-ForumTemplates.make.error=Die Vorlage existiert bereits oder ist leer
 ForumTemplates.templateTitle=Vorlagentitel\:
 ForumTemplates.templateTitle.error='[' und ']' sind nicht möglich in Titeln
 ForumTemplates.delete.ask=Vorlage löschen?
 
-#PostPreview
+#ForumPreview
 ForumPreview.preview.title=Vorschau des Postings anzeigen
 ForumPreview.preview=Vorschau
 ForumPreview.send=Absenden
 
-
+#ForumYouthIcons
+ForumYouthIcons.toolbar.main=Hauptlinks
 ForumYouthIcons.toolbar.youth=Jugendlinks
 ForumYouthIcons.toolbar.tournament=Turniere
-ForumYouthIcons.toolbar.main=Hauptlinks
+ForumYouthIcons.toolbar.other=Weitere
 ForumYouthIcons.youthplayerid=Jugendspieler verlinken
 ForumYouthIcons.youthteamid=Jugendteam verlinken
 ForumYouthIcons.youthmatchid=Link zu Jugendspiel einfügen
 ForumYouthIcons.youthseries=Link zu Jugendliga einfügen
 ForumYouthIcons.tournamentid=Link zu Turnier einfügen
 ForumYouthIcons.tournamentmatchid=Link zu Turnierspiel einfügen
-
-ForumYouthIcons.toolbar.other=Weitere
 ForumYouthIcons.debug=FoxTrick debug log einfügen.
 ForumYouthIcons.settings=FoxTrick Einstellungen einfügen.
-
-#special bbcode, not really youth icons
 ForumSpecialBBCode.q=Zitieren einfügen
 ForumSpecialBBCode.br=Zeilenumbruch einfügen
 ForumSpecialBBCode.user=UserID einfügen
@@ -519,9 +526,6 @@ ForumSpecialBBCode.enterSeparator=Eigenen Seperator eingeben
 ForumSpecialBBCode.forumSymbol="%s" einfügen
 ForumSpecialBBCode.symbols=Symbol einfügen\: %s
 
-
-FormatPostingText.ShowNestedQuotes=Zeige verschachtelte Zitat an
-
 #Transferlistfilters
 TransferSearchFilters.boxheader=FoxTrick Filter
 TransferSearchFilters.enterName=Filtername\:
@@ -530,6 +534,7 @@ TransferSearchFilters.saveFilter=Filter speichern
 
 #Filter
 Filters.label=Filter
+Filters.addFilterOptions=Filteroptionen hinzufügen
 Filters.ok=Ok
 Filters.clear=Zurücksetzen
 Filters.noFilter=Kein Filter
@@ -541,17 +546,8 @@ Filters.Form=Form
 Filters.XP=Erfahrung
 Filters.specialty=Spezialität
 Filters.stars=Sterne
-Filters.addFilterOptions=Filteroptionen hinzufügen
-
-#Locales for date and time
-#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
-#next 6 use pluralFroms
-datetimestrings.days=Tag; Tage
-datetimestrings.hours=h
-datetimestrings.minutes=min;mins
-datetimestrings.short_seasons=S
-datetimestrings.short_weeks=W
-datetimestrings.short_days=T
+Filters.minimum=Mind.
+Filters.maximum=Max.
 
 #Transfer prices
 MedianTransferPrice.median=Medianpreis
@@ -617,6 +613,7 @@ categories.R=R
 categories.E1=E1
 categories.E2=E2
 
+#match positions
 match.pos.kp=Torwart
 match.pos.kp.abbr=TW
 match.pos.lb=Linker Außenverteidiger
@@ -653,17 +650,22 @@ match.role.captain.abbr=Kapt.
 
 match.player.unknown=Unbekannter Spieler
 
-TeamStats.General=Allgemein
-
+# SkillTable
+Skill_table=Fähigkeitentabelle
+Switch_view=Ansicht wechseln
+AddHomegrown=Eigengewächse zufügen
+showTimeInClub=Zeit im Verein anzeigen
+Switch_view.title=Wechselt die Ansicht der Tabelle
+skillTable.addHomegrown=Alle eigengewächse des aktuellen Teams zufügen
+skillTable.showTimeInClub=Zeit des Vereinsbeitritts anzeigen
+skilltable.youthplayer=Jugendspieler
+skilltable.rebought_youthplayer=zurückgekaufter Jugendspieler
 PlayerNumber=Spielernummer
 PlayerNumber.abbr=\#
-
 TSI=Total Skill Index
 TSI.abbr=TSI
-
 CanBePromotedIn=Kann befördert werden in
 CanBePromotedIn.abbr=Bef
-
 Personality=Personalität
 Agreeability=Beliebtheit
 Agreeability.abbr=Be
@@ -671,33 +673,26 @@ Aggressiveness=Psyche
 Aggressiveness.abbr=Psy
 Honesty=Charakter
 Honesty.abbr=Ch
-
 Leadership=Führungsqualität
 Leadership.abbr=FQ
 Experience=Erfahrung
 Experience.abbr=XP
-
 Stamina=Kondition
 Stamina.abbr=Kon
 Form=Form
 Form.abbr=Fo
-
 Loyalty=Treue
 Loyalty.abbr=Tr
 MotherClubBonus=Heimatvereinbonus
 MotherClubBonus.abbr=HB
-
 Status=Status
 Status.abbr=Status
-
 Yellow_card=Gelbe Karte
 Yellow_card.abbr=G
 Red_card=Rote Karte
 Red_card.abbr=R
-
 Speciality=Spezialität
 Speciality.abbr=Sp
-
 Last_match=Letztes Spiel
 Last_match.abbr=Letztes
 Last_stars=Letzte Bewertung
@@ -711,18 +706,14 @@ Last_position.abbr=Pos
 #following string uses pluralForms
 Last_match_played_as_at=Spielte %1 Minute als %2 in seinem letzten Spiel am %3.;Spielte %1 Minuten als %2 in seinem letzten Spiel am %3.
 Last_match_didnot_play=Hat noch kein Spiel absolviert.
-
 Bruised=Angeschlagen
 Bruised.abbr=Ang
 Injured=Verletzt
 Injured.abbr=Ver
-
 Salary=Gehalt
 Salary.abbr=Geh
-
 TransferListed=Transfergelistet
 TransferListed.abbr=TL
-
 NrOfMatches=Anzahl der Spiele
 NrOfMatches.abbr=AS
 LeagueGoals=Ligatore
@@ -735,43 +726,48 @@ CareerGoals=Karrieretore
 CareerGoals.abbr=KT
 Hattricks=Hattricks
 Hattricks.abbr=HT
-
 Current_club=Aktueller Verein
 Current_club.abbr=Verein
 Current_league=Aktuelle Liga
 Current_league.abbr=Liga
-
 JoinedSince=Im Verein seit
 JoinedSince.abbr=Seit
-
 Hotlist=Beobachten
 Hotlist.abbr=Beob.
+Coach=Trainer
+CurrentSquad=Aktuelles Team
+Nationality=Nationalität
+Nationality.abbr=Nat
+Flag=Flagge
+Flag.abbr=Fl
+Player=Spieler
+Player.abbr=Spieler
+Age=Alter
+Age.abbr=Jhr
+Match=Spiel
+Series=Liga
+TransferCompare=TransferCompare
+TransferCompare.abbr=TC
+Bookmark=Favoriten
+Bookmark.abbr=Fav
+Deadline=Deadline
+Deadline.abbr=Deadline
+CurrentBid=Aktuelles Gebot
+CurrentBid.abbr=Gebot
+CurrentBidder=Aktuell höchster Bieter
+CurrentBidder.abbr=Bieter
+CurrentBidderShort=Aktuell höchster Bieter
+CurrentBidderShort.abbr=Bt
 
-skilltable.youthplayer=Jugendspieler
-skilltable.rebought_youthplayer=zurückgekaufter Jugendspieler
-
-#matchdetail
-match.ratings.midfield=Mittelfeld
-match.ratings.attack=Angriff
-match.ratings.defence=Verteidigung
-match.ratings.total=Total
-
-match.ratings.right=Rechts
-match.ratings.center=Mitte
-match.ratings.left=Links
-match.ratings.rightshort=R
-match.ratings.centershort=M
-match.ratings.leftshort=L
-match.ratings.ifkshort=I
+#confirms
 ConfirmActions.bid=Auf diesen Spieler bieten? Der Preis beträgt %s.
 ConfirmActions.transferlist=Den Spieler auf die Transferliste setzen? Der Preis beträgt %s.
 ConfirmActions.hirestaff=Sollen %num %kind eingestellt werden?
 ConfirmActions.sackstaff=Sollen %num %kind entlassen werden?
 ConfirmActions.ntremove=Willst du wirklich diesen Spieler hinzufügen / entfernen?
-ForumStripHattrickLinks.ask=Entfernen des Hattrick-Servers auf dem Link um ihn im Forum nutzbar zu machen?
-HideSignatures.signaturetoggle=Signatur
-MarkUnread.markunread=Als ungelesen markieren
-TeamSelectBox.selectplayer=Spieler auswählen
+
+# links
+links.boxheader=Links
 links.custom.selecticon=Icon auswählen
 links.custom.addpersonallink=Eigenen Link zufügen
 links.custom.addlink=Link zufügen
@@ -784,17 +780,7 @@ links.custom.tags=Tags
 links.custom.help=Hilfe
 links.custom.helptext=Zuerst einmal, dies ist nur der Editormodus. Man kann zwischen dem normalen und dem Editormodus wechseln in dem man auf die Überschrift dieser Box klickt. Nur im normalen Modus sind die eigenen Links voll funktionsfähig. Externe statische Links sind leicht einzufügen, einfach die volle Url angeben (Beispiel\:  http\: //alltid.org/league/427/). Für interne statische Links muss der Serverteil weggelassen werden (Beispiel\: /World/Series/Default.aspx?LeagueLevelUnitID\=427). Die Tags braucht man nur für seltenere dynamische Links. Die Tags werden durch die entsprechende Information der Seite, auf der du dich gerade befindest, ausgetauscht. Zum Beispiel http\://alltid.org/league/[leagueid] würde dich immer zu der Alltidseite der Liga führen, die du dir gerade in Hattrick anschaust. Die zur Verfügung stehenden Tags befinden sich in der Auswahlbox und sind auf jeder Seite verschieden. Nur die gelisteten Tags können auf der jeweiligen Seite für eigene Links eingesetzt werden. Der durch die Auswahlbox erzeugte Text ist nur eine exemplarische Schablone. Man kann die Tags auch selber einfügen (einschliesslich der []).
 links.custom.helptext2=Du kannst deine Links auch speichern und mit Freunden teilen. Dazu musst du nur den Export-Butten drücken und eine Datei zum Speichern auswählen. Die Links werden der Datei hinzugefügt. Somit kannst du mehrere Links in eine Datei speichern. Um Links zu importieren, gehe in die Einstellungen von FoxTrick und drücke den Importieren-Button. Lediglich Einträge, welche in der Datei vorkommen, werden hinzugefügt bzw. überschrieben - in diesem Fall deine Links. Keiner deiner existierenden Links wird dabei überschrieben.
-matches.income=Einnahmen\:
-PlayerBirthday.boxheader=Geburtstage
-PlayerBirthday.BirthdayToday=Geburtstag heute
-PlayerBirthday.BirthdayLastWeek=Geburtstage der letzten Woche
-PlayerBirthday.BirthdayNextWeek=Geburtstage der kommenden Woche
-copy.matchid=Klicken, um die MatchID in die Zwischenablage zu kopieren
-ExtendedPlayerDetails.perseason=/ Saison
 
-ExtraPlayerInfo.defensiveTrainer=Seine Fähigkeit als Trainer ist %s. Außerdem ist er ein defensiver Trainer.
-ExtraPlayerInfo.offensiveTrainer=Seine Fähigkeit als Trainer ist %s. Außerdem ist er ein offensiver Trainer.
-ExtraPlayerInfo.balancedTrainer=Seine Fähigkeit als Trainer ist %s. Außerdem ist er ein ausgewogener Trainer.
 
 #following string uses pluralForms
 notify.newMail=Du hast %s neue Nachrichten erhalten.
@@ -803,25 +789,18 @@ notify.newForumMessage=Es gibt %s neue Forenantworte(n) an dich.
 
 matchView.htLive=HT Live
 
-module.modules_allpages=globale Module
-ReadHtPrefs.HTLanguageChanged=In den Grundeinstellungen ist eingestellt, dass die FoxTrick-Sprache automatisch angepasst wird, wenn die Sprache bei HT geändert wird. Deine FoxTrick-Sprache ist jetzt\: %s.
-
-Coach=Trainer
-CurrentSquad=Aktuelles Team
-
-
-ManagerButtons.writeInGuestbook=Eintrag im Gästebuch verfassen
-copy.copyplayerad=Spieleranzeige kopieren
-copy.copied=Die Spieleranzeige wurde in die Zwischenablage kopiert.
-
-ratings.HatStats=HatStats
-ratings.LoddarStats=LoddarStats
-ratings.PeasoStats=PeasoStats
-ratings.VnukStats=VnukStats
-ratings.HTitaVal=HTitaVal
-ratings.GardierStats=GardierStats
+# Context menu items
+# This would look like: Copy player ID: 123456789
+copy.id=Kopiere %s\: %i
+copy.link=Kopiere Link in HT-ML
+copy.ht-ml=Kopiere in HT-ML
+copy.table=Kopiere Tabelle in HT-ML
 
 #copy
+copy.copyplayerad=Spieleranzeige kopieren
+copy.copied=Die Spieleranzeige wurde in die Zwischenablage kopiert.
+copy.matchid=Klicken, um die MatchID in die Zwischenablage zu kopieren
+
 copy.PostID=In die Zwischenablage kopieren
 CopyPosting=Kopiere Posting im %s Stil
 CopyPosting.abbr=Kopiere im %s Stil
@@ -853,6 +832,39 @@ copy.copied.posting=Posting in die Zwischenablage kopiert.
 copy.copySelected=Auswahl mit Strg+C kopieren.
 copy.operaPaste=Einfügen mit Umschalt + Linksklick.
 
+#matches
+matches.income=Einnahmen\:
+matches.attackdefensebars=Teamvergleich
+matches.right=rechts
+matches.left=links
+matches.center=zentral
+matches.defense=Abwehr
+matches.attack=Angriff
+matches.indfreekick=ind. Freistösse
+matches.wronglang=FoxTrick\: Statistiken können nicht angezeigt werden, da die gewählte Sprache nicht unterstützt wird oder falsch eingestellt wurde. Bitte stell sicher, dass deine FoxTrick-Spracheinstellung mit der Sprache von Hattrick übereinstimmt\!
+total_stars=Summe der Sterne
+
+#matchdetail
+match.ratings.midfield=Mittelfeld
+match.ratings.attack=Angriff
+match.ratings.defence=Verteidigung
+match.ratings.total=Total
+
+match.ratings.right=Rechts
+match.ratings.center=Mitte
+match.ratings.left=Links
+match.ratings.rightshort=R
+match.ratings.centershort=M
+match.ratings.leftshort=L
+match.ratings.ifkshort=I
+
+ratings.HatStats=HatStats
+ratings.LoddarStats=LoddarStats
+ratings.PeasoStats=PeasoStats
+ratings.VnukStats=VnukStats
+ratings.HTitaVal=HTitaVal
+ratings.GardierStats=GardierStats
+
 MatchReportFormat.MatchReport=Spielbericht
 MatchReportFormat.lineup=Aufstellung
 MatchReportFormat.kickOff=Anstoß
@@ -862,23 +874,6 @@ MatchReportFormat.extraTime=Verlängerung
 MatchReportFormat.penaltyShootOut=Elfmeterschießen
 MatchReportFormat.result=Endergebnis
 
-
-#matches
-matches.attackdefensebars=Teamvergleich
-matches.right=rechts
-matches.left=links
-matches.center=zentral
-matches.defense=Abwehr
-matches.attack=Angriff
-matches.indfreekick=ind. Freistösse
-matches.wronglang=FoxTrick\: Statistiken können nicht angezeigt werden, da die gewählte Sprache nicht unterstützt wird oder falsch eingestellt wurde. Bitte stell sicher, dass deine FoxTrick-Spracheinstellung mit der Sprache von Hattrick übereinstimmt\!
-
-# Context menu items
-# This would look like: Copy player ID: 123456789
-copy.id=Kopiere %s\: %i
-copy.link=Kopiere Link in HT-ML
-copy.ht-ml=Kopiere in HT-ML
-copy.table=Kopiere Tabelle in HT-ML
 
 #teampopups
 Manager=Manager
@@ -898,12 +893,6 @@ LastLineup=Letzte Aufstellung
 YouthMatches=Jugendspiele
 more=mehr...
 less=weniger...
-TeamPopupLinks.prefsCaption=Link-Einstellungen
-TeamPopupLinks.ShowByDefault=Standardanzeige
-TeamPopupLinks.ShowOnMore=Anzeige bei 'mehr...'
-TeamPopupLinks.OpenNewTab=In neuem Tab öffnen
-
-total_stars=Summe der Sterne
 
 # FlagCollectionToMap
 flagCollectionToMap.ShowMap=Karte anzeigen
@@ -915,12 +904,6 @@ flagCollectionToMap.MEast=Mittlerer Osten
 flagCollectionToMap.SAmerica=Südamerika
 flagCollectionToMap.World=Welt
 
-# SkillTable
-Skill_table=Fähigkeitentabelle
-Switch_view=Ansicht wechseln
-AddHomegrown=Eigengewächse zufügen
-showTimeInClub=Zeit im Verein anzeigen
-
 team.status.booked=Freundschaftsspiel vereinbart
 ShowFriendlyBooked.ShowFriendlies=Freundschaftspiele anzeigen
 
@@ -931,10 +914,6 @@ TransferSearchResultFilters.hideInjured=Verletzte ausblenden
 TransferSearchResultFilters.hideSuspended=Verberge Gesperrte
 TransferSearchResultFilters.days=Tage\:
 
-# refer to transfer search form
-Filters.minimum=Mind.
-Filters.maximum=Max.
-
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
 RapidId.view=Anzeigen
 RapidId.viewById=Anzeige nach ID
@@ -943,33 +922,6 @@ RapidId.youth=Jugend
 RapidId.tournaments=Turniere
 RapidId.tournament=Turnier
 
-# SkillTable
-Switch_view.title=Wechselt die Ansicht der Tabelle
-skillTable.addHomegrown=Alle eigengewächse des aktuellen Teams zufügen
-skillTable.showTimeInClub=Zeit des Vereinsbeitritts anzeigen
-Nationality=Nationalität
-Nationality.abbr=Nat
-Flag=Flagge
-Flag.abbr=Fl
-Player=Spieler
-Player.abbr=Spieler
-Age=Alter
-Age.abbr=Jhr
-Match=Spiel
-Series=Liga
-
-TransferCompare=TransferCompare
-TransferCompare.abbr=TC
-Bookmark=Favoriten
-Bookmark.abbr=Fav
-Deadline=Deadline
-Deadline.abbr=Deadline
-CurrentBid=Aktuelles Gebot
-CurrentBid.abbr=Gebot
-CurrentBidder=Aktuell höchster Bieter
-CurrentBidder.abbr=Bieter
-CurrentBidderShort=Aktuell höchster Bieter
-CurrentBidderShort.abbr=Bt
 
 # HTMSPrediction
 HTMSPrediction.prediction=Ergebnisvorhersage
@@ -1041,7 +993,15 @@ pageAction.mainContent=Hauptbereich anzeigen
 pageAction.leftMenu=Linkes Menue anzeigen
 pageAction.all=Zeige alles
 
-sidebarBox.actions=Aktionen
+#Locales for date and time
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
+datetimestrings.days=Tag; Tage
+datetimestrings.hours=h
+datetimestrings.minutes=min;mins
+datetimestrings.short_seasons=S
+datetimestrings.short_weeks=W
+datetimestrings.short_days=T
 
 # buttons
 button.ok=OK
@@ -1088,6 +1048,8 @@ log.header=FoxTrick Log
 # keep the following line untranslated
 log.env=Version %1, %2 platform, %3 locale, %4 layout, %5 direction
 
+ReadHtPrefs.HTLanguageChanged=In den Grundeinstellungen ist eingestellt, dass die FoxTrick-Sprache automatisch angepasst wird, wenn die Sprache bei HT geändert wird. Deine FoxTrick-Sprache ist jetzt\: %s.
+
 # End of IN-GAME STRINGS.
 
 
@@ -1096,6 +1058,10 @@ log.env=Version %1, %2 platform, %3 locale, %4 layout, %5 direction
 Links.feeds=Feeds von Linklisten (in getrennten Zeilen)
 TickerAlert.enable=Aktivieren
 TickerAlert.sound=Hinweiston
+TeamPopupLinks.prefsCaption=Link-Einstellungen
+TeamPopupLinks.ShowByDefault=Standardanzeige
+TeamPopupLinks.ShowOnMore=Anzeige bei 'mehr...'
+TeamPopupLinks.OpenNewTab=In neuem Tab öffnen
 
 #toolbar
 toolbar.title=FoxTrick
