--- a/content/locale/el/foxtrick.properties
+++ b/content/locale/el/foxtrick.properties
@@ -259,9 +259,6 @@ module.RatingsDisplay.HatStats.desc=Ως HatStats
 
 #Save for work
 
-#Embed Media
-EmbedMedia.EmbeddedImage=Ενσωματωμένη εικόνα
-
 #Extrashortcuts
 ExtraShortcuts.statistics=στατιστικά
 ExtraShortcuts.transfers=μεταγραφες
@@ -269,10 +266,8 @@ ExtraShortcuts.ManageCHPP=Διαχείριση προϊόντων CHPP
 ExtraShortcuts.prefs=Προτιμήσεις
 ExtraShortcuts.ftprefs=Προτιμήσεις FoxTrick
 
-#lineupShortcut
-
-
 #HistoryStats
+HistoryStats.boxheader=Στατιστικά ιστορία
 HistoryStats.season=Σεζόν
 HistoryStats.season.short=S
 HistoryStats.cup=Γύρος κυπελλου
@@ -281,7 +276,6 @@ HistoryStats.league=Όμιλος
 HistoryStats.league.short=Ser.
 HistoryStats.finalPosition=Τελική θέση ομιλου
 HistoryStats.finalPosition.short=P
-HistoryStats.boxheader=Στατιστικά ιστορία
 HistoryStats.cupwinner=Νικητής Κυπέλλου
 HistoryStats.cupwinner.short=ΝΚ
 
@@ -290,11 +284,9 @@ HistoryStats.cupwinner.short=ΝΚ
 YouthPromotes.future=Ο παίκτης μπορεί να προβιβαστεί σε %1 ημέρα, στις %2.; Ο παίκτης μπορεί να προβιβαστεί σε %1 ημέρες, στις %2.
 YouthPromotes.today=Ο παίκτης μπορεί να προωθηθεί σήμερα\!
 
-# links
-links.boxheader=Σύνδεσμοι
-
 #teamstats+filters
 TeamStats.boxheader=Επισκόπηση ομάδας
+TeamStats.General=Γενικά
 TeamStats.PlayerNotToOld=Παίκτες < 19 ετών
 TeamStats.PlayerToOld=Παίκτες >\= 19 ετών
 TeamStats.Cards=Κάρτες
@@ -307,6 +299,12 @@ TeamStats.NotTransferListed=Εκτός μεταγραφής
 TeamStats.ActivePlayers=Ενεργοί παίκτες
 TeamStats.PurchasedPlayers=Αγορές παικτών
 TeamStats.FilterFor=Φίλτρο για
+
+#PlayerBirthday
+PlayerBirthday.boxheader=Γενέθλια
+PlayerBirthday.BirthdayToday=Γενέθλια Σήμερα
+PlayerBirthday.BirthdayLastWeek=Γενέθλια την περασμένη εβδομάδα
+PlayerBirthday.BirthdayNextWeek=Γενέθλια την επόμενη εβδομάδα
 
 #season stats
 #note to translators. use abreviations of league table where applicable
@@ -333,43 +331,51 @@ LeagueNewsFilter.friendlies=Φιλικά & αλλαγές προπονητών
 LeagueNewsFilter.transfers=Μεταγραφές
 LeagueNewsFilter.lineupChanges=Αλλαγές εντεκάδας
 
-# AddLeaveConfButton
-AddLeaveConfButton.alert=Πάτα το μπουτόν 'Σώσε' στην επόμενη σελίδα για να εγκαταλείψεις την διάσκεψη.
-AddLeaveConfButton.LeaveForum=Εγκατέλειψε την διάσκεψη
+#team pages
+sidebarBox.actions=Ενέργειες
+TeamSelectBox.selectplayer=Επιλογή παίκτη
+ExtendedPlayerDetails.perseason=/σαιζόν
+ExtraPlayerInfo.defensiveTrainer=Ένας %s προπονητής, που είναι αμυντικογενής.
+ExtraPlayerInfo.offensiveTrainer=Ένας %s προπονητής, που είναι επιθετικογενής.
+ExtraPlayerInfo.balancedTrainer=προπονητης,ούτε επίθετικογενης, ούτε άμυντικογενης.
+ManagerButtons.writeInGuestbook=Γράψε στο βιβλίο επισκεπτών
 
-#ShowForumPrefButton
+#forum
+AddLeaveConfButton.LeaveForum=Εγκατέλειψε την διάσκεψη
+AddLeaveConfButton.alert=Πάτα το μπουτόν 'Σώσε' στην επόμενη σελίδα για να εγκαταλείψεις την διάσκεψη.
 ShowForumPrefButton.forumPreferences=Προτιμήσεις φόρουμ
+FormatPostingText.ShowNestedQuotes=Εμφάνιση ένθετων παραθέσεων
+HideSignatures.signaturetoggle=Υπογραφή
+MarkUnread.markunread=Επισημάνετε μη αναγνωσμένα μηνύματα από εδώ
+EmbedMedia.EmbeddedImage=Ενσωματωμένη εικόνα
 
 # ForumTemplates
 ForumTemplates.make=Δημιούργησε πρότυπο από την δημοσίευση
+ForumTemplates.make.error=Το πρότυπο ήδη υπάρχει ή είναι κενό
 ForumTemplates.show=Εμφάνισε πρότυπα
 ForumTemplates.hide=Κρύψε πρότυπα
-ForumTemplates.make.error=Το πρότυπο ήδη υπάρχει ή είναι κενό
 ForumTemplates.templateTitle=Τίτλος προτύπου\:
 ForumTemplates.templateTitle.error='[' και ']' δεν επιτρέπονται σε τίτλους
 ForumTemplates.delete.ask=Διαγραφή προτύπου?
 
-#PostPreview
+#ForumPreview
 ForumPreview.preview.title=Εμφανίζει προεπισκόπηση της δημοσίευσης
 ForumPreview.preview=Προεπισκόπηση
 ForumPreview.send=Αποστολή
 
-
+#ForumYouthIcons
+ForumYouthIcons.toolbar.main=Βασικοί σύνδεσμοι
 ForumYouthIcons.toolbar.youth=Σύνδεσμοι Νέων
 ForumYouthIcons.toolbar.tournament=Τουρνουά
-ForumYouthIcons.toolbar.main=Βασικοί σύνδεσμοι
+ForumYouthIcons.toolbar.other=Άλλα
 ForumYouthIcons.youthplayerid=Σύνδεσμος σε Νέο παίκτη
 ForumYouthIcons.youthteamid=Σύνδεσμος στη ομάδα Νέων
 ForumYouthIcons.youthmatchid=Προσθέτει σύνδεσμο σε αγώνα Νέων
 ForumYouthIcons.youthseries=Προσθέτει σύνδεσμο σε πρωτάθλημα Νέων
 ForumYouthIcons.tournamentid=Προσθήκη tag για τουρνουά.
 ForumYouthIcons.tournamentmatchid=Προσθήκη tag για αγώνα τουρνουά.
-
-ForumYouthIcons.toolbar.other=Άλλα
 ForumYouthIcons.debug=Εισαγωγή αρχείου καταγραφής σφαλμάτων του FoxTrick.
 ForumYouthIcons.settings=Εισαγωγή ρυθμίσεων FoxTrick.
-
-#special bbcode, not really youth icons
 ForumSpecialBBCode.q=Προσθήκη προσφοράς
 ForumSpecialBBCode.br=πρόσθεση τέλους γραμμής
 ForumSpecialBBCode.user=προσθέτει κωδικό χρήστη
@@ -384,9 +390,6 @@ ForumSpecialBBCode.enterSeparator=Εισάγετε ένα προσαρμοσμέ
 ForumSpecialBBCode.forumSymbol=Εισαγάγετε "% s"
 ForumSpecialBBCode.symbols=Εισάγετε σύμβολο\: %s
 
-
-FormatPostingText.ShowNestedQuotes=Εμφάνιση ένθετων παραθέσεων
-
 #Transferlistfilters
 TransferSearchFilters.boxheader=Foxtrick Φίλτρα
 TransferSearchFilters.enterName=Εισαγωγή ονόματος φίλτρου\:
@@ -395,6 +398,7 @@ TransferSearchFilters.saveFilter=Σώσε το νέο φίλτρο
 
 #Filter
 Filters.label=Φίλτρα
+Filters.addFilterOptions=Προσθήκη επιλογών φίλτρου
 Filters.ok=ΟΚ
 Filters.clear=Καθάρισε
 Filters.noFilter=Χωρίς φίλτρο
@@ -406,17 +410,8 @@ Filters.Form=Φόρμα
 Filters.XP=Εμπειρία
 Filters.specialty=Ειδικότητα
 Filters.stars=Αστέρια
-Filters.addFilterOptions=Προσθήκη επιλογών φίλτρου
-
-#Locales for date and time
-#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
-#next 6 use pluralFroms
-datetimestrings.days=μέρες
-datetimestrings.hours=Ω
-datetimestrings.minutes=λ
-datetimestrings.short_seasons=σ
-datetimestrings.short_weeks=εβ
-datetimestrings.short_days=μ
+Filters.minimum=Τουλάχιστον
+Filters.maximum=Μέγιστο
 
 #Transfer prices
 MedianTransferPrice.median=Διάμεση τιμή
@@ -481,6 +476,7 @@ categories.R=A
 categories.E1=E1
 categories.E2=E2
 
+#match positions
 match.pos.kp=Τερματοφύλακας
 match.pos.kp.abbr=ΤΡΜ
 match.pos.lb=Αριστερός πλάγιος αμυντικός
@@ -517,16 +513,18 @@ match.role.captain.abbr=Αρχ
 
 match.player.unknown=Άγνωστος παίκτης
 
-TeamStats.General=Γενικά
-
+# SkillTable
+Skill_table=Πίνακας ικανοτήτων
+Switch_view=Αλλαγή προβολής
+showTimeInClub=Εμφάνιση χρόνου στην ομάδα
+Switch_view.title=Εναλλαγή της προβολής του πίνακα.
+skillTable.showTimeInClub=Εμφανίζει το χρόνο από τη στιγμή που ο παίκτης εντάχθηκε στη μεγάλη ομάδα
+skilltable.youthplayer=Παίκτης ακαδημίας
 PlayerNumber=Αριθμός Παίκτη
 PlayerNumber.abbr=\#
-
 TSI=Δείκτης συνολικών ικανοτήτων (TSI)
 TSI.abbr=TSI
-
 CanBePromotedIn=Θα μπορούσε να προωθηθεί σε
-
 Personality=Προσωπικότητα
 Agreeability=Φιλικότητα
 Agreeability.abbr=AB
@@ -534,33 +532,26 @@ Aggressiveness=Επιθετικότητα
 Aggressiveness.abbr=AG
 Honesty=Ειλικρίνεια
 Honesty.abbr=ΗΟ
-
 Leadership=Ηγεσία
 Leadership.abbr=Ηγ
 Experience=Εμπειρία
 Experience.abbr=Εμ
-
 Stamina=Αντοχή
 Stamina.abbr=Αν
 Form=Φόρμα
 Form.abbr=Φ
-
 Loyalty=Πίστη
 Loyalty.abbr=Πι
 MotherClubBonus=Μπόνους μητρικού συλλόγου
 MotherClubBonus.abbr=ΜΟ
-
 Status=Κατάσταση
 Status.abbr=Κατάσταση
-
 Yellow_card=Κίτρινη κάρτα
 Yellow_card.abbr=Κι
 Red_card=Κόκκινη κάρτα
 Red_card.abbr=Κ
-
 Speciality=Ειδικότητα
 Speciality.abbr=ΣΤΦ
-
 Last_match=Τελευταίος αγώνας
 Last_match.abbr=Τελευταίος
 Last_stars=Τελευταία αστέρια
@@ -574,18 +565,14 @@ Last_position.abbr=Pos
 #following string uses pluralForms
 Last_match_played_as_at=Έπαιξε %1 λεπτά ως %2 κατά τον τελευταίο αγώνα για το %3.
 Last_match_didnot_play=Δεν έπαιξε ακόμη.
-
 Bruised=Τραυματίας, αλλά παίζει
 Bruised.abbr=Bru
 Injured=Τραυματίας
 Injured.abbr=Τρυμ
-
 Salary=Μισθός
 Salary.abbr=Μισθός
-
 TransferListed=Υπό μεταγραφή
 TransferListed.abbr=ΜΛ
-
 NrOfMatches=Αριθμός αγώνων
 NrOfMatches.abbr=ΑΑ
 LeagueGoals=Γκολ πρωταθλήματος
@@ -598,41 +585,48 @@ CareerGoals=Γκολ καριέρας
 CareerGoals.abbr=Γ
 Hattricks=Hattricks
 Hattricks.abbr=HT
-
 Current_club=Τρέχουσα ομάδα
 Current_club.abbr=Ομάδα
 Current_league=Τρέχων πρωτάθλημα
 Current_league.abbr=Πρωτάθλημα
-
 JoinedSince=Από
 JoinedSince.abbr=Από
-
 Hotlist=Λίστα παρακολούθησης
 Hotlist.abbr=Λίστα παρακολούθησης
+Coach=Προπονητής
+CurrentSquad=Τρέχουσα εντεκάδα
+Nationality=Εθνικότητα
+Nationality.abbr=Εθν
+Flag=Σημαία
+Flag.abbr=Σημαία
+Player=Παίκτης
+Player.abbr=Παίκτης
+Age=Ηλικία
+Age.abbr=Ηλικία
+Match=Αγώνας
+Series=Όμιλος
+TransferCompare=Σύγκριση μεταγραφών
+TransferCompare.abbr=Αυτοπεποίθηση
+Bookmark=Σελιδοδείκτης
+Bookmark.abbr=Σδ
+Deadline=Προθεσμία
+Deadline.abbr=Προθεσμία
+CurrentBid=Τρέχουσα προσφορά
+CurrentBid.abbr=Προσφορά
+CurrentBidder=Χρήστης με τη μεγαλύτερη προσφορά
+CurrentBidder.abbr=Υποψήφιος αγοραστής
+CurrentBidderShort=Χρήστης με τη μεγαλύτερη προσφορά
+CurrentBidderShort.abbr=$$
 
-skilltable.youthplayer=Παίκτης ακαδημίας
-
-#matchdetail
-match.ratings.midfield=Κέντρο
-match.ratings.attack=Επίθεση
-match.ratings.defence=Αμυνα
-match.ratings.total=Σύνολο
-
-match.ratings.right=Δεξιά
-match.ratings.center=Κέντρο
-match.ratings.left=Αριστερά
-match.ratings.rightshort=Δ
-match.ratings.centershort=Κ
-match.ratings.leftshort=Α
-match.ratings.ifkshort=I
+#confirms
 ConfirmActions.bid=Θέλεις να χτυπήσεις αυτόν τον παίκτη?\nΗ τιμή είναι %s.
 ConfirmActions.transferlist=Θέλεις να βάλεις τον παίκτη στη λίστα μεταγραφών?\nΗ θέση του είναι %p και η ζητούμενη τιμή είναι %s.
 ConfirmActions.hirestaff=Θέλετε να προσλάβετε %num %kind;
 ConfirmActions.sackstaff=Θέλετε να απολύσετε %num %kind;
 ConfirmActions.ntremove=Είστε βέβαιοι ότι θέλετε να προσθέσετε/καταργήσετε τον εν λόγω παίκτη από την ομάδα;
-HideSignatures.signaturetoggle=Υπογραφή
-MarkUnread.markunread=Επισημάνετε μη αναγνωσμένα μηνύματα από εδώ
-TeamSelectBox.selectplayer=Επιλογή παίκτη
+
+# links
+links.boxheader=Σύνδεσμοι
 links.custom.selecticon=Επιλογή εικονίδιου
 links.custom.addpersonallink=Πρόσθεσε προσωπικό σύνδεσμο
 links.custom.addlink=Πρόσθεσε σύνδεσμο
@@ -644,17 +638,7 @@ links.custom.addtag=Προσθέτει μια ετικέττα
 links.custom.tags=Ετικέττες
 links.custom.help=Βοήθεια
 links.custom.helptext2=Μπορείς επίσης να εξάγεις τους συνδέσμους σου και να τους διαμοιράσεις. Για να γίνει αυτό κάνε κλικ στον μπουτόν εξαγωγής και επέλεξε ένα αρχείο για να Σώσεις τους συνδέσμους. Οι σύνδεσμοι προσθέτονται στο τέλος του αρχείου, συνεπώς μπορείς να έχεις πολλούς συνδέσμους σε ένα αρχείο. Για να εισάγεις συνδέσμους πήγαινε στις Προτιμήσεις κα κατόπιν στην εισαγωγή προτιμήσεων. Μόνο οι προτιμήσεις που υπάρχουν στο επιλεγμένο αρχείο θα εισαχθούν , οι οποίες σ'αυτήν την περίπτωση ειναι οι σύνδεσμοι σου. Κανένας απο τους προηγούμενους συνδέσμους δεν θα διαγραφεί.
-matches.income=Εσοδα\:
-PlayerBirthday.boxheader=Γενέθλια
-PlayerBirthday.BirthdayToday=Γενέθλια Σήμερα
-PlayerBirthday.BirthdayLastWeek=Γενέθλια την περασμένη εβδομάδα
-PlayerBirthday.BirthdayNextWeek=Γενέθλια την επόμενη εβδομάδα
-copy.matchid=Κάντε κλικ για να αντιγράψετε matchID στο Πρόχειρο
-ExtendedPlayerDetails.perseason=/σαιζόν
 
-ExtraPlayerInfo.defensiveTrainer=Ένας %s προπονητής, που είναι αμυντικογενής.
-ExtraPlayerInfo.offensiveTrainer=Ένας %s προπονητής, που είναι επιθετικογενής.
-ExtraPlayerInfo.balancedTrainer=προπονητης,ούτε επίθετικογενης, ούτε άμυντικογενης.
 
 #following string uses pluralForms
 notify.newMail=Έχετε λάβει %s νέο μήνυμα.;Έχετε λάβει %s νέα μηνύματα.
@@ -663,25 +647,18 @@ notify.newForumMessage=Υπάρχει %s νέα απάντηση στο φόρο
 
 matchView.htLive=HT Live\!
 
-module.modules_allpages=Πρόσθετα που λειτουργούν σε όλες τις σελίδες
-ReadHtPrefs.HTLanguageChanged=Το FoxTrick εντόπισε μια αλλαγή στη γλώσσα. Η γλώσσα του FoxTrick τώρα έχει οριστεί σε %s.
-
-Coach=Προπονητής
-CurrentSquad=Τρέχουσα εντεκάδα
-
-
-ManagerButtons.writeInGuestbook=Γράψε στο βιβλίο επισκεπτών
-copy.copyplayerad=Αντιγραφή παίκτη στο πρόχειρο
-copy.copied=Ο παίκτης προστέθηκε στο πρόχειρο
-
-ratings.HatStats=HatStats
-ratings.LoddarStats=LoddarStats
-ratings.PeasoStats=PeasoStats
-ratings.VnukStats=VnukStats
-ratings.HTitaVal=HTitaVal
-ratings.GardierStats=GardierStats
+# Context menu items
+# This would look like: Copy player ID: 123456789
+copy.id=Αντιγραφή% s\:% i
+copy.link=Αντιγραφή τοποθεσίας δεσμού στο HT-ML
+copy.ht-ml=Αντιγραφή σε HT-ML
+copy.table=Αντιγραφή πίνακα σε HT-ML
 
 #copy
+copy.copyplayerad=Αντιγραφή παίκτη στο πρόχειρο
+copy.copied=Ο παίκτης προστέθηκε στο πρόχειρο
+copy.matchid=Κάντε κλικ για να αντιγράψετε matchID στο Πρόχειρο
+
 copy.PostID=Αντγραφή στο πρόχειρο
 CopyPosting=Αντιγραφή καταχώρησης σε %s στυλ
 CopyPosting.abbr=Αντιγραφή σε %s στυλ
@@ -713,6 +690,39 @@ copy.copied.posting=Καταχώρηση %s έχει αντιγραφεί στο
 copy.copySelected=Αντιγραφή επιλογής με το συνδυασμό πλήκτρων Ctrl + c.
 copy.operaPaste=Επικόλληση με Shift + αριστερό κλικ.
 
+#matches
+matches.income=Εσοδα\:
+matches.attackdefensebars=Μπάρες Επίθεση εν. Άμυνας
+matches.right=Δεξιά
+matches.left=Αριστερά
+matches.center=Κεντρικό
+matches.defense=αμ
+matches.attack=επ
+matches.indfreekick=Εμμεσο φάουλ
+matches.wronglang=Foxtrick\: Τα στατιστικά δεν μπορούν να εμφανιστούν επειδή η γλώσσα σας δεν υπάρχει ή επειδή έχετε λάθος γλώσσα στις προτιμήσεις. Παρακαλώ βεβαιωθείτε ότι η γλώσσα του Foxtrick είναι η ίδια με του Hattrick.
+total_stars=Μέτρηση Συνόλου Αστεριών
+
+#matchdetail
+match.ratings.midfield=Κέντρο
+match.ratings.attack=Επίθεση
+match.ratings.defence=Αμυνα
+match.ratings.total=Σύνολο
+
+match.ratings.right=Δεξιά
+match.ratings.center=Κέντρο
+match.ratings.left=Αριστερά
+match.ratings.rightshort=Δ
+match.ratings.centershort=Κ
+match.ratings.leftshort=Α
+match.ratings.ifkshort=I
+
+ratings.HatStats=HatStats
+ratings.LoddarStats=LoddarStats
+ratings.PeasoStats=PeasoStats
+ratings.VnukStats=VnukStats
+ratings.HTitaVal=HTitaVal
+ratings.GardierStats=GardierStats
+
 MatchReportFormat.MatchReport=αναφορα αγωνα
 MatchReportFormat.lineup=αρχικη συνθεση
 MatchReportFormat.kickOff=Σέντρα
@@ -722,23 +732,6 @@ MatchReportFormat.extraTime=παράταση
 MatchReportFormat.penaltyShootOut=Πέναλτι
 MatchReportFormat.result=Αποτέλεσμα
 
-
-#matches
-matches.attackdefensebars=Μπάρες Επίθεση εν. Άμυνας
-matches.right=Δεξιά
-matches.left=Αριστερά
-matches.center=Κεντρικό
-matches.defense=αμ
-matches.attack=επ
-matches.indfreekick=Εμμεσο φάουλ
-matches.wronglang=Foxtrick\: Τα στατιστικά δεν μπορούν να εμφανιστούν επειδή η γλώσσα σας δεν υπάρχει ή επειδή έχετε λάθος γλώσσα στις προτιμήσεις. Παρακαλώ βεβαιωθείτε ότι η γλώσσα του Foxtrick είναι η ίδια με του Hattrick.
-
-# Context menu items
-# This would look like: Copy player ID: 123456789
-copy.id=Αντιγραφή% s\:% i
-copy.link=Αντιγραφή τοποθεσίας δεσμού στο HT-ML
-copy.ht-ml=Αντιγραφή σε HT-ML
-copy.table=Αντιγραφή πίνακα σε HT-ML
 
 #teampopups
 Manager=διευθυντής
@@ -758,12 +751,6 @@ LastLineup=Τελευταία σύνθεση
 YouthMatches=Αγώνες νέων
 more=περισσότερες επιλογές...
 less=λιγότερες επιλογές...
-TeamPopupLinks.prefsCaption=Προτιμήσεις συνδέσμων
-TeamPopupLinks.ShowByDefault=Εμφάνιση προεπιλογής
-TeamPopupLinks.ShowOnMore=Εμφάνιση στις περισσότερες επιλογές
-TeamPopupLinks.OpenNewTab=Άνοιγμα σε νέα καρτέλα
-
-total_stars=Μέτρηση Συνόλου Αστεριών
 
 # FlagCollectionToMap
 flagCollectionToMap.ShowMap=Δείξε χάρτη
@@ -775,11 +762,6 @@ flagCollectionToMap.MEast=Μέση Ανατολή
 flagCollectionToMap.SAmerica=Νότια Αμερική
 flagCollectionToMap.World=Κόσμος
 
-# SkillTable
-Skill_table=Πίνακας ικανοτήτων
-Switch_view=Αλλαγή προβολής
-showTimeInClub=Εμφάνιση χρόνου στην ομάδα
-
 team.status.booked=κλεισιμο φιλικου
 ShowFriendlyBooked.ShowFriendlies=Εμφάνισε φιλικά
 
@@ -790,10 +772,6 @@ TransferSearchResultFilters.hideInjured=Κρύψε τραυματίες
 TransferSearchResultFilters.hideSuspended=Κρύψε τιμωρημένους
 TransferSearchResultFilters.days=Ημέρες\:
 
-# refer to transfer search form
-Filters.minimum=Τουλάχιστον
-Filters.maximum=Μέγιστο
-
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
 RapidId.view=Προβολή
 RapidId.viewById=Προβολή με ID
@@ -802,32 +780,6 @@ RapidId.youth=Νέοι
 RapidId.tournaments=Τουρνουά
 RapidId.tournament=Τουρνουά
 
-# SkillTable
-Switch_view.title=Εναλλαγή της προβολής του πίνακα.
-skillTable.showTimeInClub=Εμφανίζει το χρόνο από τη στιγμή που ο παίκτης εντάχθηκε στη μεγάλη ομάδα
-Nationality=Εθνικότητα
-Nationality.abbr=Εθν
-Flag=Σημαία
-Flag.abbr=Σημαία
-Player=Παίκτης
-Player.abbr=Παίκτης
-Age=Ηλικία
-Age.abbr=Ηλικία
-Match=Αγώνας
-Series=Όμιλος
-
-TransferCompare=Σύγκριση μεταγραφών
-TransferCompare.abbr=Αυτοπεποίθηση
-Bookmark=Σελιδοδείκτης
-Bookmark.abbr=Σδ
-Deadline=Προθεσμία
-Deadline.abbr=Προθεσμία
-CurrentBid=Τρέχουσα προσφορά
-CurrentBid.abbr=Προσφορά
-CurrentBidder=Χρήστης με τη μεγαλύτερη προσφορά
-CurrentBidder.abbr=Υποψήφιος αγοραστής
-CurrentBidderShort=Χρήστης με τη μεγαλύτερη προσφορά
-CurrentBidderShort.abbr=$$
 
 # HTMSPrediction
 HTMSPrediction.prediction=προβλεψη αποτελεσματος
@@ -898,7 +850,15 @@ pageAction.mainContent=Εμφάνιση κύριου περιεχομένου
 pageAction.leftMenu=Εμφάνιση αριστερής μπάρας
 pageAction.all=Εμφάνιση όλων
 
-sidebarBox.actions=Ενέργειες
+#Locales for date and time
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
+datetimestrings.days=μέρες
+datetimestrings.hours=Ω
+datetimestrings.minutes=λ
+datetimestrings.short_seasons=σ
+datetimestrings.short_weeks=εβ
+datetimestrings.short_days=μ
 
 # buttons
 button.ok=ΟΚ
@@ -943,6 +903,8 @@ exception.error=Σφάλμα %s
 log.header=FoxTrick αρχείο καταγραφής
 # keep the following line untranslated
 
+ReadHtPrefs.HTLanguageChanged=Το FoxTrick εντόπισε μια αλλαγή στη γλώσσα. Η γλώσσα του FoxTrick τώρα έχει οριστεί σε %s.
+
 # End of IN-GAME STRINGS.
 
 
@@ -951,6 +913,10 @@ log.header=FoxTrick αρχείο καταγραφής
 Links.feeds=Τροφοδοσίες λιστών συνδέσμων (διαχωρισμένες με αλλαγές γραμμών)
 TickerAlert.enable=Ενεργοποίηση
 TickerAlert.sound=Ήχος
+TeamPopupLinks.prefsCaption=Προτιμήσεις συνδέσμων
+TeamPopupLinks.ShowByDefault=Εμφάνιση προεπιλογής
+TeamPopupLinks.ShowOnMore=Εμφάνιση στις περισσότερες επιλογές
+TeamPopupLinks.OpenNewTab=Άνοιγμα σε νέα καρτέλα
 
 #toolbar
 toolbar.title=FoxTrick
