--- a/content/locale/es-CR/foxtrick.properties
+++ b/content/locale/es-CR/foxtrick.properties
@@ -387,9 +387,6 @@ module.RatingsDisplay.HatStats.desc=Como Hatstats
 
 #Save for work
 
-#Embed Media
-EmbedMedia.EmbeddedImage=Imagen incustrada
-
 #Extrashortcuts
 ExtraShortcuts.statistics=Estadísticas
 ExtraShortcuts.transfers=Transferencias
@@ -397,10 +394,8 @@ ExtraShortcuts.ManageCHPP=Organizar tus aplicaciones CHPP
 ExtraShortcuts.prefs=Preferencias
 ExtraShortcuts.ftprefs=Preferencias de FoxTrick
 
-#lineupShortcut
-
-
 #HistoryStats
+HistoryStats.boxheader=Estadísticas del Historial
 HistoryStats.season=Temporada
 HistoryStats.season.short=T
 HistoryStats.cup=Ronda Copa
@@ -409,7 +404,6 @@ HistoryStats.league=Liga
 HistoryStats.league.short=L
 HistoryStats.finalPosition=Posición final en la Liga
 HistoryStats.finalPosition.short=P
-HistoryStats.boxheader=Estadísticas del Historial
 HistoryStats.cupwinner=Ganador Copa
 HistoryStats.cupwinner.short=GC
 
@@ -418,11 +412,9 @@ HistoryStats.cupwinner.short=GC
 YouthPromotes.future=El jugador puede ser promocionado luego de %1 día, en %2.;El jugador puede ser promocionado luego de %1 días, en %2.
 YouthPromotes.today=¡El jugador puede ser promocionado hoy\!
 
-# links
-links.boxheader=Enlaces
-
 #teamstats+filters
 TeamStats.boxheader=Resumen del Equipo
+TeamStats.General=General
 TeamStats.PlayerNotToOld=Jugadores < 19 años
 TeamStats.PlayerToOld=Jugadores >\= 19 años
 TeamStats.Cards=Tarjetas
@@ -436,6 +428,12 @@ TeamStats.ActivePlayers=Jugadores activos
 TeamStats.HomeGrownPlayers=Jugadores canteranos
 TeamStats.PurchasedPlayers=Jugadores comprados
 TeamStats.FilterFor=Filtro para
+
+#PlayerBirthday
+PlayerBirthday.boxheader=Cumpleaños
+PlayerBirthday.BirthdayToday=Cumpleaños hoy
+PlayerBirthday.BirthdayLastWeek=Última semana
+PlayerBirthday.BirthdayNextWeek=Próxima semana
 
 #season stats
 #note to translators. use abreviations of league table where applicable
@@ -462,43 +460,52 @@ LeagueNewsFilter.friendlies=Amistosos y cambios de entrenador
 LeagueNewsFilter.transfers=Transferencias
 LeagueNewsFilter.lineupChanges=Cambios Alineación
 
-# AddLeaveConfButton
-AddLeaveConfButton.alert=Presiona 'Guardar' en la siguiente página para abandonar este foro.
-AddLeaveConfButton.LeaveForum=Abandonar foro.
+#team pages
+sidebarBox.actions=Acciones
+TeamSelectBox.selectplayer=Seleccionar jugador
+ExtendedPlayerDetails.perseason=/ temporada
+ExtraPlayerInfo.defensiveTrainer=Un entrenador %s de mentalidad defensiva
+ExtraPlayerInfo.offensiveTrainer=Un entrenador %s de mentalidad ofensiva.
+ExtraPlayerInfo.balancedTrainer=Un entrenador %s que no es ni ofensivo ni defensivo.
+ManagerButtons.writeInGuestbook=Escribir en el Libro de Visitas
 
-#ShowForumPrefButton
+#forum
+AddLeaveConfButton.LeaveForum=Abandonar foro.
+AddLeaveConfButton.alert=Presiona 'Guardar' en la siguiente página para abandonar este foro.
 ShowForumPrefButton.forumPreferences=Preferencias del Foro
+FormatPostingText.ShowNestedQuotes=Mostrar citas anidadas
+HideSignatures.signaturetoggle=Firma
+MarkUnread.markunread=Marcar como no leído desde aquí
+EmbedMedia.EmbeddedImage=Imagen incustrada
+ForumStripHattrickLinks.ask=¿Deseas modificar el servidor de Hattrick en los enlaces, para hacerlos funcionar en el foro?
 
 # ForumTemplates
 ForumTemplates.make=Crear plantilla a partir de este mensaje
+ForumTemplates.make.error=La plantilla ya existe o está vacía
 ForumTemplates.show=Mostrar plantillas
 ForumTemplates.hide=Ocultar templates
-ForumTemplates.make.error=La plantilla ya existe o está vacía
 ForumTemplates.templateTitle=Nombre plantilla\:
 ForumTemplates.templateTitle.error='[' y ']' son caracteres no permitidos
 ForumTemplates.delete.ask=¿Borrar plantilla?
 
-#PostPreview
+#ForumPreview
 ForumPreview.preview.title=Mostrar Vista previa del mensaje
 ForumPreview.preview=Vista previa
 ForumPreview.send=Enviar
 
-
+#ForumYouthIcons
+ForumYouthIcons.toolbar.main=Enlaces Principales
 ForumYouthIcons.toolbar.youth=Enlaces de Juveniles
 ForumYouthIcons.toolbar.tournament=Torneos
-ForumYouthIcons.toolbar.main=Enlaces Principales
+ForumYouthIcons.toolbar.other=Varios
 ForumYouthIcons.youthplayerid=Insertar etiqueta de jugador juvenil
 ForumYouthIcons.youthteamid=Insertar etiqueta de equipo juvenil
 ForumYouthIcons.youthmatchid=Insertar etiqueta de partido juvenil
 ForumYouthIcons.youthseries=Insertar etiqueta de liga juvenil
 ForumYouthIcons.tournamentid=Insertar etiqueta de torneo.
 ForumYouthIcons.tournamentmatchid=Insertar etiqueta de partido de torneo.
-
-ForumYouthIcons.toolbar.other=Varios
 ForumYouthIcons.debug=Insertar registro de depuración de FoxTrick
 ForumYouthIcons.settings=Insertar preferencias de FoxTrick
-
-#special bbcode, not really youth icons
 ForumSpecialBBCode.q=Añadir cita
 ForumSpecialBBCode.br=Añadir Salto de línea
 ForumSpecialBBCode.user=Añadir ID del mánager
@@ -513,9 +520,6 @@ ForumSpecialBBCode.enterSeparator=Introducir separador personalizado
 ForumSpecialBBCode.forumSymbol=Insertar "%s"
 ForumSpecialBBCode.symbols=Insertar símbolo\: %s
 
-
-FormatPostingText.ShowNestedQuotes=Mostrar citas anidadas
-
 #Transferlistfilters
 TransferSearchFilters.boxheader=Filtros de Foxtrick
 TransferSearchFilters.enterName=Escriba el nombre del filtro\:
@@ -524,6 +528,7 @@ TransferSearchFilters.saveFilter=Guardar nuevo filtro
 
 #Filter
 Filters.label=Filtros
+Filters.addFilterOptions=Añade opciones de filtrado
 Filters.ok=Ok
 Filters.clear=Limpiar
 Filters.noFilter=Sin filtro
@@ -535,17 +540,8 @@ Filters.Form=Forma
 Filters.XP=Experiencia
 Filters.specialty=Especialidad
 Filters.stars=Estrellas
-Filters.addFilterOptions=Añade opciones de filtrado
-
-#Locales for date and time
-#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
-#next 6 use pluralFroms
-datetimestrings.days=día;días
-datetimestrings.hours=hr;hrs
-datetimestrings.minutes=min;mins
-datetimestrings.short_seasons=t;t
-datetimestrings.short_weeks=sm;sms
-datetimestrings.short_days=d,d
+Filters.minimum=Mínimo
+Filters.maximum=Máximo
 
 #Transfer prices
 MedianTransferPrice.median=Mediana del precio
@@ -610,6 +606,7 @@ categories.R=R
 categories.E1=Extra2
 categories.E2=E2
 
+#match positions
 match.pos.kp=Portero
 match.pos.kp.abbr=PR
 match.pos.lb=Defensa lateral izquierdo
@@ -646,17 +643,22 @@ match.role.captain.abbr=Capt.
 
 match.player.unknown=Jugador desconocido
 
-TeamStats.General=General
-
+# SkillTable
+Skill_table=Tabla de Habilidades
+Switch_view=Cambiar vista
+AddHomegrown=Añadir canterano
+showTimeInClub=Mostrar tiempo en el club
+Switch_view.title=Cambiar la vista de la tabla
+skillTable.addHomegrown=Añadir a todos los canterandos del equipo actual
+skillTable.showTimeInClub=Mostrar el tiempo desde que el jugador se unió al equipo mayor
+skilltable.youthplayer=juvenil
+skilltable.rebought_youthplayer=juvenil recomprado
 PlayerNumber=Número
 PlayerNumber.abbr=\#
-
 TSI=Total Skill Index
 TSI.abbr=TSI
-
 CanBePromotedIn=Puede ser promocionado en
 CanBePromotedIn.abbr=Prom
-
 Personality=Personalidad
 Agreeability=Carácter
 Agreeability.abbr=Ca
@@ -664,33 +666,26 @@ Aggressiveness=Agresividad
 Aggressiveness.abbr=Ag
 Honesty=Honestidad
 Honesty.abbr=Ho
-
 Leadership=Liderazgo
 Leadership.abbr=LD
 Experience=Experiencia
 Experience.abbr=EX
-
 Stamina=Condición
 Stamina.abbr=Con
 Form=Form
 Form.abbr=Fo
-
 Loyalty=Lelatad
 Loyalty.abbr=Le
 MotherClubBonus=Bono de club madre
 MotherClubBonus.abbr=BCM
-
 Status=Estado
 Status.abbr=Estado
-
 Yellow_card=Tarjeta Amarilla
 Yellow_card.abbr=A
 Red_card=Tarjeta Roja
 Red_card.abbr=R
-
 Speciality=Especialidad
 Speciality.abbr=Esp
-
 Last_match=Último partido
 Last_match.abbr=Último
 Last_stars=Estrellas
@@ -704,18 +699,14 @@ Last_position.abbr=Pos
 #following string uses pluralForms
 Last_match_played_as_at=Jugó %1 minuto como %2 en su último partido en el %3.;Jugó %1 minutos como %2 en su último partido en el %3.
 Last_match_didnot_play=No ha jugado todavía.
-
 Bruised=Lastimado
 Bruised.abbr=Las
 Injured=Lesionado
 Injured.abbr=Les
-
 Salary=Salario
 Salary.abbr=Sal
-
 TransferListed=Transferible
 TransferListed.abbr=LT
-
 NrOfMatches=Número de partidos
 NrOfMatches.abbr=NP
 LeagueGoals=Goles en liga
@@ -728,43 +719,48 @@ CareerGoals=Goles de la carrera
 CareerGoals.abbr=GT
 Hattricks=Hattricks
 Hattricks.abbr=HT
-
 Current_club=Club actual
 Current_club.abbr=Club
 Current_league=Liga Actual
 Current_league.abbr=Liga
-
 JoinedSince=Llegó desde
 JoinedSince.abbr=Desde
-
 Hotlist=Lista Caliente
 Hotlist.abbr=LC
+Coach=Entrenador
+CurrentSquad=Club Actual
+Nationality=Nacionalidad
+Nationality.abbr=Nac
+Flag=Bandera
+Flag.abbr=Ban
+Player=Jugador
+Player.abbr=Jug
+Age=Edad
+Age.abbr=Edad
+Match=Partido
+Series=Liga
+TransferCompare=Comparador de Transferencias
+TransferCompare.abbr=CT
+Bookmark=Favorito
+Bookmark.abbr=Fv
+Deadline=Límite
+Deadline.abbr=Lím
+CurrentBid=Oferta actual
+CurrentBid.abbr=Ofe
+CurrentBidder=Mánager con oferta más alta
+CurrentBidder.abbr=Mángar
+CurrentBidderShort=Oferta más alta
+CurrentBidderShort.abbr=MnOf
 
-skilltable.youthplayer=juvenil
-skilltable.rebought_youthplayer=juvenil recomprado
-
-#matchdetail
-match.ratings.midfield=Mediocampo
-match.ratings.attack=Ataque
-match.ratings.defence=Defensa
-match.ratings.total=Total
-
-match.ratings.right=Derecha
-match.ratings.center=Centro
-match.ratings.left=Izquierda
-match.ratings.rightshort=D
-match.ratings.centershort=C
-match.ratings.leftshort=I
-match.ratings.ifkshort=T
+#confirms
 ConfirmActions.bid=¿Deseas ofrecer por este jugador? El precio es %s.
 ConfirmActions.transferlist=¿Deseas poner a este jugador en la lista de transferencias? El precio solicitado es %s
 ConfirmActions.hirestaff=¿Deseas contratar %num %kind?
 ConfirmActions.sackstaff=¿Deseas despedir %num %kind?
 ConfirmActions.ntremove=¿Deseas añadir/remover este jugador del equipo?
-ForumStripHattrickLinks.ask=¿Deseas modificar el servidor de Hattrick en los enlaces, para hacerlos funcionar en el foro?
-HideSignatures.signaturetoggle=Firma
-MarkUnread.markunread=Marcar como no leído desde aquí
-TeamSelectBox.selectplayer=Seleccionar jugador
+
+# links
+links.boxheader=Enlaces
 links.custom.selecticon=Seleccionar icono
 links.custom.addpersonallink=Añadir enlace persinalizado
 links.custom.addlink=Añadir enlace
@@ -777,17 +773,7 @@ links.custom.tags=Etiquetas
 links.custom.help=Ayuda
 links.custom.helptext=Este es el modo editor. Dando clic en el encabezado, cambias entre el modo editor y el normal. Solo en el modo normal tus enlaces son totalemente funcionales. Enlaces externos estáticos son fáciles de añadir, solo agrega la URL completa (Ej\: http\: //alltid.org/league/427/) . Para enlaces internos estáticos, omite la parte del servidor (Ej\: /World/Series/Default.aspx?LeagueLevelUnitID\=427). Las etiquetas solo las necesitas para enlaces dinámicos. Con las etiquetas, los enlaces dinámicos cambian usando la información del lado o página donde te encuentras. Por ejemplo http\://alltid.org/league/[leagueid] te llevará al enlace de la liga que estas viendo en Hattrick. Las etiquetas que estás disponibles para cada página están enlistadas en el cuadro de selección. Solo puedes usar las etiquetas en la lista de la página en la que te encuentras, cuando añades el enlace personalizado. El texto que se produce es unicamente una plantilla. Puedes escribir la etiqueta usando []
 links.custom.helptext2=También puedes exportar los enlaces y compartirlos.Para lograr esto, usa el botón de exportar un archivo y guarda el enlace. Los enlaces se añaden al archivo, por lo tanto puedes tener varios enlaces dentro de un archivo. Para importar enlaces, ve al cuado de preferencias y elige preferencias de Importar. Solo las preferencias presentadas dentro del archivo seleccionado serán importados, que en este caso son tus enlacess. Ninguno de los enlaces previos serán eliminados.
-matches.income=Ingreso\:
-PlayerBirthday.boxheader=Cumpleaños
-PlayerBirthday.BirthdayToday=Cumpleaños hoy
-PlayerBirthday.BirthdayLastWeek=Última semana
-PlayerBirthday.BirthdayNextWeek=Próxima semana
-copy.matchid=Clic para copiar el matchID al portapapeles
-ExtendedPlayerDetails.perseason=/ temporada
 
-ExtraPlayerInfo.defensiveTrainer=Un entrenador %s de mentalidad defensiva
-ExtraPlayerInfo.offensiveTrainer=Un entrenador %s de mentalidad ofensiva.
-ExtraPlayerInfo.balancedTrainer=Un entrenador %s que no es ni ofensivo ni defensivo.
 
 #following string uses pluralForms
 notify.newMail=Has recibido %s nuevo correo.;Has recibido %s nuevos correos.
@@ -796,25 +782,18 @@ notify.newForumMessage=Has recibido %s nuevo mensaje en el foro.;Has recibido %s
 
 matchView.htLive=HT Live
 
-module.modules_allpages=Módulos globales
-ReadHtPrefs.HTLanguageChanged=Has seleccionado en las preferencias de Foxtrick, que el idioma de Foxtrick se adapte automáticamente cuando escojas otro idiona en HT. El idioma de Foxtrick es\: %s.
-
-Coach=Entrenador
-CurrentSquad=Club Actual
-
-
-ManagerButtons.writeInGuestbook=Escribir en el Libro de Visitas
-copy.copyplayerad=Copiar anuncio de jugador al portapapeles
-copy.copied=El anuncio del jugador ha sido copiado al portapapeles
-
-ratings.HatStats=HatStats
-ratings.LoddarStats=LoddarStats
-ratings.PeasoStats=PeasoStats
-ratings.VnukStats=VnukStats
-ratings.HTitaVal=HTitaVal
-ratings.GardierStats=GardierStats
+# Context menu items
+# This would look like: Copy player ID: 123456789
+copy.id=Copiar %s\: %i
+copy.link=Copiar locación del enlace en HT-ML
+copy.ht-ml=Copiar en HT-ML
+copy.table=Copiar Tabla en HT-ML
 
 #copy
+copy.copyplayerad=Copiar anuncio de jugador al portapapeles
+copy.copied=El anuncio del jugador ha sido copiado al portapapeles
+copy.matchid=Clic para copiar el matchID al portapapeles
+
 copy.PostID=Copiar al Portapapeles el ID del mensaje
 CopyPosting=Copiar mensaje en estilo %s
 CopyPosting.abbr=Copiar en estilo %s
@@ -846,6 +825,39 @@ copy.copied.posting=El mensaje %s ha sido copiado al portapapeles.
 copy.copySelected=Copiar selección con Ctrl + C.
 copy.operaPaste=Pegar selección con Shift + Clic izquierdo.
 
+#matches
+matches.income=Ingreso\:
+matches.attackdefensebars=Comparación Ataque vs Defensa
+matches.right=Derecha
+matches.left=Izquierda
+matches.center=Centro
+matches.defense=def
+matches.attack=atq
+matches.indfreekick=Tiro Indirecto
+matches.wronglang=Foxtrick\: No se pueden mostrar las estadísticas porque tu idioma no está registrado o las preferencias del idioma son incorrectas
+total_stars=Total de estrellas
+
+#matchdetail
+match.ratings.midfield=Mediocampo
+match.ratings.attack=Ataque
+match.ratings.defence=Defensa
+match.ratings.total=Total
+
+match.ratings.right=Derecha
+match.ratings.center=Centro
+match.ratings.left=Izquierda
+match.ratings.rightshort=D
+match.ratings.centershort=C
+match.ratings.leftshort=I
+match.ratings.ifkshort=T
+
+ratings.HatStats=HatStats
+ratings.LoddarStats=LoddarStats
+ratings.PeasoStats=PeasoStats
+ratings.VnukStats=VnukStats
+ratings.HTitaVal=HTitaVal
+ratings.GardierStats=GardierStats
+
 MatchReportFormat.MatchReport=Reporte del partido
 MatchReportFormat.lineup=Alineación
 MatchReportFormat.kickOff=Patada inicial
@@ -855,23 +867,6 @@ MatchReportFormat.extraTime=Tiempo extra
 MatchReportFormat.penaltyShootOut=Tanda de penales
 MatchReportFormat.result=Resultado
 
-
-#matches
-matches.attackdefensebars=Comparación Ataque vs Defensa
-matches.right=Derecha
-matches.left=Izquierda
-matches.center=Centro
-matches.defense=def
-matches.attack=atq
-matches.indfreekick=Tiro Indirecto
-matches.wronglang=Foxtrick\: No se pueden mostrar las estadísticas porque tu idioma no está registrado o las preferencias del idioma son incorrectas
-
-# Context menu items
-# This would look like: Copy player ID: 123456789
-copy.id=Copiar %s\: %i
-copy.link=Copiar locación del enlace en HT-ML
-copy.ht-ml=Copiar en HT-ML
-copy.table=Copiar Tabla en HT-ML
 
 #teampopups
 Manager=Mánager
@@ -891,12 +886,6 @@ LastLineup=Última Alineación
 YouthMatches=Partidos Juveniles
 more=más...
 less=menos...
-TeamPopupLinks.prefsCaption=Preferencias de Elnace
-TeamPopupLinks.ShowByDefault=Mostrar por defecto
-TeamPopupLinks.ShowOnMore=Mostrar más
-TeamPopupLinks.OpenNewTab=Abrir en una nueva pestaña
-
-total_stars=Total de estrellas
 
 # FlagCollectionToMap
 flagCollectionToMap.ShowMap=Mostrar mapa
@@ -908,12 +897,6 @@ flagCollectionToMap.MEast=Medio Este
 flagCollectionToMap.SAmerica=Sudamérica
 flagCollectionToMap.World=Mundo
 
-# SkillTable
-Skill_table=Tabla de Habilidades
-Switch_view=Cambiar vista
-AddHomegrown=Añadir canterano
-showTimeInClub=Mostrar tiempo en el club
-
 team.status.booked=Amistoso pactado
 ShowFriendlyBooked.ShowFriendlies=Mostrar amistosos friendlies
 
@@ -924,10 +907,6 @@ TransferSearchResultFilters.hideInjured=Esconder lesionado
 TransferSearchResultFilters.hideSuspended=Esconder suspendido
 TransferSearchResultFilters.days=Días\:
 
-# refer to transfer search form
-Filters.minimum=Mínimo
-Filters.maximum=Máximo
-
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
 RapidId.view=Vista
 RapidId.viewById=Vista por ID
@@ -936,33 +915,6 @@ RapidId.youth=Juvenil
 RapidId.tournaments=Torneos
 RapidId.tournament=Torneo
 
-# SkillTable
-Switch_view.title=Cambiar la vista de la tabla
-skillTable.addHomegrown=Añadir a todos los canterandos del equipo actual
-skillTable.showTimeInClub=Mostrar el tiempo desde que el jugador se unió al equipo mayor
-Nationality=Nacionalidad
-Nationality.abbr=Nac
-Flag=Bandera
-Flag.abbr=Ban
-Player=Jugador
-Player.abbr=Jug
-Age=Edad
-Age.abbr=Edad
-Match=Partido
-Series=Liga
-
-TransferCompare=Comparador de Transferencias
-TransferCompare.abbr=CT
-Bookmark=Favorito
-Bookmark.abbr=Fv
-Deadline=Límite
-Deadline.abbr=Lím
-CurrentBid=Oferta actual
-CurrentBid.abbr=Ofe
-CurrentBidder=Mánager con oferta más alta
-CurrentBidder.abbr=Mángar
-CurrentBidderShort=Oferta más alta
-CurrentBidderShort.abbr=MnOf
 
 # HTMSPrediction
 HTMSPrediction.prediction=Predicción resultado
@@ -1034,7 +986,15 @@ pageAction.mainContent=Mostrar contenido principal
 pageAction.leftMenu=Mostrar barra izquierda
 pageAction.all=Mostrar todo
 
-sidebarBox.actions=Acciones
+#Locales for date and time
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
+datetimestrings.days=día;días
+datetimestrings.hours=hr;hrs
+datetimestrings.minutes=min;mins
+datetimestrings.short_seasons=t;t
+datetimestrings.short_weeks=sm;sms
+datetimestrings.short_days=d,d
 
 # buttons
 button.ok=OK
@@ -1080,6 +1040,8 @@ exception.error=Error %s
 log.header=Log de Foxtrick
 # keep the following line untranslated
 
+ReadHtPrefs.HTLanguageChanged=Has seleccionado en las preferencias de Foxtrick, que el idioma de Foxtrick se adapte automáticamente cuando escojas otro idiona en HT. El idioma de Foxtrick es\: %s.
+
 # End of IN-GAME STRINGS.
 
 
@@ -1088,6 +1050,10 @@ log.header=Log de Foxtrick
 Links.feeds=Fuentes de lista de enlaces(separadas por saltos de línea)
 TickerAlert.enable=Activar
 TickerAlert.sound=Sonido
+TeamPopupLinks.prefsCaption=Preferencias de Elnace
+TeamPopupLinks.ShowByDefault=Mostrar por defecto
+TeamPopupLinks.ShowOnMore=Mostrar más
+TeamPopupLinks.OpenNewTab=Abrir en una nueva pestaña
 
 #toolbar
 toolbar.title=FoxTrick
