--- a/content/locale/es-ES/foxtrick.properties
+++ b/content/locale/es-ES/foxtrick.properties
@@ -362,8 +362,6 @@ module.RatingsDisplay.DenominationsRange.desc=En un rango de 0-20
 
 #Save for work
 
-#Embed Media
-
 #Extrashortcuts
 ExtraShortcuts.statistics=estadísticas
 ExtraShortcuts.transfers=transferencias
@@ -371,10 +369,8 @@ ExtraShortcuts.ManageCHPP=Gestiona tus productos CHPP
 ExtraShortcuts.prefs=preferencias
 ExtraShortcuts.ftprefs=Preferencias de FoxTrick
 
-#lineupShortcut
-
-
 #HistoryStats
+HistoryStats.boxheader=Estadísticas históricas
 HistoryStats.season=temporada
 HistoryStats.season.short=t
 HistoryStats.cup=copa
@@ -383,7 +379,6 @@ HistoryStats.league=liga
 HistoryStats.league.short=Liga
 HistoryStats.finalPosition=pos
 HistoryStats.finalPosition.short=P
-HistoryStats.boxheader=Estadísticas históricas
 HistoryStats.cupwinner=Ganador de Copa
 HistoryStats.cupwinner.short=GC
 
@@ -392,11 +387,9 @@ HistoryStats.cupwinner.short=GC
 YouthPromotes.future=El jugador puede ser promocionado %1 día(s) después, el %2.
 YouthPromotes.today=¡El jugador puede ser promocionado hoy\!
 
-# links
-links.boxheader=Links
-
 #teamstats+filters
 TeamStats.boxheader=Resumen del equipo
+TeamStats.General=General
 TeamStats.PlayerNotToOld=Jugadores < 19 años
 TeamStats.PlayerToOld=Jugadores >\= 19 años
 TeamStats.Cards=Tarjetas
@@ -409,6 +402,12 @@ TeamStats.ActivePlayers=Jugadores activos
 TeamStats.HomeGrownPlayers=Canteranos
 TeamStats.PurchasedPlayers=Jugadores comprados
 TeamStats.FilterFor=Filtro para
+
+#PlayerBirthday
+PlayerBirthday.boxheader=Cumpleaños
+PlayerBirthday.BirthdayToday=Cumpleaños hoy
+PlayerBirthday.BirthdayLastWeek=Cumpleaños la semana pasada
+PlayerBirthday.BirthdayNextWeek=Cumpleaños la próxima semana
 
 #season stats
 #note to translators. use abreviations of league table where applicable
@@ -435,40 +434,47 @@ LeagueNewsFilter.friendlies=Amistosos y amigos
 LeagueNewsFilter.transfers=transferencias
 LeagueNewsFilter.lineupChanges=Cambios en la alineación
 
-# AddLeaveConfButton
-AddLeaveConfButton.alert=Presiona 'Guardar' en la siguiente página para abandonar esta conferencia.
-AddLeaveConfButton.LeaveForum=Abandonar conferencia
+#team pages
+sidebarBox.actions=Acciones
+TeamSelectBox.selectplayer=Seleccionar jugador
+ExtendedPlayerDetails.perseason=/ temporada
+ExtraPlayerInfo.defensiveTrainer=Un entrenador de nivel %s de mentalidad defensiva.
+ExtraPlayerInfo.offensiveTrainer=Un entrenador de nivel %s amante del juego ofensivo.
+ExtraPlayerInfo.balancedTrainer=Un entrenador de nivel %s de carácter neutro (ni ofensivo ni defensivo).
+ManagerButtons.writeInGuestbook=Escribir en el libro de visitas
 
-#ShowForumPrefButton
+#forum
+AddLeaveConfButton.LeaveForum=Abandonar conferencia
+AddLeaveConfButton.alert=Presiona 'Guardar' en la siguiente página para abandonar esta conferencia.
 ShowForumPrefButton.forumPreferences=Preferencias del foro
+HideSignatures.signaturetoggle=Firma
+MarkUnread.markunread=Marcar como no leídos desde aquí
+ForumStripHattrickLinks.ask=¿Deseas eliminar la información del servidor de los enlaces para que funcionen en el foro?
 
 # ForumTemplates
 ForumTemplates.make=Crear plantilla a partir de este mensaje
+ForumTemplates.make.error=La plantilla ya existe o está vacía
 ForumTemplates.show=Mostrar plantillas
 ForumTemplates.hide=Ocultar plantillas
-ForumTemplates.make.error=La plantilla ya existe o está vacía
 ForumTemplates.templateTitle=Título de la plantillas\:
 ForumTemplates.templateTitle.error='[' y ']' no se permiten en títulos
 ForumTemplates.delete.ask=¿Borrar la plantilla?
 
-#PostPreview
+#ForumPreview
 ForumPreview.preview.title=Mostrar vista previa del mensaje
 ForumPreview.preview=Vista previa
 ForumPreview.send=Enviar
 
-
-ForumYouthIcons.toolbar.youth=Links de Juveniles
+#ForumYouthIcons
 ForumYouthIcons.toolbar.main=Links principales
+ForumYouthIcons.toolbar.youth=Links de Juveniles
+ForumYouthIcons.toolbar.other=Otros
 ForumYouthIcons.youthplayerid=Link a jugador juvenil
 ForumYouthIcons.youthteamid=link a equipo juvenil
 ForumYouthIcons.youthmatchid=Añadir link a partido de juveniles
 ForumYouthIcons.youthseries=Añadir link a serie de juveniles
-
-ForumYouthIcons.toolbar.other=Otros
 ForumYouthIcons.debug=Inserta log de debug de FoxTrick
 ForumYouthIcons.settings=Inserta características de FoxTrick
-
-#special bbcode, not really youth icons
 ForumSpecialBBCode.q=Añadir cita
 ForumSpecialBBCode.br=añade salto de línea
 ForumSpecialBBCode.user=añade ID de usuario
@@ -483,8 +489,6 @@ ForumSpecialBBCode.enterSeparator=Añade un separador personalizado
 ForumSpecialBBCode.forumSymbol=Insertar "%s"
 ForumSpecialBBCode.symbols=Insertar símbolo\: %s
 
-
-
 #Transferlistfilters
 TransferSearchFilters.boxheader=Filtros de Foxtrick
 TransferSearchFilters.enterName=Seleccionar nombre del filtro\:
@@ -493,6 +497,7 @@ TransferSearchFilters.saveFilter=Guardar nuevo filtro
 
 #Filter
 Filters.label=Filtros
+Filters.addFilterOptions=Añadir opciones de filtro
 Filters.ok=Aceptar
 Filters.clear=Limpiar
 Filters.noFilter=Ningún filtro
@@ -503,17 +508,8 @@ Filters.Form=Forma
 Filters.XP=Experiencia
 Filters.specialty=Especialidad
 Filters.stars=Estrellas
-Filters.addFilterOptions=Añadir opciones de filtro
-
-#Locales for date and time
-#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
-#next 6 use pluralFroms
-datetimestrings.days=días
-datetimestrings.hours=hr
-datetimestrings.minutes=min
-datetimestrings.short_seasons=t
-datetimestrings.short_weeks=s
-datetimestrings.short_days=E
+Filters.minimum=Al menos
+Filters.maximum=Máximo
 
 #Transfer prices
 MedianTransferPrice.median=Mediana del precio
@@ -578,6 +574,7 @@ categories.R=D
 categories.E1=E1
 categories.E2=E2
 
+#match positions
 match.pos.kp=Portero
 match.pos.lb=Defensor lateral izquierdo
 match.pos.lb.abbr=DLI
@@ -595,16 +592,20 @@ match.role.captain.abbr=Capi
 
 match.player.unknown=Jugador desconocido
 
-TeamStats.General=General
-
+# SkillTable
+Skill_table=Tabla de habilidades
+Switch_view=Cambiar vista
+AddHomegrown=Añadir jugadores promocionados por el club
+showTimeInClub=Mostrar tiempo en el club
+Switch_view.title=Cambia la vista de la tabla.
+skillTable.addHomegrown=Añadir todos los jugadores promocionados por el equipo desde el actual
+skillTable.showTimeInClub=Muestra el tiempo transcurrido desde que el jugador fue promocionado al equipo senior
+skilltable.youthplayer=juvenil canterano
 PlayerNumber=Dorsal del jugador
 PlayerNumber.abbr=\#
-
 TSI=TSI
 TSI.abbr=TSI
-
 CanBePromotedIn=Puede ser promocionado en
-
 Personality=Personalidad
 Agreeability=Carácter
 Agreeability.abbr=Ca
@@ -612,30 +613,23 @@ Aggressiveness=Agresividad
 Aggressiveness.abbr=Ag
 Honesty=Honestidad
 Honesty.abbr=Ho
-
 Leadership=Liderazgo
 Leadership.abbr=LS
 Experience=Experiencia
 Experience.abbr=Ex
-
 Stamina=Resistencia
 Stamina.abbr=Con
 Form=forma
 Form.abbr=Fo
-
 Loyalty=Fidelidaz
-
 Status=Estado
 Status.abbr=Estado
-
 Yellow_card=Tarjeta amarilla
 Yellow_card.abbr=A
 Red_card=Tarjeta Rojo
 Red_card.abbr=D
-
 Speciality=Especialidad
 Speciality.abbr=BP
-
 Last_match=Último partido
 Last_match.abbr=Último
 Last_stars=Última calificación
@@ -648,18 +642,14 @@ Last_position.abbr=pos
 #following string uses pluralForms
 Last_match_played_as_at=Jugó %1 min(s) como %2 en su útimo partido en el %3.
 Last_match_didnot_play=No ha jugado todavía.
-
 Bruised=Lastimado
 Bruised.abbr=Las.
 Injured=Lesionado
 Injured.abbr=Les
-
 Salary=Sueldo
 Salary.abbr=Sueldo
-
 TransferListed=En lista de transferencias
 TransferListed.abbr=TL
-
 NrOfMatches=Número de partidos
 NrOfMatches.abbr=NP
 LeagueGoals=Goles en Liga
@@ -672,42 +662,48 @@ CareerGoals=Goles en su carrera
 CareerGoals.abbr=G
 Hattricks=Hattricks
 Hattricks.abbr=HT
-
 Current_club=Equipo actual
 Current_club.abbr=Equipo
 Current_league=Liga actual
 Current_league.abbr=liga
-
 JoinedSince=Jugando desde
 JoinedSince.abbr=Desde
-
 Hotlist=Lista
 Hotlist.abbr=Lista
+Coach=Entrenador
+CurrentSquad=Formación actual
+Nationality=Nacionalidad
+Nationality.abbr=Nac
+Flag=Bandera
+Flag.abbr=Ban.
+Player=Jugador
+Player.abbr=Jugador
+Age=edad
+Age.abbr=edad
+Match=Partido
+Series=Liga
+TransferCompare=Comparador de transferencias
+TransferCompare.abbr=CT
+Bookmark=Favorito
+Bookmark.abbr=Fav
+Deadline=Límite
+Deadline.abbr=Límite
+CurrentBid=Puja actual
+CurrentBid.abbr=Puja
+CurrentBidder=Puja actual mayor
+CurrentBidder.abbr=Pujador
+CurrentBidderShort=Pujador actual mayor
+CurrentBidderShort.abbr=Puj.
 
-skilltable.youthplayer=juvenil canterano
-
-#matchdetail
-match.ratings.midfield=Mediocampo
-match.ratings.attack=Ataque
-match.ratings.defence=Defensa
-match.ratings.total=Total
-
-match.ratings.right=Derecha
-match.ratings.center=Centro
-match.ratings.left=Izquierda
-match.ratings.rightshort=D
-match.ratings.centershort=C
-match.ratings.leftshort=P
-match.ratings.ifkshort=I
+#confirms
 ConfirmActions.bid=¿Deseas ofrecer por este jugador? El precio es %s
 ConfirmActions.transferlist=¿Deseas poner a este jugador en la lista de transferencias? El precio solicitado es %s
 ConfirmActions.hirestaff=¿Deseas contratar %num %kind?
 ConfirmActions.sackstaff=¿Deseas despedir %num %kind?
 ConfirmActions.ntremove=¿Realmente deseas añadir / eliminar a este jugador?
-ForumStripHattrickLinks.ask=¿Deseas eliminar la información del servidor de los enlaces para que funcionen en el foro?
-HideSignatures.signaturetoggle=Firma
-MarkUnread.markunread=Marcar como no leídos desde aquí
-TeamSelectBox.selectplayer=Seleccionar jugador
+
+# links
+links.boxheader=Links
 links.custom.selecticon=Seleccionar icono
 links.custom.addpersonallink=Añadir link personalizado
 links.custom.addlink=Añadir link
@@ -720,17 +716,7 @@ links.custom.tags=Etiquetas
 links.custom.help=Ayuda
 links.custom.helptext=En primer lugar, esto es sólo el modo de edición. Al hacer clic en el encabezado de esta sección cambias entre el modo editor y el modo normal. Sólo en el modo normal tus propios enlaces son totalmente funcionales. Enlaces externos estáticos son fáciles de añadir, basta con añadir la URL completa (por ejemplo\: http\: //alltid.org/league/427/). Para enlaces internos no incluyas a la parte del servidor (Ejemplo\: /World/Series/Default.aspx?LeagueLevelUnitID \= 427). Sólo necesitas las etiquetas para enlaces dinámicos más raros. Con las etiquetas los enlaces cambian dinámicamente con la información de la página que se encuentra. Por ejemplo http\://alltid.org/league/[leagueid] siempre te llevará a la página Alltid de la liga que seacaba de ver en Hattrick. Las etiquetas que están disponibles en cada página se enumeran en el cuadro de selección. Sólo se pueden utilizar las que se enumeran en la página que desea agregar su enlace personalizado. El texto en el cuadro es sólo una plantilla de muestra. Puedes escribir una etiqueta tú mismo (usando []).
 links.custom.helptext2=También puedes exportar tus enlaces y compartirlos. Para hacer esto haz clic en el botón Exportar y selecciona un archivo para guardar ese enlace. Los enlaces se añaden a ese archivo, por lo tanto, puedes guardar varios enlaces en un solo archivo. Para importar los enlaces ve al cuadro de preferencias y a la opción importar las preferencias. Sólo las entradas en el archivo seleccionado será importadas, que en este caso son los links. Ninguno de los enlaces anteriores se borrará.
-matches.income=Ingresos\:
-PlayerBirthday.boxheader=Cumpleaños
-PlayerBirthday.BirthdayToday=Cumpleaños hoy
-PlayerBirthday.BirthdayLastWeek=Cumpleaños la semana pasada
-PlayerBirthday.BirthdayNextWeek=Cumpleaños la próxima semana
-copy.matchid=Pulsa para copiar el ID del partido al portapapeles
-ExtendedPlayerDetails.perseason=/ temporada
 
-ExtraPlayerInfo.defensiveTrainer=Un entrenador de nivel %s de mentalidad defensiva.
-ExtraPlayerInfo.offensiveTrainer=Un entrenador de nivel %s amante del juego ofensivo.
-ExtraPlayerInfo.balancedTrainer=Un entrenador de nivel %s de carácter neutro (ni ofensivo ni defensivo).
 
 #following string uses pluralForms
 notify.newMail=Has recibido %s nuevo(s) HTmail(s).
@@ -739,25 +725,18 @@ notify.newForumMessage=Has recibido %s nuevos mensajes del foro.
 
 matchView.htLive=HT Live
 
-module.modules_allpages=Módulos que se ejecutan en todas las páginas
-ReadHtPrefs.HTLanguageChanged=Has seleccionado en las preferencias principales de Foxtrick que el idioma de Foxtrick se actualice automáticamente cuando cambies el idioma en Hattrick. Tu nuevo idioma de Foxtrick es\:
-
-Coach=Entrenador
-CurrentSquad=Formación actual
-
-
-ManagerButtons.writeInGuestbook=Escribir en el libro de visitas
-copy.copyplayerad=Copiar información de jugador a portapapeles
-copy.copied=La información del jugador ha sido copiada al portapapeles.
-
-ratings.HatStats=HatStats
-ratings.LoddarStats=LoddarStats
-ratings.PeasoStats=PeasoStats
-ratings.VnukStats=VnukStats
-ratings.HTitaVal=HTitaVal
-ratings.GardierStats=GardierStats
+# Context menu items
+# This would look like: Copy player ID: 123456789
+copy.id=Copiar %s\: %i
+copy.link=Copia el link en HT-ML
+copy.ht-ml=Copia en HT-ML
+copy.table=Copia la tabla en HT-ML
 
 #copy
+copy.copyplayerad=Copiar información de jugador a portapapeles
+copy.copied=La información del jugador ha sido copiada al portapapeles.
+copy.matchid=Pulsa para copiar el ID del partido al portapapeles
+
 copy.PostID=Copiar ID del mensaje al portapapeles
 CopyPosting=Copiar el mensaje en estilo %s
 CopyPosting.abbr=Copia en estilo %s
@@ -789,6 +768,39 @@ copy.copied.posting=El mensaje ha sido copiado al portapapeles.
 copy.copySelected=Copiar selección con Ctrl + C.
 copy.operaPaste=Pegar con Mayús + clic izquierdo.
 
+#matches
+matches.income=Ingresos\:
+matches.attackdefensebars=Comparación Ataque vs Defensa
+matches.right=Derecha
+matches.left=Izquierda
+matches.center=Centro
+matches.defense=def
+matches.attack=at
+matches.indfreekick=Tiro indirecto
+matches.wronglang=Foxtrick\: No se pueden mostrar las estadísticas porque tu idioma no está registrado o las preferencias del idioma son incorrectas
+total_stars=Suma total de estrellas
+
+#matchdetail
+match.ratings.midfield=Mediocampo
+match.ratings.attack=Ataque
+match.ratings.defence=Defensa
+match.ratings.total=Total
+
+match.ratings.right=Derecha
+match.ratings.center=Centro
+match.ratings.left=Izquierda
+match.ratings.rightshort=D
+match.ratings.centershort=C
+match.ratings.leftshort=P
+match.ratings.ifkshort=I
+
+ratings.HatStats=HatStats
+ratings.LoddarStats=LoddarStats
+ratings.PeasoStats=PeasoStats
+ratings.VnukStats=VnukStats
+ratings.HTitaVal=HTitaVal
+ratings.GardierStats=GardierStats
+
 MatchReportFormat.MatchReport=Informe del partido
 MatchReportFormat.lineup=Alineación
 MatchReportFormat.kickOff=Chutar
@@ -798,23 +810,6 @@ MatchReportFormat.extraTime=Tiempo extra
 MatchReportFormat.penaltyShootOut=Tanda de penaltis
 MatchReportFormat.result=Resultado
 
-
-#matches
-matches.attackdefensebars=Comparación Ataque vs Defensa
-matches.right=Derecha
-matches.left=Izquierda
-matches.center=Centro
-matches.defense=def
-matches.attack=at
-matches.indfreekick=Tiro indirecto
-matches.wronglang=Foxtrick\: No se pueden mostrar las estadísticas porque tu idioma no está registrado o las preferencias del idioma son incorrectas
-
-# Context menu items
-# This would look like: Copy player ID: 123456789
-copy.id=Copiar %s\: %i
-copy.link=Copia el link en HT-ML
-copy.ht-ml=Copia en HT-ML
-copy.table=Copia la tabla en HT-ML
 
 #teampopups
 Manager=Manager
@@ -834,12 +829,6 @@ LastLineup=Última alineación
 YouthMatches=Partidos de juveniles
 more=más...
 less=menos...
-TeamPopupLinks.prefsCaption=Preferencias de link
-TeamPopupLinks.ShowByDefault=Mostrar por defecto
-TeamPopupLinks.ShowOnMore=Mostrar al pulsar "mas"
-TeamPopupLinks.OpenNewTab=Abrir en una nueva pestaña
-
-total_stars=Suma total de estrellas
 
 # FlagCollectionToMap
 flagCollectionToMap.ShowMap=Mostrar mapa
@@ -851,12 +840,6 @@ flagCollectionToMap.MEast=Oriente Medio
 flagCollectionToMap.SAmerica=Sudamérica
 flagCollectionToMap.World=Mundial
 
-# SkillTable
-Skill_table=Tabla de habilidades
-Switch_view=Cambiar vista
-AddHomegrown=Añadir jugadores promocionados por el club
-showTimeInClub=Mostrar tiempo en el club
-
 team.status.booked=Amistoso pactado
 ShowFriendlyBooked.ShowFriendlies=Mostrar amistosos
 
@@ -867,43 +850,12 @@ TransferSearchResultFilters.hideInjured=Ocultar lesionados
 TransferSearchResultFilters.hideSuspended=Ocultar sancionados
 TransferSearchResultFilters.days=Días\:
 
-# refer to transfer search form
-Filters.minimum=Al menos
-Filters.maximum=Máximo
-
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
 RapidId.view=Ver
 RapidId.viewById=Ver por ID
 RapidId.senior=Adulto
 RapidId.youth=Juvenil
 
-# SkillTable
-Switch_view.title=Cambia la vista de la tabla.
-skillTable.addHomegrown=Añadir todos los jugadores promocionados por el equipo desde el actual
-skillTable.showTimeInClub=Muestra el tiempo transcurrido desde que el jugador fue promocionado al equipo senior
-Nationality=Nacionalidad
-Nationality.abbr=Nac
-Flag=Bandera
-Flag.abbr=Ban.
-Player=Jugador
-Player.abbr=Jugador
-Age=edad
-Age.abbr=edad
-Match=Partido
-Series=Liga
-
-TransferCompare=Comparador de transferencias
-TransferCompare.abbr=CT
-Bookmark=Favorito
-Bookmark.abbr=Fav
-Deadline=Límite
-Deadline.abbr=Límite
-CurrentBid=Puja actual
-CurrentBid.abbr=Puja
-CurrentBidder=Puja actual mayor
-CurrentBidder.abbr=Pujador
-CurrentBidderShort=Pujador actual mayor
-CurrentBidderShort.abbr=Puj.
 
 # HTMSPrediction
 HTMSPrediction.prediction=Predicción del resultado
@@ -972,7 +924,15 @@ pageAction.mainContent=Mostrar contenido principal
 pageAction.leftMenu=Mostrar la barra de la izquierda
 pageAction.all=Mostrar todo
 
-sidebarBox.actions=Acciones
+#Locales for date and time
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
+datetimestrings.days=días
+datetimestrings.hours=hr
+datetimestrings.minutes=min
+datetimestrings.short_seasons=t
+datetimestrings.short_weeks=s
+datetimestrings.short_days=E
 
 # buttons
 button.ok=OK
@@ -1018,6 +978,8 @@ log.header=Foxtrick Log
 # keep the following line untranslated
 log.env=Versión %1, %2 plataforma, %3 local, %4 layout, %5 dirección
 
+ReadHtPrefs.HTLanguageChanged=Has seleccionado en las preferencias principales de Foxtrick que el idioma de Foxtrick se actualice automáticamente cuando cambies el idioma en Hattrick. Tu nuevo idioma de Foxtrick es\:
+
 # End of IN-GAME STRINGS.
 
 
@@ -1025,6 +987,10 @@ log.env=Versión %1, %2 plataforma, %3 local, %4 layout, %5 dirección
 # option function strings
 TickerAlert.enable=Habilitar
 TickerAlert.sound=Sonido
+TeamPopupLinks.prefsCaption=Preferencias de link
+TeamPopupLinks.ShowByDefault=Mostrar por defecto
+TeamPopupLinks.ShowOnMore=Mostrar al pulsar "mas"
+TeamPopupLinks.OpenNewTab=Abrir en una nueva pestaña
 
 #toolbar
 toolbar.title=FoxTrick
