--- a/content/locale/et/foxtrick.properties
+++ b/content/locale/et/foxtrick.properties
@@ -70,12 +70,7 @@ module.MatchOrderInterface.Specialties.desc=Kuva mängijate erioskusi
 
 #Save for work
 
-#Embed Media
-
 #Extrashortcuts
-
-#lineupShortcut
-
 
 #HistoryStats
 
@@ -83,39 +78,30 @@ module.MatchOrderInterface.Specialties.desc=Kuva mängijate erioskusi
 #following string uses pluralForms
 YouthPromotes.today=Mängijat võib edutada\!
 
-# links
-
 #teamstats+filters
 TeamStats.Injured=Vigastatud
 TeamStats.TransferListed=Müüginimekirjas
+
+#PlayerBirthday
 
 #season stats
 #note to translators. use abreviations of league table where applicable
 
 #Newsfeed filter
 
-# AddLeaveConfButton
+#team pages
 
-#ShowForumPrefButton
+#forum
 
 # ForumTemplates
 
-#PostPreview
+#ForumPreview
 
-
-
-
-#special bbcode, not really youth icons
-
-
+#ForumYouthIcons
 
 #Transferlistfilters
 
 #Filter
-
-#Locales for date and time
-#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
-#next 6 use pluralFroms
 
 #Transfer prices
 
@@ -126,42 +112,24 @@ TeamStats.TransferListed=Müüginimekirjas
 
 #note to translators. Copy abbreviations from HT translations using players page on HT (only supporters can see them in brackets next to players names)
 
+#match positions
 
 
 
-
-
-
-
-
-
-
-
-
-
-
+# SkillTable
 #following string uses pluralForms
 
+#confirms
 
-
-
-
-
-
-
-
-#matchdetail
-
+# links
 
 
 #following string uses pluralForms
 #following string uses pluralForms
 
 
-
-
-
-
+# Context menu items
+# This would look like: Copy player ID: 123456789
 
 #copy
 
@@ -169,29 +137,24 @@ TeamStats.TransferListed=Müüginimekirjas
 
 
 
-
 #matches
 
-# Context menu items
-# This would look like: Copy player ID: 123456789
+#matchdetail
+
+
+
+
 
 #teampopups
 Guestbook=Külalisteraamat
 
-
 # FlagCollectionToMap
-
-# SkillTable
 
 
 
 # TransferSearchResultFilters
 
-# refer to transfer search form
-
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
-
-# SkillTable
 
 
 # HTMSPrediction
@@ -218,6 +181,9 @@ ticker.type.mail=HT-Mail
 
 # fennec ui
 
+#Locales for date and time
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
 
 # buttons
 
@@ -226,6 +192,7 @@ ticker.type.mail=HT-Mail
 
 
 # keep the following line untranslated
+
 
 # End of IN-GAME STRINGS.
 
