--- a/content/locale/eu/foxtrick.properties
+++ b/content/locale/eu/foxtrick.properties
@@ -40,49 +40,35 @@ pluralFormRuleID=pluralFormRule1
 
 #Save for work
 
-#Embed Media
-
 #Extrashortcuts
-
-#lineupShortcut
-
 
 #HistoryStats
 
 # YouthPromotes
 #following string uses pluralForms
 
-# links
-
 #teamstats+filters
+
+#PlayerBirthday
 
 #season stats
 #note to translators. use abreviations of league table where applicable
 
 #Newsfeed filter
 
-# AddLeaveConfButton
+#team pages
 
-#ShowForumPrefButton
+#forum
 
 # ForumTemplates
 
-#PostPreview
+#ForumPreview
 
-
-
-
-#special bbcode, not really youth icons
-
-
+#ForumYouthIcons
 
 #Transferlistfilters
 
 #Filter
-
-#Locales for date and time
-#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
-#next 6 use pluralFroms
 
 #Transfer prices
 
@@ -93,42 +79,24 @@ pluralFormRuleID=pluralFormRule1
 
 #note to translators. Copy abbreviations from HT translations using players page on HT (only supporters can see them in brackets next to players names)
 
+#match positions
 
 
 
-
-
-
-
-
-
-
-
-
-
-
+# SkillTable
 #following string uses pluralForms
 
+#confirms
 
-
-
-
-
-
-
-
-#matchdetail
-
+# links
 
 
 #following string uses pluralForms
 #following string uses pluralForms
 
 
-
-
-
-
+# Context menu items
+# This would look like: Copy player ID: 123456789
 
 #copy
 
@@ -136,28 +104,23 @@ pluralFormRuleID=pluralFormRule1
 
 
 
-
 #matches
 
-# Context menu items
-# This would look like: Copy player ID: 123456789
+#matchdetail
+
+
+
+
 
 #teampopups
 
-
 # FlagCollectionToMap
-
-# SkillTable
 
 
 
 # TransferSearchResultFilters
 
-# refer to transfer search form
-
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
-
-# SkillTable
 
 
 # HTMSPrediction
@@ -182,6 +145,9 @@ pluralFormRuleID=pluralFormRule1
 
 # fennec ui
 
+#Locales for date and time
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
 
 # buttons
 
@@ -190,6 +156,7 @@ pluralFormRuleID=pluralFormRule1
 
 
 # keep the following line untranslated
+
 
 # End of IN-GAME STRINGS.
 
