--- a/content/locale/fy-NL/foxtrick.properties
+++ b/content/locale/fy-NL/foxtrick.properties
@@ -141,58 +141,51 @@ module.MatchIncome.desc=Wedstriidynkommen yn wedstriidrapport
 
 #Save for work
 
-#Embed Media
-
 #Extrashortcuts
 ExtraShortcuts.statistics=statistyken
 ExtraShortcuts.transfers=oerstappen
-
-#lineupShortcut
-
 
 #HistoryStats
 
 # YouthPromotes
 #following string uses pluralForms
 
-# links
-links.boxheader=Koppelings
-
 #teamstats+filters
 TeamStats.boxheader=Ploechoersjoch
+
+#PlayerBirthday
 
 #season stats
 #note to translators. use abreviations of league table where applicable
 
 #Newsfeed filter
 
-# AddLeaveConfButton
-AddLeaveConfButton.alert=Klik op 'Opslaan' op de folgjende side om dit foarum te ferlitten.
-AddLeaveConfButton.LeaveForum=ferlit foarum
+#team pages
+sidebarBox.actions=Aksjes
+TeamSelectBox.selectplayer=Selektear spiler
+ManagerButtons.writeInGuestbook=Skriuw yn gastenboek
 
-#ShowForumPrefButton
+#forum
+AddLeaveConfButton.LeaveForum=ferlit foarum
+AddLeaveConfButton.alert=Klik op 'Opslaan' op de folgjende side om dit foarum te ferlitten.
+HideSignatures.signaturetoggle=Hântekening
 
 # ForumTemplates
 ForumTemplates.make=Meitsje template fan berjocht
 ForumTemplates.make.error=Template bestiet al of is leech
 ForumTemplates.delete.ask=Template ferwiderje?
 
-#PostPreview
+#ForumPreview
 ForumPreview.preview.title=Toan foarútblik fan it berjocht
 
-
-ForumYouthIcons.toolbar.youth=Jeugdkoppelings
+#ForumYouthIcons
 ForumYouthIcons.toolbar.main=Haadkoppelings
+ForumYouthIcons.toolbar.youth=Jeugdkoppelings
 ForumYouthIcons.youthplayerid=koppeling nei jeugdspiler
 ForumYouthIcons.youthteamid=koppeling nei jeugdploech
 ForumYouthIcons.youthmatchid=koppeling nei jeugdwedstriid
 ForumYouthIcons.youthseries=koppeling nei jeugdkompetysje
-
-
-#special bbcode, not really youth icons
 ForumSpecialBBCode.br=foegje enter yn
-
-
 
 #Transferlistfilters
 TransferSearchFilters.boxheader=Foxtrick Filters
@@ -201,16 +194,6 @@ TransferSearchFilters.deleteFilter.ask=Wolst dit filter echt ferwiderje?
 TransferSearchFilters.saveFilter=Bewarje nij filter
 
 #Filter
-
-#Locales for date and time
-#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
-#next 6 use pluralFroms
-datetimestrings.days=dagen
-datetimestrings.hours=oe
-datetimestrings.minutes=m
-datetimestrings.short_seasons=s
-datetimestrings.short_weeks=w
-datetimestrings.short_days=d
 
 #Transfer prices
 MedianTransferPrice.median=Mediaanpriis
@@ -230,30 +213,63 @@ Set_pieces=Dea Spul
 
 #note to translators. Copy abbreviations from HT translations using players page on HT (only supporters can see them in brackets next to players names)
 
+#match positions
 
 
 
-
-
-
-
-
-
+# SkillTable
 Stamina=Kondysje
+#following string uses pluralForms
+Coach=Coach
 
+#confirms
+ConfirmActions.bid=Wolst biede op dizze spiler? De priis is %s.
+ConfirmActions.transferlist=Wolst dizze spiler te keap sette? Dyn fraachpriis is %s.
 
-
+# links
+links.boxheader=Koppelings
+links.custom.selecticon=Selektear ikoan
+links.custom.addpersonallink=Foegje persoanlike koppeling ta
+links.custom.addlink=Foegje koppeling ta
+links.custom.remove=Ferwiderje
+links.custom.copy=Kopiearje
+links.custom.export=Eksportearje
+links.custom.confirmremove=Echt ferwiderje?
+links.custom.addtag=Foegje in tag ta
+links.custom.tags=Tags
+links.custom.help=Hulp
+links.custom.helptext=Dit is de editor-kant. Atst klikst op de kop fan dit fak skeakelst tusken editor en normaal úterlik. Dyn koppelings wurkje allinnich folledich yn normaal úterlik. Fêste eksterne koppelings binne ienfâldich ta te foegjen, ful gewoan de hiele url yn (bygelyks\: http\: //alltid.org/league/427/). Foar fêste ynterne koppelings slaast it serverdiel oer (bygelyks\: /World/Series/Default.aspx?LeagueLevelUnitID\=427). Tags hast allinnich nedich foar seldsumer dynamyske koppelings. Mei tags wurde de koppelings dynamysk feroare mei de ynfo op de side wêr'tst bist (http\://alltid.org/league/[leagueid] liedt dy bygelyks altyd nei de alltid-side fan de kompetysje dy'tst yn Hattrick iepenstean hast). De beskikbere tags steane per side yn it blêderfak. Do kinst allinnich dy sjen dy't hearre by de side wêr'tst dyn koppeling tafoegest. De tekst dy't oanmakke wurdt is in foarbyld. Do kinst de tag sels skriuwe (mei de []).
+links.custom.helptext2=Do kinst dyn koppelings ek eksportearje en diele. Om dit te dwaan klikst op de eksportearknop en selektearrest in bestân om de koppeling op te slaan. Koppelings wurde oan dat bestân tafoege, sa kinst meardere koppelings yn ien bestân opslaan. Om koppelings te ymportearjen giest nei it foarkeurenskerm, ûnder ymportear foarkeuren. De foarkeuren yn it selektearre bestân wurde allinnich ymportearre, yn dit gefal binne dat dyn koppelings. Gjin fan dyn foarige koppelings sille ferwidere wurde.
 
 
 #following string uses pluralForms
+#following string uses pluralForms
+
+
+# Context menu items
+# This would look like: Copy player ID: 123456789
+
+#copy
+copy.copyplayerad=Kopiearje spileradvertinsje nei klemboerd
+copy.copied=De spileradvertinsje is kopiearre nei it klemboerd.
+
+copy.PostID=Kopiearje nei klemboerd
+
+CopyRatings.copied=De wurdearrings binne kopiearre nei it klemboerd.
 
 
 
-
-
-
-
-
+#matches
+matches.income=Ynkomsten\:
+matches.attackdefensebars=Oanfal - Ferdigening
+matches.right=Rjochts
+matches.left=Links
+matches.center=Sintraal
+matches.defense=ferd
+matches.attack=oanf
+matches.indfreekick=Ynd. frije trapen
+matches.wronglang=Foxtrick\: De stats kinne net toand wurde omdat dyn taal net registrearre is, of omdat de ferkearde taal ynsteld is by foarkeuren. Sjoch nei of dyn Foxtricktaal gelyk is oan dyn Hattricktaal.
+total_stars=Totaal oantal stjerren
 
 #matchdetail
 match.ratings.midfield=Middenfjild
@@ -267,59 +283,9 @@ match.ratings.rightshort=R
 match.ratings.centershort=S
 match.ratings.leftshort=L
 match.ratings.ifkshort=YFT
-ConfirmActions.bid=Wolst biede op dizze spiler? De priis is %s.
-ConfirmActions.transferlist=Wolst dizze spiler te keap sette? Dyn fraachpriis is %s.
-HideSignatures.signaturetoggle=Hântekening
-TeamSelectBox.selectplayer=Selektear spiler
-links.custom.selecticon=Selektear ikoan
-links.custom.addpersonallink=Foegje persoanlike koppeling ta
-links.custom.addlink=Foegje koppeling ta
-links.custom.remove=Ferwiderje
-links.custom.copy=Kopiearje
-links.custom.export=Eksportearje
-links.custom.confirmremove=Echt ferwiderje?
-links.custom.addtag=Foegje in tag ta
-links.custom.tags=Tags
-links.custom.help=Hulp
-links.custom.helptext=Dit is de editor-kant. Atst klikst op de kop fan dit fak skeakelst tusken editor en normaal úterlik. Dyn koppelings wurkje allinnich folledich yn normaal úterlik. Fêste eksterne koppelings binne ienfâldich ta te foegjen, ful gewoan de hiele url yn (bygelyks\: http\: //alltid.org/league/427/). Foar fêste ynterne koppelings slaast it serverdiel oer (bygelyks\: /World/Series/Default.aspx?LeagueLevelUnitID\=427). Tags hast allinnich nedich foar seldsumer dynamyske koppelings. Mei tags wurde de koppelings dynamysk feroare mei de ynfo op de side wêr'tst bist (http\://alltid.org/league/[leagueid] liedt dy bygelyks altyd nei de alltid-side fan de kompetysje dy'tst yn Hattrick iepenstean hast). De beskikbere tags steane per side yn it blêderfak. Do kinst allinnich dy sjen dy't hearre by de side wêr'tst dyn koppeling tafoegest. De tekst dy't oanmakke wurdt is in foarbyld. Do kinst de tag sels skriuwe (mei de []).
-links.custom.helptext2=Do kinst dyn koppelings ek eksportearje en diele. Om dit te dwaan klikst op de eksportearknop en selektearrest in bestân om de koppeling op te slaan. Koppelings wurde oan dat bestân tafoege, sa kinst meardere koppelings yn ien bestân opslaan. Om koppelings te ymportearjen giest nei it foarkeurenskerm, ûnder ymportear foarkeuren. De foarkeuren yn it selektearre bestân wurde allinnich ymportearre, yn dit gefal binne dat dyn koppelings. Gjin fan dyn foarige koppelings sille ferwidere wurde.
-matches.income=Ynkomsten\:
-
-
-#following string uses pluralForms
-#following string uses pluralForms
 
 
 
-Coach=Coach
-
-
-ManagerButtons.writeInGuestbook=Skriuw yn gastenboek
-copy.copyplayerad=Kopiearje spileradvertinsje nei klemboerd
-copy.copied=De spileradvertinsje is kopiearre nei it klemboerd.
-
-
-#copy
-copy.PostID=Kopiearje nei klemboerd
-
-CopyRatings.copied=De wurdearrings binne kopiearre nei it klemboerd.
-
-
-
-
-
-#matches
-matches.attackdefensebars=Oanfal - Ferdigening
-matches.right=Rjochts
-matches.left=Links
-matches.center=Sintraal
-matches.defense=ferd
-matches.attack=oanf
-matches.indfreekick=Ynd. frije trapen
-matches.wronglang=Foxtrick\: De stats kinne net toand wurde omdat dyn taal net registrearre is, of omdat de ferkearde taal ynsteld is by foarkeuren. Sjoch nei of dyn Foxtricktaal gelyk is oan dyn Hattricktaal.
-
-# Context menu items
-# This would look like: Copy player ID: 123456789
 
 #teampopups
 Manager=Manager
@@ -336,8 +302,6 @@ LastLineup=Lêste opstelling
 more=mear...
 less=minder...
 
-total_stars=Totaal oantal stjerren
-
 # FlagCollectionToMap
 flagCollectionToMap.ShowMap=Toan kaart
 flagCollectionToMap.HideMap=Ferberch kaart
@@ -348,17 +312,11 @@ flagCollectionToMap.MEast=Midden-Easten
 flagCollectionToMap.SAmerica=Súd-Amearika
 flagCollectionToMap.World=Wrâld
 
-# SkillTable
-
 
 
 # TransferSearchResultFilters
 
-# refer to transfer search form
-
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
-
-# SkillTable
 
 
 # HTMSPrediction
@@ -389,7 +347,15 @@ pageAction.mainContent=Lit haadinhâld sjen
 pageAction.leftMenu=Lit linker balk sjen
 pageAction.all=Lit alles sjen
 
-sidebarBox.actions=Aksjes
+#Locales for date and time
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
+datetimestrings.days=dagen
+datetimestrings.hours=oe
+datetimestrings.minutes=m
+datetimestrings.short_seasons=s
+datetimestrings.short_weeks=w
+datetimestrings.short_days=d
 
 # buttons
 button.save=Opslaan
@@ -404,6 +370,7 @@ button.disableAll=Alles útskeakelje
 
 
 # keep the following line untranslated
+
 
 # End of IN-GAME STRINGS.
 
