--- a/content/locale/gl/foxtrick.properties
+++ b/content/locale/gl/foxtrick.properties
@@ -182,29 +182,28 @@ module.MatchOrderInterface.Specialties.desc=Amosar especialidade dos xogadores
 
 #Save for work
 
-#Embed Media
-
 #Extrashortcuts
 ExtraShortcuts.statistics=estatísticas
 ExtraShortcuts.transfers=traspasos
-
-#lineupShortcut
-
 
 #HistoryStats
 
 # YouthPromotes
 #following string uses pluralForms
 
-# links
-links.boxheader=Ligazóns
-
 #teamstats+filters
 TeamStats.boxheader=Ollada xeral
+TeamStats.General=Xeral
 TeamStats.Cards=Tarxetas
 TeamStats.Injured=Lesionados
 TeamStats.TransferListed=Na lista de traspasos
 TeamStats.Pictures=Imaxes
+
+#PlayerBirthday
+PlayerBirthday.boxheader=Aniversarios
+PlayerBirthday.BirthdayToday=Aniversario hoxe
+PlayerBirthday.BirthdayLastWeek=Aniversarios da pasada semana
+PlayerBirthday.BirthdayNextWeek=Aniversarios da proxima semana
 
 #season stats
 #note to translators. use abreviations of league table where applicable
@@ -213,42 +212,43 @@ seasonstats.cup=Copa
 
 #Newsfeed filter
 
-# AddLeaveConfButton
-AddLeaveConfButton.alert=Fai clic no botón de 'Gardar' na seguinte páxina para abandoar esta conferencia
-AddLeaveConfButton.LeaveForum=Abandoar conferencia
+#team pages
+sidebarBox.actions=Accións
+TeamSelectBox.selectplayer=Selecciona un xogador
+ExtendedPlayerDetails.perseason=/tempada
+ManagerButtons.writeInGuestbook=Escribir no Libro de visitas
 
-#ShowForumPrefButton
+#forum
+AddLeaveConfButton.LeaveForum=Abandoar conferencia
+AddLeaveConfButton.alert=Fai clic no botón de 'Gardar' na seguinte páxina para abandoar esta conferencia
+HideSignatures.signaturetoggle=Sinatura
+MarkUnread.markunread=Marcar non lido dende aqui
 
 # ForumTemplates
 ForumTemplates.make=Fai unha plantiña da seguinte mensaxe
+ForumTemplates.make.error=Xa existe esa plantiña ou está vacía
 ForumTemplates.show=Amosa as plantiñas
 ForumTemplates.hide=Oculta as plantiñas
-ForumTemplates.make.error=Xa existe esa plantiña ou está vacía
 ForumTemplates.templateTitle=Título da plantiña\:
 ForumTemplates.templateTitle.error='[' e ']' non están permitidos nos títulos
 ForumTemplates.delete.ask=Estas seguro de querer borrar esta plantiña?
 
-#PostPreview
+#ForumPreview
 ForumPreview.preview.title=Amosa unha previsualización da mensaxe
 ForumPreview.preview=Previsualización
 ForumPreview.send=Enviar
 
-
-ForumYouthIcons.toolbar.youth=Ligazóns de xuvenís
+#ForumYouthIcons
 ForumYouthIcons.toolbar.main=Ligazóns principais
+ForumYouthIcons.toolbar.youth=Ligazóns de xuvenís
 ForumYouthIcons.youthplayerid=Ligazón a un xogador xuvenil
 ForumYouthIcons.youthteamid=Ligazón a un equipo xuvenil
 ForumYouthIcons.youthmatchid=Engadir unha ligazón a un encontro de xuvenís
 ForumYouthIcons.youthseries=Engadir unha ligazón a unha liga xuvenil
-
-
-#special bbcode, not really youth icons
 ForumSpecialBBCode.br=Engade un salto de liña
 ForumSpecialBBCode.user=Engadir id usuario
 ForumSpecialBBCode.article=Engadir id editorial
 ForumSpecialBBCode.symbols=Insertar símbolo\: %s
-
-
 
 #Transferlistfilters
 TransferSearchFilters.boxheader=Filtros de Foxtrick
@@ -269,16 +269,7 @@ Filters.Form=Forma
 Filters.XP=Experiencia
 Filters.specialty=Especialidade
 Filters.stars=Estrelas
-
-#Locales for date and time
-#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
-#next 6 use pluralFroms
-datetimestrings.days=días
-datetimestrings.hours=h
-datetimestrings.minutes=min
-datetimestrings.short_seasons=t
-datetimestrings.short_weeks=s
-datetimestrings.short_days=d
+Filters.minimum=Como mínimo
 
 #Transfer prices
 MedianTransferPrice.median=Mediana do prezo
@@ -340,6 +331,7 @@ categories.S=S
 categories.R=R
 categories.E1=E1
 
+#match positions
 match.pos.kp=Porteiro
 match.pos.kp.abbr=P
 match.pos.lb=Lateral Esquerdo
@@ -365,54 +357,42 @@ match.pos.rw.abbr=ED
 match.role.captain=Capitán
 
 
-TeamStats.General=Xeral
-
-
+# SkillTable
+Switch_view=Trocar vista
+AddHomegrown=Engadir a fidelidade dos xogadores
+showTimeInClub=Mostrar tempo no club
 TSI.abbr=TSI
-
-
 Agreeability=Carácter
 Agreeability.abbr=Ca
 Aggressiveness=Agresividade
 Aggressiveness.abbr=Ag
 Honesty=Honestidade
 Honesty.abbr=Ho
-
 Leadership=Liderado
 Leadership.abbr=Li
 Experience=Experiencia
 Experience.abbr=Ex
-
 Stamina=Resistencia
 Stamina.abbr=Res
 Form=Forma
 Form.abbr=Fo
-
 Loyalty=Lealdade
 Loyalty.abbr=Le
 MotherClubBonus=Bonus por club nai
 MotherClubBonus.abbr=CNB
-
 Status=Estado
 Status.abbr=Estado
-
 Yellow_card=Cartón Amarelo
 Yellow_card.abbr=A
 Red_card=Cartón Vermello
 Red_card.abbr=V
-
 Speciality=Especialidade
-
 #following string uses pluralForms
 Last_match_played_as_at=Xogou %1 min como %2 no último encontro, o %3.
-
-
 Salary=Salario
 Salary.abbr=Salario
-
 TransferListed=Na lista de traspasos
 TransferListed.abbr=LT
-
 NrOfMatches=Número de partidos
 LeagueGoals=Goles na liga
 LeagueGoals.abbr=GL
@@ -420,15 +400,85 @@ CupGoals=Goles na Copa
 CupGoals.abbr=GC
 Hattricks=Hattricks
 Hattricks.abbr=HT
-
 Current_club=Club actual
 Current_club.abbr=Club
 Current_league=Liga actual
 Current_league.abbr=Liga
-
 JoinedSince.abbr=Dende
+Coach=Adestrador
+CurrentSquad=Equipo actual
+Nationality=Nacionalidade
+Flag=Bandeira
+Flag.abbr=Bandeira
+Player=Xogador
+Player.abbr=Xogador
+Age=Idade
+Age.abbr=Idade
+Match=Partido
+Series=Liga
+TransferCompare=Comparación de Traspasos
+TransferCompare.abbr=CT
+Bookmark=Engadir a favoritos
+Bookmark.abbr=Fa
+Deadline=Data límite
+Deadline.abbr=Data límite
+
+#confirms
+ConfirmActions.bid=Estás seguro de querer poxar por este xogador? O seu prezo é de %s
+ConfirmActions.transferlist=Estás seguro de querer trasferir este xogador? O seu prezo mínimo de venda sería de %s
+ConfirmActions.ntremove=Estás seguro de queres engadir/eliminar a este xogador da selezón?
+
+# links
+links.boxheader=Ligazóns
+links.custom.selecticon=Selecciona unha icona
+links.custom.addpersonallink=Engade unha ligazón persoal
+links.custom.addlink=Engadir ligazón
+links.custom.remove=Borrar
+links.custom.copy=Copiar
+links.custom.export=Exportar
+links.custom.confirmremove=Estás seguro de querer borrar isto?
+links.custom.addtag=Engadir unha etiqueta
+links.custom.tags=Etiquetas
+links.custom.help=Axuda
+links.custom.helptext=Este é o modo de edicion. Clicando na cabeceira deste cadro cambia entre os modos de edición e o normal. Soamente no modo normal as túas ligazóns persoais serán completamente funcionales. Ligazóns estáticas externas son sinxelas de engadir, só engade a url completa (Exemplo\: http\://alltid.org/league/427/). Para links estáticos internos sálta a parte do servidor (Exemplo\: /World/Series/Default.aspx?LeagueLevelUnitID\=427). As etiquetas só as necesitas para as pouco comunes ligazóns dinámicas. Con etiquetas as ligazóns se cambiarán dinámicamente usando a información do sitio onde esteas. Por exemplo http\://alltid.org/league/[leagueid] sempre che levará o sitio de alltid da liga que estás mirando no hattrick. As etiquetas que están dispoñíbeis están listadas no cadro de selección. Soamente podes usar aquelas que están listadas na páxina onde estás engadindo a túa ligazón personal. O texto que se produce so é unhá plantiña de exemplo. Podes escribir ti mesmo a etiqueta (cos [])
+links.custom.helptext2=Tamén podes exportar as túas ligazóns e compartilas. Para facelo clica no botón de exportar e selecciona un arquivo para gardar a ligazón. As ligazón se engadirán ó final dese arquivo, podes gardar varias ligazón nun arquivo. Para importar ligazóns diríxete á sección de preferencias e vai a importar preferencias. Só as preferencias presentes nese arquivo serán importadas, que neste caso son as túas ligazóns. As túas ligazóns previas non se borrarán
 
 
+#following string uses pluralForms
+#following string uses pluralForms
+
+
+# Context menu items
+# This would look like: Copy player ID: 123456789
+copy.ht-ml=Copiar en HT-ML
+copy.table=Copiar a tabla en HT-ML
+
+#copy
+copy.copyplayerad=Copiar un anuncio do xogador ao portapapeis
+copy.copied=Copiaches o anuncio deste xogador ao portapapeis
+copy.matchid=Fai click para copiar o matchID ao portapapeis
+
+copy.PostID=Copiar ao portapapeis
+
+CopyRatings.both=Copiar calificacións (en HT-ML)
+CopyRatings.home=Copiar calificacións locais (en HT-ML)
+CopyRatings.away=Copiar calificacións visitante (en HT-ML)
+CopyRatings.copied=As calificacións copiáronse ó portapapeis.
+
+CopyYouth.trainingReport=Copiar informe de adestramento
+
+
+#matches
+matches.income=Ingresos\:
+matches.attackdefensebars=Comparación Ataque vs Defensa
+matches.right=Dereita
+matches.left=Esquerda
+matches.center=Central
+matches.defense=def
+matches.attack=ata
+matches.indfreekick=Saques de falta ind.
+matches.wronglang=Foxtrick\: Non se puideron amosar as estatísticas porque a túa lingua aínda non está rexistrada ou porque te equivocaras ao establecer a lingua nas preferncias. Por favor asegúrate de que a lingua que teñas non Foxtrick sexa a mesma que empregas no Hattrick
+total_stars=Número total de estrelas
 
 #matchdetail
 match.ratings.midfield=Mediocampo
@@ -443,46 +493,6 @@ match.ratings.rightshort=D
 match.ratings.centershort=C
 match.ratings.leftshort=E
 match.ratings.ifkshort=I
-ConfirmActions.bid=Estás seguro de querer poxar por este xogador? O seu prezo é de %s
-ConfirmActions.transferlist=Estás seguro de querer trasferir este xogador? O seu prezo mínimo de venda sería de %s
-ConfirmActions.ntremove=Estás seguro de queres engadir/eliminar a este xogador da selezón?
-HideSignatures.signaturetoggle=Sinatura
-MarkUnread.markunread=Marcar non lido dende aqui
-TeamSelectBox.selectplayer=Selecciona un xogador
-links.custom.selecticon=Selecciona unha icona
-links.custom.addpersonallink=Engade unha ligazón persoal
-links.custom.addlink=Engadir ligazón
-links.custom.remove=Borrar
-links.custom.copy=Copiar
-links.custom.export=Exportar
-links.custom.confirmremove=Estás seguro de querer borrar isto?
-links.custom.addtag=Engadir unha etiqueta
-links.custom.tags=Etiquetas
-links.custom.help=Axuda
-links.custom.helptext=Este é o modo de edicion. Clicando na cabeceira deste cadro cambia entre os modos de edición e o normal. Soamente no modo normal as túas ligazóns persoais serán completamente funcionales. Ligazóns estáticas externas son sinxelas de engadir, só engade a url completa (Exemplo\: http\://alltid.org/league/427/). Para links estáticos internos sálta a parte do servidor (Exemplo\: /World/Series/Default.aspx?LeagueLevelUnitID\=427). As etiquetas só as necesitas para as pouco comunes ligazóns dinámicas. Con etiquetas as ligazóns se cambiarán dinámicamente usando a información do sitio onde esteas. Por exemplo http\://alltid.org/league/[leagueid] sempre che levará o sitio de alltid da liga que estás mirando no hattrick. As etiquetas que están dispoñíbeis están listadas no cadro de selección. Soamente podes usar aquelas que están listadas na páxina onde estás engadindo a túa ligazón personal. O texto que se produce so é unhá plantiña de exemplo. Podes escribir ti mesmo a etiqueta (cos [])
-links.custom.helptext2=Tamén podes exportar as túas ligazóns e compartilas. Para facelo clica no botón de exportar e selecciona un arquivo para gardar a ligazón. As ligazón se engadirán ó final dese arquivo, podes gardar varias ligazón nun arquivo. Para importar ligazóns diríxete á sección de preferencias e vai a importar preferencias. Só as preferencias presentes nese arquivo serán importadas, que neste caso son as túas ligazóns. As túas ligazóns previas non se borrarán
-matches.income=Ingresos\:
-PlayerBirthday.boxheader=Aniversarios
-PlayerBirthday.BirthdayToday=Aniversario hoxe
-PlayerBirthday.BirthdayLastWeek=Aniversarios da pasada semana
-PlayerBirthday.BirthdayNextWeek=Aniversarios da proxima semana
-copy.matchid=Fai click para copiar o matchID ao portapapeis
-ExtendedPlayerDetails.perseason=/tempada
-
-
-#following string uses pluralForms
-#following string uses pluralForms
-
-
-ReadHtPrefs.HTLanguageChanged=Foxtrick detectou un troco de idioma. O idioma de Foxtrick está agora configurado como %s.
-
-Coach=Adestrador
-CurrentSquad=Equipo actual
-
-
-ManagerButtons.writeInGuestbook=Escribir no Libro de visitas
-copy.copyplayerad=Copiar un anuncio do xogador ao portapapeis
-copy.copied=Copiaches o anuncio deste xogador ao portapapeis
 
 ratings.HatStats=HatStats
 ratings.LoddarStats=LoddarStats
@@ -491,35 +501,9 @@ ratings.VnukStats=VnukStats
 ratings.HTitaVal=HTitaVal
 ratings.GardierStats=GardierStats
 
-#copy
-copy.PostID=Copiar ao portapapeis
-
-CopyRatings.both=Copiar calificacións (en HT-ML)
-CopyRatings.home=Copiar calificacións locais (en HT-ML)
-CopyRatings.away=Copiar calificacións visitante (en HT-ML)
-CopyRatings.copied=As calificacións copiáronse ó portapapeis.
-
-CopyYouth.trainingReport=Copiar informe de adestramento
-
-
 MatchReportFormat.kickOff=Saque inicial
 MatchReportFormat.result=Resultado
 
-
-#matches
-matches.attackdefensebars=Comparación Ataque vs Defensa
-matches.right=Dereita
-matches.left=Esquerda
-matches.center=Central
-matches.defense=def
-matches.attack=ata
-matches.indfreekick=Saques de falta ind.
-matches.wronglang=Foxtrick\: Non se puideron amosar as estatísticas porque a túa lingua aínda non está rexistrada ou porque te equivocaras ao establecer a lingua nas preferncias. Por favor asegúrate de que a lingua que teñas non Foxtrick sexa a mesma que empregas no Hattrick
-
-# Context menu items
-# This would look like: Copy player ID: 123456789
-copy.ht-ml=Copiar en HT-ML
-copy.table=Copiar a tabla en HT-ML
 
 #teampopups
 Manager=Mánager
@@ -538,8 +522,6 @@ LastLineup=Última aliñación
 more=máis...
 less=menos...
 
-total_stars=Número total de estrelas
-
 # FlagCollectionToMap
 flagCollectionToMap.ShowMap=Amosa o mapa
 flagCollectionToMap.HideMap=Oculta o mapa
@@ -550,11 +532,6 @@ flagCollectionToMap.MEast=Oriente medio
 flagCollectionToMap.SAmerica=América do Sur
 flagCollectionToMap.World=O mundo
 
-# SkillTable
-Switch_view=Trocar vista
-AddHomegrown=Engadir a fidelidade dos xogadores
-showTimeInClub=Mostrar tempo no club
-
 
 
 # TransferSearchResultFilters
@@ -563,29 +540,9 @@ TransferSearchResultFilters.hideInjured=Agochar lesionados
 TransferSearchResultFilters.hideSuspended=Agochar sancionados
 TransferSearchResultFilters.days=Días\:
 
-# refer to transfer search form
-Filters.minimum=Como mínimo
-
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
 RapidId.view=Ver
 
-# SkillTable
-Nationality=Nacionalidade
-Flag=Bandeira
-Flag.abbr=Bandeira
-Player=Xogador
-Player.abbr=Xogador
-Age=Idade
-Age.abbr=Idade
-Match=Partido
-Series=Liga
-
-TransferCompare=Comparación de Traspasos
-TransferCompare.abbr=CT
-Bookmark=Engadir a favoritos
-Bookmark.abbr=Fa
-Deadline=Data límite
-Deadline.abbr=Data límite
 
 # HTMSPrediction
 HTMSPrediction.prediction=Resultado prognosticado
@@ -639,7 +596,15 @@ pageAction.mainContent=Mostrar o contido principal
 pageAction.leftMenu=Amosar barra á esquerda
 pageAction.all=Amosar todos
 
-sidebarBox.actions=Accións
+#Locales for date and time
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
+datetimestrings.days=días
+datetimestrings.hours=h
+datetimestrings.minutes=min
+datetimestrings.short_seasons=t
+datetimestrings.short_weeks=s
+datetimestrings.short_days=d
 
 # buttons
 button.ok=OK
@@ -676,6 +641,8 @@ api.clearCache=Limpiar caché
 
 log.header=Traza de FoxTrick
 # keep the following line untranslated
+
+ReadHtPrefs.HTLanguageChanged=Foxtrick detectou un troco de idioma. O idioma de Foxtrick está agora configurado como %s.
 
 # End of IN-GAME STRINGS.
 
