--- a/content/locale/hr/foxtrick.properties
+++ b/content/locale/hr/foxtrick.properties
@@ -393,9 +393,6 @@ module.SafeForWork.desc=Zamjenjuje ikonu i naslovni tekst Hattrickovih kartica
 SafeForWork.title=Naslov
 SafeForWork.icon=Ikona
 
-#Embed Media
-EmbedMedia.EmbeddedImage=Ubačena slika
-
 #Extrashortcuts
 ExtraShortcuts.statistics=Statistika
 ExtraShortcuts.transfers=Transferi
@@ -403,11 +400,8 @@ ExtraShortcuts.ManageCHPP=Upravljajte vašim CHPP programima koje koristite
 ExtraShortcuts.prefs=Postavke
 ExtraShortcuts.ftprefs=FoxTrickove postavke
 
-#lineupShortcut
-LineupShortcut.lineup=Postava
-
-
 #HistoryStats
+HistoryStats.boxheader=Statistika povijesti
 HistoryStats.season=Sezona
 HistoryStats.season.short=S
 HistoryStats.cup=Kolo kupa
@@ -416,7 +410,6 @@ HistoryStats.league=Liga
 HistoryStats.league.short=Lg.
 HistoryStats.finalPosition=Konačna pozicija u ligi
 HistoryStats.finalPosition.short=P
-HistoryStats.boxheader=Statistika povijesti
 HistoryStats.cupwinner=Pobjednik kupa
 HistoryStats.cupwinner.short=PK
 
@@ -425,11 +418,9 @@ HistoryStats.cupwinner.short=PK
 YouthPromotes.future=Igrač može biti promoviran %1 dan kasnije, %2.;Igrač može biti promoviran %1 dana kasnije, %2.
 YouthPromotes.today=Igrač se može promovirati danas\!
 
-# links
-links.boxheader=Linkovi
-
 #teamstats+filters
 TeamStats.boxheader=Pregled momčadi
+TeamStats.General=Općenito
 TeamStats.PlayerNotToOld=Igrači ispod 19 god.
 TeamStats.PlayerToOld=Igrači sa ili iznad 19 god.
 TeamStats.Cards=Kartoni
@@ -443,6 +434,12 @@ TeamStats.ActivePlayers=Aktivni igrači
 TeamStats.HomeGrownPlayers=Igrači iz vlastitog kluba
 TeamStats.PurchasedPlayers=Kupljeni igrači
 TeamStats.FilterFor=Filter za
+
+#PlayerBirthday
+PlayerBirthday.boxheader=Rođendani
+PlayerBirthday.BirthdayToday=Rođendani danas
+PlayerBirthday.BirthdayLastWeek=Rođendani prošli tjedan
+PlayerBirthday.BirthdayNextWeek=Rođendani sljedeći tjedan
 
 #season stats
 #note to translators. use abreviations of league table where applicable
@@ -469,43 +466,53 @@ LeagueNewsFilter.friendlies=Prijateljske i promjene trenera
 LeagueNewsFilter.transfers=Transferi
 LeagueNewsFilter.lineupChanges=Promjene taktike
 
-# AddLeaveConfButton
-AddLeaveConfButton.alert=Klikni na link 'Spremi' na sljedećoj stranici za napuštanje ovog foruma.
-AddLeaveConfButton.LeaveForum=Napusti forum
+#team pages
+sidebarBox.actions=Dodatne Radnje
+TeamSelectBox.selectplayer=Izaberi igrača
+ExtendedPlayerDetails.perseason=/-sezoni
+ExtraPlayerInfo.defensiveTrainer=%s obrambeni trener.
+ExtraPlayerInfo.offensiveTrainer=%s napadački trener.
+ExtraPlayerInfo.balancedTrainer=%s neutralni trener.
+ManagerButtons.writeInGuestbook=Upiši u knjigu gostiju
+LineupShortcut.lineup=Postava
 
-#ShowForumPrefButton
+#forum
+AddLeaveConfButton.LeaveForum=Napusti forum
+AddLeaveConfButton.alert=Klikni na link 'Spremi' na sljedećoj stranici za napuštanje ovog foruma.
 ShowForumPrefButton.forumPreferences=Postavke foruma
+FormatPostingText.ShowNestedQuotes=Prikaži velike citate
+HideSignatures.signaturetoggle=Potpis
+MarkUnread.markunread=Označi kao nepročitano od ovog posta
+EmbedMedia.EmbeddedImage=Ubačena slika
+ForumStripHattrickLinks.ask=Da li zaista želite ukloniti broj servera iz linka za prikladniji prikaz na forumu?
 
 # ForumTemplates
 ForumTemplates.make=Napravi predložak od poruke
+ForumTemplates.make.error=Predložak već postoji ili je prazan
 ForumTemplates.show=Prikaži predloške
 ForumTemplates.hide=Sakrij predloške
-ForumTemplates.make.error=Predložak već postoji ili je prazan
 ForumTemplates.templateTitle=Naslov predloška\:
 ForumTemplates.templateTitle.error='[' i ']' nisu dozvoljeni u naslovu
 ForumTemplates.delete.ask=Izbrisati predložak?
 
-#PostPreview
+#ForumPreview
 ForumPreview.preview.title=Prikaži pregled poruke
 ForumPreview.preview=Pregled
 ForumPreview.send=Pošalji
 
-
+#ForumYouthIcons
+ForumYouthIcons.toolbar.main=Glavni linkovi
 ForumYouthIcons.toolbar.youth=Linkovi za juniore
 ForumYouthIcons.toolbar.tournament=Turniri
-ForumYouthIcons.toolbar.main=Glavni linkovi
+ForumYouthIcons.toolbar.other=Ostalo
 ForumYouthIcons.youthplayerid=Dodaj link na juniorskog igrača
 ForumYouthIcons.youthteamid=Dodaj link na juniorsku momčad
 ForumYouthIcons.youthmatchid=Dodaj link na juniorsku utakmicu
 ForumYouthIcons.youthseries=Dodaj link na juniorsku ligu
 ForumYouthIcons.tournamentid=Umetnite oznaku za turnir.
 ForumYouthIcons.tournamentmatchid=Umetnite oznaku za utakmicu turnira.
-
-ForumYouthIcons.toolbar.other=Ostalo
 ForumYouthIcons.debug=Umetnite FoxTrickove debug zapise.
 ForumYouthIcons.settings=Umetnite Foxtickove postavke.
-
-#special bbcode, not really youth icons
 ForumSpecialBBCode.q=Dodaj citat
 ForumSpecialBBCode.br=Dodaj novi red
 ForumSpecialBBCode.user=Dodaj korisnikov ID broj
@@ -520,9 +527,6 @@ ForumSpecialBBCode.enterSeparator=Unesite prilagođeni razdjelnik
 ForumSpecialBBCode.forumSymbol=Umetnite "%s"
 ForumSpecialBBCode.symbols=Umetnite simbol\: %s
 
-
-FormatPostingText.ShowNestedQuotes=Prikaži velike citate
-
 #Transferlistfilters
 TransferSearchFilters.boxheader=Filteri
 TransferSearchFilters.enterName=Odredi ime filtera\:
@@ -531,6 +535,7 @@ TransferSearchFilters.saveFilter=Spremi novi filter
 
 #Filter
 Filters.label=Filteri
+Filters.addFilterOptions=Dodaj mogućnosti filtra
 Filters.ok=Ok
 Filters.clear=Obriši
 Filters.noFilter=Bez filtera
@@ -542,17 +547,8 @@ Filters.Form=Forma
 Filters.XP=Iskustvo
 Filters.specialty=Specijalnost
 Filters.stars=Zvjezdice
-Filters.addFilterOptions=Dodaj mogućnosti filtra
-
-#Locales for date and time
-#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
-#next 6 use pluralFroms
-datetimestrings.days=dana
-datetimestrings.hours=h
-datetimestrings.minutes=m
-datetimestrings.short_seasons=s
-datetimestrings.short_weeks=w
-datetimestrings.short_days=d
+Filters.minimum=Barem
+Filters.maximum=Najviše
 
 #Transfer prices
 MedianTransferPrice.median=Srednja vrijednost
@@ -618,6 +614,7 @@ categories.R=R
 categories.E1=E1
 categories.E2=E2
 
+#match positions
 match.pos.kp=Vratar
 match.pos.kp.abbr=KP
 match.pos.lb=Lijevi bočni
@@ -654,17 +651,22 @@ match.role.captain.abbr=Kap.
 
 match.player.unknown=Nepoznat igrač
 
-TeamStats.General=Općenito
-
+# SkillTable
+Skill_table=Tablica vještina
+Switch_view=Promijeni pregled
+AddHomegrown=Dodaj domaće igrače
+showTimeInClub=Prikaži vrijeme u klubu
+Switch_view.title=Promijeni izgled tablice.
+skillTable.addHomegrown=Dodaje sve domaće igrače od trenutnih
+skillTable.showTimeInClub=Prikaži vrijeme od kad se igrač pridružio klupskoj seniorskoj momčadi
+skilltable.youthplayer=junior
+skilltable.rebought_youthplayer=Ponovno kupljeni juniori
 PlayerNumber=Igračev broj
 PlayerNumber.abbr=\#
-
 TSI=Ukupni indeks vještina
 TSI.abbr=TSI
-
 CanBePromotedIn=Može biti promoviran za
 CanBePromotedIn.abbr=Prom
-
 Personality=Osobnost
 Agreeability=Suglasnost
 Agreeability.abbr=Sug
@@ -672,33 +674,26 @@ Aggressiveness=Agresivnost
 Aggressiveness.abbr=Agr
 Honesty=Poštenje
 Honesty.abbr=Poš
-
 Leadership=Vodstvo
 Leadership.abbr=Vod
 Experience=Iskustvo
 Experience.abbr=Isk
-
 Stamina=Izdržljivost
 Stamina.abbr=Izd
 Form=Forma
 Form.abbr=For
-
 Loyalty=Privrženost
 Loyalty.abbr=Pri
 MotherClubBonus=Bonus matičnoga kluba
 MotherClubBonus.abbr=MK
-
 Status=Status
 Status.abbr=Status
-
 Yellow_card=Žuti karton
 Yellow_card.abbr=Ž
 Red_card=Crveni karton
 Red_card.abbr=C
-
 Speciality=Specijalnost
 Speciality.abbr=Sp
-
 Last_match=Posljednja utakmica
 Last_match.abbr=Utakmica
 Last_stars=Posljednja ocjena
@@ -712,18 +707,14 @@ Last_position.abbr=Poz.
 #following string uses pluralForms
 Last_match_played_as_at=Igrao %1 minuta kao %2 u njegovoj posljednjoj utakmici %3.
 Last_match_didnot_play=Još nije igrao.
-
 Bruised=Lakše ozlijeđen
 Bruised.abbr=LOz
 Injured=Ozlijeđen
 Injured.abbr=Ozl
-
 Salary=Plaća
 Salary.abbr=Plaća
-
 TransferListed=Na transfer listi
 TransferListed.abbr=TL
-
 NrOfMatches=Broj utakmica
 NrOfMatches.abbr=BU
 LeagueGoals=Golova u ligi
@@ -736,43 +727,48 @@ CareerGoals=Golova u karijeri
 CareerGoals.abbr=G
 Hattricks=Hattrickovi
 Hattricks.abbr=HT
-
 Current_club=Trenutni klub
 Current_club.abbr=Klub
 Current_league=Trenutna liga
 Current_league.abbr=Liga
-
 JoinedSince=Igra od
 JoinedSince.abbr=Od
-
 Hotlist=Vruća lista
 Hotlist.abbr=Vruće
+Coach=Trener
+CurrentSquad=Trenutna postava
+Nationality=Nacionalnost
+Nationality.abbr=Nac
+Flag=Zastavica
+Flag.abbr=Zastavica
+Player=Igrač
+Player.abbr=Igrač
+Age=Starost
+Age.abbr=Starost
+Match=Utakmica
+Series=Liga
+TransferCompare=Usporedba transfera
+TransferCompare.abbr=TC
+Bookmark=Pribilježi
+Bookmark.abbr=Bm
+Deadline=Rok transfera
+Deadline.abbr=Rok
+CurrentBid=Trenutna ponuda
+CurrentBid.abbr=Ponuda
+CurrentBidder=Trenutni najbolji ponuđač
+CurrentBidder.abbr=Ponuđač
+CurrentBidderShort=Trenutni najbolji ponuđač
+CurrentBidderShort.abbr=Bd
 
-skilltable.youthplayer=junior
-skilltable.rebought_youthplayer=Ponovno kupljeni juniori
-
-#matchdetail
-match.ratings.midfield=Sredina
-match.ratings.attack=Napad
-match.ratings.defence=Obrana
-match.ratings.total=Ukupno
-
-match.ratings.right=Desni
-match.ratings.center=Sredina
-match.ratings.left=Lijevi
-match.ratings.rightshort=D
-match.ratings.centershort=S
-match.ratings.leftshort=L
-match.ratings.ifkshort=I
+#confirms
 ConfirmActions.bid=Da li zaista želite poslati ponudu za ovog igrača? Trenutna cijena je %s Kn.
 ConfirmActions.transferlist=Da li zaista želite postaviti ovog igrača na transfer listu? Početna cijena je %s Kn.
 ConfirmActions.hirestaff=Da li zaista želite uposliti\! %num %kind?
 ConfirmActions.sackstaff=Da li zaista želite otpustiti\! %num %kind?
 ConfirmActions.ntremove=Da li zaista želite dodati/izbaciti ovog igrača u/iz momčadi?
-ForumStripHattrickLinks.ask=Da li zaista želite ukloniti broj servera iz linka za prikladniji prikaz na forumu?
-HideSignatures.signaturetoggle=Potpis
-MarkUnread.markunread=Označi kao nepročitano od ovog posta
-TeamSelectBox.selectplayer=Izaberi igrača
+
+# links
+links.boxheader=Linkovi
 links.custom.selecticon=Izaberi ikonu
 links.custom.addpersonallink=Dodaj vlastiti link
 links.custom.addlink=Dodaj link
@@ -785,17 +781,7 @@ links.custom.tags=Oznake
 links.custom.help=Pomoć
 links.custom.helptext=Kao prvo, ovo je samo režim za uređivanje. Klikom na zaglavlje ovog okvira prelazi se iz uređivačkog u normalan režim rada. Vaši linkovi su u funkciji samo kada ste u normalnom režimu rada. Vanjske linkove je lako dodati, samo ubacite punu adresu (Primjer\: http\: //alltid.org/league/427/). Za interni statički link preskočite dio koji se odnosi na server (Primjer\: /World/Series/Default.aspx?LeagueLevelUnitID\=427). Oznake su vam potrebne samo za rjeđe dinamičke linkove. Uz pomoć oznaka linkovi se dinamički menjaju koristeći informaciju sa stranice na kojoj se trenutno nalazite. Npr. http\://alltid.org/league/[leagueid] će vas uvijek odvesti na 'Alltidovu' stranicu lige koju trenutno pregledavate. Oznake koje su vam dostupne za svaku stranicu prikazane su u padajućem izborniku. Možete koristiti samo oznake koje su navedene na stranici na koju dodajete novi vlastiti link. Tekst koji je naveden je samo primjer. Vaše oznake možete napraviti sami (s pomoću ugl. zagrada - []).
 links.custom.helptext2=Svoje linkove možete izvoziti i dijeliti s drugim korisnicima. To se može učiniti klikom na link 'Izvezi', te odabirom dokumenta za spremanje. Linkovi se pridodaju u taj dokument, a u isti dokument možete spremiti više linkova. Da biste uvezli linkove, morate otvoriti Foxtrickove postavke i otići na podizbornik s postavkama za 'uvoz/izvoz'. Uvezene će biti samo postavke koje su prikazane u tom dokumentu, u ovom slučaju vaši linkovi. Niti jedan od vaših prethodnih linkova neće biti uklonjen.
-matches.income=Prihod\:
-PlayerBirthday.boxheader=Rođendani
-PlayerBirthday.BirthdayToday=Rođendani danas
-PlayerBirthday.BirthdayLastWeek=Rođendani prošli tjedan
-PlayerBirthday.BirthdayNextWeek=Rođendani sljedeći tjedan
-copy.matchid=Klikni za kopiranje ID broja utakmice u međuspremnik
-ExtendedPlayerDetails.perseason=/-sezoni
 
-ExtraPlayerInfo.defensiveTrainer=%s obrambeni trener.
-ExtraPlayerInfo.offensiveTrainer=%s napadački trener.
-ExtraPlayerInfo.balancedTrainer=%s neutralni trener.
 
 #following string uses pluralForms
 notify.newMail=Primili ste %s novu poruku.;Primili ste %s novih poruka.
@@ -804,25 +790,18 @@ notify.newForumMessage=Postoji %s odgovora na forumu za vas.;Postoje %s odgovora
 
 matchView.htLive=HT Live
 
-module.modules_allpages=Opcije koje rade na svim stranicama
-ReadHtPrefs.HTLanguageChanged=Podesili ste vaše Foxtrick postavke da se automatski prilagode vašem Hattrick jeziku. Vaš odabrani jezik za Foxtrick je sada podešen na\: %s.
-
-Coach=Trener
-CurrentSquad=Trenutna postava
-
-
-ManagerButtons.writeInGuestbook=Upiši u knjigu gostiju
-copy.copyplayerad=Kopiraj igračev ID
-copy.copied=Igračev oglas je kopiran u međuspremnik.
-
-ratings.HatStats=HatStats
-ratings.LoddarStats=LoddarStats
-ratings.PeasoStats=PeasoStats
-ratings.VnukStats=VnukStats
-ratings.HTitaVal=HTitaVal
-ratings.GardierStats=GardierStats
+# Context menu items
+# This would look like: Copy player ID: 123456789
+copy.id=Kopiraj %s\: %i
+copy.link=Kopiraj adresu linka u HT-ML
+copy.ht-ml=Kopiraj u HT-ML
+copy.table=Kopiraj tablicu u HT-ML
 
 #copy
+copy.copyplayerad=Kopiraj igračev ID
+copy.copied=Igračev oglas je kopiran u međuspremnik.
+copy.matchid=Klikni za kopiranje ID broja utakmice u međuspremnik
+
 copy.PostID=Kopiraj ID poruke u međuspremnik
 CopyPosting=Kopirajte postanje u %s stilu
 CopyPosting.abbr=Kopiraj u %s stilu
@@ -854,6 +833,39 @@ copy.copied.posting=Poruka kopirana je u međuspremnik.
 copy.copySelected=Kopiraj obilježeno sa ctrl + c.
 copy.operaPaste=Zalijepi sa shift + lijevi klik.
 
+#matches
+matches.income=Prihod\:
+matches.attackdefensebars=Prikaz 'Napad protiv Obrane'
+matches.right=Desni
+matches.left=Lijevi
+matches.center=Središnji
+matches.defense=obr
+matches.attack=nap
+matches.indfreekick=Ind. slob. udarac
+matches.wronglang=Foxtrick\: Statistika ne može biti prikazana jer vaš jezik nije prijavljen ili niste podesili prikladan jezik u postavkama. Pripazite da odaberete isti jezik kako u Foxtricku tako i u Hattricku.
+total_stars=Ukupan broj zvjezdica
+
+#matchdetail
+match.ratings.midfield=Sredina
+match.ratings.attack=Napad
+match.ratings.defence=Obrana
+match.ratings.total=Ukupno
+
+match.ratings.right=Desni
+match.ratings.center=Sredina
+match.ratings.left=Lijevi
+match.ratings.rightshort=D
+match.ratings.centershort=S
+match.ratings.leftshort=L
+match.ratings.ifkshort=I
+
+ratings.HatStats=HatStats
+ratings.LoddarStats=LoddarStats
+ratings.PeasoStats=PeasoStats
+ratings.VnukStats=VnukStats
+ratings.HTitaVal=HTitaVal
+ratings.GardierStats=GardierStats
+
 MatchReportFormat.MatchReport=Izvještaj utakmice
 MatchReportFormat.lineup=Početna postava
 MatchReportFormat.kickOff=Početni udarac
@@ -863,23 +875,6 @@ MatchReportFormat.extraTime=Produžetci
 MatchReportFormat.penaltyShootOut=Izvođenje jedanaesteraca
 MatchReportFormat.result=Rezultat
 
-
-#matches
-matches.attackdefensebars=Prikaz 'Napad protiv Obrane'
-matches.right=Desni
-matches.left=Lijevi
-matches.center=Središnji
-matches.defense=obr
-matches.attack=nap
-matches.indfreekick=Ind. slob. udarac
-matches.wronglang=Foxtrick\: Statistika ne može biti prikazana jer vaš jezik nije prijavljen ili niste podesili prikladan jezik u postavkama. Pripazite da odaberete isti jezik kako u Foxtricku tako i u Hattricku.
-
-# Context menu items
-# This would look like: Copy player ID: 123456789
-copy.id=Kopiraj %s\: %i
-copy.link=Kopiraj adresu linka u HT-ML
-copy.ht-ml=Kopiraj u HT-ML
-copy.table=Kopiraj tablicu u HT-ML
 
 #teampopups
 Manager=Korisnik
@@ -899,12 +894,6 @@ LastLineup=Posljednja postava
 YouthMatches=Utakmice juniora
 more=više...
 less=manje...
-TeamPopupLinks.prefsCaption=Link postavki
-TeamPopupLinks.ShowByDefault=Prikaži uobičajeno
-TeamPopupLinks.ShowOnMore=Prikaži više
-TeamPopupLinks.OpenNewTab=Otvori u novoj kartici
-
-total_stars=Ukupan broj zvjezdica
 
 # FlagCollectionToMap
 flagCollectionToMap.ShowMap=Prikaži kartu
@@ -916,12 +905,6 @@ flagCollectionToMap.MEast=Srednji Istok
 flagCollectionToMap.SAmerica=Južna Amerika
 flagCollectionToMap.World=Svijet
 
-# SkillTable
-Skill_table=Tablica vještina
-Switch_view=Promijeni pregled
-AddHomegrown=Dodaj domaće igrače
-showTimeInClub=Prikaži vrijeme u klubu
-
 team.status.booked=Prijateljska utakmica ugovorena
 ShowFriendlyBooked.ShowFriendlies=Prikaži prijateljske
 
@@ -932,10 +915,6 @@ TransferSearchResultFilters.hideInjured=Sakrij ozlijeđene
 TransferSearchResultFilters.hideSuspended=Sakrij suspendirane
 TransferSearchResultFilters.days=Dana\:
 
-# refer to transfer search form
-Filters.minimum=Barem
-Filters.maximum=Najviše
-
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
 RapidId.view=Pregled
 RapidId.viewById=Pregled preko ID broja
@@ -944,33 +923,6 @@ RapidId.youth=Junior
 RapidId.tournaments=Turniri
 RapidId.tournament=Turnir
 
-# SkillTable
-Switch_view.title=Promijeni izgled tablice.
-skillTable.addHomegrown=Dodaje sve domaće igrače od trenutnih
-skillTable.showTimeInClub=Prikaži vrijeme od kad se igrač pridružio klupskoj seniorskoj momčadi
-Nationality=Nacionalnost
-Nationality.abbr=Nac
-Flag=Zastavica
-Flag.abbr=Zastavica
-Player=Igrač
-Player.abbr=Igrač
-Age=Starost
-Age.abbr=Starost
-Match=Utakmica
-Series=Liga
-
-TransferCompare=Usporedba transfera
-TransferCompare.abbr=TC
-Bookmark=Pribilježi
-Bookmark.abbr=Bm
-Deadline=Rok transfera
-Deadline.abbr=Rok
-CurrentBid=Trenutna ponuda
-CurrentBid.abbr=Ponuda
-CurrentBidder=Trenutni najbolji ponuđač
-CurrentBidder.abbr=Ponuđač
-CurrentBidderShort=Trenutni najbolji ponuđač
-CurrentBidderShort.abbr=Bd
 
 # HTMSPrediction
 HTMSPrediction.prediction=Predviđeni rezultat
@@ -1042,7 +994,15 @@ pageAction.mainContent=Prikaži glavni sadržaj
 pageAction.leftMenu=Prikaži lijevu traku
 pageAction.all=Prikaži sve
 
-sidebarBox.actions=Dodatne Radnje
+#Locales for date and time
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
+datetimestrings.days=dana
+datetimestrings.hours=h
+datetimestrings.minutes=m
+datetimestrings.short_seasons=s
+datetimestrings.short_weeks=w
+datetimestrings.short_days=d
 
 # buttons
 button.ok=OK
@@ -1087,6 +1047,9 @@ exception.error=Greška %s
 
 log.header=FoxTrick zapisi
 # keep the following line untranslated
+log.env=Verzija %1, %2 sučelje, %3 jezik, %4 raspored, %5 smjer
+
+ReadHtPrefs.HTLanguageChanged=Podesili ste vaše Foxtrick postavke da se automatski prilagode vašem Hattrick jeziku. Vaš odabrani jezik za Foxtrick je sada podešen na\: %s.
 
 # End of IN-GAME STRINGS.
 
@@ -1096,6 +1059,10 @@ log.header=FoxTrick zapisi
 Links.feeds=Izvori liste linkova (odvojeni redovima)
 TickerAlert.enable=Omogući
 TickerAlert.sound=Zvuk
+TeamPopupLinks.prefsCaption=Link postavki
+TeamPopupLinks.ShowByDefault=Prikaži uobičajeno
+TeamPopupLinks.ShowOnMore=Prikaži više
+TeamPopupLinks.OpenNewTab=Otvori u novoj kartici
 
 #toolbar
 toolbar.title=FoxTrick
