--- a/content/locale/it/foxtrick.properties
+++ b/content/locale/it/foxtrick.properties
@@ -393,9 +393,6 @@ module.SafeForWork.desc=Sostituisce l'icona e il testo del titolo delle schede d
 SafeForWork.title=Titolo
 SafeForWork.icon=Icona
 
-#Embed Media
-EmbedMedia.EmbeddedImage=Immagine incorporata
-
 #Extrashortcuts
 ExtraShortcuts.statistics=Statistiche
 ExtraShortcuts.transfers=Trasferimenti
@@ -403,10 +400,8 @@ ExtraShortcuts.ManageCHPP=Gestisci i tuoi prodotti CHPP
 ExtraShortcuts.prefs=Preferenze
 ExtraShortcuts.ftprefs=Preferenze di FoxTrick
 
-#lineupShortcut
-
-
 #HistoryStats
+HistoryStats.boxheader=Statistiche
 HistoryStats.season=Stagione
 HistoryStats.season.short=S
 HistoryStats.cup=Turni di coppa
@@ -415,7 +410,6 @@ HistoryStats.league=Serie
 HistoryStats.league.short=Ser.
 HistoryStats.finalPosition=Posizione finale nella serie
 HistoryStats.finalPosition.short=P
-HistoryStats.boxheader=Statistiche
 HistoryStats.cupwinner=Vincitore di coppa
 HistoryStats.cupwinner.short=VC
 
@@ -424,11 +418,9 @@ HistoryStats.cupwinner.short=VC
 YouthPromotes.future=Il giocatore può essere promosso tra %1 giorno/i ovvero il %2.
 YouthPromotes.today=Il giocatore può essere promosso oggi\!
 
-# links
-links.boxheader=Collegamenti
-
 #teamstats+filters
 TeamStats.boxheader=Panoramica squadra
+TeamStats.General=Generale
 TeamStats.PlayerNotToOld=Giocatori < 19 anni
 TeamStats.PlayerToOld=Giocatori >\= 19 anni
 TeamStats.Cards=Cartellini
@@ -442,6 +434,12 @@ TeamStats.ActivePlayers=Giocatori attivi
 TeamStats.HomeGrownPlayers=Giocatori del vivaio
 TeamStats.PurchasedPlayers=Giocatori acquistati
 TeamStats.FilterFor=Filtro per
+
+#PlayerBirthday
+PlayerBirthday.boxheader=Compleanni
+PlayerBirthday.BirthdayToday=Compleanni di oggi
+PlayerBirthday.BirthdayLastWeek=Compleanni della scorsa settimana
+PlayerBirthday.BirthdayNextWeek=Compleanni di questa settimana
 
 #season stats
 #note to translators. use abreviations of league table where applicable
@@ -468,43 +466,52 @@ LeagueNewsFilter.friendlies=Amichevoli e cambi allenatori
 LeagueNewsFilter.transfers=Trasferimenti
 LeagueNewsFilter.lineupChanges=Cambi formazione
 
-# AddLeaveConfButton
-AddLeaveConfButton.alert=Clicca sul pulsante 'Salva' nella prossima pagina per abbandonare il forum
-AddLeaveConfButton.LeaveForum=Abbandona forum
+#team pages
+sidebarBox.actions=Azioni
+TeamSelectBox.selectplayer=Seleziona giocatore
+ExtendedPlayerDetails.perseason=/stagione
+ExtraPlayerInfo.defensiveTrainer=Un allenatore %s con atteggiamento difensivo.
+ExtraPlayerInfo.offensiveTrainer=Un allenatore %s con atteggiamento spregiudicato.
+ExtraPlayerInfo.balancedTrainer=Un allenatore %s con atteggiamento equilibrato.
+ManagerButtons.writeInGuestbook=Scrivi nel libro degli ospiti
 
-#ShowForumPrefButton
+#forum
+AddLeaveConfButton.LeaveForum=Abbandona forum
+AddLeaveConfButton.alert=Clicca sul pulsante 'Salva' nella prossima pagina per abbandonare il forum
 ShowForumPrefButton.forumPreferences=Preferenze del forum
+FormatPostingText.ShowNestedQuotes=Visualizza citazioni nidificate
+HideSignatures.signaturetoggle=Firma
+MarkUnread.markunread=Segna come non letto da qui
+EmbedMedia.EmbeddedImage=Immagine incorporata
+ForumStripHattrickLinks.ask=Vuoi eliminare il server dai collegamenti per renderli utilizzabili nel forum?
 
 # ForumTemplates
 ForumTemplates.make=Crea modello dal messaggio
+ForumTemplates.make.error=Modello già esistente o vuoto
 ForumTemplates.show=Mostra modelli
 ForumTemplates.hide=Nascondi modelli
-ForumTemplates.make.error=Modello già esistente o vuoto
 ForumTemplates.templateTitle=Titolo del modello\:
 ForumTemplates.templateTitle.error='[' e ']' non sono ammessi nel titolo
 ForumTemplates.delete.ask=Cancella modello?
 
-#PostPreview
+#ForumPreview
 ForumPreview.preview.title=Visualizza anteprima del messaggio
 ForumPreview.preview=Anteprima
 ForumPreview.send=Invia
 
-
+#ForumYouthIcons
+ForumYouthIcons.toolbar.main=Collegamenti principali
 ForumYouthIcons.toolbar.youth=Collegamenti della squadra giovanile
 ForumYouthIcons.toolbar.tournament=Tornei
-ForumYouthIcons.toolbar.main=Collegamenti principali
+ForumYouthIcons.toolbar.other=Altre
 ForumYouthIcons.youthplayerid=Collegamento a giocatore della squadra giovanile
 ForumYouthIcons.youthteamid=Collegamento a squadra giovanile
 ForumYouthIcons.youthmatchid=Aggiunge icona collegamento a partita giovanile
 ForumYouthIcons.youthseries=Aggiunge icona collegamento a serie giovanile
 ForumYouthIcons.tournamentid=Inserire tag torneo.
 ForumYouthIcons.tournamentmatchid=Inserire tag per la partita del torneo.
-
-ForumYouthIcons.toolbar.other=Altre
 ForumYouthIcons.debug=Inserire il registro di debug di FoxTrick.
 ForumYouthIcons.settings=Inserisci le impostazioni di FoxTrick.
-
-#special bbcode, not really youth icons
 ForumSpecialBBCode.q=Aggiunge citazione
 ForumSpecialBBCode.br=Aggiunge icona ritorno a capo
 ForumSpecialBBCode.user=Aggiunge icona codice utente
@@ -519,9 +526,6 @@ ForumSpecialBBCode.enterSeparator=Inserisci un separatore personalizzato
 ForumSpecialBBCode.forumSymbol=Inserisci "%s"
 ForumSpecialBBCode.symbols=Inserisci simbolo\: %s
 
-
-FormatPostingText.ShowNestedQuotes=Visualizza citazioni nidificate
-
 #Transferlistfilters
 TransferSearchFilters.boxheader=Filtri di Foxtrick
 TransferSearchFilters.enterName=Inserisci nome filtro\:
@@ -530,6 +534,7 @@ TransferSearchFilters.saveFilter=Salva nuovo filtro
 
 #Filter
 Filters.label=Filtri
+Filters.addFilterOptions=Aggiungi opzioni al filtro
 Filters.ok=Ok
 Filters.clear=Pulisci
 Filters.noFilter=Nessun filtro
@@ -541,17 +546,8 @@ Filters.Form=Forma
 Filters.XP=Esperienza
 Filters.specialty=Specialità
 Filters.stars=Stelle
-Filters.addFilterOptions=Aggiungi opzioni al filtro
-
-#Locales for date and time
-#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
-#next 6 use pluralFroms
-datetimestrings.days=giorni
-datetimestrings.hours=h
-datetimestrings.minutes=m
-datetimestrings.short_seasons=s
-datetimestrings.short_weeks=set
-datetimestrings.short_days=gg
+Filters.minimum=Almeno
+Filters.maximum=Massimo
 
 #Transfer prices
 MedianTransferPrice.median=Prezzo mediano
@@ -617,6 +613,7 @@ categories.R=R
 categories.E1=E1
 categories.E2=E2
 
+#match positions
 match.pos.kp=Portiere
 match.pos.kp.abbr=PR
 match.pos.lb=Terzino sinistro
@@ -653,17 +650,22 @@ match.role.captain.abbr=Capit.
 
 match.player.unknown=Giocatore sconosciuto
 
-TeamStats.General=Generale
-
+# SkillTable
+Skill_table=Tabella delle skill
+Switch_view=Cambia vista
+AddHomegrown=Aggiungi giocatori delle giovanili
+showTimeInClub=Mostra il tempo nel club
+Switch_view.title=Cambia la vista della tabella.
+skillTable.addHomegrown=Aggiunge tutti i giocatori cresciuti nella squadra dalla lista dei giocatori attuali
+skillTable.showTimeInClub=Mostra da quanto tempo il giocatore fa parte della prima squadra
+skilltable.youthplayer=Giocatore delle giovanili
+skilltable.rebought_youthplayer=Giocatore delle giovanili ricomprato
 PlayerNumber=Numero maglia
 PlayerNumber.abbr=\#
-
 TSI=Total Skill Index
 TSI.abbr=TSI
-
 CanBePromotedIn=Può essere promosso tra
 CanBePromotedIn.abbr=Prom
-
 Personality=Personalità
 Agreeability=Simpatia
 Agreeability.abbr=Sim
@@ -671,33 +673,26 @@ Aggressiveness=Aggressività
 Aggressiveness.abbr=Agg
 Honesty=Condotta Morale
 Honesty.abbr=CM
-
 Leadership=Carisma
 Leadership.abbr=Car
 Experience=Esperienza
 Experience.abbr=XP
-
 Stamina=Resistenza
 Stamina.abbr=Res
 Form=Forma
 Form.abbr=For
-
 Loyalty=Fedeltà
 Loyalty.abbr=Fe
 MotherClubBonus=Bonus Squadra d'origine
 MotherClubBonus.abbr=BO
-
 Status=Stato
 Status.abbr=Stato
-
 Yellow_card=Cartellino Giallo
 Yellow_card.abbr=G
 Red_card=Cartellino Rosso
 Red_card.abbr=R
-
 Speciality=Specialità
 Speciality.abbr=Sp
-
 Last_match=Ultima partita
 Last_match.abbr=Ultima
 Last_stars=Ultima valutazione in stelle
@@ -711,18 +706,14 @@ Last_position.abbr=Pos
 #following string uses pluralForms
 Last_match_played_as_at=Ha giocato %1 min come %2 il %3.
 Last_match_didnot_play=Non ha ancora giocato.
-
 Bruised=Acciaccato
 Bruised.abbr=Acc
 Injured=Infortunato
 Injured.abbr=Inf
-
 Salary=Stipendio
 Salary.abbr=Stip
-
 TransferListed=In-Vendita
 TransferListed.abbr=$$
-
 NrOfMatches=Partite Giocate
 NrOfMatches.abbr=PG
 LeagueGoals=Gol in questa stagione
@@ -735,43 +726,48 @@ CareerGoals=Gol in carriera
 CareerGoals.abbr=GTot
 Hattricks=Hattrick
 Hattricks.abbr=HT
-
 Current_club=Squadra attuale
 Current_club.abbr=Squadra
 Current_league=Serie attuale
 Current_league.abbr=Serie
-
 JoinedSince=Iscritto dal
 JoinedSince.abbr=Dal
-
 Hotlist=Hotlist
 Hotlist.abbr=Hot
+Coach=Allenatore
+CurrentSquad=Squadra attuale
+Nationality=Nazionalità
+Nationality.abbr=Naz
+Flag=Bandiera
+Flag.abbr=Flag
+Player=Giocatore
+Player.abbr=Nome
+Age=Età
+Age.abbr=Età
+Match=Partita
+Series=Serie
+TransferCompare=Confronta trasferimenti
+TransferCompare.abbr=CT
+Bookmark=Segnalibro
+Bookmark.abbr=Sl
+Deadline=Scadenza
+Deadline.abbr=Scadenza
+CurrentBid=Offerta corrente
+CurrentBid.abbr=Offerta
+CurrentBidder=Miglior offerente
+CurrentBidder.abbr=Offerente
+CurrentBidderShort=Miglior offerente
+CurrentBidderShort.abbr=Off
 
-skilltable.youthplayer=Giocatore delle giovanili
-skilltable.rebought_youthplayer=Giocatore delle giovanili ricomprato
-
-#matchdetail
-match.ratings.midfield=Centrocampo
-match.ratings.attack=Attacco
-match.ratings.defence=Difesa
-match.ratings.total=Totale
-
-match.ratings.right=Destra
-match.ratings.center=Centro
-match.ratings.left=Sinistra
-match.ratings.rightshort=D
-match.ratings.centershort=C
-match.ratings.leftshort=S
-match.ratings.ifkshort=I
+#confirms
 ConfirmActions.bid=Vuoi offrire per questo giocatore? Il prezzo è %s.
 ConfirmActions.transferlist=Vuoi vendere questo giocatore? Il prezzo è %s.
 ConfirmActions.hirestaff=Vuoi assumere %num %kind?
 ConfirmActions.sackstaff=Vuoi licenziare %num %kind?
 ConfirmActions.ntremove=Vuoi veramente convocare/sconvocare questo giocatore?
-ForumStripHattrickLinks.ask=Vuoi eliminare il server dai collegamenti per renderli utilizzabili nel forum?
-HideSignatures.signaturetoggle=Firma
-MarkUnread.markunread=Segna come non letto da qui
-TeamSelectBox.selectplayer=Seleziona giocatore
+
+# links
+links.boxheader=Collegamenti
 links.custom.selecticon=Seleziona icona
 links.custom.addpersonallink=Aggiungi collegamento personale
 links.custom.addlink=Aggiungi collegamento
@@ -784,17 +780,7 @@ links.custom.tags=Tags
 links.custom.help=Aiuto
 links.custom.helptext=Questa e' solo la modalità editor. Cliccando sull'intestazione di questo box si passa dalla modalità editor a quella normale. Solo nella modalità normale i tuoi link saranno funzionanti. I collegamenti statici esterni sono facili da aggiungere, devi solo aggiungere l'indirizzo completo (Esempio\: http\: //alltid.org/league/427/). Per collegamenti statici interni evitate l'indirizzo del server (Esempio\: /World/Series/Default.aspx?LeagueLevelUnitID\=427). Le tag servono solo per i collegamenti dinamici, più rari. Con i tag, i collegameni cambiano dinamicamente in funzione di dove ti trovi. Ad esempio http\://alltid.org/league/[leagueid] porterà sempre alla pagina di AlltID della serie che stai visualizzando. Le tag disponibili per ogni sito sono elencate nel box di selezione. Si possono usare solo quelle elencate per il sito di destinazione. Il testo generato è solo un esempio. Puoi scrivere tu stesso le tag (con []).
 links.custom.helptext2=Puoi anche esportare i tuoi collegamenti e condividerli. Per fare questo devi cliccare su esporta e selezionare un file in cui salvare il collegamento. I collegamenti sono aggiunti in questo file, puoi anche salvare più collegamenti in un solo file. Per importare i collegamenti vai nella configurazione di foxtrick e vai nelle impostazioni principali. Solo le impostazioni predenti nel file selezionato verranno importate, in questo caso saranno i tuoi collegamenti. Nessuno dei collegamenti presenti verra' cancellato.
-matches.income=Incasso\:
-PlayerBirthday.boxheader=Compleanni
-PlayerBirthday.BirthdayToday=Compleanni di oggi
-PlayerBirthday.BirthdayLastWeek=Compleanni della scorsa settimana
-PlayerBirthday.BirthdayNextWeek=Compleanni di questa settimana
-copy.matchid=Clicca per copiare il matchID negli appunti
-ExtendedPlayerDetails.perseason=/stagione
 
-ExtraPlayerInfo.defensiveTrainer=Un allenatore %s con atteggiamento difensivo.
-ExtraPlayerInfo.offensiveTrainer=Un allenatore %s con atteggiamento spregiudicato.
-ExtraPlayerInfo.balancedTrainer=Un allenatore %s con atteggiamento equilibrato.
 
 #following string uses pluralForms
 notify.newMail=Hai ricevuto %s nuova mail.;Hai ricevuto %s nuove mail.
@@ -803,25 +789,18 @@ notify.newForumMessage=C'è %s nuova risposta sul forum.;Ci sono %s nuove rispos
 
 matchView.htLive=HT Live
 
-module.modules_allpages=Moduli funzionanti su ogni pagina
-ReadHtPrefs.HTLanguageChanged=Hai scelto nelle impostazioni di Foxtrick di cambiare la lingua di Foxtrick a ogni cambio di lingua sul sito. Ora la tua lingua è\: %s.
-
-Coach=Allenatore
-CurrentSquad=Squadra attuale
-
-
-ManagerButtons.writeInGuestbook=Scrivi nel libro degli ospiti
-copy.copyplayerad=Copia le caratteristiche del giocatore negli appunti
-copy.copied=Caratteristiche del giocatore copiate negli appunti
-
-ratings.HatStats=HatStats
-ratings.LoddarStats=LoddarStats
-ratings.PeasoStats=PeasoStats
-ratings.VnukStats=VnukStats
-ratings.HTitaVal=HTitaVal
-ratings.GardierStats=GardierStats
+# Context menu items
+# This would look like: Copy player ID: 123456789
+copy.id=Copia %s\: %i
+copy.link=Copia il link in HT-ML
+copy.ht-ml=Copia in HT-ML
+copy.table=Copia tabella in HT-ML
 
 #copy
+copy.copyplayerad=Copia le caratteristiche del giocatore negli appunti
+copy.copied=Caratteristiche del giocatore copiate negli appunti
+copy.matchid=Clicca per copiare il matchID negli appunti
+
 copy.PostID=Copia ID messaggio negli appunti
 CopyPosting=Copia messaggio con lo stile %s
 CopyPosting.abbr=Copia in stile %s
@@ -853,6 +832,39 @@ copy.copied.posting=Il messaggio è stato copiato negli appunti
 copy.copySelected=Copia la selezione con Ctrl + C.
 copy.operaPaste=Incolla con MAIUSC + clic sinistro.
 
+#matches
+matches.income=Incasso\:
+matches.attackdefensebars=Barre attacco/difesa
+matches.right=Destra
+matches.left=Sinistra
+matches.center=Centrale
+matches.defense=Dif
+matches.attack=Att
+matches.indfreekick=Calci piazzati ind.
+matches.wronglang=Foxtrick\: la lingua che hai impostato in hattrick e' diversa da quella impostata in Foxtrick, quindi le barre non possono essere visualizzate
+total_stars=Stelle totali
+
+#matchdetail
+match.ratings.midfield=Centrocampo
+match.ratings.attack=Attacco
+match.ratings.defence=Difesa
+match.ratings.total=Totale
+
+match.ratings.right=Destra
+match.ratings.center=Centro
+match.ratings.left=Sinistra
+match.ratings.rightshort=D
+match.ratings.centershort=C
+match.ratings.leftshort=S
+match.ratings.ifkshort=I
+
+ratings.HatStats=HatStats
+ratings.LoddarStats=LoddarStats
+ratings.PeasoStats=PeasoStats
+ratings.VnukStats=VnukStats
+ratings.HTitaVal=HTitaVal
+ratings.GardierStats=GardierStats
+
 MatchReportFormat.MatchReport=Cronaca partita
 MatchReportFormat.lineup=Formazione
 MatchReportFormat.kickOff=Calcio d'inizio
@@ -862,23 +874,6 @@ MatchReportFormat.extraTime=Tempi supplementari
 MatchReportFormat.penaltyShootOut=Calci di rigore
 MatchReportFormat.result=Risultato
 
-
-#matches
-matches.attackdefensebars=Barre attacco/difesa
-matches.right=Destra
-matches.left=Sinistra
-matches.center=Centrale
-matches.defense=Dif
-matches.attack=Att
-matches.indfreekick=Calci piazzati ind.
-matches.wronglang=Foxtrick\: la lingua che hai impostato in hattrick e' diversa da quella impostata in Foxtrick, quindi le barre non possono essere visualizzate
-
-# Context menu items
-# This would look like: Copy player ID: 123456789
-copy.id=Copia %s\: %i
-copy.link=Copia il link in HT-ML
-copy.ht-ml=Copia in HT-ML
-copy.table=Copia tabella in HT-ML
 
 #teampopups
 Manager=Utente
@@ -898,12 +893,6 @@ LastLineup=Ultima formazione
 YouthMatches=Partita delle giovanili
 more=di più...
 less=meno...
-TeamPopupLinks.prefsCaption=Preferenze collegamenti
-TeamPopupLinks.ShowByDefault=Visualizzazione predefinita
-TeamPopupLinks.ShowOnMore=Mostra di più
-TeamPopupLinks.OpenNewTab=Apri in una nuova scheda
-
-total_stars=Stelle totali
 
 # FlagCollectionToMap
 flagCollectionToMap.ShowMap=Mostra mappa
@@ -915,12 +904,6 @@ flagCollectionToMap.MEast=Medio oriente
 flagCollectionToMap.SAmerica=Sud America
 flagCollectionToMap.World=Mondo
 
-# SkillTable
-Skill_table=Tabella delle skill
-Switch_view=Cambia vista
-AddHomegrown=Aggiungi giocatori delle giovanili
-showTimeInClub=Mostra il tempo nel club
-
 team.status.booked=Amichevole organizzata
 ShowFriendlyBooked.ShowFriendlies=Mostra amichevoli
 
@@ -931,10 +914,6 @@ TransferSearchResultFilters.hideInjured=Non mostrare infortunati
 TransferSearchResultFilters.hideSuspended=Non mostrare squalificati
 TransferSearchResultFilters.days=Giorni\:
 
-# refer to transfer search form
-Filters.minimum=Almeno
-Filters.maximum=Massimo
-
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
 RapidId.view=Visualizza
 RapidId.viewById=Cerca ID
@@ -943,33 +922,6 @@ RapidId.youth=Giovanili
 RapidId.tournaments=Tornei
 RapidId.tournament=Torneo
 
-# SkillTable
-Switch_view.title=Cambia la vista della tabella.
-skillTable.addHomegrown=Aggiunge tutti i giocatori cresciuti nella squadra dalla lista dei giocatori attuali
-skillTable.showTimeInClub=Mostra da quanto tempo il giocatore fa parte della prima squadra
-Nationality=Nazionalità
-Nationality.abbr=Naz
-Flag=Bandiera
-Flag.abbr=Flag
-Player=Giocatore
-Player.abbr=Nome
-Age=Età
-Age.abbr=Età
-Match=Partita
-Series=Serie
-
-TransferCompare=Confronta trasferimenti
-TransferCompare.abbr=CT
-Bookmark=Segnalibro
-Bookmark.abbr=Sl
-Deadline=Scadenza
-Deadline.abbr=Scadenza
-CurrentBid=Offerta corrente
-CurrentBid.abbr=Offerta
-CurrentBidder=Miglior offerente
-CurrentBidder.abbr=Offerente
-CurrentBidderShort=Miglior offerente
-CurrentBidderShort.abbr=Off
 
 # HTMSPrediction
 HTMSPrediction.prediction=Risultato previsto
@@ -1041,7 +993,15 @@ pageAction.mainContent=Mostra contenuto principale
 pageAction.leftMenu=Mostra barra a sinistra
 pageAction.all=Visualizza tutto
 
-sidebarBox.actions=Azioni
+#Locales for date and time
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
+datetimestrings.days=giorni
+datetimestrings.hours=h
+datetimestrings.minutes=m
+datetimestrings.short_seasons=s
+datetimestrings.short_weeks=set
+datetimestrings.short_days=gg
 
 # buttons
 button.ok=Ok
@@ -1087,6 +1047,8 @@ exception.error=Errore %s
 log.header=Registro di FoxTrick
 # keep the following line untranslated
 
+ReadHtPrefs.HTLanguageChanged=Hai scelto nelle impostazioni di Foxtrick di cambiare la lingua di Foxtrick a ogni cambio di lingua sul sito. Ora la tua lingua è\: %s.
+
 # End of IN-GAME STRINGS.
 
 
@@ -1095,6 +1057,10 @@ log.header=Registro di FoxTrick
 Links.feeds=Feed di liste di link (separati da interruzioni di riga)
 TickerAlert.enable=Attiva
 TickerAlert.sound=Suono
+TeamPopupLinks.prefsCaption=Preferenze collegamenti
+TeamPopupLinks.ShowByDefault=Visualizzazione predefinita
+TeamPopupLinks.ShowOnMore=Mostra di più
+TeamPopupLinks.OpenNewTab=Apri in una nuova scheda
 
 #toolbar
 toolbar.title=FoxTrick
