--- a/content/locale/lb/foxtrick.properties
+++ b/content/locale/lb/foxtrick.properties
@@ -210,23 +210,15 @@ module.MatchTables.RemoveTime.desc=D'Matchzäit gëtt an der aktueller Matchtabe
 
 #Save for work
 
-#Embed Media
-
 #Extrashortcuts
 ExtraShortcuts.statistics=Statistiken
 ExtraShortcuts.transfers=Transferen
 ExtraShortcuts.prefs=Astellungen
 
-#lineupShortcut
-
-
 #HistoryStats
 
 # YouthPromotes
 #following string uses pluralForms
-
-# links
-links.boxheader=Links
 
 #teamstats+filters
 TeamStats.boxheader=Iwwersiicht fir d'Équipe
@@ -238,6 +230,11 @@ TeamStats.TransferListed=Op dem Transfermaart
 TeamStats.Pictures=Biller
 TeamStats.PlayedLatest=Huet am leschte Match gespillt
 TeamStats.NotPlayedLatest=Huet net am leschte Match gespillt
+
+#PlayerBirthday
+PlayerBirthday.boxheader=Gebuertsdeeg
+PlayerBirthday.BirthdayLastWeek=Gebuertsdeeg vun der leschter Woch
+PlayerBirthday.BirthdayNextWeek=Gebuertsdeeg vun der nächster Woch
 
 #season stats
 #note to translators. use abreviations of league table where applicable
@@ -264,43 +261,43 @@ LeagueNewsFilter.friendlies=Frëndschaftsmätscher & Trainerwiessel
 LeagueNewsFilter.transfers=Transferen
 LeagueNewsFilter.lineupChanges=Ännerunge vun der Opstellung
 
-# AddLeaveConfButton
-AddLeaveConfButton.alert=Klick op de Knäppchen 'Späicheren' op der nächster Säit, fir dëse Forum ze verloossen.
-AddLeaveConfButton.LeaveForum=Forum verloossen
+#team pages
+sidebarBox.actions=Aktiounen
+TeamSelectBox.selectplayer=Spiller wielen
+ExtendedPlayerDetails.perseason=/ Saison
+ManagerButtons.writeInGuestbook=An d'Gëllent Buch schreiwen
 
-#ShowForumPrefButton
+#forum
+AddLeaveConfButton.LeaveForum=Forum verloossen
+AddLeaveConfButton.alert=Klick op de Knäppchen 'Späicheren' op der nächster Säit, fir dëse Forum ze verloossen.
+HideSignatures.signaturetoggle=Signatur
 
 # ForumTemplates
 ForumTemplates.make=Dëse Message zu engem Modell maachen.
+ForumTemplates.make.error=Modell gëtt et schonn oder ass eidel.
 ForumTemplates.show=Modeller weisen
 ForumTemplates.hide=Modeller verstoppen
-ForumTemplates.make.error=Modell gëtt et schonn oder ass eidel.
 ForumTemplates.templateTitle=Titel vum Modell\:
 ForumTemplates.templateTitle.error='[' an ']' sinn am Titel net erlaabt
 ForumTemplates.delete.ask=Modell läschen?
 
-#PostPreview
+#ForumPreview
 ForumPreview.preview.title=Message prévisualiséieren
 ForumPreview.preview=Previsualiséieren
 ForumPreview.send=Schécken
 
-
-ForumYouthIcons.toolbar.youth=Links fir d'Jugend
+#ForumYouthIcons
 ForumYouthIcons.toolbar.main=Haapt-Links
+ForumYouthIcons.toolbar.youth=Links fir d'Jugend
 ForumYouthIcons.youthplayerid=Link op e Jugendspiller
 ForumYouthIcons.youthteamid=Link op eng Jugendéquipe
 ForumYouthIcons.youthmatchid=Link op e Jugendmatch
 ForumYouthIcons.youthseries=Link op eng Jugendliga
-
-
-#special bbcode, not really youth icons
 ForumSpecialBBCode.br=Zeilenëmbroch dobäisetzen
 ForumSpecialBBCode.user=BenotzerID dobäisetzen
 ForumSpecialBBCode.kit=KitID dobäisetzen
 ForumSpecialBBCode.article=ArtikelID dobäisetzen
 ForumSpecialBBCode.clock=aktuell Zäit dobäisetzen
-
-
 
 #Transferlistfilters
 TransferSearchFilters.boxheader=FoxTrick-Filteren
@@ -309,16 +306,6 @@ TransferSearchFilters.deleteFilter.ask=Wëlls de dëse Filter wierklech läschen
 TransferSearchFilters.saveFilter=Neie Filter späicheren
 
 #Filter
-
-#Locales for date and time
-#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
-#next 6 use pluralFroms
-datetimestrings.days=Deeg
-datetimestrings.hours=St
-datetimestrings.minutes=Min
-datetimestrings.short_seasons=Sek
-datetimestrings.short_weeks=W
-datetimestrings.short_days=D
 
 #Transfer prices
 MedianTransferPrice.median=Mediane Präis
@@ -338,30 +325,69 @@ Set_pieces=Strofstéiss
 
 #note to translators. Copy abbreviations from HT translations using players page on HT (only supporters can see them in brackets next to players names)
 
+#match positions
 
 
 
-
-
-
-
-
-
+# SkillTable
 Stamina=Konditioun
+#following string uses pluralForms
+Coach=Trainer
+Player=Spiller
 
+#confirms
+ConfirmActions.bid=Wëlls de wierklech eng Offer fir dëse Spiller maachen? De Präis ass %s.
+ConfirmActions.transferlist=Wëlls de dëse Spiller wierklech op den Transfermaart setzen? De Mindestpräis ass %s.
+ConfirmActions.ntremove=Wëlls de dëse Spiller wierklech an däi Kader ophuelen/aus dengem Kader erausgeheien?
 
-
+# links
+links.boxheader=Links
+links.custom.selecticon=Ikon wielen
+links.custom.addpersonallink=Perséinleche Link dobäisetzen
+links.custom.addlink=Link dobäisetzen
+links.custom.remove=Läschen
+links.custom.copy=Kopéieren
+links.custom.export=Exportéieren
+links.custom.confirmremove=Wierklech läschen?
+links.custom.addtag=Tag dobäisetzen
+links.custom.tags=Tagen
+links.custom.help=Hëllef
+links.custom.helptext=Du bass just am Modus fir ze änneren. Klick op de Kapp vun dëser Këscht fir tëschent dem Ännerungsmodus an dem normale Modus hin- an hierzewiesselen. Deng eege Links fonctionnéieren nëmmen am normale Modus komplett. Extern statesch Links kënne ganz liicht dobäigesat ginn, setz einfach déi voll URL dobäi (Beispill\: http\: //alltid.org/league/427/). Looss deen Deel ewech, deen de Server concernéiert, wann s de intern statesch Links bastele wëlls (Beispill\: /World/Series/Default.aspx?LeagueLevelUnitID\=427). Tage brauchs de nëmme fir méi seelen dynamesch Links. Mat den Tage ginn d'Links automatesch geännert am Zesummenhang mat der Säit op där s de deen Ament bass. Zum Beispill géif dech http\://alltid.org/league/[leagueid] ëmmer op d'Alltid-Säit vun där Liga bréngen, déi s de grad bei Hattrick kucks. D'Tagen, séi op där Säit op där s de grad bass, disponibel sinn, stinn an der Këscht. Du kanns nëmmen déi Tage benotzen, déi op där Säit stinn, op där s de däi perséinleche Link wëlls hunn. Den Text an der Këscht ass just e Beispill. Du kanns selwer en Tag bastelen (mat der Hëllef vun []).
+links.custom.helptext2=Du kanns deng Links och exportéiren a mat anere Leit deelen. Fir dat ze maachen, muss de op de Knäppchen 'Exportéieren' klicken an e Fichier auswielen, fir de Link ze späicheren. Links ginn a de Fichier dobäigesat, sou datt s de e puer Links an deem Fichier späichere kanns. Fir Links ze importéiere geess de an d'Astellungen an dono klicks de op de Knäppche fir ze Importéieren. Nëmmen déi Links, déi am Fichier stinn, dee gewielt gëtt, ginn importéiert. Dat sinn an dengem Fall deng Links. Kee vun deene Links, déi s de scho vu virdrun hues, gëtt geläscht.
 
 
 #following string uses pluralForms
+#following string uses pluralForms
 
 
+# Context menu items
+# This would look like: Copy player ID: 123456789
+
+#copy
+copy.copyplayerad=Annonce fir de Spiller an d'Tëschepalette kopéieren.
+copy.copied=D'Annonce fir de Spiller gouf an d'Tëschepalette kopéiert.
+copy.matchid=Klick, fir d'MatchID an d'Tëschepalette ze kopéieren
+
+copy.PostID=ID vum Message an d'Tëschepalette kopéieren
+
+CopyRatings.copied=D'Bewäertunge vum Match goufen an d'Tëschepalette kopéiert.
 
 
+copy.copied.matchid=D'ID vum Match gouf an d'Tëschepalette kopéiert.
+copy.copied.postid=D'ID vum Message gouf an d'Tëschepalette kopéiert.
+copy.copied.posting=De Message gouf an d'Tëschepalette kopéiert.
 
-
-
-
+#matches
+matches.income=Revenu\:
+matches.attackdefensebars=Stuerm géint Verteidegung
+matches.right=Riets
+matches.left=Lénks
+matches.center=Zentral
+matches.defense=Vert
+matches.attack=Stuerm
+matches.indfreekick=Indir. Fräistéiss
+matches.wronglang=FoxTrick\: D'Statistike kënnen net gewise ginn, well deng Sprooch net registréiert ass oder well déi falsch Sprooch an den Astellunge gewielt gouf. D'FoxTrick-Sprooch muss déi selwecht Sprooch si wéi déi Sprooch, déi s de bei Hattrick benotz.
+total_stars=Zomm vun de Stären
 
 #matchdetail
 match.ratings.midfield=Mëttelfeld
@@ -375,70 +401,9 @@ match.ratings.rightshort=R
 match.ratings.centershort=Z
 match.ratings.leftshort=L
 match.ratings.ifkshort=I
-ConfirmActions.bid=Wëlls de wierklech eng Offer fir dëse Spiller maachen? De Präis ass %s.
-ConfirmActions.transferlist=Wëlls de dëse Spiller wierklech op den Transfermaart setzen? De Mindestpräis ass %s.
-ConfirmActions.ntremove=Wëlls de dëse Spiller wierklech an däi Kader ophuelen/aus dengem Kader erausgeheien?
-HideSignatures.signaturetoggle=Signatur
-TeamSelectBox.selectplayer=Spiller wielen
-links.custom.selecticon=Ikon wielen
-links.custom.addpersonallink=Perséinleche Link dobäisetzen
-links.custom.addlink=Link dobäisetzen
-links.custom.remove=Läschen
-links.custom.copy=Kopéieren
-links.custom.export=Exportéieren
-links.custom.confirmremove=Wierklech läschen?
-links.custom.addtag=Tag dobäisetzen
-links.custom.tags=Tagen
-links.custom.help=Hëllef
-links.custom.helptext=Du bass just am Modus fir ze änneren. Klick op de Kapp vun dëser Këscht fir tëschent dem Ännerungsmodus an dem normale Modus hin- an hierzewiesselen. Deng eege Links fonctionnéieren nëmmen am normale Modus komplett. Extern statesch Links kënne ganz liicht dobäigesat ginn, setz einfach déi voll URL dobäi (Beispill\: http\: //alltid.org/league/427/). Looss deen Deel ewech, deen de Server concernéiert, wann s de intern statesch Links bastele wëlls (Beispill\: /World/Series/Default.aspx?LeagueLevelUnitID\=427). Tage brauchs de nëmme fir méi seelen dynamesch Links. Mat den Tage ginn d'Links automatesch geännert am Zesummenhang mat der Säit op där s de deen Ament bass. Zum Beispill géif dech http\://alltid.org/league/[leagueid] ëmmer op d'Alltid-Säit vun där Liga bréngen, déi s de grad bei Hattrick kucks. D'Tagen, séi op där Säit op där s de grad bass, disponibel sinn, stinn an der Këscht. Du kanns nëmmen déi Tage benotzen, déi op där Säit stinn, op där s de däi perséinleche Link wëlls hunn. Den Text an der Këscht ass just e Beispill. Du kanns selwer en Tag bastelen (mat der Hëllef vun []).
-links.custom.helptext2=Du kanns deng Links och exportéiren a mat anere Leit deelen. Fir dat ze maachen, muss de op de Knäppchen 'Exportéieren' klicken an e Fichier auswielen, fir de Link ze späicheren. Links ginn a de Fichier dobäigesat, sou datt s de e puer Links an deem Fichier späichere kanns. Fir Links ze importéiere geess de an d'Astellungen an dono klicks de op de Knäppche fir ze Importéieren. Nëmmen déi Links, déi am Fichier stinn, dee gewielt gëtt, ginn importéiert. Dat sinn an dengem Fall deng Links. Kee vun deene Links, déi s de scho vu virdrun hues, gëtt geläscht.
-matches.income=Revenu\:
-PlayerBirthday.boxheader=Gebuertsdeeg
-PlayerBirthday.BirthdayLastWeek=Gebuertsdeeg vun der leschter Woch
-PlayerBirthday.BirthdayNextWeek=Gebuertsdeeg vun der nächster Woch
-copy.matchid=Klick, fir d'MatchID an d'Tëschepalette ze kopéieren
-ExtendedPlayerDetails.perseason=/ Saison
-
-
-#following string uses pluralForms
-#following string uses pluralForms
-
-
-module.modules_allpages=Moduler, déi op all Säit lafen.
-ReadHtPrefs.HTLanguageChanged=Du muss an den Haaptastellunge vu FoxTrick astellen, datt deng FoxTrick-Sprooch automatesch ugepasst gëtt. Deng FoxTrick-Sprooch ass den Ament\: %s.
-
-Coach=Trainer
-
-
-ManagerButtons.writeInGuestbook=An d'Gëllent Buch schreiwen
-copy.copyplayerad=Annonce fir de Spiller an d'Tëschepalette kopéieren.
-copy.copied=D'Annonce fir de Spiller gouf an d'Tëschepalette kopéiert.
-
-
-#copy
-copy.PostID=ID vum Message an d'Tëschepalette kopéieren
-
-CopyRatings.copied=D'Bewäertunge vum Match goufen an d'Tëschepalette kopéiert.
-
-
-copy.copied.matchid=D'ID vum Match gouf an d'Tëschepalette kopéiert.
-copy.copied.postid=D'ID vum Message gouf an d'Tëschepalette kopéiert.
-copy.copied.posting=De Message gouf an d'Tëschepalette kopéiert.
 
 
 
-#matches
-matches.attackdefensebars=Stuerm géint Verteidegung
-matches.right=Riets
-matches.left=Lénks
-matches.center=Zentral
-matches.defense=Vert
-matches.attack=Stuerm
-matches.indfreekick=Indir. Fräistéiss
-matches.wronglang=FoxTrick\: D'Statistike kënnen net gewise ginn, well deng Sprooch net registréiert ass oder well déi falsch Sprooch an den Astellunge gewielt gouf. D'FoxTrick-Sprooch muss déi selwecht Sprooch si wéi déi Sprooch, déi s de bei Hattrick benotz.
-
-# Context menu items
-# This would look like: Copy player ID: 123456789
 
 #teampopups
 Manager=Manager
@@ -459,8 +424,6 @@ YouthMatches=Jugendmätscher
 more=méi...
 less=manner...
 
-total_stars=Zomm vun de Stären
-
 # FlagCollectionToMap
 flagCollectionToMap.ShowMap=Kaart weisen
 flagCollectionToMap.HideMap=Kaart verstoppen
@@ -471,18 +434,11 @@ flagCollectionToMap.MEast=Mëttleren Osten
 flagCollectionToMap.SAmerica=Südamerika
 flagCollectionToMap.World=Welt
 
-# SkillTable
-
 
 
 # TransferSearchResultFilters
 
-# refer to transfer search form
-
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
-
-# SkillTable
-Player=Spiller
 
 
 # HTMSPrediction
@@ -507,7 +463,15 @@ Player=Spiller
 
 # fennec ui
 
-sidebarBox.actions=Aktiounen
+#Locales for date and time
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
+datetimestrings.days=Deeg
+datetimestrings.hours=St
+datetimestrings.minutes=Min
+datetimestrings.short_seasons=Sek
+datetimestrings.short_weeks=W
+datetimestrings.short_days=D
 
 # buttons
 button.save=Späicheren
@@ -522,6 +486,8 @@ button.disableAll=All ofschalten
 
 
 # keep the following line untranslated
+
+ReadHtPrefs.HTLanguageChanged=Du muss an den Haaptastellunge vu FoxTrick astellen, datt deng FoxTrick-Sprooch automatesch ugepasst gëtt. Deng FoxTrick-Sprooch ass den Ament\: %s.
 
 # End of IN-GAME STRINGS.
 
