--- a/content/locale/lt/foxtrick.properties
+++ b/content/locale/lt/foxtrick.properties
@@ -388,9 +388,6 @@ module.RatingsDisplay.HatStats.desc=Į „Hatstats“
 
 #Save for work
 
-#Embed Media
-EmbedMedia.EmbeddedImage=Įkeltas paveikslėlis
-
 #Extrashortcuts
 ExtraShortcuts.statistics=Statistika
 ExtraShortcuts.transfers=Sandoriai
@@ -398,10 +395,8 @@ ExtraShortcuts.ManageCHPP=Valdykite CHPP produktus
 ExtraShortcuts.prefs=Nustatymai
 ExtraShortcuts.ftprefs=FoxTrick nustatymai
 
-#lineupShortcut
-
-
 #HistoryStats
+HistoryStats.boxheader=Istorijos statistika
 HistoryStats.season=Sezonas
 HistoryStats.season.short=S
 HistoryStats.cup=Taurės turas
@@ -410,7 +405,6 @@ HistoryStats.league=Grupė
 HistoryStats.league.short=G
 HistoryStats.finalPosition=Galutinė pozicija grupėje
 HistoryStats.finalPosition.short=P
-HistoryStats.boxheader=Istorijos statistika
 HistoryStats.cupwinner=Taurės nugalėtojas
 HistoryStats.cupwinner.short=TN
 
@@ -419,11 +413,9 @@ HistoryStats.cupwinner.short=TN
 YouthPromotes.future=Žaidėjas gali būti paaukštintas po %1 dienos (%2).;Žaidėjas gali būti paaukštintas po %1 dienų (%2).;Žaidėjas gali būti paaukštintas po %1 dienų (%2).
 YouthPromotes.today=Jau galima paaukštinti\!
 
-# links
-links.boxheader=Nuorodos
-
 #teamstats+filters
 TeamStats.boxheader=Komandos apžvalga
+TeamStats.General=Bendra
 TeamStats.PlayerNotToOld=Jaunesnių nei 19 metų
 TeamStats.PlayerToOld=Vyresnių nei 19 metų
 TeamStats.Cards=Gavę korteles
@@ -437,6 +429,12 @@ TeamStats.ActivePlayers=Galintys žaisti
 TeamStats.HomeGrownPlayers=Užauginti žaidėjai
 TeamStats.PurchasedPlayers=Nupirkti žaidėjai
 TeamStats.FilterFor=Filtruoti
+
+#PlayerBirthday
+PlayerBirthday.boxheader=Gimtadieniai
+PlayerBirthday.BirthdayToday=Gimtadieniai šiandien
+PlayerBirthday.BirthdayLastWeek=Gimtadieniai praeitą sav.
+PlayerBirthday.BirthdayNextWeek=Gimtadieniai ateinančią sav.
 
 #season stats
 #note to translators. use abreviations of league table where applicable
@@ -463,43 +461,52 @@ LeagueNewsFilter.friendlies=Draugiškos ir pakeisti treneriai
 LeagueNewsFilter.transfers=Sandoriai
 LeagueNewsFilter.lineupChanges=Sudėties pakeitimai
 
-# AddLeaveConfButton
-AddLeaveConfButton.alert=Spauskite mygtuką „Išsaugoti“ kitame puslapyje, jeigu norite išeiti iš šio forumo.
-AddLeaveConfButton.LeaveForum=Išeiti iš forumo
+#team pages
+sidebarBox.actions=Veiksmai
+TeamSelectBox.selectplayer=Pasirinkti žaidėją
+ExtendedPlayerDetails.perseason=per sez.
+ExtraPlayerInfo.defensiveTrainer=%s gynybinio stiliaus treneris.
+ExtraPlayerInfo.offensiveTrainer=%s atakuojančio stiliaus treneris.
+ExtraPlayerInfo.balancedTrainer=%s neutralaus stiliaus treneris.
+ManagerButtons.writeInGuestbook=Rašyti į svečių knygą
 
-#ShowForumPrefButton
+#forum
+AddLeaveConfButton.LeaveForum=Išeiti iš forumo
+AddLeaveConfButton.alert=Spauskite mygtuką „Išsaugoti“ kitame puslapyje, jeigu norite išeiti iš šio forumo.
 ShowForumPrefButton.forumPreferences=Forumo nustatymai
+FormatPostingText.ShowNestedQuotes=Rodyti citatas
+HideSignatures.signaturetoggle=Parašas
+MarkUnread.markunread=Pažymėti neperskaitytomis nuo čia
+EmbedMedia.EmbeddedImage=Įkeltas paveikslėlis
+ForumStripHattrickLinks.ask=Pakeisti lentelės vaizdą.
 
 # ForumTemplates
 ForumTemplates.make=Išsaugoti šią žinutę kaip šabloną
+ForumTemplates.make.error=Šablonas jau egzistuoja arba yra tuščias
 ForumTemplates.show=Rodyti šablonus
 ForumTemplates.hide=Paslėpti šablonus
-ForumTemplates.make.error=Šablonas jau egzistuoja arba yra tuščias
 ForumTemplates.templateTitle=Šablono pavadinimas\:
 ForumTemplates.templateTitle.error=Simboliai „[“ ir „]“ pavadinimuose draudžiami
 ForumTemplates.delete.ask=Ištrinti šabloną?
 
-#PostPreview
+#ForumPreview
 ForumPreview.preview.title=Rodyti, kaip atrodys žinutė
 ForumPreview.preview=Peržiūrėti
 ForumPreview.send=Siųsti
 
-
+#ForumYouthIcons
+ForumYouthIcons.toolbar.main=Pagrindinės nuorodos
 ForumYouthIcons.toolbar.youth=JA nuorodos
 ForumYouthIcons.toolbar.tournament=Turnyrai
-ForumYouthIcons.toolbar.main=Pagrindinės nuorodos
+ForumYouthIcons.toolbar.other=Kita
 ForumYouthIcons.youthplayerid=Įterpti jaunio žymę.
 ForumYouthIcons.youthteamid=Įterpti jaunių komandos žymę
 ForumYouthIcons.youthmatchid=Įterpti jaunių rungtynių žymę.
 ForumYouthIcons.youthseries=Įterpti jaunių grupės žymę.
 ForumYouthIcons.tournamentid=Prideda turnyro ikoną.
 ForumYouthIcons.tournamentmatchid=Prideda turnyro rungtynių ikoną.
-
-ForumYouthIcons.toolbar.other=Kita
 ForumYouthIcons.debug=Įterpti FoxTrick veiklos žurnalą (programuotojams).
 ForumYouthIcons.settings=Įterpti FoxTrick nustatymus.
-
-#special bbcode, not really youth icons
 ForumSpecialBBCode.q=Įterpti citatos žymę
 ForumSpecialBBCode.br=Įterpti naujos eilutės žymę
 ForumSpecialBBCode.user=Įterpti vartotojo žymę
@@ -514,9 +521,6 @@ ForumSpecialBBCode.enterSeparator=Įveskite kitą atskiriamąjį simbolį
 ForumSpecialBBCode.forumSymbol=Įterpti „%s“
 ForumSpecialBBCode.symbols=Įterpti simbolį\: „%s“
 
-
-FormatPostingText.ShowNestedQuotes=Rodyti citatas
-
 #Transferlistfilters
 TransferSearchFilters.boxheader=FoxTrick filtrai
 TransferSearchFilters.enterName=Įveskite filtro pavadinimą\:
@@ -525,6 +529,7 @@ TransferSearchFilters.saveFilter=Išsaugoti naują filtrą
 
 #Filter
 Filters.label=Filtrai
+Filters.addFilterOptions=Pasirinkti filtrą
 Filters.ok=Gerai
 Filters.clear=Išvalyti
 Filters.noFilter=Jokio filtro
@@ -536,17 +541,8 @@ Filters.Form=Forma
 Filters.XP=Patirtis
 Filters.specialty=Specialybė
 Filters.stars=Žvaigždutės
-Filters.addFilterOptions=Pasirinkti filtrą
-
-#Locales for date and time
-#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
-#next 6 use pluralFroms
-datetimestrings.days=d.
-datetimestrings.hours=val.
-datetimestrings.minutes=min.
-datetimestrings.short_seasons=sez.
-datetimestrings.short_weeks=s.
-datetimestrings.short_days=d.
+Filters.minimum=Bent
+Filters.maximum=Daugiausiai
 
 #Transfer prices
 MedianTransferPrice.median=Mediana
@@ -611,6 +607,7 @@ categories.R=R
 categories.E1=E1
 categories.E2=E2
 
+#match positions
 match.pos.kp=Vartininkas
 match.pos.kp.abbr=VR
 match.pos.lb=Kairysis krašto gynėjas
@@ -647,17 +644,21 @@ match.role.captain.abbr=KAP
 
 match.player.unknown=Nežinomas žaidėjas
 
-TeamStats.General=Bendra
-
+# SkillTable
+Skill_table=Įgūdžių lentelė
+Switch_view=Pakeisti vaizdą
+AddHomegrown=Pridėti išaugintus žaidėjus
+showTimeInClub=Rodyti praleistą laiką komandoje
+skillTable.addHomegrown=Pridėti visus užaugintus žaidėjus
+skillTable.showTimeInClub=Rodyti komandoje išbūtą laiką
+skilltable.youthplayer=Jaunis
+skilltable.rebought_youthplayer=Perpirktas jaunis
 PlayerNumber=Žaidėjo numeris
 PlayerNumber.abbr=\#
-
 TSI=Bendras įgūdžių indeksas
 TSI.abbr=TSI
-
 CanBePromotedIn=Gali būti paaukštintas po
 CanBePromotedIn.abbr=^^
-
 Personality=Asmenybė
 Agreeability=Suderinamumas
 Agreeability.abbr=Su
@@ -665,33 +666,26 @@ Aggressiveness=Agresyvumas
 Aggressiveness.abbr=Ag
 Honesty=Sąžiningumas
 Honesty.abbr=Są
-
 Leadership=Vadovavimas
 Leadership.abbr=Vad
 Experience=Patirtis
 Experience.abbr=Pat
-
 Stamina=Ištvermė
 Stamina.abbr=Išt
 Form=Forma
 Form.abbr=Fo
-
 Loyalty=Lojalumas
 Loyalty.abbr=Lo
 MotherClubBonus=Kilmės klubo premija
 MotherClubBonus.abbr=KK
-
 Status=Būsena
 Status.abbr=Būs
-
 Yellow_card=Geltona kortelė
 Yellow_card.abbr=G
 Red_card=Raudona kortelė
 Red_card.abbr=R
-
 Speciality=Specialybė
 Speciality.abbr=Spc
-
 Last_match=Paskutinės rungtynės
 Last_match.abbr=Žaista
 Last_stars=Paskutinis įvertinimas
@@ -705,18 +699,14 @@ Last_position.abbr=Poz
 #following string uses pluralForms
 Last_match_played_as_at=Savo paskutinėse rungtynėse (%3) žaidė %1 minutę kaip %2.;Savo paskutinėse rungtynėse (%3) žaidė %1 minučių kaip %2.;Savo paskutinėse rungtynėse (%3) žaidė %1 minutes kaip %2.
 Last_match_didnot_play=Dar nežaidė.
-
 Bruised=Susižeidęs
 Bruised.abbr=Sžd
 Injured=Traumuotas
 Injured.abbr=Tr
-
 Salary=Atlyginimas
 Salary.abbr=Alga
-
 TransferListed=Parduodamas
 TransferListed.abbr=Prd
-
 NrOfMatches=Rungtynių skaičius
 NrOfMatches.abbr=R
 LeagueGoals=Įvarčiai lygoje
@@ -729,43 +719,48 @@ CareerGoals=Įvarčiai per visą karjerą
 CareerGoals.abbr=Įv
 Hattricks=Hat-trick'ai
 Hattricks.abbr=HT
-
 Current_club=Dabartinis klubas
 Current_club.abbr=Klubas
 Current_league=Dabartinė lyga
 Current_league.abbr=Lyga
-
 JoinedSince=Komandoje išbūtas laikas
 JoinedSince.abbr=Išbuvo
-
 Hotlist=Sekti
 Hotlist.abbr=Sekti
+Coach=Treneris
+CurrentSquad=Dabartinė sudėtis
+Nationality=Pilietybė
+Nationality.abbr=Pil.
+Flag=Vėliava
+Flag.abbr=Vėl.
+Player=Žaidėjas
+Player.abbr=Žaidėjas
+Age=Amžius
+Age.abbr=Amž.
+Match=Rungtynės
+Series=Grupė
+TransferCompare=Sandorių palyginimas
+TransferCompare.abbr=LYG
+Bookmark=Pridėti žymeklį
+Bookmark.abbr=Žym.
+Deadline=Pasiūlymų teikimo pabaiga
+Deadline.abbr=Pabaiga
+CurrentBid=Dabartinė suma
+CurrentBid.abbr=Suma
+CurrentBidder=Dabartinis pirkėjas
+CurrentBidder.abbr=Pirkėjas
+CurrentBidderShort=Dabartinis pirkėjas
+CurrentBidderShort.abbr=Prk
 
-skilltable.youthplayer=Jaunis
-skilltable.rebought_youthplayer=Perpirktas jaunis
-
-#matchdetail
-match.ratings.midfield=Saugų linija
-match.ratings.attack=Ataka
-match.ratings.defence=Gynyba
-match.ratings.total=Viso
-
-match.ratings.right=Dešinė
-match.ratings.center=Centras
-match.ratings.left=Kairė
-match.ratings.rightshort=D
-match.ratings.centershort=C
-match.ratings.leftshort=K
-match.ratings.ifkshort=NSP
+#confirms
 ConfirmActions.bid=Ar tikrai norite pirkti šį žaidėją? Jūsų siūloma kaina yra %s.
 ConfirmActions.transferlist=Ar tikrai norite parduoti šį žaiėją? Jūsų nustatyta kaina yra %s.
 ConfirmActions.hirestaff=Ar tikrai norite pasamdyti %num %kind?
 ConfirmActions.sackstaff=Ar tikrai norite atleisti %num %kind?
 ConfirmActions.ntremove=Ar tikrai norite priimti ar išmesti šį žaidėją?
-ForumStripHattrickLinks.ask=Ar norite pašalinti nuorodos serverio pavadinimą, kad ja galėtų naudotis visi?
-HideSignatures.signaturetoggle=Parašas
-MarkUnread.markunread=Pažymėti neperskaitytomis nuo čia
-TeamSelectBox.selectplayer=Pasirinkti žaidėją
+
+# links
+links.boxheader=Nuorodos
 links.custom.selecticon=Pasirinkti paveikslėlį
 links.custom.addpersonallink=Pridėti asmeninę nuorodą
 links.custom.addlink=Pridėti nuorodą
@@ -778,17 +773,7 @@ links.custom.tags=Žymės
 links.custom.help=Pagalba
 links.custom.helptext=Tai yra redaktoriaus režimas. Normalų ir redaktoriaus režimą galima pakeisti paspaudus šios skilties antraštę. Jūsų nuorodos veikia tik normaliame režime. Pridėti pastovias išorines nuorodas yra labai paprasta. Jums reikia tik pridėti nuorodos adresą, pavyzdžiui, „http\://alltid.org/league/427/“. Pridėdami pastovias vidines nuorodas praleiskite serverio informaciją, pavyzdžiui, „/World/Series/Default.aspx?LeagueLevelUnitID\=427“. Žymės reikalingos tik kintančioms nuorodoms. Naudojant žymes nuorodos automatiškai pasikeičia, panaudodamos esamo puslapio informaciją. Pavyzdžiui, "http\://alltid.org/league/[leagueid]" Jus visada nukreips į tą Alltid puslapį, kuriame yra informacija apie lygą, kurios puslapį naršote (žymė „[leagueid]“). Kiekviename puslapyje veikiančios žymės yra surašytos iššokančiame sąraše. Galite naudoti tik tas žymes, kurios veikia puslapyje, kuriame yra nuoroda. Šiuo metu parašytas tekstas yra tik pavyzdys. Žymę galite įrašyti patys (reikia naudoti laužtinius skliaustelius []).
 links.custom.helptext2=Jūs taip pat galite išsaugoti ir pasidalinti savo nuorodomis su kitais. Paspauskite mygtuką "Išsaugoti" ir pasirinkite rinkmeną, kurioje norite išsaugoti informaciją. Nuorodos įrašomos rinkmenos pabaigoje, todėl vienoje rinkmenoje galite išsaugoti daug nuorodų. Norėdami įkelti nuorodas iš failo, turite tai atlikti Foxtrick nustatymų skiltyje "Išsaugojimo/įkėlimo nustatymai". Bus įkelti tik tie nustatymai (šiuo atveju – Jūsų nuorodos), kurie yra išsaugoti rinkmenoje. Anksčiau sukurtos nuorodos neišnyks.
-matches.income=Pajamos\:
-PlayerBirthday.boxheader=Gimtadieniai
-PlayerBirthday.BirthdayToday=Gimtadieniai šiandien
-PlayerBirthday.BirthdayLastWeek=Gimtadieniai praeitą sav.
-PlayerBirthday.BirthdayNextWeek=Gimtadieniai ateinančią sav.
-copy.matchid=Spauskite čia, jei norite nukopijuoti rungtynių ID
-ExtendedPlayerDetails.perseason=per sez.
 
-ExtraPlayerInfo.defensiveTrainer=%s gynybinio stiliaus treneris.
-ExtraPlayerInfo.offensiveTrainer=%s atakuojančio stiliaus treneris.
-ExtraPlayerInfo.balancedTrainer=%s neutralaus stiliaus treneris.
 
 #following string uses pluralForms
 notify.newMail=Gavote %s naują HT-pašto žinutę.;Gavote %s naujų HT-pašto žinučių.;Gavote %s naujas HT-pašto žinutes.
@@ -797,25 +782,18 @@ notify.newForumMessage=Gavote %s naują atsakymą forume.;Gavote %s naujų atsak
 
 matchView.htLive=HT Live
 
-module.modules_allpages=Visuose puslapiuose veikiantys moduliai
-ReadHtPrefs.HTLanguageChanged=FoxTrick aptiko kalbos pakeitimą. %s – dabar Foxtrick kalba.
-
-Coach=Treneris
-CurrentSquad=Dabartinė sudėtis
-
-
-ManagerButtons.writeInGuestbook=Rašyti į svečių knygą
-copy.copyplayerad=Kopijuoti informaciją
-copy.copied=Žaidėjo informacija nukopijuota.
-
-ratings.HatStats=HatStats
-ratings.LoddarStats=LoddarStats
-ratings.PeasoStats=PeasoStats
-ratings.VnukStats=VnukStats
-ratings.HTitaVal=HTitaVal
-ratings.GardierStats=GardierStats
+# Context menu items
+# This would look like: Copy player ID: 123456789
+copy.id=Kopijuoti %s\: %i
+copy.link=Kopijuoti adresą HT-ML formatu
+copy.ht-ml=Kopijuoti HT-ML formatu
+copy.table=Kopijuoti lentelę HT-ML formatu
 
 #copy
+copy.copyplayerad=Kopijuoti informaciją
+copy.copied=Žaidėjo informacija nukopijuota.
+copy.matchid=Spauskite čia, jei norite nukopijuoti rungtynių ID
+
 copy.PostID=Nukopijuoti žinutės ID
 CopyPosting=Nukopijuoti žinutę %s formatu
 CopyPosting.abbr=Kopijuoti %s formatu
@@ -847,6 +825,39 @@ copy.copied.posting=Žinutė %s nukopijuota.
 copy.copySelected=Nukopijuoti pažymėtą turinį paspaudus Ctrl + C.
 copy.operaPaste=Įterpti paspaudus Shift + Kairysis pelės mygtukas.
 
+#matches
+matches.income=Pajamos\:
+matches.attackdefensebars=Atakos ir Gynybos juostelės
+matches.right=Dešinė
+matches.left=Kairė
+matches.center=Centras
+matches.defense=Gynyba
+matches.attack=Ataka
+matches.indfreekick=Net. baudos smūgiai
+matches.wronglang=FoxTrick\: Statistika negali būti parodyta, nes nustatyta neteisinga kalba. Prašome Foxtrick nustatymuose pasirinkti tokią kalbą, kokia nustatyta Hattrick puslapyje.
+total_stars=Žvaigždučių suma
+
+#matchdetail
+match.ratings.midfield=Saugų linija
+match.ratings.attack=Ataka
+match.ratings.defence=Gynyba
+match.ratings.total=Viso
+
+match.ratings.right=Dešinė
+match.ratings.center=Centras
+match.ratings.left=Kairė
+match.ratings.rightshort=D
+match.ratings.centershort=C
+match.ratings.leftshort=K
+match.ratings.ifkshort=NSP
+
+ratings.HatStats=HatStats
+ratings.LoddarStats=LoddarStats
+ratings.PeasoStats=PeasoStats
+ratings.VnukStats=VnukStats
+ratings.HTitaVal=HTitaVal
+ratings.GardierStats=GardierStats
+
 MatchReportFormat.MatchReport=Rungtynių ataskaita
 MatchReportFormat.lineup=Sudėtis
 MatchReportFormat.kickOff=Rungtynių pradžia
@@ -856,23 +867,6 @@ MatchReportFormat.extraTime=Pratęsimas
 MatchReportFormat.penaltyShootOut=Baudinių serija
 MatchReportFormat.result=Rezultatas
 
-
-#matches
-matches.attackdefensebars=Atakos ir Gynybos juostelės
-matches.right=Dešinė
-matches.left=Kairė
-matches.center=Centras
-matches.defense=Gynyba
-matches.attack=Ataka
-matches.indfreekick=Net. baudos smūgiai
-matches.wronglang=FoxTrick\: Statistika negali būti parodyta, nes nustatyta neteisinga kalba. Prašome Foxtrick nustatymuose pasirinkti tokią kalbą, kokia nustatyta Hattrick puslapyje.
-
-# Context menu items
-# This would look like: Copy player ID: 123456789
-copy.id=Kopijuoti %s\: %i
-copy.link=Kopijuoti adresą HT-ML formatu
-copy.ht-ml=Kopijuoti HT-ML formatu
-copy.table=Kopijuoti lentelę HT-ML formatu
 
 #teampopups
 Manager=Savininkas
@@ -892,12 +886,6 @@ LastLineup=Paskutinė sudėtis
 YouthMatches=Jaunių rungtynės
 more=daugiau...
 less=mažiau...
-TeamPopupLinks.prefsCaption=Nuorodų nustatymai
-TeamPopupLinks.ShowByDefault=Rodyti iškart
-TeamPopupLinks.ShowOnMore=Rodyti paspaudus „daugiau“
-TeamPopupLinks.OpenNewTab=Atidaryti naujoje kortelėje
-
-total_stars=Žvaigždučių suma
 
 # FlagCollectionToMap
 flagCollectionToMap.ShowMap=Rodyti žemėlapį
@@ -909,12 +897,6 @@ flagCollectionToMap.MEast=Artimieji Rytai
 flagCollectionToMap.SAmerica=Pietų Amerika
 flagCollectionToMap.World=Pasaulis
 
-# SkillTable
-Skill_table=Įgūdžių lentelė
-Switch_view=Pakeisti vaizdą
-AddHomegrown=Pridėti išaugintus žaidėjus
-showTimeInClub=Rodyti praleistą laiką komandoje
-
 team.status.booked=Susitarta dėl draugiškų
 ShowFriendlyBooked.ShowFriendlies=Rodyti draugiškas rungtynes
 
@@ -925,10 +907,6 @@ TransferSearchResultFilters.hideInjured=Paslėpti traumuotus
 TransferSearchResultFilters.hideSuspended=Paslėpti suspenduotus
 TransferSearchResultFilters.days=Dienos\:
 
-# refer to transfer search form
-Filters.minimum=Bent
-Filters.maximum=Daugiausiai
-
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
 RapidId.view=Žiūrėti
 RapidId.viewById=Žiūrėti ID
@@ -937,33 +915,6 @@ RapidId.youth=Jauniai
 RapidId.tournaments=Turnyrai
 RapidId.tournament=Turnyras
 
-# SkillTable
-ForumStripHattrickLinks.ask=Pakeisti lentelės vaizdą.
-skillTable.addHomegrown=Pridėti visus užaugintus žaidėjus
-skillTable.showTimeInClub=Rodyti komandoje išbūtą laiką
-Nationality=Pilietybė
-Nationality.abbr=Pil.
-Flag=Vėliava
-Flag.abbr=Vėl.
-Player=Žaidėjas
-Player.abbr=Žaidėjas
-Age=Amžius
-Age.abbr=Amž.
-Match=Rungtynės
-Series=Grupė
-
-TransferCompare=Sandorių palyginimas
-TransferCompare.abbr=LYG
-Bookmark=Pridėti žymeklį
-Bookmark.abbr=Žym.
-Deadline=Pasiūlymų teikimo pabaiga
-Deadline.abbr=Pabaiga
-CurrentBid=Dabartinė suma
-CurrentBid.abbr=Suma
-CurrentBidder=Dabartinis pirkėjas
-CurrentBidder.abbr=Pirkėjas
-CurrentBidderShort=Dabartinis pirkėjas
-CurrentBidderShort.abbr=Prk
 
 # HTMSPrediction
 HTMSPrediction.prediction=Spėjamas rezultatas
@@ -1035,7 +986,15 @@ pageAction.mainContent=Rodyti pagrindinį turinį
 pageAction.leftMenu=Rodyti juostą kairėje
 pageAction.all=Rodyti viską
 
-sidebarBox.actions=Veiksmai
+#Locales for date and time
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
+datetimestrings.days=d.
+datetimestrings.hours=val.
+datetimestrings.minutes=min.
+datetimestrings.short_seasons=sez.
+datetimestrings.short_weeks=s.
+datetimestrings.short_days=d.
 
 # buttons
 button.ok=Gerai
@@ -1082,6 +1041,8 @@ log.header=FoxTrick žurnalas
 # keep the following line untranslated
 log.env=Version %1, %2 platform, %3 locale, %4 layout, %5 direction
 
+ReadHtPrefs.HTLanguageChanged=FoxTrick aptiko kalbos pakeitimą. %s – dabar Foxtrick kalba.
+
 # End of IN-GAME STRINGS.
 
 
@@ -1090,6 +1051,10 @@ log.env=Version %1, %2 platform, %3 locale, %4 layout, %5 direction
 Links.feeds=Nuorodų srautai (kiekvienas iš naujos eilutės)
 TickerAlert.enable=Įjungta
 TickerAlert.sound=Garsas
+TeamPopupLinks.prefsCaption=Nuorodų nustatymai
+TeamPopupLinks.ShowByDefault=Rodyti iškart
+TeamPopupLinks.ShowOnMore=Rodyti paspaudus „daugiau“
+TeamPopupLinks.OpenNewTab=Atidaryti naujoje kortelėje
 
 #toolbar
 toolbar.title=FoxTrick
