--- a/content/locale/lv/foxtrick.properties
+++ b/content/locale/lv/foxtrick.properties
@@ -91,17 +91,12 @@ module.MatchOrderInterface.Specialties.desc=Rādīt spēlētāju specialitātes
 
 #Save for work
 
-#Embed Media
-
 #Extrashortcuts
 ExtraShortcuts.statistics=Statistika
 ExtraShortcuts.transfers=Darījumi
 ExtraShortcuts.ManageCHPP=Pārvaldīt CHPP produktus
 ExtraShortcuts.prefs=Iestatījumi
 ExtraShortcuts.ftprefs=FoxTrick uzstādījumi
-
-#lineupShortcut
-
 
 #HistoryStats
 HistoryStats.season=Sezona
@@ -117,11 +112,9 @@ HistoryStats.cupwinner.short=KU
 #following string uses pluralForms
 YouthPromotes.today=Spēlētāju šodien var paaugstināt\!
 
-# links
-links.boxheader=Saites
-
 #teamstats+filters
 TeamStats.boxheader=Komandas pārskats
+TeamStats.General=Vispārīgi
 TeamStats.PlayerNotToOld=Spēlētāji < 19
 TeamStats.PlayerToOld=Spēlētāji >\= 19
 TeamStats.Cards=Kartītes
@@ -134,6 +127,12 @@ TeamStats.NotTransferListed=Nav izlikti pārdošanā
 TeamStats.ActivePlayers=Aktīvie spēlētāji
 TeamStats.HomeGrownPlayers="Mātes kluba" bonuss
 TeamStats.PurchasedPlayers=Nopirktie spēlētāji
+
+#PlayerBirthday
+PlayerBirthday.boxheader=Dzimšanas dienas
+PlayerBirthday.BirthdayToday=Dzimšanas dienas šodien
+PlayerBirthday.BirthdayLastWeek=Dzimšanas dienas pagājušajā nedēļā
+PlayerBirthday.BirthdayNextWeek=Dzimšanas dienas nākamajā nedēļā
 
 #season stats
 #note to translators. use abreviations of league table where applicable
@@ -160,36 +159,41 @@ LeagueNewsFilter.friendlies=Draudzības spēles un mainītie treneri
 LeagueNewsFilter.transfers=Darījumi
 LeagueNewsFilter.lineupChanges=Spēlētāju izkārtojuma izmaiņas
 
-# AddLeaveConfButton
-AddLeaveConfButton.LeaveForum=Atstāt diskusiju telpu
+#team pages
+sidebarBox.actions=Darbības
+TeamSelectBox.selectplayer=Atlasīt spēlētāju
+ExtendedPlayerDetails.perseason=/sezonā
+ExtraPlayerInfo.defensiveTrainer=%s treneris, kurš ir aizsardzības futbola piekritējs.
+ExtraPlayerInfo.offensiveTrainer=%s treneris, kurš ir uzbrūkoša futbola piekritējs.
+ExtraPlayerInfo.balancedTrainer=%s treneris, kas nav ne uzbrukuma, ne aizsardzības piekritējs.
+ManagerButtons.writeInGuestbook=Rakstīt viesu grāmatā
 
-#ShowForumPrefButton
+#forum
+AddLeaveConfButton.LeaveForum=Atstāt diskusiju telpu
 ShowForumPrefButton.forumPreferences=Diskusiju uzstādījumi
+HideSignatures.signaturetoggle=Paraksts
+MarkUnread.markunread=Atzīmēt kā nelasītu sākot no šejienes
+ForumStripHattrickLinks.ask=Vai vēlies dzēst Hattrick serveri no saites, lai tā būtu lietojama diskusijās?
 
 # ForumTemplates
 ForumTemplates.make=Izveidot veidni no ziņojuma
+ForumTemplates.make.error=Veidne jau eksistē vai ir tukša
 ForumTemplates.show=Rādīt veidnes
 ForumTemplates.hide=Slēpt veidnes
-ForumTemplates.make.error=Veidne jau eksistē vai ir tukša
 ForumTemplates.templateTitle=Veidnes nosaukums\:
 ForumTemplates.templateTitle.error='[' un ']' nav atļauti virsrakstos
 ForumTemplates.delete.ask=Dzēst veidni?
 
-#PostPreview
+#ForumPreview
 ForumPreview.preview.title=Parādīt ziņas priekšskatījumu
 ForumPreview.preview=Priekšskatīt
 ForumPreview.send=Nosūtīt
 
-
-
-
-#special bbcode, not really youth icons
+#ForumYouthIcons
 ForumSpecialBBCode.tableSeparator=Konvertēt "%s" šūnās
 ForumSpecialBBCode.enterSeparator=Ievadiet pielāgotu atdalītāju
 ForumSpecialBBCode.forumSymbol=Ievietot "%s"
 ForumSpecialBBCode.symbols=Ievietot simbolu\: %s
-
-
 
 #Transferlistfilters
 TransferSearchFilters.boxheader=FoxTrick filtri
@@ -210,13 +214,8 @@ Filters.Form=Forma
 Filters.XP=Pieredze
 Filters.specialty=Specialitāte
 Filters.stars=Zvaigznes
-
-#Locales for date and time
-#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
-#next 6 use pluralFroms
-datetimestrings.days=dienas
-datetimestrings.hours=st.
-datetimestrings.minutes=min
+Filters.minimum=Vismaz
+Filters.maximum=Maksimālais
 
 #Transfer prices
 MedianTransferPrice.median=Vidējā cena
@@ -275,6 +274,7 @@ categories.W=MP
 categories.IM=CP
 categories.FW=U
 
+#match positions
 match.pos.kp=Vārtsargs
 match.pos.kp.abbr=V
 match.pos.lb=Kreisais malējais aizsargs
@@ -311,17 +311,21 @@ match.role.captain.abbr=Kapt.
 
 match.player.unknown=Nezināms spēlētājs
 
-TeamStats.General=Vispārīgi
-
+# SkillTable
+Skill_table=Prasmju tabula
+Switch_view=Mainīt skatu
+AddHomegrown=Pievienot klubā uzaugušos spēlētājus
+showTimeInClub=Parādīt klubā pavadīto laiku
+Switch_view.title=Mainīt tabulas skatu.
+skillTable.showTimeInClub=Rāda laiku kopš brīža, kad spēlētājs pievienojās kluba pieaugušo komandai
+skilltable.youthplayer=jauniešu spēlētājs
+skilltable.rebought_youthplayer=atpirkts jauniešu spēlētājs
 PlayerNumber=Spēlētāja numurs
 PlayerNumber.abbr=Nr
-
 TSI=Kopējais prasmju indekss
 TSI.abbr=TSI
-
 CanBePromotedIn=Var tikt paaugstināts
 CanBePromotedIn.abbr=Paaugst.
-
 Personality=Personība
 Agreeability=Personība
 Agreeability.abbr=Pers
@@ -329,33 +333,26 @@ Aggressiveness=Agresivitāte
 Aggressiveness.abbr=Agr
 Honesty=Godīgums
 Honesty.abbr=God
-
 Leadership=Līdera dotības
 Leadership.abbr=Līd. dot.
 Experience=Pieredze
 Experience.abbr=Pier
-
 Stamina=Izturība
 Stamina.abbr=Izt
 Form=Forma
 Form.abbr=Forma
-
 Loyalty=Lojalitāte
 Loyalty.abbr=Loj
 MotherClubBonus=Māteskluba bonuss
 MotherClubBonus.abbr=MB
-
 Status=Statuss
 Status.abbr=Statuss
-
 Yellow_card=Dzeltenā kartīte
 Yellow_card.abbr=Dz
 Red_card=Sarkanā kartīte
 Red_card.abbr=Sar
-
 Speciality=Specialitāte
 Speciality.abbr=Spec
-
 Last_match=Pēdējā spēle
 Last_match.abbr=Pēd
 Last_stars=Pēdējās zvaigznes
@@ -369,16 +366,12 @@ Last_position.abbr=Poz
 #following string uses pluralForms
 Last_match_played_as_at=%3 nospēlēja %1 minūtes kā %2.
 Last_match_didnot_play=Vēl nav spēlējis.
-
 Injured=Savainots
 Injured.abbr=Sav
-
 Salary=Alga
 Salary.abbr=Alga
-
 TransferListed=Izlikts pārdošanā
 TransferListed.abbr=Tirgū
-
 NrOfMatches=Spēles
 NrOfMatches.abbr=S
 LeagueGoals=Vārti līga
@@ -391,43 +384,45 @@ CareerGoals=Vārti karjerā
 CareerGoals.abbr=V
 Hattricks=Hattricki
 Hattricks.abbr=HT
-
 Current_club=Pašreizējais klubs
 Current_club.abbr=Klubs
 Current_league=Pašreizējā līga
 Current_league.abbr=Līga
-
 JoinedSince=Pievienojies kopš
 JoinedSince.abbr=Kopš
-
 Hotlist=Karstais saraksts
 Hotlist.abbr=KS
+Coach=Treneris
+CurrentSquad=Pašreizējā komanda
+Nationality=Tautība
+Nationality.abbr=Nac.
+Flag=Karogs
+Flag.abbr=Karogs
+Player=Spēlētājs
+Player.abbr=Spēlētājs
+Age=Vecums
+Age.abbr=Vec.
+Match=Spēle
+Series=Līga
+TransferCompare.abbr=DS
+Bookmark=Iegrāmatot
+Deadline=Beigu termiņš
+Deadline.abbr=Beigu termiņš
+CurrentBid=Lielākais piedāvājums
+CurrentBid.abbr=Solīt
+CurrentBidder=Pašreizējais augstākās summas solītājs
+CurrentBidder.abbr=Solītājs
+CurrentBidderShort=Solītājs
 
-skilltable.youthplayer=jauniešu spēlētājs
-skilltable.rebought_youthplayer=atpirkts jauniešu spēlētājs
-
-#matchdetail
-match.ratings.midfield=Vidējā zona
-match.ratings.attack=Uzbrukums
-match.ratings.defence=Aizsardzība
-match.ratings.total=Kopā
-
-match.ratings.right=Labais
-match.ratings.center=Centra
-match.ratings.left=Kreisais
-match.ratings.rightshort=L
-match.ratings.centershort=C
-match.ratings.leftshort=K
-match.ratings.ifkshort=N
+#confirms
 ConfirmActions.bid=Vēlies solīt %s par šo spēlētāju?
 ConfirmActions.transferlist=Vēlaties pārdot šo spēlētāju? Sākumcena ir %s.
 ConfirmActions.hirestaff=Tiks nolīgti %num %kind, turpināt?
 ConfirmActions.sackstaff=%num %kind tiks atlaisti, turpināt?
 ConfirmActions.ntremove=Tiešām vēlies pievienot/atlaist šo spēlētāju?
-ForumStripHattrickLinks.ask=Vai vēlies dzēst Hattrick serveri no saites, lai tā būtu lietojama diskusijās?
-HideSignatures.signaturetoggle=Paraksts
-MarkUnread.markunread=Atzīmēt kā nelasītu sākot no šejienes
-TeamSelectBox.selectplayer=Atlasīt spēlētāju
+
+# links
+links.boxheader=Saites
 links.custom.selecticon=Izvēlēties ikonu
 links.custom.addpersonallink=Pievienot personisku saiti
 links.custom.addlink=Pievienot saiti
@@ -438,42 +433,25 @@ links.custom.confirmremove=Vai tiešām dzēst?
 links.custom.addtag=Pievienot birku
 links.custom.tags=Birkas
 links.custom.help=Palīdzība
-matches.income=Ienākumi\:
-PlayerBirthday.boxheader=Dzimšanas dienas
-PlayerBirthday.BirthdayToday=Dzimšanas dienas šodien
-PlayerBirthday.BirthdayLastWeek=Dzimšanas dienas pagājušajā nedēļā
-PlayerBirthday.BirthdayNextWeek=Dzimšanas dienas nākamajā nedēļā
-copy.matchid=Klikšķiniet, lai kopētu matchID starpliktuvē
-ExtendedPlayerDetails.perseason=/sezonā
 
-ExtraPlayerInfo.defensiveTrainer=%s treneris, kurš ir aizsardzības futbola piekritējs.
-ExtraPlayerInfo.offensiveTrainer=%s treneris, kurš ir uzbrūkoša futbola piekritējs.
-ExtraPlayerInfo.balancedTrainer=%s treneris, kas nav ne uzbrukuma, ne aizsardzības piekritējs.
 
 #following string uses pluralForms
 #following string uses pluralForms
 
 matchView.htLive=HT Live
 
-module.modules_allpages=Moduļi, kas darbojas visās lapās
-ReadHtPrefs.HTLanguageChanged=FoxTrick ir konstatējis valodas maiņu. FoxTrick valoda ir mainīta uz %s.
-
-Coach=Treneris
-CurrentSquad=Pašreizējā komanda
-
-
-ManagerButtons.writeInGuestbook=Rakstīt viesu grāmatā
-copy.copyplayerad=Kopēt spēlētāja reklāmu
-copy.copied=Spēlētāja reklāma ir nokopēta starpliktuvē.
-
-ratings.HatStats=HatStats
-ratings.LoddarStats=LoddarStats
-ratings.PeasoStats=PeasoStats
-ratings.VnukStats=VnukStats
-ratings.HTitaVal=HTitaVal
-ratings.GardierStats=GardierStats
+# Context menu items
+# This would look like: Copy player ID: 123456789
+copy.id=Kopēt %s\: %i
+copy.link=Kopēt saites atrašanās vietu HT-ML
+copy.ht-ml=Kopēt HT-ML
+copy.table=Kopēt tabulu HT-ML
 
 #copy
+copy.copyplayerad=Kopēt spēlētāja reklāmu
+copy.copied=Spēlētāja reklāma ir nokopēta starpliktuvē.
+copy.matchid=Klikšķiniet, lai kopētu matchID starpliktuvē
+
 copy.PostID=Kopēt PostID starpliktuvē
 CopyPosting=Kopēt ziņu %s stilā
 CopyPosting.abbr=Kopēt %s stilā
@@ -503,6 +481,38 @@ copy.copied.posting=Ziņojums %s ir pievienots starpliktuvei.
 copy.copySelected=Kopējiet iezīmēto ar Ctrl + C.
 copy.operaPaste=Ielīmējiet ar Shift + kreisais klikšķis.
 
+#matches
+matches.income=Ienākumi\:
+matches.attackdefensebars=Uzbruk. pret Aizs.
+matches.right=Labais
+matches.left=Kreisais
+matches.center=Centra
+matches.defense=aiz
+matches.attack=uzbr
+matches.indfreekick=Net. brīvsitieni
+total_stars=Zvaigznes kopā
+
+#matchdetail
+match.ratings.midfield=Vidējā zona
+match.ratings.attack=Uzbrukums
+match.ratings.defence=Aizsardzība
+match.ratings.total=Kopā
+
+match.ratings.right=Labais
+match.ratings.center=Centra
+match.ratings.left=Kreisais
+match.ratings.rightshort=L
+match.ratings.centershort=C
+match.ratings.leftshort=K
+match.ratings.ifkshort=N
+
+ratings.HatStats=HatStats
+ratings.LoddarStats=LoddarStats
+ratings.PeasoStats=PeasoStats
+ratings.VnukStats=VnukStats
+ratings.HTitaVal=HTitaVal
+ratings.GardierStats=GardierStats
+
 MatchReportFormat.MatchReport=Spēles pārskats
 MatchReportFormat.lineup=Izkārtojums
 MatchReportFormat.kickOff=Sākums
@@ -512,22 +522,6 @@ MatchReportFormat.extraTime=Papildlaiks
 MatchReportFormat.penaltyShootOut=Pēcspēles sitieni
 MatchReportFormat.result=Rezultāts
 
-
-#matches
-matches.attackdefensebars=Uzbruk. pret Aizs.
-matches.right=Labais
-matches.left=Kreisais
-matches.center=Centra
-matches.defense=aiz
-matches.attack=uzbr
-matches.indfreekick=Net. brīvsitieni
-
-# Context menu items
-# This would look like: Copy player ID: 123456789
-copy.id=Kopēt %s\: %i
-copy.link=Kopēt saites atrašanās vietu HT-ML
-copy.ht-ml=Kopēt HT-ML
-copy.table=Kopēt tabulu HT-ML
 
 #teampopups
 Manager=Menedžeris
@@ -547,12 +541,6 @@ LastLineup=Pēdējais izkārtojums
 YouthMatches=Jauniešu spēles
 more=vairāk...
 less=mazāk...
-TeamPopupLinks.prefsCaption=Saišu uzstādījumi
-TeamPopupLinks.ShowByDefault=Rādīt pēc noklusējuma
-TeamPopupLinks.ShowOnMore=Rādīt pie Vairāk
-TeamPopupLinks.OpenNewTab=Atvērt jaunā cilnē
-
-total_stars=Zvaigznes kopā
 
 # FlagCollectionToMap
 flagCollectionToMap.ShowMap=Parādīt karti
@@ -564,12 +552,6 @@ flagCollectionToMap.MEast=Vidējie Austrumi
 flagCollectionToMap.SAmerica=Dienvidamerika
 flagCollectionToMap.World=Pasaule
 
-# SkillTable
-Skill_table=Prasmju tabula
-Switch_view=Mainīt skatu
-AddHomegrown=Pievienot klubā uzaugušos spēlētājus
-showTimeInClub=Parādīt klubā pavadīto laiku
-
 team.status.booked=Draudzības spēles sarunāta
 ShowFriendlyBooked.ShowFriendlies=Parādīt draudzības spēles
 
@@ -580,39 +562,12 @@ TransferSearchResultFilters.hideInjured=Slēpt savainotos
 TransferSearchResultFilters.hideSuspended=Slēpt diskvalificētos
 TransferSearchResultFilters.days=Dienas\:
 
-# refer to transfer search form
-Filters.minimum=Vismaz
-Filters.maximum=Maksimālais
-
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
 RapidId.view=Apskatīt
 RapidId.viewById=Atrast pēc ID
 RapidId.senior=Pieaugušo
 RapidId.youth=Jaunieši
 
-# SkillTable
-Switch_view.title=Mainīt tabulas skatu.
-skillTable.showTimeInClub=Rāda laiku kopš brīža, kad spēlētājs pievienojās kluba pieaugušo komandai
-Nationality=Tautība
-Nationality.abbr=Nac.
-Flag=Karogs
-Flag.abbr=Karogs
-Player=Spēlētājs
-Player.abbr=Spēlētājs
-Age=Vecums
-Age.abbr=Vec.
-Match=Spēle
-Series=Līga
-
-TransferCompare.abbr=DS
-Bookmark=Iegrāmatot
-Deadline=Beigu termiņš
-Deadline.abbr=Beigu termiņš
-CurrentBid=Lielākais piedāvājums
-CurrentBid.abbr=Solīt
-CurrentBidder=Pašreizējais augstākās summas solītājs
-CurrentBidder.abbr=Solītājs
-CurrentBidderShort=Solītājs
 
 # HTMSPrediction
 HTMSPrediction.prediction=Prognozēt rezultātu
@@ -681,7 +636,12 @@ pageAction.mainContent=Parādīt pamatsaturu
 pageAction.leftMenu=Parādīt kreiso sānjoslu
 pageAction.all=Rādīt visus
 
-sidebarBox.actions=Darbības
+#Locales for date and time
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
+datetimestrings.days=dienas
+datetimestrings.hours=st.
+datetimestrings.minutes=min
 
 # buttons
 button.cancel=Atcelt
@@ -709,6 +669,8 @@ api.clearCache.title=Iztukšo FoxTrick XML kešatmiņu. FoxTrick pēc pieprasīj
 
 # keep the following line untranslated
 
+ReadHtPrefs.HTLanguageChanged=FoxTrick ir konstatējis valodas maiņu. FoxTrick valoda ir mainīta uz %s.
+
 # End of IN-GAME STRINGS.
 
 
@@ -716,6 +678,10 @@ api.clearCache.title=Iztukšo FoxTrick XML kešatmiņu. FoxTrick pēc pieprasīj
 # option function strings
 TickerAlert.enable=Iespējot
 TickerAlert.sound=Skaņa
+TeamPopupLinks.prefsCaption=Saišu uzstādījumi
+TeamPopupLinks.ShowByDefault=Rādīt pēc noklusējuma
+TeamPopupLinks.ShowOnMore=Rādīt pie Vairāk
+TeamPopupLinks.OpenNewTab=Atvērt jaunā cilnē
 
 #toolbar
 status.active=aktīvs
