--- a/content/locale/mt/foxtrick.properties
+++ b/content/locale/mt/foxtrick.properties
@@ -246,30 +246,22 @@ module.RapidId.desc=Kaxxa konvenjenti fuq in-naħa ta' fuq tal-paġna biex tkun 
 
 #Save for work
 
-#Embed Media
-
 #Extrashortcuts
 ExtraShortcuts.statistics=Statistika
 ExtraShortcuts.transfers=Trasferimenti
 ExtraShortcuts.prefs=Preferenzi
 ExtraShortcuts.ftprefs=Preferenzi ta' Foxtrick
 
-#lineupShortcut
-
-
 #HistoryStats
+HistoryStats.boxheader=Statistika dwar l-Istorja
 HistoryStats.season=staġun
 HistoryStats.cup=tazza
 HistoryStats.league=kampjonat
 HistoryStats.finalPosition=poż
-HistoryStats.boxheader=Statistika dwar l-Istorja
 
 # YouthPromotes
 #following string uses pluralForms
 YouthPromotes.today=Il-plejer jista' jittella' illum stess\!
-
-# links
-links.boxheader=Links
 
 #teamstats+filters
 TeamStats.boxheader=It-tim inġenerali
@@ -281,6 +273,12 @@ TeamStats.TransferListed=Għall-bejgħ
 TeamStats.Pictures=Stampi
 TeamStats.PlayedLatest=Lagħab fl-aħħar partita
 TeamStats.NotPlayedLatest=Ma lagħabx fl-aħħar partita
+
+#PlayerBirthday
+PlayerBirthday.boxheader=Egħluq żmienhom
+PlayerBirthday.BirthdayToday=Jagħlqu żmienhom illum
+PlayerBirthday.BirthdayLastWeek=Jagħlqu żmienhom din il-ġimgħa
+PlayerBirthday.BirthdayNextWeek=Jagħlqu żmienhom il-ġimgħa d-dieħla
 
 #season stats
 #note to translators. use abreviations of league table where applicable
@@ -307,36 +305,43 @@ LeagueNewsFilter.friendlies=Logħob ta' ħbiberija u kowċis mibdula
 LeagueNewsFilter.transfers=Trasferimenti
 LeagueNewsFilter.lineupChanges=Bdil fil-formazzjoni
 
-# AddLeaveConfButton
-AddLeaveConfButton.alert=Agħfas fuq il-buttuna 'Issejvja' li għandek issib fuq il-paġna li jmiss biex ma titlaq minn dan il-forum
-AddLeaveConfButton.LeaveForum=Itlaq mill-forum
+#team pages
+sidebarBox.actions=Azzjonijiet
+TeamSelectBox.selectplayer=Agħżel plejer
+ExtendedPlayerDetails.perseason=/staġun
+ExtraPlayerInfo.defensiveTrainer=Kowċ %s u jħobb jiddefendi.
+ExtraPlayerInfo.offensiveTrainer=Kowċ %s u jħobb jattakka.
+ExtraPlayerInfo.balancedTrainer=Kowċ %s u ma jħobbx jattakka u lanqas jiddefendi.
+ManagerButtons.writeInGuestbook=Ikteb fil-Ktieb tal-mistednin
 
-#ShowForumPrefButton
+#forum
+AddLeaveConfButton.LeaveForum=Itlaq mill-forum
+AddLeaveConfButton.alert=Agħfas fuq il-buttuna 'Issejvja' li għandek issib fuq il-paġna li jmiss biex ma titlaq minn dan il-forum
+HideSignatures.signaturetoggle=Firma
+MarkUnread.markunread=Immarka li ma nqrawx minn hawn
+ForumStripHattrickLinks.ask=Ċert li trid tiċċekkja s-server ta' hattrick għal links biex tkun tista' tużahom fil-forum?
 
 # ForumTemplates
 ForumTemplates.make=Agħmel template minn messaġġ
+ForumTemplates.make.error=It-template diġa' teżisti jew inkella vojta
 ForumTemplates.show=Uri t-templates
 ForumTemplates.hide=Aħbi t-templates
-ForumTemplates.make.error=It-template diġa' teżisti jew inkella vojta
 ForumTemplates.templateTitle=Titlu tat-template\:
 ForumTemplates.templateTitle.error=M'humiex permessi '[' u ']' fit-titli
 ForumTemplates.delete.ask=Tħassar it-template?
 
-#PostPreview
+#ForumPreview
 ForumPreview.preview.title=Uri l-messaġġ kif se jiġi jidher
 ForumPreview.preview=Ara kif se jidher
 ForumPreview.send=Ibgħat
 
-
-ForumYouthIcons.toolbar.youth=Links għall-Minors
+#ForumYouthIcons
 ForumYouthIcons.toolbar.main=Links Prinċipali
+ForumYouthIcons.toolbar.youth=Links għall-Minors
 ForumYouthIcons.youthplayerid=Daħħal tikketta għal plejer tal-minors
 ForumYouthIcons.youthteamid=Daħħal tikketta għal tim tal-minors
 ForumYouthIcons.youthmatchid=Daħħal tikketta għal partita tal-minors
 ForumYouthIcons.youthseries=Daħħal tikketta għal kampjonat tal-minors
-
-
-#special bbcode, not really youth icons
 ForumSpecialBBCode.br=Ibda linja ġdida
 ForumSpecialBBCode.user=Żid ID ta' persuna
 ForumSpecialBBCode.kit=Żid ID ta' kit
@@ -345,8 +350,6 @@ ForumSpecialBBCode.clock=Żid il-ħin attwali
 ForumSpecialBBCode.spoiler=Żid spoiler
 ForumSpecialBBCode.pre=Daħħal tikketta b'format kif kien qabel
 
-
-
 #Transferlistfilters
 TransferSearchFilters.boxheader=Filtri ta' Foxtrick
 TransferSearchFilters.enterName=Daħħal l-isem tal-filtru\:
@@ -354,16 +357,6 @@ TransferSearchFilters.deleteFilter.ask=Ċert li trid tħassar dan il-filtru?
 TransferSearchFilters.saveFilter=Issejvja l-filtru l-ġdid
 
 #Filter
-
-#Locales for date and time
-#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
-#next 6 use pluralFroms
-datetimestrings.days=ġranet
-datetimestrings.hours=siegħa
-datetimestrings.minutes=minuta
-datetimestrings.short_seasons=st
-datetimestrings.short_weeks=ġi
-datetimestrings.short_days=ġr
 
 #Transfer prices
 MedianTransferPrice.median=Prezz medjan
@@ -402,71 +395,124 @@ categories.R=R
 categories.E1=O1
 categories.E2=O2
 
+#match positions
 
 
 
-
+# SkillTable
+Switch_view=Aqleb id-dehra
+Switch_view.title=Aqleb id-dehra tat-tabella.
 PlayerNumber=Numru tal-plejer
 PlayerNumber.abbr=\#
-
 TSI=Total Skill Index
 TSI.abbr=TSI
-
-
 Agreeability=Qbil
 Agreeability.abbr=Qb
 Aggressiveness=Aggressivita'
 Aggressiveness.abbr=Ag
 Honesty=Onesta'
 Honesty.abbr=On
-
 Leadership=Tmexxija
 Leadership.abbr=Tm
 Experience=Esperjenza
 Experience.abbr=Es
-
 Stamina=Stamina
 Stamina.abbr=Stm
 Form=Forma
 Form.abbr=Fo
-
-
-
 Yellow_card=Karta Safra
 Yellow_card.abbr=KS
 Red_card=Karta Ħamra
 Red_card.abbr=KĦ
-
 Speciality=Speċjalita'
 Speciality.abbr=Sp
-
 Last_stars=L-aħħar Stilel
 Last_stars.abbr=Stl
 Last_position=L-aħħar Pożizzjoni
 Last_position.abbr=Poż
 #following string uses pluralForms
-
 Bruised=Imweġġa' ħafif
 Bruised.abbr=Imħ
 Injured=Imweġġa'
 Injured.abbr=Imw
-
 Salary=Paga
 Salary.abbr=Paga
-
 TransferListed=Għall-bejgħ
 TransferListed.abbr=BE
-
 NrOfMatches=Numru ta' partiti
 NrOfMatches.abbr=NP
 LeagueGoals=Gowls fil-kampjonat
 LeagueGoals.abbr=GKa
 CareerGoals=Gowls fil-karriera
 CareerGoals.abbr=GKr
+Coach=Kowċ
+Flag=Bandiera
+Flag.abbr=Bandiera
+Player=Plejer
+Player.abbr=Plejer
+Age=Eta'
+Age.abbr=Eta'
+Match=Partita
+Series=Serje
+
+#confirms
+ConfirmActions.bid=Ċert li trid toffri għal dan il-plejer? Il-prezz huwa %s.
+ConfirmActions.transferlist=Ċert li trid titfa' lil dan il-plejer għall-bejgħ? Il-prezz se jibda minn %s.
+ConfirmActions.hirestaff=Ċert li trid timpjega %num %kind?
+ConfirmActions.sackstaff=Ċert li trid tkeċċi %num %kind?
+ConfirmActions.ntremove=Ċert li trid iżżid/tneħħi lil dan il-plejer mill-iskwadra tiegħek?
+
+# links
+links.boxheader=Links
+links.custom.selecticon=Agħżel simbolu
+links.custom.addpersonallink=Żid link personali
+links.custom.addlink=Żid link
+links.custom.remove=Neħħi
+links.custom.copy=Ikkopja
+links.custom.export=Esporta
+links.custom.confirmremove=Ċert li trid tneħħi?
+links.custom.addtag=Żid tikketta
+links.custom.tags=Tikketti
+links.custom.help=Għajnuna
+links.custom.helptext=L-ewwel, dan huwa biss l-editur. Jekk tagħfas fuq il-header ta' din il-kaxxa int se tkun tista' taqleb mill-editur għall-mod normali. Il-links jaħdmu kompletament meta tkun qed taħdem fil-mod normali biss. Links statiċi esterni huma faċli biex iżżidhom, kemm iżżid il-url sħiħ (Eżempju\: http\: //alltid.org/league/427/). Għal links statiċi interni aqbeż il-parti tas-server (Eżempju\: /World/Series/Default.aspx?LeagueLevelUnitID\=427). Inti għandek bżonn it-tikketti għal links dinamiċi u li huma rari. Bit-tikketti l-links jiġu mibdula dinamikament billi jużaw l-informazzjoni fuq il-paġna li tkun fiha. Pereżempju http\://alltid.org/league/[leagueid] se jitfak dejjem fuq il-paġna t'Alltid tas-serje li inti qiegħed tara fuq Hattrick. It-tikketi li huma disponibbli fuq kull paġna qegħdin imniżżla fil-kaxxa fejn tagħżel. Inti tista' tuża biss dawk li qegħdin imniżżla fuq il-paġna fejn inti qed iżżid il-link personaliżżat tiegħek. Il-kliem fil-kaxxa huwa biss eżempju ta' template. Tista' tikteb tikketta inti stess (using []).
+links.custom.helptext2=Inti tista' tesporta l-links tiegħek u taqsamhom mal-oħrajn. Biex tkun tista' tagħmel dan tista' tagħfas fuq il-buttuna biex tesporta u tagħżel il-file biex tissejvja dak il-link. Il-links jiġu miżjuda ma' dak il-file, b'hekk tista' tissejvja diversi links f'file wieħed. Biex timporta l-links mur fuq il-preferenzi u mur fuq importa l-preferenza. Dak li għandek imdaħħal biss fil-file magħżul se jiġi mportat, u li f'dan il-każ huma l-links tiegek. L-ebda links ta' qabel m'huma se jiġu mħassra.
 
 
+#following string uses pluralForms
+#following string uses pluralForms
 
 
+# Context menu items
+# This would look like: Copy player ID: 123456789
+
+#copy
+copy.copyplayerad=Ikkopja l-avviż tal-plejer għal fuq il-clipboard
+copy.copied=L-avviż tal-plejer ġie ikkopjat għal fuq il-clipboard.
+copy.matchid=Agħfas biex tikkopja l-ID tal-logħba għal fuq il-clipboard
+
+copy.PostID=Ikkopja l-ID tal-messaġġ għal fuq il-clipboard
+
+CopyRatings.home=Ikkopja l-evalwazzjoni tat-tim li qiegħed jilgħab f'daru
+CopyRatings.away=Ikkopja l-evalwazzjoni tat-tim li qiegħed jilgħab barra minn daru għal fuq il-clipboard (f'HT-ML)
+CopyRatings.copied=L-evalwazzjonijiet ġew ikkopjati għal fuq il-clipboard.
+
+
+copy.copy.skilltable=Ikkopja t-tabella tal-abbiltajiet għal fuq il-clipboard (f'HT-ML)
+copy.copied.matchid=L-Id tal-partita ġiet ikkopjata għal fuq il-clipboard.
+copy.copied.postid=L-ID tal-messaġġ ġie ikkopjat għal fuq il-clipboard
+copy.copied.posting=Il-messaġġ ġie ikkopjat għal fuq il-clipboard.
+
+#matches
+matches.income=Dħul\:
+matches.attackdefensebars=Attakk vs Difens
+matches.right=Lemin
+matches.left=Xellug
+matches.center=Ċentrali
+matches.defense=dif
+matches.attack=att
+matches.indfreekick=Set pieces ind.
+matches.wronglang=Foxtrick\: L-istatistika ma tistax tiġi murija minħabba li l-lingwa tiegħek m'hijiex irreġistrata jew inkella minħabba li int issettjajt il-lingwa l-ħażina fil-preferenzi. Jekk jogħġbok kun cert li l-lingwa ta' Foxtrick hija l-istess bħal-lingwa ta' HT.
+total_stars=Stilel totali
 
 #matchdetail
 match.ratings.midfield=Nofs
@@ -480,81 +526,9 @@ match.ratings.rightshort=L
 match.ratings.centershort=Ċ
 match.ratings.leftshort=X
 match.ratings.ifkshort=I
-ConfirmActions.bid=Ċert li trid toffri għal dan il-plejer? Il-prezz huwa %s.
-ConfirmActions.transferlist=Ċert li trid titfa' lil dan il-plejer għall-bejgħ? Il-prezz se jibda minn %s.
-ConfirmActions.hirestaff=Ċert li trid timpjega %num %kind?
-ConfirmActions.sackstaff=Ċert li trid tkeċċi %num %kind?
-ConfirmActions.ntremove=Ċert li trid iżżid/tneħħi lil dan il-plejer mill-iskwadra tiegħek?
-ForumStripHattrickLinks.ask=Ċert li trid tiċċekkja s-server ta' hattrick għal links biex tkun tista' tużahom fil-forum?
-HideSignatures.signaturetoggle=Firma
-MarkUnread.markunread=Immarka li ma nqrawx minn hawn
-TeamSelectBox.selectplayer=Agħżel plejer
-links.custom.selecticon=Agħżel simbolu
-links.custom.addpersonallink=Żid link personali
-links.custom.addlink=Żid link
-links.custom.remove=Neħħi
-links.custom.copy=Ikkopja
-links.custom.export=Esporta
-links.custom.confirmremove=Ċert li trid tneħħi?
-links.custom.addtag=Żid tikketta
-links.custom.tags=Tikketti
-links.custom.help=Għajnuna
-links.custom.helptext=L-ewwel, dan huwa biss l-editur. Jekk tagħfas fuq il-header ta' din il-kaxxa int se tkun tista' taqleb mill-editur għall-mod normali. Il-links jaħdmu kompletament meta tkun qed taħdem fil-mod normali biss. Links statiċi esterni huma faċli biex iżżidhom, kemm iżżid il-url sħiħ (Eżempju\: http\: //alltid.org/league/427/). Għal links statiċi interni aqbeż il-parti tas-server (Eżempju\: /World/Series/Default.aspx?LeagueLevelUnitID\=427). Inti għandek bżonn it-tikketti għal links dinamiċi u li huma rari. Bit-tikketti l-links jiġu mibdula dinamikament billi jużaw l-informazzjoni fuq il-paġna li tkun fiha. Pereżempju http\://alltid.org/league/[leagueid] se jitfak dejjem fuq il-paġna t'Alltid tas-serje li inti qiegħed tara fuq Hattrick. It-tikketi li huma disponibbli fuq kull paġna qegħdin imniżżla fil-kaxxa fejn tagħżel. Inti tista' tuża biss dawk li qegħdin imniżżla fuq il-paġna fejn inti qed iżżid il-link personaliżżat tiegħek. Il-kliem fil-kaxxa huwa biss eżempju ta' template. Tista' tikteb tikketta inti stess (using []).
-links.custom.helptext2=Inti tista' tesporta l-links tiegħek u taqsamhom mal-oħrajn. Biex tkun tista' tagħmel dan tista' tagħfas fuq il-buttuna biex tesporta u tagħżel il-file biex tissejvja dak il-link. Il-links jiġu miżjuda ma' dak il-file, b'hekk tista' tissejvja diversi links f'file wieħed. Biex timporta l-links mur fuq il-preferenzi u mur fuq importa l-preferenza. Dak li għandek imdaħħal biss fil-file magħżul se jiġi mportat, u li f'dan il-każ huma l-links tiegek. L-ebda links ta' qabel m'huma se jiġu mħassra.
-matches.income=Dħul\:
-PlayerBirthday.boxheader=Egħluq żmienhom
-PlayerBirthday.BirthdayToday=Jagħlqu żmienhom illum
-PlayerBirthday.BirthdayLastWeek=Jagħlqu żmienhom din il-ġimgħa
-PlayerBirthday.BirthdayNextWeek=Jagħlqu żmienhom il-ġimgħa d-dieħla
-copy.matchid=Agħfas biex tikkopja l-ID tal-logħba għal fuq il-clipboard
-ExtendedPlayerDetails.perseason=/staġun
-
-ExtraPlayerInfo.defensiveTrainer=Kowċ %s u jħobb jiddefendi.
-ExtraPlayerInfo.offensiveTrainer=Kowċ %s u jħobb jattakka.
-ExtraPlayerInfo.balancedTrainer=Kowċ %s u ma jħobbx jattakka u lanqas jiddefendi.
-
-#following string uses pluralForms
-#following string uses pluralForms
-
-
-module.modules_allpages=Moduli li qegħdin jaħdmu fuq din il-paġna
-ReadHtPrefs.HTLanguageChanged=Inti ssettjajt fuq il-preferenzi prinċipali ta' Foxtrick biex il-lingwa użata min Foxtrick tiġi awtomatikament aġġornata mal-lingwa li qiegħed tuża f'HT. Il-lingwa użata minn Foxtrick bħalissa hija\: %s.
-
-Coach=Kowċ
-
-
-ManagerButtons.writeInGuestbook=Ikteb fil-Ktieb tal-mistednin
-copy.copyplayerad=Ikkopja l-avviż tal-plejer għal fuq il-clipboard
-copy.copied=L-avviż tal-plejer ġie ikkopjat għal fuq il-clipboard.
-
-
-#copy
-copy.PostID=Ikkopja l-ID tal-messaġġ għal fuq il-clipboard
-
-CopyRatings.home=Ikkopja l-evalwazzjoni tat-tim li qiegħed jilgħab f'daru
-CopyRatings.away=Ikkopja l-evalwazzjoni tat-tim li qiegħed jilgħab barra minn daru għal fuq il-clipboard (f'HT-ML)
-CopyRatings.copied=L-evalwazzjonijiet ġew ikkopjati għal fuq il-clipboard.
-
-
-copy.copy.skilltable=Ikkopja t-tabella tal-abbiltajiet għal fuq il-clipboard (f'HT-ML)
-copy.copied.matchid=L-Id tal-partita ġiet ikkopjata għal fuq il-clipboard.
-copy.copied.postid=L-ID tal-messaġġ ġie ikkopjat għal fuq il-clipboard
-copy.copied.posting=Il-messaġġ ġie ikkopjat għal fuq il-clipboard.
 
 
 
-#matches
-matches.attackdefensebars=Attakk vs Difens
-matches.right=Lemin
-matches.left=Xellug
-matches.center=Ċentrali
-matches.defense=dif
-matches.attack=att
-matches.indfreekick=Set pieces ind.
-matches.wronglang=Foxtrick\: L-istatistika ma tistax tiġi murija minħabba li l-lingwa tiegħek m'hijiex irreġistrata jew inkella minħabba li int issettjajt il-lingwa l-ħażina fil-preferenzi. Jekk jogħġbok kun cert li l-lingwa ta' Foxtrick hija l-istess bħal-lingwa ta' HT.
-
-# Context menu items
-# This would look like: Copy player ID: 123456789
 
 #teampopups
 Manager=Maniġer
@@ -575,8 +549,6 @@ YouthMatches=Partiti tal-minors
 more=aktar...
 less=anqas...
 
-total_stars=Stilel totali
-
 # FlagCollectionToMap
 flagCollectionToMap.ShowMap=Uri l-mappa
 flagCollectionToMap.HideMap=Aħbi l-mappa
@@ -587,31 +559,15 @@ flagCollectionToMap.MEast=Lvant Nofsani
 flagCollectionToMap.SAmerica=Amerka t'Isfel
 flagCollectionToMap.World=Dinja
 
-# SkillTable
-Switch_view=Aqleb id-dehra
-
 
 
 # TransferSearchResultFilters
-
-# refer to transfer search form
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
 RapidId.view=Ara
 RapidId.viewById=Ara skond l-ID
 RapidId.senior=Il-Kbar
 RapidId.youth=Il-Minors
-
-# SkillTable
-Switch_view.title=Aqleb id-dehra tat-tabella.
-Flag=Bandiera
-Flag.abbr=Bandiera
-Player=Plejer
-Player.abbr=Plejer
-Age=Eta'
-Age.abbr=Eta'
-Match=Partita
-Series=Serje
 
 
 # HTMSPrediction
@@ -641,7 +597,15 @@ CrossTable.table=Klassifika tal-istaġun
 
 # fennec ui
 
-sidebarBox.actions=Azzjonijiet
+#Locales for date and time
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
+datetimestrings.days=ġranet
+datetimestrings.hours=siegħa
+datetimestrings.minutes=minuta
+datetimestrings.short_seasons=st
+datetimestrings.short_weeks=ġi
+datetimestrings.short_days=ġr
 
 # buttons
 button.customize=Ippersonalizza
@@ -657,6 +621,8 @@ button.disableAll=Itfi kollox
 
 
 # keep the following line untranslated
+
+ReadHtPrefs.HTLanguageChanged=Inti ssettjajt fuq il-preferenzi prinċipali ta' Foxtrick biex il-lingwa użata min Foxtrick tiġi awtomatikament aġġornata mal-lingwa li qiegħed tuża f'HT. Il-lingwa użata minn Foxtrick bħalissa hija\: %s.
 
 # End of IN-GAME STRINGS.
 
