--- a/content/locale/nl/foxtrick.properties
+++ b/content/locale/nl/foxtrick.properties
@@ -390,9 +390,6 @@ module.RatingsDisplay.HatStats.desc=Als HatStats
 
 #Save for work
 
-#Embed Media
-EmbedMedia.EmbeddedImage=Geïntegreerde afbeelding
-
 #Extrashortcuts
 ExtraShortcuts.statistics=Statistieken
 ExtraShortcuts.transfers=Transfers
@@ -400,10 +397,8 @@ ExtraShortcuts.ManageCHPP=Beheer je CHPP producten
 ExtraShortcuts.prefs=Voorkeuren
 ExtraShortcuts.ftprefs=FoxTrick voorkeuren
 
-#lineupShortcut
-
-
 #HistoryStats
+HistoryStats.boxheader=Geschiedenis statistieken
 HistoryStats.season=Seizoen
 HistoryStats.season.short=S
 HistoryStats.cup=Beker ronde
@@ -412,7 +407,6 @@ HistoryStats.league=Competitie
 HistoryStats.league.short=Div.
 HistoryStats.finalPosition=Eind positie in competitie
 HistoryStats.finalPosition.short=P
-HistoryStats.boxheader=Geschiedenis statistieken
 HistoryStats.cupwinner=Beker winnaar
 HistoryStats.cupwinner.short=BW
 
@@ -421,11 +415,9 @@ HistoryStats.cupwinner.short=BW
 YouthPromotes.future=Speler kan gepromoveerd worden in %1 dag, op %2.;Speler kan gepromoveerd worden in %1 dagen, op %2.
 YouthPromotes.today=Speler kan vandaag gepromoveerd worden\!
 
-# links
-links.boxheader=Links
-
 #teamstats+filters
 TeamStats.boxheader=Teamoverzicht
+TeamStats.General=Algemeen
 TeamStats.PlayerNotToOld=Spelers < 19jr
 TeamStats.PlayerToOld=Spelers >\= 19jr
 TeamStats.Cards=Kaarten
@@ -439,6 +431,12 @@ TeamStats.ActivePlayers=Actieve spelers
 TeamStats.HomeGrownPlayers=Eigen spelers
 TeamStats.PurchasedPlayers=Gekochte spelers
 TeamStats.FilterFor=Filter voor
+
+#PlayerBirthday
+PlayerBirthday.boxheader=Verjaardagen
+PlayerBirthday.BirthdayToday=Verjaardagen vandaag
+PlayerBirthday.BirthdayLastWeek=Verjaardagen afgelopen week
+PlayerBirthday.BirthdayNextWeek=Verjaardagen komende week
 
 #season stats
 #note to translators. use abreviations of league table where applicable
@@ -465,43 +463,52 @@ LeagueNewsFilter.friendlies=Vriendschappelijke wedstrijden en trainerswisselinge
 LeagueNewsFilter.transfers=Transfers
 LeagueNewsFilter.lineupChanges=Opstellingsverandering
 
-# AddLeaveConfButton
-AddLeaveConfButton.alert=Klik op de 'Opslaan' knop op de volgende pagina om dit forum te verlaten.
-AddLeaveConfButton.LeaveForum=Verlaat forum
+#team pages
+sidebarBox.actions=Acties
+TeamSelectBox.selectplayer=Selecteer speler
+ExtendedPlayerDetails.perseason=/ seizoen
+ExtraPlayerInfo.defensiveTrainer=Een %s trainer die verdedigend is ingesteld
+ExtraPlayerInfo.offensiveTrainer=Een %s trainer die aanvallend is ingesteld
+ExtraPlayerInfo.balancedTrainer=Een %s trainer die noch aanvallend noch verdedigend is ingesteld
+ManagerButtons.writeInGuestbook=Schrijf in het gastenboek
 
-#ShowForumPrefButton
+#forum
+AddLeaveConfButton.LeaveForum=Verlaat forum
+AddLeaveConfButton.alert=Klik op de 'Opslaan' knop op de volgende pagina om dit forum te verlaten.
 ShowForumPrefButton.forumPreferences=Forum voorkeuren
+FormatPostingText.ShowNestedQuotes=Toon geneste quotes
+HideSignatures.signaturetoggle=Toon handtekening
+MarkUnread.markunread=Markeer als ongelezen vanaf hier
+EmbedMedia.EmbeddedImage=Geïntegreerde afbeelding
+ForumStripHattrickLinks.ask=Wil je de hattrick-server uit de link verwijderen om de link bruikbaar te maken op het forum?
 
 # ForumTemplates
 ForumTemplates.make=Maak sjabloon van bericht
+ForumTemplates.make.error=Sjabloon bestaat al of is leeg
 ForumTemplates.show=Toon sjablonen
 ForumTemplates.hide=Verberg sjablonen
-ForumTemplates.make.error=Sjabloon bestaat al of is leeg
 ForumTemplates.templateTitle=Sjabloon titel\:
 ForumTemplates.templateTitle.error='[' en ']' zijn niet toegestaan in titels
 ForumTemplates.delete.ask=Sjabloon verwijderen?
 
-#PostPreview
+#ForumPreview
 ForumPreview.preview.title=Toon een voorbeeld van het bericht
 ForumPreview.preview=Voorbeeld
 ForumPreview.send=Verstuur
 
-
+#ForumYouthIcons
+ForumYouthIcons.toolbar.main=Belangrijkste Snelkoppelingen
 ForumYouthIcons.toolbar.youth=Jeugd Snelkoppelingen
 ForumYouthIcons.toolbar.tournament=Toernooien
-ForumYouthIcons.toolbar.main=Belangrijkste Snelkoppelingen
+ForumYouthIcons.toolbar.other=Anders
 ForumYouthIcons.youthplayerid=Voeg link naar jeugdspeler toe.
 ForumYouthIcons.youthteamid=Voeg link naar jeugdteam toe.
 ForumYouthIcons.youthmatchid=Voeg link naar jeugdwedstrijd toe.
 ForumYouthIcons.youthseries=voeg link naar jeugdcompetitie toe
 ForumYouthIcons.tournamentid=Toernooi tag invoegen.
 ForumYouthIcons.tournamentmatchid=Toernooi wedstrijd tag invoegen.
-
-ForumYouthIcons.toolbar.other=Anders
 ForumYouthIcons.debug=Voeg FoxTrick debug log toe.
 ForumYouthIcons.settings=Voeg FoxTrick instellingen toe.
-
-#special bbcode, not really youth icons
 ForumSpecialBBCode.q=Voeg quote toe
 ForumSpecialBBCode.br=Voeg regeleinde toe
 ForumSpecialBBCode.user=Voeg user ID toe
@@ -516,9 +523,6 @@ ForumSpecialBBCode.enterSeparator=Voeg een aangepast scheidingsteken toe
 ForumSpecialBBCode.forumSymbol=Voeg "%s" in
 ForumSpecialBBCode.symbols=Symbool invoegen\: %s
 
-
-FormatPostingText.ShowNestedQuotes=Toon geneste quotes
-
 #Transferlistfilters
 TransferSearchFilters.boxheader=FoxTrick filters
 TransferSearchFilters.enterName=Geef filternaam\:
@@ -527,6 +531,7 @@ TransferSearchFilters.saveFilter=Sla nieuwe filter op
 
 #Filter
 Filters.label=Filters
+Filters.addFilterOptions=Filteropties toevoegen
 Filters.ok=Ok
 Filters.clear=Verwijder
 Filters.noFilter=Geen filter
@@ -538,17 +543,8 @@ Filters.Form=Vorm
 Filters.XP=Ervaring
 Filters.specialty=Specialiteit
 Filters.stars=Sterren
-Filters.addFilterOptions=Filteropties toevoegen
-
-#Locales for date and time
-#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
-#next 6 use pluralFroms
-datetimestrings.days=dagen
-datetimestrings.hours=u
-datetimestrings.minutes=m
-datetimestrings.short_seasons=s
-datetimestrings.short_weeks=wk
-datetimestrings.short_days=d
+Filters.minimum=Minstens
+Filters.maximum=Maximaal
 
 #Transfer prices
 MedianTransferPrice.median=Mediaangemiddelde prijs
@@ -613,6 +609,7 @@ categories.R=R
 categories.E1=E1
 categories.E2=E2
 
+#match positions
 match.pos.kp=Keeper
 match.pos.kp.abbr=KP
 match.pos.lb=Linksback
@@ -649,17 +646,22 @@ match.role.captain.abbr=Aanv.
 
 match.player.unknown=Onbekende speler
 
-TeamStats.General=Algemeen
-
+# SkillTable
+Skill_table=Vaardighedentabel
+Switch_view=Wissel weergave
+AddHomegrown=Voeg eigen jeugdspelers toe
+showTimeInClub=Laat periode bij club zien
+Switch_view.title=Wissel de weergave van de tabel
+skillTable.addHomegrown=Voeg alle jeugdspelers toe
+skillTable.showTimeInClub=Laat de periode zien sinds de speler bij het senioren team speelt
+skilltable.youthplayer=jeugdspeler
+skilltable.rebought_youthplayer=Teruggekochte jeugdspeler
 PlayerNumber=Rugnummer
 PlayerNumber.abbr=\#
-
 TSI=Total Skill Index
 TSI.abbr=TSI
-
 CanBePromotedIn=Kan gepromoveerd worden in
 CanBePromotedIn.abbr=Prom
-
 Personality=Persoonlijkheid
 Agreeability=Populariteit
 Agreeability.abbr=Po
@@ -667,33 +669,26 @@ Aggressiveness=Agressiviteit
 Aggressiveness.abbr=Ag
 Honesty=Eerlijkheid
 Honesty.abbr=Eh
-
 Leadership=Leiderschap
 Leadership.abbr=LS
 Experience=Ervaring
 Experience.abbr=XP
-
 Stamina=Conditie
 Stamina.abbr=Co
 Form=Vorm
 Form.abbr=Vo
-
 Loyalty=Loyaliteit
 Loyalty.abbr=Lo
 MotherClubBonus=Moederclub bonus
 MotherClubBonus.abbr=MB
-
 Status=Status
 Status.abbr=Status
-
 Yellow_card=Gele kaart
 Yellow_card.abbr=G
 Red_card=Rode kaart
 Red_card.abbr=R
-
 Speciality=Specialiteit
 Speciality.abbr=Sp
-
 Last_match=Laatste wedstrijd
 Last_match.abbr=Laatste
 Last_stars=Laatst aantal sterren
@@ -707,18 +702,14 @@ Last_position.abbr=Pos
 #following string uses pluralForms
 Last_match_played_as_at=Speelde %1 min als %2 in zijn meest recente wedstrijd op %3.; Speelde %1 minuten als %2 in zijn meest recente wedstrijd op %3.
 Last_match_didnot_play=Heeft nog geen wedstrijd gespeeld.
-
 Bruised=Pleister
 Bruised.abbr=Ple
 Injured=Geblesseerd
 Injured.abbr=Ble
-
 Salary=Salaris
 Salary.abbr=Sal
-
 TransferListed=Staat op de transferlijst
 TransferListed.abbr=TL
-
 NrOfMatches=Aantal wedstrijden
 NrOfMatches.abbr=AW
 LeagueGoals=Competitiedoelpunten
@@ -731,43 +722,48 @@ CareerGoals=Doelpunten in carrière
 CareerGoals.abbr=DC
 Hattricks=Hattricks
 Hattricks.abbr=HT
-
 Current_club=Huidige club
 Current_club.abbr=Club
 Current_league=Huidige competitie
 Current_league.abbr=Competitie
-
 JoinedSince=Begonnen sinds
 JoinedSince.abbr=Sinds
-
 Hotlist=Hotlist
 Hotlist.abbr=Hot
+Coach=Trainer
+CurrentSquad=Huidig team
+Nationality=Nationaliteit
+Nationality.abbr=Nat
+Flag=Vlaggetje
+Flag.abbr=Vlag
+Player=Speler
+Player.abbr=Speler
+Age=Leeftijd
+Age.abbr=Leeftijd
+Match=Wedstrijd
+Series=Competities
+TransferCompare=TransferVergelijk
+TransferCompare.abbr=TV
+Bookmark=Bookmark
+Bookmark.abbr=Bm
+Deadline=Deadline
+Deadline.abbr=Deadline
+CurrentBid=Huidig bod
+CurrentBid.abbr=Bod
+CurrentBidder=Huidige hoogste bieder
+CurrentBidder.abbr=Bieder
+CurrentBidderShort=Huidige hoogste bieder
+CurrentBidderShort.abbr=Bd
 
-skilltable.youthplayer=jeugdspeler
-skilltable.rebought_youthplayer=Teruggekochte jeugdspeler
-
-#matchdetail
-match.ratings.midfield=Middenveld
-match.ratings.attack=Aanval
-match.ratings.defence=Verdediging
-match.ratings.total=Totaal
-
-match.ratings.right=Rechts
-match.ratings.center=Centrum
-match.ratings.left=Links
-match.ratings.rightshort=R
-match.ratings.centershort=C
-match.ratings.leftshort=L
-match.ratings.ifkshort=I
+#confirms
 ConfirmActions.bid=Wil je op deze speler bieden? De prijs is %s.
 ConfirmActions.transferlist=Wil je deze speler op de transferlijst zetten? De vraagprijs is %s.
 ConfirmActions.hirestaff=Wil je %num %kind inhuren?
 ConfirmActions.sackstaff=Wil je %num %kind ontslaan?
 ConfirmActions.ntremove=Wil je deze speler echt toevoegen aan of verwijderen uit je team?
-ForumStripHattrickLinks.ask=Wil je de hattrick-server uit de link verwijderen om de link bruikbaar te maken op het forum?
-HideSignatures.signaturetoggle=Toon handtekening
-MarkUnread.markunread=Markeer als ongelezen vanaf hier
-TeamSelectBox.selectplayer=Selecteer speler
+
+# links
+links.boxheader=Links
 links.custom.selecticon=Selecteer icoon
 links.custom.addpersonallink=Voeg eigen link toe
 links.custom.addlink=Voeg link toe
@@ -780,17 +776,7 @@ links.custom.tags=Parameters
 links.custom.help=Help
 links.custom.helptext=Allereerst, dit is de bewerkingsmodus. Door op de bovenkant van deze box te klikken, schakel je tussen de bewerkingsmodus en de normale modus. Alleen in de normale modus werken de links. Statische externe links zijn gemakkelijk toe te voegen, voeg gewoon de volledige URL toe (voorbeeld\: http\: //alltid.org/league/427/). Voor statische links binnen Hattrick laat je het server gedeelte weg (voorbeeld\: /World/Series/Default.aspx?LeagueLevelUnitID\=427). De parameters zijn alleen nodig voor dynamische links. Met parameters kun je informatie van Hattrick dynamisch in links plaatsen (voorbeeld\: http\://alltid.org/league/[leagueid] stuurt je naar de alltid site van de competitie die je op dat moment bekijkt). De parameters die op iedere pagina beschikbaar zijn, worden getoond in een selectieveld. Je kunt alleen die parameters gebruiken. De tekst die getoond wordt in een link, is slechts een voorbeeld. Je kunt die tekst zelf vervangen door je parameter naar keuze (met de []).
 links.custom.helptext2=Je kunt je links ook exporteren en delen. Hiertoe klik je op de export knop en selecteer je een bestand om je links in op te slaan. Links worden aan dat bestand toegevoegd, dus je kunt verscheidene links in één bestand opslaan. Om links te importeren ga je in het voorkeuren venster naar inporteer voorkeuren. Alleen de voorkeuren uit het geselecteerde bestand worden geïmporteerd. In dit geval zijn dat dus alleen jouw links. Reeds bestaande links worden niet verwijderd.
-matches.income=Recette\:
-PlayerBirthday.boxheader=Verjaardagen
-PlayerBirthday.BirthdayToday=Verjaardagen vandaag
-PlayerBirthday.BirthdayLastWeek=Verjaardagen afgelopen week
-PlayerBirthday.BirthdayNextWeek=Verjaardagen komende week
-copy.matchid=Klik hier om het wedstrijd ID naar je klembord te kopiëren
-ExtendedPlayerDetails.perseason=/ seizoen
 
-ExtraPlayerInfo.defensiveTrainer=Een %s trainer die verdedigend is ingesteld
-ExtraPlayerInfo.offensiveTrainer=Een %s trainer die aanvallend is ingesteld
-ExtraPlayerInfo.balancedTrainer=Een %s trainer die noch aanvallend noch verdedigend is ingesteld
 
 #following string uses pluralForms
 notify.newMail=Je hebt %s nieuw bericht.;Je hebt %s nieuwe berichten.
@@ -799,25 +785,18 @@ notify.newForumMessage=Je hebt %s nieuw antwoord op een van je forum-berichten.;
 
 matchView.htLive=HT Live
 
-module.modules_allpages=Modules die op alle pagina's werken
-ReadHtPrefs.HTLanguageChanged=In de FoxTrick instellingen heb je ingesteld staan dat de taal automatisch gekozen moet worden. Jouw FoxTrick taal is nu ingesteld op\: %s.
-
-Coach=Trainer
-CurrentSquad=Huidig team
-
-
-ManagerButtons.writeInGuestbook=Schrijf in het gastenboek
-copy.copyplayerad=Kopieer transferadvertentie voor speler naar klembord
-copy.copied=De advertentie is naar het klembord gekopieerd.
-
-ratings.HatStats=HatStats
-ratings.LoddarStats=LoddarStats
-ratings.PeasoStats=PeasoStats
-ratings.VnukStats=VnukStats
-ratings.HTitaVal=HTitaVal
-ratings.GardierStats=GardierStats
+# Context menu items
+# This would look like: Copy player ID: 123456789
+copy.id=Kopieer %s\: %i
+copy.link=Kopieer link in HT-ML formaat
+copy.ht-ml=Kopieer in HT-ML formaat
+copy.table=Kopieer tabel in HT-ML formaat
 
 #copy
+copy.copyplayerad=Kopieer transferadvertentie voor speler naar klembord
+copy.copied=De advertentie is naar het klembord gekopieerd.
+copy.matchid=Klik hier om het wedstrijd ID naar je klembord te kopiëren
+
 copy.PostID=Kopieer bericht-ID naar klembord
 CopyPosting=Kopieer post in %s stijl
 CopyPosting.abbr=Kopieer in %s stijl
@@ -849,6 +828,39 @@ copy.copied.posting=Bericht %s is naar het klembord gekopieerd.
 copy.copySelected=Kopieer selectie met CTRL + C.
 copy.operaPaste=Plak met SHIFT + linker muis klik.
 
+#matches
+matches.income=Recette\:
+matches.attackdefensebars=Aanval vs Verdediging
+matches.right=Rechter
+matches.left=Linker
+matches.center=Centr.
+matches.defense=verd.
+matches.attack=aanv.
+matches.indfreekick=Ind. vrije trap
+matches.wronglang=FoxTrick\: De statistieken kunnen niet getoond worden, omdat jouw taal niet is geregistreerd of omdat je de verkeerde taal in je instellingen hebt gekozen. Zorg er voor dat je FoxTrick taalinstellingen gelijk zijn aan je Hattrick taalinstellingen.
+total_stars=Totaal aantal sterren
+
+#matchdetail
+match.ratings.midfield=Middenveld
+match.ratings.attack=Aanval
+match.ratings.defence=Verdediging
+match.ratings.total=Totaal
+
+match.ratings.right=Rechts
+match.ratings.center=Centrum
+match.ratings.left=Links
+match.ratings.rightshort=R
+match.ratings.centershort=C
+match.ratings.leftshort=L
+match.ratings.ifkshort=I
+
+ratings.HatStats=HatStats
+ratings.LoddarStats=LoddarStats
+ratings.PeasoStats=PeasoStats
+ratings.VnukStats=VnukStats
+ratings.HTitaVal=HTitaVal
+ratings.GardierStats=GardierStats
+
 MatchReportFormat.MatchReport=Wedstrijdverslag
 MatchReportFormat.lineup=Opstelling
 MatchReportFormat.kickOff=Beginsignaal
@@ -858,23 +870,6 @@ MatchReportFormat.extraTime=Extra tijd
 MatchReportFormat.penaltyShootOut=Penalty's
 MatchReportFormat.result=Resultaat
 
-
-#matches
-matches.attackdefensebars=Aanval vs Verdediging
-matches.right=Rechter
-matches.left=Linker
-matches.center=Centr.
-matches.defense=verd.
-matches.attack=aanv.
-matches.indfreekick=Ind. vrije trap
-matches.wronglang=FoxTrick\: De statistieken kunnen niet getoond worden, omdat jouw taal niet is geregistreerd of omdat je de verkeerde taal in je instellingen hebt gekozen. Zorg er voor dat je FoxTrick taalinstellingen gelijk zijn aan je Hattrick taalinstellingen.
-
-# Context menu items
-# This would look like: Copy player ID: 123456789
-copy.id=Kopieer %s\: %i
-copy.link=Kopieer link in HT-ML formaat
-copy.ht-ml=Kopieer in HT-ML formaat
-copy.table=Kopieer tabel in HT-ML formaat
 
 #teampopups
 Manager=Manager
@@ -894,12 +889,6 @@ LastLineup=Laatste opstelling
 YouthMatches=Jeugdwedstrijden
 more=meer...
 less=minder...
-TeamPopupLinks.prefsCaption=Snelkoppeling's voorkeuren
-TeamPopupLinks.ShowByDefault=Laat standaard zien
-TeamPopupLinks.ShowOnMore=Laat zien na een klik op 'meer...'
-TeamPopupLinks.OpenNewTab=Openen in nieuwe tab
-
-total_stars=Totaal aantal sterren
 
 # FlagCollectionToMap
 flagCollectionToMap.ShowMap=Toon kaart
@@ -911,12 +900,6 @@ flagCollectionToMap.MEast=Midden-Oosten
 flagCollectionToMap.SAmerica=Zuid-Amerika
 flagCollectionToMap.World=Wereld
 
-# SkillTable
-Skill_table=Vaardighedentabel
-Switch_view=Wissel weergave
-AddHomegrown=Voeg eigen jeugdspelers toe
-showTimeInClub=Laat periode bij club zien
-
 team.status.booked=Vriendschappelijk wedstrijd geregeld
 ShowFriendlyBooked.ShowFriendlies=Laat vriendschappelijk zien
 
@@ -927,10 +910,6 @@ TransferSearchResultFilters.hideInjured=Verberg blessures
 TransferSearchResultFilters.hideSuspended=Verberg schorsingen
 TransferSearchResultFilters.days=Dagen\:
 
-# refer to transfer search form
-Filters.minimum=Minstens
-Filters.maximum=Maximaal
-
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
 RapidId.view=Bekijk
 RapidId.viewById=Zoek op ID
@@ -939,33 +918,6 @@ RapidId.youth=Jeugd
 RapidId.tournaments=Toernooien
 RapidId.tournament=Toernooi
 
-# SkillTable
-Switch_view.title=Wissel de weergave van de tabel
-skillTable.addHomegrown=Voeg alle jeugdspelers toe
-skillTable.showTimeInClub=Laat de periode zien sinds de speler bij het senioren team speelt
-Nationality=Nationaliteit
-Nationality.abbr=Nat
-Flag=Vlaggetje
-Flag.abbr=Vlag
-Player=Speler
-Player.abbr=Speler
-Age=Leeftijd
-Age.abbr=Leeftijd
-Match=Wedstrijd
-Series=Competities
-
-TransferCompare=TransferVergelijk
-TransferCompare.abbr=TV
-Bookmark=Bookmark
-Bookmark.abbr=Bm
-Deadline=Deadline
-Deadline.abbr=Deadline
-CurrentBid=Huidig bod
-CurrentBid.abbr=Bod
-CurrentBidder=Huidige hoogste bieder
-CurrentBidder.abbr=Bieder
-CurrentBidderShort=Huidige hoogste bieder
-CurrentBidderShort.abbr=Bd
 
 # HTMSPrediction
 HTMSPrediction.prediction=Voorspeld resultaat
@@ -1037,7 +989,15 @@ pageAction.mainContent=Laat het hoofddeel van de site zien
 pageAction.leftMenu=Laat linker balk zien
 pageAction.all=Laat alles zien
 
-sidebarBox.actions=Acties
+#Locales for date and time
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
+datetimestrings.days=dagen
+datetimestrings.hours=u
+datetimestrings.minutes=m
+datetimestrings.short_seasons=s
+datetimestrings.short_weeks=wk
+datetimestrings.short_days=d
 
 # buttons
 button.ok=OK
@@ -1084,6 +1044,8 @@ log.header=FoxTrick log
 # keep the following line untranslated
 log.env=Versie %1, %2 platform, %3 taal, %4 lay-out, %5 richting
 
+ReadHtPrefs.HTLanguageChanged=In de FoxTrick instellingen heb je ingesteld staan dat de taal automatisch gekozen moet worden. Jouw FoxTrick taal is nu ingesteld op\: %s.
+
 # End of IN-GAME STRINGS.
 
 
@@ -1092,6 +1054,10 @@ log.env=Versie %1, %2 platform, %3 taal, %4 lay-out, %5 richting
 Links.feeds=Feed met lijst van snelkoppelingen (gescheiden door regeleinden)
 TickerAlert.enable=Zet aan
 TickerAlert.sound=Geluid
+TeamPopupLinks.prefsCaption=Snelkoppeling's voorkeuren
+TeamPopupLinks.ShowByDefault=Laat standaard zien
+TeamPopupLinks.ShowOnMore=Laat zien na een klik op 'meer...'
+TeamPopupLinks.OpenNewTab=Openen in nieuwe tab
 
 #toolbar
 toolbar.title=FoxTrick
