--- a/content/locale/nn-NO/foxtrick.properties
+++ b/content/locale/nn-NO/foxtrick.properties
@@ -288,18 +288,14 @@ module.TableSort.desc=Gjer at alle 'skikkelege' tabellar sorterbare som har ei o
 
 #Save for work
 
-#Embed Media
-
 #Extrashortcuts
 ExtraShortcuts.statistics=Statistikk
 ExtraShortcuts.transfers=Overgangar
 ExtraShortcuts.prefs=Innstillingar
 ExtraShortcuts.ftprefs=FoxTrick-innstillingar
 
-#lineupShortcut
-
-
 #HistoryStats
+HistoryStats.boxheader=Historisk statistikk
 HistoryStats.season=Sesong
 HistoryStats.season.short=S
 HistoryStats.cup=Cuprunde
@@ -308,7 +304,6 @@ HistoryStats.league=Serie
 HistoryStats.league.short=Ser.
 HistoryStats.finalPosition=Serieplassering
 HistoryStats.finalPosition.short=P
-HistoryStats.boxheader=Historisk statistikk
 HistoryStats.cupwinner=Cupvinnar
 HistoryStats.cupwinner.short=CV
 
@@ -316,11 +311,9 @@ HistoryStats.cupwinner.short=CV
 #following string uses pluralForms
 YouthPromotes.today=Spelaren kan verte forfremja i dag\!
 
-# links
-links.boxheader=Lenkjer
-
 #teamstats+filters
 TeamStats.boxheader=Lagoversikt
+TeamStats.General=General
 TeamStats.PlayerNotToOld=Spelarar < 19 år
 TeamStats.PlayerToOld=Spelarar >\= 19 år
 TeamStats.Cards=Kort
@@ -329,6 +322,12 @@ TeamStats.TransferListed=Overgangs-lista
 TeamStats.Pictures=Andlete
 TeamStats.PlayedLatest=Spelt i førre kamp
 TeamStats.NotPlayedLatest=Spelte ikkje i førre kamp
+
+#PlayerBirthday
+PlayerBirthday.boxheader=Bursdagar
+PlayerBirthday.BirthdayToday=Bursdagar i dag
+PlayerBirthday.BirthdayLastWeek=Bursdagar førre veke
+PlayerBirthday.BirthdayNextWeek=Bursdagar neste veke
 
 #season stats
 #note to translators. use abreviations of league table where applicable
@@ -355,36 +354,43 @@ LeagueNewsFilter.friendlies=Treningskampar og utbytte trenarar
 LeagueNewsFilter.transfers=Overgangar
 LeagueNewsFilter.lineupChanges=Endringar i oppstillinga
 
-# AddLeaveConfButton
-AddLeaveConfButton.alert=Klikk på 'Lagre'-knappen på neste side for å forlate forumet.
-AddLeaveConfButton.LeaveForum=Forlat forum
+#team pages
+sidebarBox.actions=Handlingar
+TeamSelectBox.selectplayer=Vel spelar
+ExtendedPlayerDetails.perseason=/sesong
+ExtraPlayerInfo.defensiveTrainer=Ein %s trenar som er defensiv.
+ExtraPlayerInfo.offensiveTrainer=Ein %s trenar som er offensiv.
+ExtraPlayerInfo.balancedTrainer=Ein %s trenar som verken er defensiv eller offensiv.
+ManagerButtons.writeInGuestbook=Skriv i gjesteboka
 
-#ShowForumPrefButton
+#forum
+AddLeaveConfButton.LeaveForum=Forlat forum
+AddLeaveConfButton.alert=Klikk på 'Lagre'-knappen på neste side for å forlate forumet.
+HideSignatures.signaturetoggle=Signatur
+MarkUnread.markunread=Merk som ulest
+ForumStripHattrickLinks.ask=Ynskjer du å fjerne lenkene frå Hattrick serveren?
 
 # ForumTemplates
 ForumTemplates.make=Lag mal frå forumposta
+ForumTemplates.make.error=Malen fins allereie, eller malen er tom
 ForumTemplates.show=Vis malar
 ForumTemplates.hide=Skjul malar
-ForumTemplates.make.error=Malen fins allereie, eller malen er tom
 ForumTemplates.templateTitle=Mal-namn\:
 ForumTemplates.templateTitle.error='[' og ']' er ikkje tillete i namnet
 ForumTemplates.delete.ask=Slett mal?
 
-#PostPreview
+#ForumPreview
 ForumPreview.preview.title=Vis ei førehandsvisning av posten
 ForumPreview.preview=Førehandsvisning
 ForumPreview.send=Send
 
-
-ForumYouthIcons.toolbar.youth=Ungdomslenkjer
+#ForumYouthIcons
 ForumYouthIcons.toolbar.main=Hovudlenkjer
+ForumYouthIcons.toolbar.youth=Ungdomslenkjer
 ForumYouthIcons.youthplayerid=Sett inn ungdomsspelar-tag.
 ForumYouthIcons.youthteamid=Sett inn ungdomslag-tag.
 ForumYouthIcons.youthmatchid=Sett inn ungdomskamp-tag.
 ForumYouthIcons.youthseries=Sett inn ungdomsseire-tag.
-
-
-#special bbcode, not really youth icons
 ForumSpecialBBCode.q=Legg til sitat
 ForumSpecialBBCode.br=Sett inn linjeskift
 ForumSpecialBBCode.user=Legg til brukarID
@@ -397,8 +403,6 @@ ForumSpecialBBCode.table=Sett inn 'tabell'-tag. Skriven tekst vert konvertert ti
 ForumSpecialBBCode.tableSeparator=Konverter "%s" til celler
 ForumSpecialBBCode.enterSeparator=Skriv inn ein tilfeldig skiljemarkør
 
-
-
 #Transferlistfilters
 TransferSearchFilters.boxheader=FoxTrick-filter
 TransferSearchFilters.enterName=Skriv inn filternamn\:
@@ -406,16 +410,8 @@ TransferSearchFilters.deleteFilter.ask=Vil du verkeleg slette filteret?
 TransferSearchFilters.saveFilter=Lagre nytt filter
 
 #Filter
-
-#Locales for date and time
-#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
-#next 6 use pluralFroms
-datetimestrings.days=dagar
-datetimestrings.hours=tim
-datetimestrings.minutes=min
-datetimestrings.short_seasons=s
-datetimestrings.short_weeks=ve
-datetimestrings.short_days=d
+Filters.minimum=Minimum
+Filters.maximum=Maks
 
 #Transfer prices
 MedianTransferPrice.median=Medianpris
@@ -454,18 +450,18 @@ categories.R=R
 categories.E1=E1
 categories.E2=E2
 
+#match positions
 
 
 
-TeamStats.General=General
-
+# SkillTable
+Skill_table=Ferdigheitstabell
+Switch_view=Endre visning
+Switch_view.title=Endre visning av tabell.
 PlayerNumber=Spelarnummer
 PlayerNumber.abbr=\#
-
 TSI=Total Skill Index
 TSI.abbr=TSI
-
-
 Personality=Personlege ferdigheiter
 Agreeability=Evne til omgjenge
 Agreeability.abbr=Ab
@@ -473,29 +469,22 @@ Aggressiveness=Aggresjon
 Aggressiveness.abbr=Ag
 Honesty=Rettsinn
 Honesty.abbr=Ho
-
 Leadership=Leiarskap
 Leadership.abbr=LS
 Experience=Røynsle
 Experience.abbr=XP
-
 Stamina=Kondisjon
 Stamina.abbr=Stm
 Form=Form
 Form.abbr=Fo
-
-
 Status=Status
 Status.abbr=Status
-
 Yellow_card=Gule kot
 Yellow_card.abbr=G
 Red_card=Raude kort
 Red_card.abbr=R
-
 Speciality=Spesialitet
 Speciality.abbr=Sp
-
 Last_match=Siste kamp
 Last_match.abbr=Siste
 Last_stars=Siste rangering
@@ -503,18 +492,14 @@ Last_stars.abbr=Rt
 Last_position=Siste posisjon
 Last_position.abbr=Pos
 #following string uses pluralForms
-
 Bruised=Plastra
 Bruised.abbr=Pla
 Injured=Skada
 Injured.abbr=Inj
-
 Salary=Løn
 Salary.abbr=Løn
-
 TransferListed=Lista for overgang
 TransferListed.abbr=TL
-
 NrOfMatches=Antal kampar
 NrOfMatches.abbr=NM
 LeagueGoals=Ligamål
@@ -527,36 +512,41 @@ CareerGoals=Mål i karrieren
 CareerGoals.abbr=G
 Hattricks=Hattrick
 Hattricks.abbr=HT
-
 Current_club=Noverande klubb
 Current_club.abbr=Klubb
 Current_league=Noverande liga
 Current_league.abbr=Liga
+Coach=Trenar
+Nationality=Nasjonalitet
+Nationality.abbr=Nasj
+Flag=Flagg
+Flag.abbr=Flagg
+Player=Spelar
+Player.abbr=Spelar
+Age=Alder
+Age.abbr=Alder
+Match=Kamp
+Series=Serie
+Bookmark=Bokmerkje
+Bookmark.abbr=Bm
+Deadline=Siste frist
+Deadline.abbr=Siste frist
+CurrentBid=Noverande bod
+CurrentBid.abbr=Bod
+CurrentBidder=Noverande høgste bodgjevar
+CurrentBidder.abbr=Bodgjevar
+CurrentBidderShort=Noverande høgste bodgjevar
+CurrentBidderShort.abbr=Bd
 
-
-
-
-#matchdetail
-match.ratings.midfield=Midtbane
-match.ratings.attack=Angrep
-match.ratings.defence=Forsvar
-
-match.ratings.right=Høgre
-match.ratings.center=Sentralt
-match.ratings.left=Venstre
-match.ratings.rightshort=H
-match.ratings.centershort=S
-match.ratings.leftshort=V
-match.ratings.ifkshort=I
+#confirms
 ConfirmActions.bid=Ynskjer du å leggje inn eit bod på denne spelaren? Prisen er %s.
 ConfirmActions.transferlist=Ynskjer du å leggje spelaren ut for sal? Utropsprisen er %s.
 ConfirmActions.hirestaff=Ynskjer du å hyre %num %kind?
 ConfirmActions.sackstaff=Ynskjer du å sparke %num %kind?
 ConfirmActions.ntremove=Ynskjer du å leggje til/fjerne spelaren frå troppen?
-ForumStripHattrickLinks.ask=Ynskjer du å fjerne lenkene frå Hattrick serveren?
-HideSignatures.signaturetoggle=Signatur
-MarkUnread.markunread=Merk som ulest
-TeamSelectBox.selectplayer=Vel spelar
+
+# links
+links.boxheader=Lenkjer
 links.custom.selecticon=Vel ikon
 links.custom.addpersonallink=Legg til personleg lenke
 links.custom.addlink=Legg til lenke
@@ -569,34 +559,24 @@ links.custom.tags=Taggar
 links.custom.help=Hjelp
 links.custom.helptext=Dette er berre endre-modus. Å klikka på headeren til denne boksen vil byta mellom endremodus og normalmodus. Berre i normalmodus er lenkjene dine funksjonelle. Eksterne statistikklenkjer er lette å leggje til, berre skriv inn den fulle URL-adressa (Døme\: http\: //alltid.org/league/427/). For interne lenkjer må du droppa server-delen (Døme\: /World/Series/Default.aspx?LeagueLevelUnitID\=427). Du treng berre taggar for sjeldnare dynamiske lenkjer. Med taggar vert lenkja endra dynamisk med informasjonen frå sida du er på. Til dømes\: http\://alltid.org/league/[leagueid] vil alltid leia deg til Alltid-sida for serien du ser på i Hattrick. Kva for taggar som er tilgjengeleg ser du alltid i rullegardinmenyen på sida du er på. Du kan berre velja dei taggane som er tilgjengeleg på sida du skal leggje lenkja til på. Teksten i boksen er berre ein standard mal. Du kan skrive ein tag sjølv. (ved å bruka []).
 links.custom.helptext2=Du kan og eksportere lenkjene dine, og dela dei. For å gjere det, berre trykkjer du på eksporter og veljer ein fil til å lagre lenka i. Lenkjene er vedlegg til fila, dermed kan du lagra fleire lenkjer i ei fil. For å importere ei lenkje går du til innstillingar og veljer importer innstilling. Berre infoen som ligg lagra i filen vil verte importert, i dette tilfellet berre lenkjene dine. Ingen tidlegare lenkjer vil verte sletta.
-matches.income=Tent\:
-PlayerBirthday.boxheader=Bursdagar
-PlayerBirthday.BirthdayToday=Bursdagar i dag
-PlayerBirthday.BirthdayLastWeek=Bursdagar førre veke
-PlayerBirthday.BirthdayNextWeek=Bursdagar neste veke
-copy.matchid=Klikk for å kopiera kampID
-ExtendedPlayerDetails.perseason=/sesong
 
-ExtraPlayerInfo.defensiveTrainer=Ein %s trenar som er defensiv.
-ExtraPlayerInfo.offensiveTrainer=Ein %s trenar som er offensiv.
-ExtraPlayerInfo.balancedTrainer=Ein %s trenar som verken er defensiv eller offensiv.
 
 #following string uses pluralForms
 #following string uses pluralForms
 
 
-module.modules_allpages=Modular kjører no på alle sider
-ReadHtPrefs.HTLanguageChanged=FoxTrick har oppdaga ei endring i språket. Språket har no vorte endra til %s.
-
-Coach=Trenar
-
-
-ManagerButtons.writeInGuestbook=Skriv i gjesteboka
-copy.copyplayerad=Kopier spelarannonse
-copy.copied=Spelarannonsa har vorte kopiert.
-
+# Context menu items
+# This would look like: Copy player ID: 123456789
+copy.id=Kopier %s\: %i
+copy.link=Kopier lenkje i HT-ML
+copy.ht-ml=Kopier i HT-ML
+copy.table=Kopier tabell i HT-ML
 
 #copy
+copy.copyplayerad=Kopier spelarannonse
+copy.copied=Spelarannonsa har vorte kopiert.
+copy.matchid=Klikk for å kopiera kampID
+
 copy.PostID=Kopier PostID
 CopyPosting=Kopier post i %s stil
 CopyPosting.abbr=Kopier i %s stil
@@ -617,9 +597,8 @@ copy.copied.matchid=Kamp-ID har vorte kopiert.
 copy.copied.postid=Post-ID [post\=%s] har vorte kopiert.
 copy.copied.posting=Innlegget %s har vorte kopiert.
 
-
-
 #matches
+matches.income=Tent\:
 matches.attackdefensebars=Angrep vs forsvar
 matches.right=Høgre
 matches.left=Venstre
@@ -628,13 +607,23 @@ matches.defense=Forsvar
 matches.attack=Angrep
 matches.indfreekick=Indirekte daudball
 matches.wronglang=FoxTrick\: Ratinga kan ikkje verte vist, sidan språket ditt ikkje har vorte lagd til, eller sidan du har vald feil språk i innstillingar. Ver god sjekk at du har same språk i Foxtrick som på Hattrick.
+total_stars=Totalt antal stjerner
 
-# Context menu items
-# This would look like: Copy player ID: 123456789
-copy.id=Kopier %s\: %i
-copy.link=Kopier lenkje i HT-ML
-copy.ht-ml=Kopier i HT-ML
-copy.table=Kopier tabell i HT-ML
+#matchdetail
+match.ratings.midfield=Midtbane
+match.ratings.attack=Angrep
+match.ratings.defence=Forsvar
+
+match.ratings.right=Høgre
+match.ratings.center=Sentralt
+match.ratings.left=Venstre
+match.ratings.rightshort=H
+match.ratings.centershort=S
+match.ratings.leftshort=V
+match.ratings.ifkshort=I
+
+
+
 
 #teampopups
 Manager=Manager
@@ -655,8 +644,6 @@ YouthMatches=Juniorkampar
 more=meir...
 less=mindre...
 
-total_stars=Totalt antal stjerner
-
 # FlagCollectionToMap
 flagCollectionToMap.ShowMap=Syn kart
 flagCollectionToMap.HideMap=Gøym kart
@@ -667,18 +654,10 @@ flagCollectionToMap.MEast=Midt-Austen
 flagCollectionToMap.SAmerica=Sør-Afrika
 flagCollectionToMap.World=Verda
 
-# SkillTable
-Skill_table=Ferdigheitstabell
-Switch_view=Endre visning
-
 
 
 # TransferSearchResultFilters
 TransferSearchResultFilters.days=Dagar\:
-
-# refer to transfer search form
-Filters.minimum=Minimum
-Filters.maximum=Maks
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
 RapidId.view=Syn
@@ -686,29 +665,6 @@ RapidId.viewById=Sorter av ID
 RapidId.senior=Senior
 RapidId.youth=Junior
 
-# SkillTable
-Switch_view.title=Endre visning av tabell.
-Nationality=Nasjonalitet
-Nationality.abbr=Nasj
-Flag=Flagg
-Flag.abbr=Flagg
-Player=Spelar
-Player.abbr=Spelar
-Age=Alder
-Age.abbr=Alder
-Match=Kamp
-Series=Serie
-
-Bookmark=Bokmerkje
-Bookmark.abbr=Bm
-Deadline=Siste frist
-Deadline.abbr=Siste frist
-CurrentBid=Noverande bod
-CurrentBid.abbr=Bod
-CurrentBidder=Noverande høgste bodgjevar
-CurrentBidder.abbr=Bodgjevar
-CurrentBidderShort=Noverande høgste bodgjevar
-CurrentBidderShort.abbr=Bd
 
 # HTMSPrediction
 HTMSPrediction.prediction=Forventa resultat
@@ -737,7 +693,15 @@ CrossTable.table=Sesongkrysstabell
 
 # fennec ui
 
-sidebarBox.actions=Handlingar
+#Locales for date and time
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
+datetimestrings.days=dagar
+datetimestrings.hours=tim
+datetimestrings.minutes=min
+datetimestrings.short_seasons=s
+datetimestrings.short_weeks=ve
+datetimestrings.short_days=d
 
 # buttons
 button.ok=OK
@@ -757,6 +721,8 @@ button.copy=Kopier
 
 
 # keep the following line untranslated
+
+ReadHtPrefs.HTLanguageChanged=FoxTrick har oppdaga ei endring i språket. Språket har no vorte endra til %s.
 
 # End of IN-GAME STRINGS.
 
