--- a/content/locale/no/foxtrick.properties
+++ b/content/locale/no/foxtrick.properties
@@ -116,60 +116,52 @@ module.SkillColoring.skill_select.desc=Viser også nummer på overgangssøk f.ek
 
 #Save for work
 
-#Embed Media
-
 #Extrashortcuts
 ExtraShortcuts.statistics=statistikk
 ExtraShortcuts.transfers=overganger
-
-#lineupShortcut
-
 
 #HistoryStats
 
 # YouthPromotes
 #following string uses pluralForms
 
-# links
-links.boxheader=Lenker
-
 #teamstats+filters
 TeamStats.boxheader=Lagoversikt
+
+#PlayerBirthday
 
 #season stats
 #note to translators. use abreviations of league table where applicable
 
 #Newsfeed filter
 
-# AddLeaveConfButton
-AddLeaveConfButton.alert=Trykk på 'Large' knappen på neste side for å forlate dette forumet
-AddLeaveConfButton.LeaveForum=forlat liga
+#team pages
+sidebarBox.actions=Funksjoner
+TeamSelectBox.selectplayer=Velg spiller
+ManagerButtons.writeInGuestbook=Skriv i gjestebok
 
-#ShowForumPrefButton
+#forum
+AddLeaveConfButton.LeaveForum=forlat liga
+AddLeaveConfButton.alert=Trykk på 'Large' knappen på neste side for å forlate dette forumet
 
 # ForumTemplates
 ForumTemplates.make=Lag mal av post
 ForumTemplates.make.error=Det finnes allerede en mal, eller så er den er tom
 ForumTemplates.delete.ask=Slett mal?
 
-#PostPreview
+#ForumPreview
 ForumPreview.preview.title=Forhåndsvis posten
 
-
-ForumYouthIcons.toolbar.youth=Juniorlenker
+#ForumYouthIcons
 ForumYouthIcons.toolbar.main=Hovedlenker
+ForumYouthIcons.toolbar.youth=Juniorlenker
 ForumYouthIcons.youthplayerid=link til juniorspiller
 ForumYouthIcons.youthteamid=link til ungdomslag
 ForumYouthIcons.youthmatchid=legg til link til juniorkamp
 ForumYouthIcons.youthseries=legg til link til ungdomsliga
-
-
-#special bbcode, not really youth icons
 ForumSpecialBBCode.br=legg til linjebrems
 ForumSpecialBBCode.user=legg til brukerid
 ForumSpecialBBCode.article=legg til artikkelid
-
-
 
 #Transferlistfilters
 TransferSearchFilters.boxheader=Foxtrick Filtere
@@ -178,16 +170,6 @@ TransferSearchFilters.deleteFilter.ask=Er du sikker på at du vil slette dette f
 TransferSearchFilters.saveFilter=Lagre nytt filter
 
 #Filter
-
-#Locales for date and time
-#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
-#next 6 use pluralFroms
-datetimestrings.days=dager
-datetimestrings.hours=t
-datetimestrings.minutes=m
-datetimestrings.short_seasons=s
-datetimestrings.short_weeks=u
-datetimestrings.short_days=d
 
 #Transfer prices
 MedianTransferPrice.median=Medianpris
@@ -207,46 +189,23 @@ Set_pieces=Dødball
 
 #note to translators. Copy abbreviations from HT translations using players page on HT (only supporters can see them in brackets next to players names)
 
+#match positions
 
 
 
-
-
-
-
-
-
+# SkillTable
+Switch_view=Bytte visning
+showTimeInClub=Vis tid i klubben
 Stamina=Kondisjon
-
-
-
-
-
 #following string uses pluralForms
+Coach=Trener
 
-
-
-
-
-
-
-
-
-#matchdetail
-match.ratings.midfield=Midtbane
-match.ratings.attack=Angrep
-match.ratings.defence=Forsvar
-
-match.ratings.right=Høyre
-match.ratings.center=Midt
-match.ratings.left=Venstre
-match.ratings.rightshort=H
-match.ratings.centershort=M
-match.ratings.leftshort=V
-match.ratings.ifkshort=I
+#confirms
 ConfirmActions.bid=Er du sikker på at du vil by på denne spilleren? Prisen er %s.
 ConfirmActions.transferlist=Er du sikker på at du vil selge denne spilleren? Prisen er satt til %s.
-TeamSelectBox.selectplayer=Velg spiller
+
+# links
+links.boxheader=Lenker
 links.custom.selecticon=Velg ikon
 links.custom.addpersonallink=Legg til personlig link
 links.custom.addlink=Legg til link
@@ -262,19 +221,14 @@ links.custom.help=Hjelp
 #following string uses pluralForms
 
 
+# Context menu items
+# This would look like: Copy player ID: 123456789
 
-Coach=Trener
-
-
-ManagerButtons.writeInGuestbook=Skriv i gjestebok
+#copy
 copy.copyplayerad=Kopier spillerannonse til utklippstavlen
 copy.copied=Spilleren har blitt kopiert til utklippstavlen.
 
-
-#copy
 copy.PostID=Kopier til utklippstavle
-
-
 
 
 
@@ -287,9 +241,23 @@ matches.center=Midt
 matches.defense=forsvar
 matches.attack=angrep
 matches.indfreekick=Indirekte frispark
+total_stars=Totalt antall stjerner
 
-# Context menu items
-# This would look like: Copy player ID: 123456789
+#matchdetail
+match.ratings.midfield=Midtbane
+match.ratings.attack=Angrep
+match.ratings.defence=Forsvar
+
+match.ratings.right=Høyre
+match.ratings.center=Midt
+match.ratings.left=Venstre
+match.ratings.rightshort=H
+match.ratings.centershort=M
+match.ratings.leftshort=V
+match.ratings.ifkshort=I
+
+
+
 
 #teampopups
 Team=Lag
@@ -305,8 +273,6 @@ LastLineup=Siste lagoppstilling
 more=mer..
 less=mindre..
 
-total_stars=Totalt antall stjerner
-
 # FlagCollectionToMap
 flagCollectionToMap.ShowMap=Vis kart
 flagCollectionToMap.HideMap=Skjul kart
@@ -317,20 +283,12 @@ flagCollectionToMap.MEast=Midt-Østen
 flagCollectionToMap.SAmerica=Sør-Amerika
 flagCollectionToMap.World=Verden
 
-# SkillTable
-Switch_view=Bytte visning
-showTimeInClub=Vis tid i klubben
-
 
 
 # TransferSearchResultFilters
 
-# refer to transfer search form
-
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
 RapidId.view=Vis
-
-# SkillTable
 
 
 # HTMSPrediction
@@ -367,7 +325,15 @@ LocalTime.local.title=Tid i lokal tidssone. Klikk på klokken for å bytte til H
 pageAction.mainContent=Vis hovedinnhold
 pageAction.all=Vis alle
 
-sidebarBox.actions=Funksjoner
+#Locales for date and time
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
+datetimestrings.days=dager
+datetimestrings.hours=t
+datetimestrings.minutes=m
+datetimestrings.short_seasons=s
+datetimestrings.short_weeks=u
+datetimestrings.short_days=d
 
 # buttons
 button.save=Lagre
@@ -383,6 +349,7 @@ api.clearCache=Tøm buffer
 
 
 # keep the following line untranslated
+
 
 # End of IN-GAME STRINGS.
 
