--- a/content/locale/pl/foxtrick.properties
+++ b/content/locale/pl/foxtrick.properties
@@ -281,17 +281,13 @@ module.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=Lista ID tematów zawsze w
 
 #Save for work
 
-#Embed Media
-
 #Extrashortcuts
 ExtraShortcuts.statistics=Statystyki
 ExtraShortcuts.transfers=Transfery
 ExtraShortcuts.prefs=Ustawienia
 
-#lineupShortcut
-
-
 #HistoryStats
+HistoryStats.boxheader=Statystyki
 HistoryStats.season=sezon
 HistoryStats.season.short=S
 HistoryStats.cup=puchar
@@ -300,16 +296,12 @@ HistoryStats.league=liga
 HistoryStats.league.short=Liga
 HistoryStats.finalPosition=miejsce
 HistoryStats.finalPosition.short=P
-HistoryStats.boxheader=Statystyki
 HistoryStats.cupwinner=Zdobyte puchary
 HistoryStats.cupwinner.short=Pu
 
 # YouthPromotes
 #following string uses pluralForms
 YouthPromotes.today=Możesz promować tego zawodnika\!
-
-# links
-links.boxheader=Linki
 
 #teamstats+filters
 TeamStats.boxheader=Przegląd drużyny
@@ -321,6 +313,12 @@ TeamStats.TransferListed=Na sprzedaż
 TeamStats.Pictures=Twarze
 TeamStats.PlayedLatest=Grał w ostatnim meczu
 TeamStats.NotPlayedLatest=Nie grał w ostatnim meczu
+
+#PlayerBirthday
+PlayerBirthday.boxheader=Urodziny
+PlayerBirthday.BirthdayToday=Urodziny dziś
+PlayerBirthday.BirthdayLastWeek=Urodziny w tym tygodniu
+PlayerBirthday.BirthdayNextWeek=Urodziny w następnym tygodniu
 
 #season stats
 #note to translators. use abreviations of league table where applicable
@@ -347,36 +345,43 @@ LeagueNewsFilter.friendlies=Sparingi i zmiany trenera
 LeagueNewsFilter.transfers=Transfery
 LeagueNewsFilter.lineupChanges=Zmiany ustawienia
 
-# AddLeaveConfButton
-AddLeaveConfButton.alert=Aby opuścić to forum, naciśnij przycisk 'Zapisz' na następnej stronie
-AddLeaveConfButton.LeaveForum=Opuść forum
+#team pages
+sidebarBox.actions=Akcje
+TeamSelectBox.selectplayer=Wybierz zawodnika
+ExtendedPlayerDetails.perseason=/ sezon
+ExtraPlayerInfo.defensiveTrainer=%s trener defensywny
+ExtraPlayerInfo.offensiveTrainer=%s trener ofensywny
+ExtraPlayerInfo.balancedTrainer=%s trener neutralny
+ManagerButtons.writeInGuestbook=Wpisz się do Księgi Gości
 
-#ShowForumPrefButton
+#forum
+AddLeaveConfButton.LeaveForum=Opuść forum
+AddLeaveConfButton.alert=Aby opuścić to forum, naciśnij przycisk 'Zapisz' na następnej stronie
+HideSignatures.signaturetoggle=Sygnaturka
+MarkUnread.markunread=Zaznacz "nieczytane" od tego miejsca
+ForumStripHattrickLinks.ask=Czy na pewno chcesz usunąć numer serwera Hattricka z linka?
 
 # ForumTemplates
 ForumTemplates.make=Zapisz post jako szablon
+ForumTemplates.make.error=Szablon już istnieje albo jest pusty
 ForumTemplates.show=Pokazuj szablony
 ForumTemplates.hide=Ukrywaj szablony
-ForumTemplates.make.error=Szablon już istnieje albo jest pusty
 ForumTemplates.templateTitle=Tytuł szablonu\:
 ForumTemplates.templateTitle.error=Symoble '[' i ']' są zabronione
 ForumTemplates.delete.ask=Usunąć szablon?
 
-#PostPreview
+#ForumPreview
 ForumPreview.preview.title=Podgląd posta
 ForumPreview.preview=Podgląd
 ForumPreview.send=Wyślij
 
-
-ForumYouthIcons.toolbar.youth=Linki juniorów
+#ForumYouthIcons
 ForumYouthIcons.toolbar.main=Linki domyślne
+ForumYouthIcons.toolbar.youth=Linki juniorów
 ForumYouthIcons.youthplayerid=Wstaw link do juniora
 ForumYouthIcons.youthteamid=Wstaw link to drużyny juniorów
 ForumYouthIcons.youthmatchid=Wstaw link do meczu juniorów
 ForumYouthIcons.youthseries=Wstaw link do ligi juniorów
-
-
-#special bbcode, not really youth icons
 ForumSpecialBBCode.br=Wstaw pusty wiersz
 ForumSpecialBBCode.user=Wstaw userID
 ForumSpecialBBCode.kit=Wstaw ID strojów
@@ -387,8 +392,6 @@ ForumSpecialBBCode.pre=Wstaw tag 'Pre'
 ForumSpecialBBCode.table=Wstaw tagi tabeli (nowa linia \= nowy wiersz, nowa kolumna \= "%s")
 ForumSpecialBBCode.tableSeparator=Konwertuj "%s" do komórek
 
-
-
 #Transferlistfilters
 TransferSearchFilters.boxheader=Filtry FoxTricka
 TransferSearchFilters.enterName=Nazwij filtr\:
@@ -396,16 +399,8 @@ TransferSearchFilters.deleteFilter.ask=Czy na pewno chcesz usunąć ten filtr?
 TransferSearchFilters.saveFilter=Dodaj nowy filtr
 
 #Filter
-
-#Locales for date and time
-#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
-#next 6 use pluralFroms
-datetimestrings.days=dni
-datetimestrings.hours=h
-datetimestrings.minutes=m
-datetimestrings.short_seasons=s
-datetimestrings.short_weeks=t
-datetimestrings.short_days=d
+Filters.minimum=Co najmniej
+Filters.maximum=Co najwyżej
 
 #Transfer prices
 MedianTransferPrice.median=Średnia cena według mediany
@@ -444,17 +439,18 @@ categories.R=R
 categories.E1=E1
 categories.E2=E2
 
+#match positions
 
 
 
-
+# SkillTable
+Skill_table=Tabela umiejętności
+Switch_view=Zmień widok
+Switch_view.title=Zmienia widok tabeli
 PlayerNumber=Numer zawodnika
 PlayerNumber.abbr=\#
-
 TSI=Total Skill Index
 TSI.abbr=TSI
-
-
 Personality=Charakter
 Agreeability=Usposobienie
 Agreeability.abbr=Us
@@ -462,27 +458,20 @@ Aggressiveness=Agresywność
 Aggressiveness.abbr=Ag
 Honesty=Uczciwość
 Honesty.abbr=Uc
-
 Leadership=Przywództwo
 Leadership.abbr=Pr
 Experience=Doświadczenie
 Experience.abbr=Do
-
 Stamina=Kondycja
 Stamina.abbr=Kon
 Form=Forma
 Form.abbr=Fo
-
-
-
 Yellow_card=Żółta kartka
 Yellow_card.abbr=Ż
 Red_card=Czerwona kartka
 Red_card.abbr=Cz
-
 Speciality=Specjalność
 Speciality.abbr=Sp
-
 Last_match=Ostatni mecz
 Last_match.abbr=Ost
 Last_stars=Ostatnia ocena
@@ -490,18 +479,14 @@ Last_stars.abbr=Oce
 Last_position=Ostatnia pozycja
 Last_position.abbr=Poz
 #following string uses pluralForms
-
 Bruised=Lekko kontuzjowany
 Bruised.abbr=Kon
 Injured=Kontuzjowany
 Injured.abbr=Kon
-
 Salary=Pensja
 Salary.abbr=Pen
-
 TransferListed=Na sprzedaż
 TransferListed.abbr=TL
-
 NrOfMatches=Liczba meczów
 NrOfMatches.abbr=Me
 LeagueGoals=Gole w lidze
@@ -514,36 +499,41 @@ CareerGoals=Gole w karierze
 CareerGoals.abbr=GK
 Hattricks=Hattricks
 Hattricks.abbr=HT
-
 Current_club=Obecny klub
 Current_club.abbr=Klub
 Current_league=Obecna liga
 Current_league.abbr=Liga
+Coach=Trener
+Nationality=Narodowość
+Nationality.abbr=Nar
+Flag=Flagi
+Flag.abbr=Flagi
+Player=Zawodnik
+Player.abbr=Zawodnik
+Age=Wiek
+Age.abbr=Wiek
+Match=Mecz
+Series=Liga
+Bookmark=Zakładki
+Bookmark.abbr=Za
+Deadline=Termin
+Deadline.abbr=Termin
+CurrentBid=Obecna cena
+CurrentBid.abbr=Cena
+CurrentBidder=Obecny kupujący
+CurrentBidder.abbr=Kupujący
+CurrentBidderShort=Obecny kupujący
+CurrentBidderShort.abbr=Ku
 
-
-
-
-#matchdetail
-match.ratings.midfield=Pomoc
-match.ratings.attack=Atak
-match.ratings.defence=Obrona
-
-match.ratings.right=Prawy
-match.ratings.center=Środk.
-match.ratings.left=Lewy
-match.ratings.rightshort=P
-match.ratings.centershort=Ś
-match.ratings.leftshort=L
-match.ratings.ifkshort=W
+#confirms
 ConfirmActions.bid=Czy na pewno chcesz złożyć ofertę kupna tego zawodnika? Cena to %s.
 ConfirmActions.transferlist=Czy na pewno chcesz wystawić tego zawodnika na listę transferową? Cena to %s.
 ConfirmActions.hirestaff=Czy napewno chcesz zatrudnić %num %kind?
 ConfirmActions.sackstaff=Czy napewno chcesz zwolnić %num %kind?
 ConfirmActions.ntremove=Czy na pewno chcesz dodać/usunąć tego zawodnika z reprezentacji?
-ForumStripHattrickLinks.ask=Czy na pewno chcesz usunąć numer serwera Hattricka z linka?
-HideSignatures.signaturetoggle=Sygnaturka
-MarkUnread.markunread=Zaznacz "nieczytane" od tego miejsca
-TeamSelectBox.selectplayer=Wybierz zawodnika
+
+# links
+links.boxheader=Linki
 links.custom.selecticon=Wybierz ikonę
 links.custom.addpersonallink=Dodaj własny link
 links.custom.addlink=Dodaj link
@@ -554,34 +544,24 @@ links.custom.confirmremove=Na pewno usunąć?
 links.custom.addtag=Dodaj tag
 links.custom.tags=Tagi
 links.custom.help=Pomoc
-matches.income=Dochód\:
-PlayerBirthday.boxheader=Urodziny
-PlayerBirthday.BirthdayToday=Urodziny dziś
-PlayerBirthday.BirthdayLastWeek=Urodziny w tym tygodniu
-PlayerBirthday.BirthdayNextWeek=Urodziny w następnym tygodniu
-copy.matchid=Kliknij, aby skopiować matchID
-ExtendedPlayerDetails.perseason=/ sezon
 
-ExtraPlayerInfo.defensiveTrainer=%s trener defensywny
-ExtraPlayerInfo.offensiveTrainer=%s trener ofensywny
-ExtraPlayerInfo.balancedTrainer=%s trener neutralny
 
 #following string uses pluralForms
 #following string uses pluralForms
 
 
-module.modules_allpages=Moduły aktywne na wszystkich stronach
-ReadHtPrefs.HTLanguageChanged=W opcjach Foxtricka włączyłeś wykrywanie zmian języka w Hattricku. W związku z tym, zmieniono język Foxtricka na\: %s.
-
-Coach=Trener
-
-
-ManagerButtons.writeInGuestbook=Wpisz się do Księgi Gości
-copy.copyplayerad=Kopiuj reklamę zawodnika do schowka
-copy.copied=Reklama skopiowana\!
-
+# Context menu items
+# This would look like: Copy player ID: 123456789
+copy.id=Skopiowano %s\: %i
+copy.link=Copy Link Location in HT-ML
+copy.ht-ml=Kopiuj link w HT-ML
+copy.table=Kopiuj tabelę w HT-ML
 
 #copy
+copy.copyplayerad=Kopiuj reklamę zawodnika do schowka
+copy.copied=Reklama skopiowana\!
+copy.matchid=Kliknij, aby skopiować matchID
+
 copy.PostID=Kopiuj postID do schowka
 CopyPosting=Kopiuj w stylu %s
 CopyPosting.abbr=Kopiuj w stylu %s
@@ -599,9 +579,8 @@ copy.copied.matchid=Zrobione\!
 copy.copied.postid=Post [post\=%s] został skopiowany do schowka\!
 copy.copied.posting=Postujący %s został skopiowany do schowka\!
 
-
-
 #matches
+matches.income=Dochód\:
 matches.attackdefensebars=Atak vs Obrona
 matches.right=Prawy
 matches.left=Lewy
@@ -610,13 +589,23 @@ matches.defense=Obrona
 matches.attack=Atak
 matches.indfreekick=Wolne pośr.
 matches.wronglang=FoxTrick\: Statystyki nie mogą zostać pokazane, gdyż Twój język nie jest obsługiwany bądź wybrałeś zły język w opcjach FoxTricka
+total_stars=Łączna liczba gwiazdek
 
-# Context menu items
-# This would look like: Copy player ID: 123456789
-copy.id=Skopiowano %s\: %i
-copy.link=Copy Link Location in HT-ML
-copy.ht-ml=Kopiuj link w HT-ML
-copy.table=Kopiuj tabelę w HT-ML
+#matchdetail
+match.ratings.midfield=Pomoc
+match.ratings.attack=Atak
+match.ratings.defence=Obrona
+
+match.ratings.right=Prawy
+match.ratings.center=Środk.
+match.ratings.left=Lewy
+match.ratings.rightshort=P
+match.ratings.centershort=Ś
+match.ratings.leftshort=L
+match.ratings.ifkshort=W
+
+
+
 
 #teampopups
 Manager=Prezes
@@ -637,8 +626,6 @@ YouthMatches=Juniorzy
 more=Więcej...
 less=Mniej...
 
-total_stars=Łączna liczba gwiazdek
-
 # FlagCollectionToMap
 flagCollectionToMap.ShowMap=Pokaż mapę
 flagCollectionToMap.HideMap=Ukryj mapę
@@ -649,18 +636,10 @@ flagCollectionToMap.MEast=Bliski Wschód
 flagCollectionToMap.SAmerica=Ameryka Południowa
 flagCollectionToMap.World=Świat
 
-# SkillTable
-Skill_table=Tabela umiejętności
-Switch_view=Zmień widok
-
 
 
 # TransferSearchResultFilters
 TransferSearchResultFilters.days=Dni\:
-
-# refer to transfer search form
-Filters.minimum=Co najmniej
-Filters.maximum=Co najwyżej
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
 RapidId.view=Zobacz
@@ -668,29 +647,6 @@ RapidId.viewById=Szukaj wg ID
 RapidId.senior=Seniorzy
 RapidId.youth=Juniorzy
 
-# SkillTable
-Switch_view.title=Zmienia widok tabeli
-Nationality=Narodowość
-Nationality.abbr=Nar
-Flag=Flagi
-Flag.abbr=Flagi
-Player=Zawodnik
-Player.abbr=Zawodnik
-Age=Wiek
-Age.abbr=Wiek
-Match=Mecz
-Series=Liga
-
-Bookmark=Zakładki
-Bookmark.abbr=Za
-Deadline=Termin
-Deadline.abbr=Termin
-CurrentBid=Obecna cena
-CurrentBid.abbr=Cena
-CurrentBidder=Obecny kupujący
-CurrentBidder.abbr=Kupujący
-CurrentBidderShort=Obecny kupujący
-CurrentBidderShort.abbr=Ku
 
 # HTMSPrediction
 HTMSPrediction.prediction=Prognoza wyniku
@@ -719,7 +675,15 @@ CrossTable.table=Tabela meczów
 
 # fennec ui
 
-sidebarBox.actions=Akcje
+#Locales for date and time
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
+datetimestrings.days=dni
+datetimestrings.hours=h
+datetimestrings.minutes=m
+datetimestrings.short_seasons=s
+datetimestrings.short_weeks=t
+datetimestrings.short_days=d
 
 # buttons
 button.ok=OK
@@ -739,6 +703,8 @@ button.copy=Kopiuj
 
 
 # keep the following line untranslated
+
+ReadHtPrefs.HTLanguageChanged=W opcjach Foxtricka włączyłeś wykrywanie zmian języka w Hattricku. W związku z tym, zmieniono język Foxtricka na\: %s.
 
 # End of IN-GAME STRINGS.
 
