--- a/content/locale/pt-PT/foxtrick.properties
+++ b/content/locale/pt-PT/foxtrick.properties
@@ -242,17 +242,12 @@ module.MatchOrderInterface.StayOnPage.desc=Permanecer na página de ordens depoi
 
 #Save for work
 
-#Embed Media
-
 #Extrashortcuts
 ExtraShortcuts.statistics=Estatísticas
 ExtraShortcuts.transfers=transfers
 ExtraShortcuts.ManageCHPP=Gerenciar seus produtos CHPP
 ExtraShortcuts.prefs=Preferências
 ExtraShortcuts.ftprefs=Preferências de FoxTrick
-
-#lineupShortcut
-
 
 #HistoryStats
 HistoryStats.season=Temporada
@@ -265,11 +260,9 @@ HistoryStats.cupwinner=Vencedor da Taça
 #following string uses pluralForms
 YouthPromotes.today=Jogador pode ser promovido hoje\!
 
-# links
-links.boxheader=Links
-
 #teamstats+filters
 TeamStats.boxheader=Síntese da Equipa
+TeamStats.General=Geral
 TeamStats.PlayerNotToOld=Jogadores < 19 anos
 TeamStats.PlayerToOld=Jogadores > \= 19 anos
 TeamStats.Cards=Cartões
@@ -282,6 +275,12 @@ TeamStats.NotTransferListed=Não listado de transferência
 TeamStats.ActivePlayers=Jogadores ativos
 TeamStats.HomeGrownPlayers=Jogadores caseiros
 TeamStats.PurchasedPlayers=Jogadores comprados
+
+#PlayerBirthday
+PlayerBirthday.boxheader=Aniversários
+PlayerBirthday.BirthdayToday=Aniversários de hoje
+PlayerBirthday.BirthdayLastWeek=Aniversários na semana passada
+PlayerBirthday.BirthdayNextWeek=Aniversários na próxima semana
 
 #season stats
 #note to translators. use abreviations of league table where applicable
@@ -301,40 +300,42 @@ LeagueNewsFilter.all=Todos
 LeagueNewsFilter.transfers=Transferências
 LeagueNewsFilter.lineupChanges=Mudanças na formação
 
-# AddLeaveConfButton
-AddLeaveConfButton.alert=Clique no botão 'Guardar' na próxima página para abandonar este fórum.
-AddLeaveConfButton.LeaveForum=Abandonar fórum
+#team pages
+sidebarBox.actions=Acções
+TeamSelectBox.selectplayer=Seleccionar jogador
+ManagerButtons.writeInGuestbook=Escrever no livro de visitas
 
-#ShowForumPrefButton
+#forum
+AddLeaveConfButton.LeaveForum=Abandonar fórum
+AddLeaveConfButton.alert=Clique no botão 'Guardar' na próxima página para abandonar este fórum.
 ShowForumPrefButton.forumPreferences=Preferências de fórum
+HideSignatures.signaturetoggle=Assinatura
+MarkUnread.markunread=Marcar como não lido a partir daqui
 
 # ForumTemplates
 ForumTemplates.make=Fazer template a partir do post
+ForumTemplates.make.error=O template já existe ou está vazio
 ForumTemplates.show=Mostrar templates
 ForumTemplates.hide=Esconder templates
-ForumTemplates.make.error=O template já existe ou está vazio
 ForumTemplates.templateTitle=Título do Template
 ForumTemplates.templateTitle.error='[' and ']' não são permitidos nos títulos
 ForumTemplates.delete.ask=Apagar template?
 
-#PostPreview
+#ForumPreview
 ForumPreview.preview.title=Mostrar uma previsão do novo post
 ForumPreview.preview=Prever
 ForumPreview.send=Enviar
 
-
-ForumYouthIcons.toolbar.youth=Links Academia
+#ForumYouthIcons
 ForumYouthIcons.toolbar.main=Links Principais
+ForumYouthIcons.toolbar.youth=Links Academia
+ForumYouthIcons.toolbar.other=Outros
 ForumYouthIcons.youthplayerid=Link para jogador júnior
 ForumYouthIcons.youthteamid=Link para equipa de juniores
 ForumYouthIcons.youthmatchid=Link para jogo de juniores
 ForumYouthIcons.youthseries=Link para liga de juniores
-
-ForumYouthIcons.toolbar.other=Outros
 ForumYouthIcons.debug=Inserir registo de depuração FoxTrick.
 ForumYouthIcons.settings=Insira configurações de FoxTrick.
-
-#special bbcode, not really youth icons
 ForumSpecialBBCode.q=Adicionar citação
 ForumSpecialBBCode.br=Adicionar mudança de linha
 ForumSpecialBBCode.user=Adicionar link para utilizador
@@ -348,8 +349,6 @@ ForumSpecialBBCode.tableSeparator=Converter "% s" para células
 ForumSpecialBBCode.enterSeparator=Indique um separador personalizado
 ForumSpecialBBCode.forumSymbol=Inserir "% s"
 ForumSpecialBBCode.symbols=Inserir símbolo\: %s
-
-
 
 #Transferlistfilters
 TransferSearchFilters.boxheader=Filtros Foxtrick
@@ -370,16 +369,7 @@ Filters.Form=Forma
 Filters.XP=Experiência
 Filters.specialty=Especialidade
 Filters.stars=Estrelas
-
-#Locales for date and time
-#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
-#next 6 use pluralFroms
-datetimestrings.days=Dias
-datetimestrings.hours=h.
-datetimestrings.minutes=min.
-datetimestrings.short_seasons=épo.
-datetimestrings.short_weeks=sem.
-datetimestrings.short_days=dias
+Filters.minimum=Pelo menos
 
 #Transfer prices
 MedianTransferPrice.median=Preço mediano
@@ -416,6 +406,7 @@ Set_pieces=Bolas Paradas
 
 #note to translators. Copy abbreviations from HT translations using players page on HT (only supporters can see them in brackets next to players names)
 
+#match positions
 match.pos.mcd.abbr=MCD
 match.pos.rcd.abbr=RCD
 match.pos.rb.abbr=RB
@@ -438,17 +429,19 @@ match.role.captain.abbr=Capt.
 
 match.player.unknown=Jogador desconhecido
 
-TeamStats.General=Geral
-
+# SkillTable
+Skill_table=Tabela de habilidades
+Switch_view=Alterar modo de exibição
+AddHomegrown=Adicionar jogadores caseiros
+showTimeInClub=Mostrar Tempo no Clube
+skilltable.youthplayer=Jogador Jovem
+skilltable.rebought_youthplayer=Jogador jovem recomprado
 PlayerNumber=Numero do jogador
 PlayerNumber.abbr=\#
-
 TSI=Total Skill Index
 TSI.abbr=TSI
-
 CanBePromotedIn=Pode ser promovido em
 CanBePromotedIn.abbr=Prom
-
 Personality=Personalidade
 Agreeability=Agreeability
 Agreeability.abbr=AB
@@ -456,33 +449,26 @@ Aggressiveness=Agressividade
 Aggressiveness.abbr=AG
 Honesty=Honestidade
 Honesty.abbr=Ho
-
 Leadership=Liderança
 Leadership.abbr=LS
 Experience=Experiência
 Experience.abbr=XP
-
 Stamina=Resistência
 Stamina.abbr=STM
 Form=Forma
 Form.abbr=FO
-
 Loyalty=Lealdade
 Loyalty.abbr=Lo
 MotherClubBonus=Bónus de Clube-Mãe
 MotherClubBonus.abbr=MB
-
 Status=estado
 Status.abbr=estado
-
 Yellow_card=Cartão amarelo
 Yellow_card.abbr=Y
 Red_card=Cartão vermelho
 Red_card.abbr=R
-
 Speciality=Especialidade
 Speciality.abbr=SP
-
 Last_match=Último jogo
 Last_match.abbr=Última
 Last_stars=Estrelas mais recentes
@@ -494,56 +480,49 @@ Last_position.abbr=POS
 #following string uses pluralForms
 Last_match_played_as_at=Jogou min %1 como %2 na sua última partida em 3%.
 Last_match_didnot_play=Não tenha jogado ainda.
-
 Bruised=Ferido
 Bruised.abbr=Fer
 Injured=Lesionado
 Injured.abbr=Les
-
 Salary.abbr=Salário
-
-
 LeagueGoals=Golos na Liga
 CupGoals=Golos na Taça
 FriendliesGoals=Golos nos amigáveis
 CareerGoals=Golos na carreira
 Hattricks=Hattricks
 Hattricks.abbr=HT
-
 Current_club=Clube atual
 Current_club.abbr=Clube
 Current_league=Liga atual
 Current_league.abbr=Liga
-
 JoinedSince=Juntou-se desde
 JoinedSince.abbr=Desde
-
 Hotlist=lista de favoritos
+Coach=Treinador
+CurrentSquad=Equipa Atual
+Nationality=Nacionalidade
+Nationality.abbr=NAT
+Flag=Bandeira
+Flag.abbr=Bandeira
+Player=Jogador
+Player.abbr=Jogador
+Age=Idade
+Age.abbr=Idade
+Match=Jogo
+Series=Série
+Deadline=Prazo
+Deadline.abbr=Prazo
+CurrentBid=Proposta atual
 
-skilltable.youthplayer=Jogador Jovem
-skilltable.rebought_youthplayer=Jogador jovem recomprado
-
-#matchdetail
-match.ratings.midfield=Meio-Campo
-match.ratings.attack=Ataque
-match.ratings.defence=Defesa
-match.ratings.total=Total
-
-match.ratings.right=Direita
-match.ratings.center=Centro
-match.ratings.left=Esquerda
-match.ratings.rightshort=D
-match.ratings.centershort=C
-match.ratings.leftshort=E
-match.ratings.ifkshort=L. Ind.
+#confirms
 ConfirmActions.bid=Deseja licitar este jogador? O preço é %s.
 ConfirmActions.transferlist=Deseja colocar este jogador na lista de transferências? O preço será de %s.
 ConfirmActions.hirestaff=Você deseja contratar % num % tipo?
 ConfirmActions.sackstaff=Você deseja demitir % num % tipo?
 ConfirmActions.ntremove=Deseja realmente adicionar/remover este jogador da sua equipa?
-HideSignatures.signaturetoggle=Assinatura
-MarkUnread.markunread=Marcar como não lido a partir daqui
-TeamSelectBox.selectplayer=Seleccionar jogador
+
+# links
+links.boxheader=Links
 links.custom.selecticon=Seleccionar ícone
 links.custom.addpersonallink=Adicionar link pessoal
 links.custom.addlink=Adicionar link
@@ -556,12 +535,6 @@ links.custom.tags=Etiquetas
 links.custom.help=Ajuda
 links.custom.helptext=Primeiro, isto é só o modo de edição. Ao clicar no cabeçalho desta caixa alterna entre modo editor e modo normal. Apenas em modo normal os teus próprios links estão completamente funcionais. Links estáticos externos são fáceis de adicionar, apenas adiciona o url completo (Examplo\: http\: //alltid.org/league/427/) . Para links estáticos internos não colocar a parte do servidor (Examplo\: /World/Series/Default.aspx?LeagueLevelUnitID\=427). As etiquetas apenas precisas para links dinâmicos raros. Com etiquestas os links são dinâmicamente mudados usando a informação do lado em que tu estás. Por exemplo http\://alltid.org/league/[leagueid] Iria sempre para o link Alltid da série que estás a ver. As etiquetas que estão disponíveis em cada site estão listadas na caixa de selecção. Apenas podes usar aqueles que estão listados no site onde tu estás a adicionar o link personalizado. Os texto produzido é apenas um template de amostra. Podes escrever a tua própria etiqueta. (com []).
 links.custom.helptext2=Tua também exportas os teus links e os partilhas. Para isto podes clicar no botão exportar e seleccionar um ficheiro para guardar o link. Os links são anexados aquele ficheiro, para que possas guardar vários links num único ficheiro. Para importar links vai à janela de preferências e dirige-te a Importar Preferências. Apenas as preferências que se encontrem naquele ficheiro serão importadas, que neste caso, são os links. Nenhum dos teus links anteriores serão apagados.
-matches.income=Receita\:
-PlayerBirthday.boxheader=Aniversários
-PlayerBirthday.BirthdayToday=Aniversários de hoje
-PlayerBirthday.BirthdayLastWeek=Aniversários na semana passada
-PlayerBirthday.BirthdayNextWeek=Aniversários na próxima semana
-copy.matchid=Clica para copiar o matchID para a caixa de texto
 
 
 #following string uses pluralForms
@@ -569,24 +542,18 @@ notify.newMail=Você recebeu %s novo mail.;Você recebeu %s novos e-mails.
 #following string uses pluralForms
 
 
-ReadHtPrefs.HTLanguageChanged=Escolheu mudar a linguagem do Foxtrick automaticamente consoante mude a linguagem no Hattrick. A linguagem do Foxtrick é agora\: %s.
-
-Coach=Treinador
-CurrentSquad=Equipa Atual
-
-
-ManagerButtons.writeInGuestbook=Escrever no livro de visitas
-copy.copyplayerad=Copiar anúncio do jogador para a área de transferências.
-copy.copied=O anúncio do jogador foi colocado na área de transferências.
-
-ratings.HatStats=HatStats
-ratings.LoddarStats=LoddarStats
-ratings.PeasoStats=PeasoStats
-ratings.VnukStats=VnukStats
-ratings.HTitaVal=HTitaVal
-ratings.GardierStats=GardierStats
+# Context menu items
+# This would look like: Copy player ID: 123456789
+copy.id=Copiar % s\: %i
+copy.link=Copiar localização do Link em HT-ML
+copy.ht-ml=Copiar no HT-ML
+copy.table=Copiar tabela no HT-ML
 
 #copy
+copy.copyplayerad=Copiar anúncio do jogador para a área de transferências.
+copy.copied=O anúncio do jogador foi colocado na área de transferências.
+copy.matchid=Clica para copiar o matchID para a caixa de texto
+
 copy.PostID=Copiar para a área de transferência
 CopyPosting=Copiar post no estilo %s
 CopyPosting.abbr=Copiar estilo de %s
@@ -618,6 +585,39 @@ copy.copied.posting=O Post% s foi copiado para o clipboard.
 copy.copySelected=Copiar a seleção com Ctrl + c.
 copy.operaPaste=Colar com Shift + Click esquerdo.
 
+#matches
+matches.income=Receita\:
+matches.attackdefensebars=Barras Ataque vs Defesa
+matches.right=Direita
+matches.left=Esquerda
+matches.center=Centro
+matches.defense=Defesa
+matches.attack=Ataque
+matches.indfreekick=Livre Ind.
+matches.wronglang=Foxtrick\: As estatísticas não podem ser mostradas porque a tua língua não está registada ou escolheste a língua errada nas preferências. Por favor tem a certeza que a tua língua do Hattrick e do Foxtrick são a mesma.
+total_stars=Contagem do número total de estrelas
+
+#matchdetail
+match.ratings.midfield=Meio-Campo
+match.ratings.attack=Ataque
+match.ratings.defence=Defesa
+match.ratings.total=Total
+
+match.ratings.right=Direita
+match.ratings.center=Centro
+match.ratings.left=Esquerda
+match.ratings.rightshort=D
+match.ratings.centershort=C
+match.ratings.leftshort=E
+match.ratings.ifkshort=L. Ind.
+
+ratings.HatStats=HatStats
+ratings.LoddarStats=LoddarStats
+ratings.PeasoStats=PeasoStats
+ratings.VnukStats=VnukStats
+ratings.HTitaVal=HTitaVal
+ratings.GardierStats=GardierStats
+
 MatchReportFormat.MatchReport=Relatório do jogo
 MatchReportFormat.lineup=Line-up
 MatchReportFormat.kickOff=Pontapé de saída
@@ -627,23 +627,6 @@ MatchReportFormat.extraTime=Prolongamento
 MatchReportFormat.penaltyShootOut=Penáltis
 MatchReportFormat.result=Resultado
 
-
-#matches
-matches.attackdefensebars=Barras Ataque vs Defesa
-matches.right=Direita
-matches.left=Esquerda
-matches.center=Centro
-matches.defense=Defesa
-matches.attack=Ataque
-matches.indfreekick=Livre Ind.
-matches.wronglang=Foxtrick\: As estatísticas não podem ser mostradas porque a tua língua não está registada ou escolheste a língua errada nas preferências. Por favor tem a certeza que a tua língua do Hattrick e do Foxtrick são a mesma.
-
-# Context menu items
-# This would look like: Copy player ID: 123456789
-copy.id=Copiar % s\: %i
-copy.link=Copiar localização do Link em HT-ML
-copy.ht-ml=Copiar no HT-ML
-copy.table=Copiar tabela no HT-ML
 
 #teampopups
 Manager=Treinador
@@ -663,12 +646,6 @@ LastLineup=Última formação
 YouthMatches=Jogos dos jovens
 more=mais...
 less=menos...
-TeamPopupLinks.prefsCaption=Preferências de ligação
-TeamPopupLinks.ShowByDefault=Mostrar por padrão
-TeamPopupLinks.ShowOnMore=Mostrar mais
-TeamPopupLinks.OpenNewTab=Abrir num novo separador
-
-total_stars=Contagem do número total de estrelas
 
 # FlagCollectionToMap
 flagCollectionToMap.ShowMap=Mostrar mapa
@@ -680,12 +657,6 @@ flagCollectionToMap.MEast=Médio Oriente
 flagCollectionToMap.SAmerica=América do Sul
 flagCollectionToMap.World=Mundo
 
-# SkillTable
-Skill_table=Tabela de habilidades
-Switch_view=Alterar modo de exibição
-AddHomegrown=Adicionar jogadores caseiros
-showTimeInClub=Mostrar Tempo no Clube
-
 team.status.booked=Amigável marcado
 ShowFriendlyBooked.ShowFriendlies=Mostrar Jogos amigáveis
 
@@ -696,29 +667,11 @@ TransferSearchResultFilters.hideInjured=Ocultar feridos
 TransferSearchResultFilters.hideSuspended=Ocultar suspenso
 TransferSearchResultFilters.days=Dias\:
 
-# refer to transfer search form
-Filters.minimum=Pelo menos
-
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
 RapidId.view=Exibir
 RapidId.senior=Sénior
 RapidId.youth=Jovens
 
-# SkillTable
-Nationality=Nacionalidade
-Nationality.abbr=NAT
-Flag=Bandeira
-Flag.abbr=Bandeira
-Player=Jogador
-Player.abbr=Jogador
-Age=Idade
-Age.abbr=Idade
-Match=Jogo
-Series=Série
-
-Deadline=Prazo
-Deadline.abbr=Prazo
-CurrentBid=Proposta atual
 
 # HTMSPrediction
 HTMSPrediction.team=Equipa
@@ -777,7 +730,15 @@ pageAction.mainContent=Mostrar o conteúdo principal
 pageAction.leftMenu=Mostrar barra à esquerda
 pageAction.all=Mostrar tudo
 
-sidebarBox.actions=Acções
+#Locales for date and time
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
+datetimestrings.days=Dias
+datetimestrings.hours=h.
+datetimestrings.minutes=min.
+datetimestrings.short_seasons=épo.
+datetimestrings.short_weeks=sem.
+datetimestrings.short_days=dias
 
 # buttons
 button.ok=OK
@@ -820,6 +781,8 @@ exception.error=Erro %s
 log.header=FoxTrick Log
 # keep the following line untranslated
 
+ReadHtPrefs.HTLanguageChanged=Escolheu mudar a linguagem do Foxtrick automaticamente consoante mude a linguagem no Hattrick. A linguagem do Foxtrick é agora\: %s.
+
 # End of IN-GAME STRINGS.
 
 
@@ -828,6 +791,10 @@ log.header=FoxTrick Log
 Links.feeds=Feeds de listas de ligações (separadas por quebras)
 TickerAlert.enable=Ativar
 TickerAlert.sound=Som
+TeamPopupLinks.prefsCaption=Preferências de ligação
+TeamPopupLinks.ShowByDefault=Mostrar por padrão
+TeamPopupLinks.ShowOnMore=Mostrar mais
+TeamPopupLinks.OpenNewTab=Abrir num novo separador
 
 #toolbar
 toolbar.title=FoxTrick
