--- a/content/locale/ro/foxtrick.properties
+++ b/content/locale/ro/foxtrick.properties
@@ -393,9 +393,6 @@ module.SafeForWork.desc=Inlocuieste pictograma si titlul tab-urilor Hattrick pen
 SafeForWork.title=Titlu
 SafeForWork.icon=Pictograma
 
-#Embed Media
-EmbedMedia.EmbeddedImage=Imagine incorporata
-
 #Extrashortcuts
 ExtraShortcuts.statistics=Statistici
 ExtraShortcuts.transfers=Transferuri
@@ -403,10 +400,8 @@ ExtraShortcuts.ManageCHPP=Coordoneaza produsele tale CHPP
 ExtraShortcuts.prefs=Preferinte
 ExtraShortcuts.ftprefs=Preferinte FoxTrick
 
-#lineupShortcut
-
-
 #HistoryStats
+HistoryStats.boxheader=Statistici istorie
 HistoryStats.season=Sezon
 HistoryStats.season.short=S
 HistoryStats.cup=Tur cupa
@@ -415,7 +410,6 @@ HistoryStats.league=Liga
 HistoryStats.league.short=Lig
 HistoryStats.finalPosition=Pozitie finala in liga
 HistoryStats.finalPosition.short=Pfl
-HistoryStats.boxheader=Statistici istorie
 HistoryStats.cupwinner=Castigator cupa
 HistoryStats.cupwinner.short=CC
 
@@ -424,11 +418,9 @@ HistoryStats.cupwinner.short=CC
 YouthPromotes.future=Jucătorul poate fi promovat %1 zi mai târziu, pe %2.;Jucătorul poate fi promovat %1 zile mai târziu, pe %2.
 YouthPromotes.today=Jucatorul poate fi promovat astazi\!
 
-# links
-links.boxheader=Linkuri
-
 #teamstats+filters
 TeamStats.boxheader=Situatia lotului
+TeamStats.General=General
 TeamStats.PlayerNotToOld=Jucatori < 19 ani
 TeamStats.PlayerToOld=Jucatori >\= 19 ani
 TeamStats.Cards=Cartonase
@@ -442,6 +434,12 @@ TeamStats.ActivePlayers=Jucatori activi
 TeamStats.HomeGrownPlayers=Jucatori club mama
 TeamStats.PurchasedPlayers=Jucatori cumparati
 TeamStats.FilterFor=Filtru pentru
+
+#PlayerBirthday
+PlayerBirthday.boxheader=Zile de nastere
+PlayerBirthday.BirthdayToday=Zile de nastere astazi
+PlayerBirthday.BirthdayLastWeek=Zile de nastere saptamana trecuta
+PlayerBirthday.BirthdayNextWeek=Zile de nastere saptamana viitoare
 
 #season stats
 #note to translators. use abreviations of league table where applicable
@@ -468,43 +466,52 @@ LeagueNewsFilter.friendlies=Amicale si antrenor noi
 LeagueNewsFilter.transfers=Transferuri
 LeagueNewsFilter.lineupChanges=Schimbarea ordinelor de meci
 
-# AddLeaveConfButton
-AddLeaveConfButton.alert=Click pe butonul 'Salveaza' pe pagina urmatoare pentru a parasi acest forum.
-AddLeaveConfButton.LeaveForum=Paraseste forumul
+#team pages
+sidebarBox.actions=Actiuni
+TeamSelectBox.selectplayer=Alege jucator
+ExtendedPlayerDetails.perseason=/ sezon
+ExtraPlayerInfo.defensiveTrainer=Un antrenor %s care este adept al apararii.
+ExtraPlayerInfo.offensiveTrainer=Un antrenor %s care este adept al atacului.
+ExtraPlayerInfo.balancedTrainer=Un antrenor %s care nu este nici adept al atacului, nici al apararii.
+ManagerButtons.writeInGuestbook=Scrie in Cartea de Oaspeti
 
-#ShowForumPrefButton
+#forum
+AddLeaveConfButton.LeaveForum=Paraseste forumul
+AddLeaveConfButton.alert=Click pe butonul 'Salveaza' pe pagina urmatoare pentru a parasi acest forum.
 ShowForumPrefButton.forumPreferences=Forum Preferences
+FormatPostingText.ShowNestedQuotes=Arata quote-urile imbricate  
+HideSignatures.signaturetoggle=Semnatura
+MarkUnread.markunread=Marcheaza necitite de aici incolo
+EmbedMedia.EmbeddedImage=Imagine incorporata
+ForumStripHattrickLinks.ask=Doresti sa formezi linkuri din serverul hattrick pentru a le utiliza?
 
 # ForumTemplates
 ForumTemplates.make=Creeaza un sablon din post
+ForumTemplates.make.error=Sablonul exista deja sau este gol
 ForumTemplates.show=Arata sabloane
 ForumTemplates.hide=Ascunde sabloane
-ForumTemplates.make.error=Sablonul exista deja sau este gol
 ForumTemplates.templateTitle=Nume sablon\:
 ForumTemplates.templateTitle.error='[' si ']' sunt interzise in numele sabloanelor
 ForumTemplates.delete.ask=stergere sablon?
 
-#PostPreview
+#ForumPreview
 ForumPreview.preview.title=Previzualizare mesaj
 ForumPreview.preview=Previzualizare
 ForumPreview.send=Trimite
 
-
+#ForumYouthIcons
+ForumYouthIcons.toolbar.main=Linkuri principale
 ForumYouthIcons.toolbar.youth=Linkuri juniori
 ForumYouthIcons.toolbar.tournament=Turnee
-ForumYouthIcons.toolbar.main=Linkuri principale
+ForumYouthIcons.toolbar.other=Altele
 ForumYouthIcons.youthplayerid=Adauga link pentru ID juniorului
 ForumYouthIcons.youthteamid=Adauga link pentru ID-ul echipei de juniori
 ForumYouthIcons.youthmatchid=Adauga link pentru meciurile juniorilor
 ForumYouthIcons.youthseries=Adauga link pentru seriile de juniori
 ForumYouthIcons.tournamentid=Introduceti tag-ul turneului.
 ForumYouthIcons.tournamentmatchid=Introduceti tag-ul meciului din turneu.
-
-ForumYouthIcons.toolbar.other=Altele
 ForumYouthIcons.debug=Insereaza log-ul debug FoxTrick.
 ForumYouthIcons.settings=Insereaza setarile FoxTrick.
-
-#special bbcode, not really youth icons
 ForumSpecialBBCode.q=Adauga quote
 ForumSpecialBBCode.br=Lasa o linie pauza si sare la randul urmator
 ForumSpecialBBCode.user=Adauga link catre utilizator
@@ -519,9 +526,6 @@ ForumSpecialBBCode.enterSeparator=Adauga un separator
 ForumSpecialBBCode.forumSymbol=Inserare "%s"
 ForumSpecialBBCode.symbols=Inserare simbol\: %s
 
-
-FormatPostingText.ShowNestedQuotes=Arata quote-urile imbricate  
-
 #Transferlistfilters
 TransferSearchFilters.boxheader=Filtre FoxTrick
 TransferSearchFilters.enterName=Introduceti numele filtrului\:
@@ -530,6 +534,7 @@ TransferSearchFilters.saveFilter=Salveaza filtru nou
 
 #Filter
 Filters.label=Filtre
+Filters.addFilterOptions=Adauga optiuni de filtrare
 Filters.ok=Ok
 Filters.clear=Goliti
 Filters.noFilter=Nici un filtru
@@ -541,17 +546,8 @@ Filters.Form=Forma
 Filters.XP=Experienta
 Filters.specialty=Specialitate
 Filters.stars=Stele
-Filters.addFilterOptions=Adauga optiuni de filtrare
-
-#Locales for date and time
-#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
-#next 6 use pluralFroms
-datetimestrings.days=zile
-datetimestrings.hours=ore
-datetimestrings.minutes=min
-datetimestrings.short_seasons=sez
-datetimestrings.short_weeks=sapt
-datetimestrings.short_days=zil
+Filters.minimum=Cel putin
+Filters.maximum=Maxim
 
 #Transfer prices
 MedianTransferPrice.median=Pretul median
@@ -617,6 +613,7 @@ categories.R=R
 categories.E1=E1
 categories.E2=E2
 
+#match positions
 match.pos.kp=Portar
 match.pos.kp.abbr=GK
 match.pos.lb=Fundas stanga
@@ -653,17 +650,22 @@ match.role.captain.abbr=Capt.
 
 match.player.unknown=Jucator necunoscut
 
-TeamStats.General=General
-
+# SkillTable
+Skill_table=Tabel calitati
+Switch_view=Schimba modul de vizualizare
+AddHomegrown=Adauga jucatorii crescuti la club
+showTimeInClub=Arata timpul de cand sunt la club
+Switch_view.title=Schimba modul de vizualizare al tabelului.
+skillTable.addHomegrown=Adauga toti jucatorii crescuti la club din actualul
+skillTable.showTimeInClub=Arata timpul de cand jucatorul a sosit la echipa de seniori
+skilltable.youthplayer=Junior
+skilltable.rebought_youthplayer=Junior rascumparat
 PlayerNumber=Numarul jucatorului
 PlayerNumber.abbr=\#
-
 TSI=Totalul calitatilor individuale
 TSI.abbr=TCI
-
 CanBePromotedIn=Poate fi promovat in
 CanBePromotedIn.abbr=Prom
-
 Personality=Personalitate
 Agreeability=Agreabilitate
 Agreeability.abbr=Ab
@@ -671,33 +673,26 @@ Aggressiveness=Agresivitate
 Aggressiveness.abbr=Ag
 Honesty=Cinste
 Honesty.abbr=Ci
-
 Leadership=Lider
 Leadership.abbr=LS
 Experience=Experienta
 Experience.abbr=XP
-
 Stamina=Rezistenta
 Stamina.abbr=Rez
 Form=Forma
 Form.abbr=Fo
-
 Loyalty=Loialitate
 Loyalty.abbr=Lo
 MotherClubBonus=Bonus club mama
 MotherClubBonus.abbr=CM
-
 Status=Status
 Status.abbr=Status
-
 Yellow_card=Cartonas galben
 Yellow_card.abbr=Y
 Red_card=Cartonas rosu
 Red_card.abbr=R
-
 Speciality=Specialitate
 Speciality.abbr=S
-
 Last_match=Ultimul meci
 Last_match.abbr=Meci
 Last_stars=Stele ultimul meci
@@ -711,18 +706,14 @@ Last_position.abbr=Poz
 #following string uses pluralForms
 Last_match_played_as_at=A jucat %1 min ca %2 in ultimul sau meci pe %3.
 Last_match_didnot_play=Nu a jucat inca.
-
 Bruised=Accidentat usor
 Bruised.abbr=Aus
 Injured=Accidentat
 Injured.abbr=Acc
-
 Salary=Salariu
 Salary.abbr=Sal
-
 TransferListed=Jucator listat
 TransferListed.abbr=TL
-
 NrOfMatches=Numarul de meciuri
 NrOfMatches.abbr=NM
 LeagueGoals=Goluri liga
@@ -735,43 +726,48 @@ CareerGoals=Goluri cariera
 CareerGoals.abbr=G
 Hattricks=Hattrick-uri
 Hattricks.abbr=HT
-
 Current_club=Echipa curenta
 Current_club.abbr=Echipa
 Current_league=Liga curenta
 Current_league.abbr=Liga
-
 JoinedSince=Alaturat de la
 JoinedSince.abbr=De la
-
 Hotlist=Lista de cumparaturi
 Hotlist.abbr=Lista
+Coach=Antrenor
+CurrentSquad=Echipa actuala
+Nationality=Nationalitate
+Nationality.abbr=Nat
+Flag=Flag
+Flag.abbr=Flag
+Player=Jucator
+Player.abbr=Jucator
+Age=Varsta
+Age.abbr=Varsta
+Match=Meci
+Series=Serie
+TransferCompare=ComparaTransferul
+TransferCompare.abbr=CT
+Bookmark=Bookmark
+Bookmark.abbr=Bm
+Deadline=Termen limita
+Deadline.abbr=Term
+CurrentBid=Oferta actuala
+CurrentBid.abbr=Bid
+CurrentBidder=Cel mai mare ofertant actual
+CurrentBidder.abbr=Ofertant
+CurrentBidderShort=Cel mai mare ofertant actual
+CurrentBidderShort.abbr=Of
 
-skilltable.youthplayer=Junior
-skilltable.rebought_youthplayer=Junior rascumparat
-
-#matchdetail
-match.ratings.midfield=Mijloc
-match.ratings.attack=Atac
-match.ratings.defence=Aparare
-match.ratings.total=Total
-
-match.ratings.right=Dreapta
-match.ratings.center=Centru
-match.ratings.left=Stanga
-match.ratings.rightshort=D
-match.ratings.centershort=C
-match.ratings.leftshort=S
-match.ratings.ifkshort=I
+#confirms
 ConfirmActions.bid=Vrei sa licitezi pentru acest jucator? Pretul este %s.
 ConfirmActions.transferlist=Vrei sa adaugi acest jucator pe lista de transferuri? Pretul de pornire este %s.
 ConfirmActions.hirestaff=Vrei sa angajezi\! %num %kind?
 ConfirmActions.sackstaff=Vrei sa concediezi\! %num %kind?
 ConfirmActions.ntremove=Esti sigur ca vrei sa adaugi/scoti acest jucator in/din echipa ta?
-ForumStripHattrickLinks.ask=Doresti sa formezi linkuri din serverul hattrick pentru a le utiliza?
-HideSignatures.signaturetoggle=Semnatura
-MarkUnread.markunread=Marcheaza necitite de aici incolo
-TeamSelectBox.selectplayer=Alege jucator
+
+# links
+links.boxheader=Linkuri
 links.custom.selecticon=Alege pictograma
 links.custom.addpersonallink=Adauga link personal
 links.custom.addlink=Adauga link
@@ -784,17 +780,7 @@ links.custom.tags=Tags
 links.custom.help=Ajutor
 links.custom.helptext=In primul rand, acesta este doar modul de editor. Daca faceti click pe antetul acestei casute se va comuta intre editor si modul normal. Doar in modul normal linkurile proprii sunt pe deplin functionale. Linkurile externe statice sunt usor de adaugat, este suficient sa adaugati url-ul complet (Exemplu\: http\:  /  / example.org  / liga  / 427  /). Pentru linkuri interne statice sariti partea cu serverul (exemplu\:  / World  / Seria  / Default.aspx? LeagueLevelUnitID \= 427). Cu ajutorul etichetelor linkurile sunt schimbate dinamic. De exemplu http\:  /  / example.org  / Liga  / [leagueid] va va conduce intotdeauna pe pagina ligii cu ID-ul pe care o vizualizati in hattrick. Etichetele care sunt la indemana pe fiecare site sunt listate in casuta de selectare. Poti utiliza doar acele etichete care sunt listate pe situl unde adaugi linkul. Textul produs este doar un exemplu de sablon. Poti scrie la tag-ul dvs. (cu []).
 links.custom.helptext2=De asemenea puteti exporta linkurile. Pentru a face acest lucru puteti da click pe butonul Export si selectati un fisier pentru a salva acel link. Linkurile sunt adaugate in acest fisier, puteti salva mai multe linkuri intr-un singur fisier. Pentru a importa linkuri mergeti la casuta preferinta de dialog si apoi import preferinte. Doar preferintele prezente in fisierul selectat vor fi importate, care in acest caz sunt linkurile proprii. Nici unul din linkurile precedente nu vor fi sterse.
-matches.income=Venituri\:
-PlayerBirthday.boxheader=Zile de nastere
-PlayerBirthday.BirthdayToday=Zile de nastere astazi
-PlayerBirthday.BirthdayLastWeek=Zile de nastere saptamana trecuta
-PlayerBirthday.BirthdayNextWeek=Zile de nastere saptamana viitoare
-copy.matchid=Click pentru a copia ID-ul meciului in clipboard
-ExtendedPlayerDetails.perseason=/ sezon
 
-ExtraPlayerInfo.defensiveTrainer=Un antrenor %s care este adept al apararii.
-ExtraPlayerInfo.offensiveTrainer=Un antrenor %s care este adept al atacului.
-ExtraPlayerInfo.balancedTrainer=Un antrenor %s care nu este nici adept al atacului, nici al apararii.
 
 #following string uses pluralForms
 notify.newMail=Ai primit %s mesaj nou.;Ai primit %s mesaje noi.
@@ -803,25 +789,18 @@ notify.newForumMessage=Ai %s mesaj nou adresat tie pe forum.;Ai %s mesaje noi ad
 
 matchView.htLive=HT Live
 
-module.modules_allpages=Module care ruleaza pe toate paginile
-ReadHtPrefs.HTLanguageChanged=FoxTrick a detectat o schimbare a limbii. Limba FoxTrick este acum setata ca fiind %s.
-
-Coach=Antrenor
-CurrentSquad=Echipa actuala
-
-
-ManagerButtons.writeInGuestbook=Scrie in Cartea de Oaspeti
-copy.copyplayerad=Copiaza jucatorul
-copy.copied=Jucatorul a fost copiat in clipboard
-
-ratings.HatStats=HatStats
-ratings.LoddarStats=LoddarStats
-ratings.PeasoStats=PeasoStats
-ratings.VnukStats=VnukStats
-ratings.HTitaVal=HTitaVal
-ratings.GardierStats=GardierStats
+# Context menu items
+# This would look like: Copy player ID: 123456789
+copy.id=Copiaza %s\: %i
+copy.link=Copiaza locatia linkului in HT-ML
+copy.ht-ml=Copiaza in HT-ML
+copy.table=Copiaza Tabel in HT-ML
 
 #copy
+copy.copyplayerad=Copiaza jucatorul
+copy.copied=Jucatorul a fost copiat in clipboard
+copy.matchid=Click pentru a copia ID-ul meciului in clipboard
+
 copy.PostID=Copiaza postID in clipboard
 CopyPosting=Copiaza in stilul %s
 CopyPosting.abbr=Copiaza in stilul %s
@@ -853,6 +832,39 @@ copy.copied.posting=Mesajul %s a fost copiat in clipboard.
 copy.copySelected=Copiati selectia cu Ctrl + C.
 copy.operaPaste=Lipire selectia cu Shift + Click Stanga.
 
+#matches
+matches.income=Venituri\:
+matches.attackdefensebars=Atac vs Aparare
+matches.right=Dreapta
+matches.left=Stanga
+matches.center=Centru
+matches.defense=apar
+matches.attack=atac
+matches.indfreekick=Faze fixe indirecte
+matches.wronglang=Foxtrick\: Datele nu pot fi afisate pentru ca limba dumneavoastra nu este inregistrata sau pentru ca ati setat limba gresita la preferinte. Fiti sigur ca limba din Foxtrick este aceeasi ca si limba din Hattrick.
+total_stars=Numar total stele
+
+#matchdetail
+match.ratings.midfield=Mijloc
+match.ratings.attack=Atac
+match.ratings.defence=Aparare
+match.ratings.total=Total
+
+match.ratings.right=Dreapta
+match.ratings.center=Centru
+match.ratings.left=Stanga
+match.ratings.rightshort=D
+match.ratings.centershort=C
+match.ratings.leftshort=S
+match.ratings.ifkshort=I
+
+ratings.HatStats=HatStats
+ratings.LoddarStats=LoddarStats
+ratings.PeasoStats=PeasoStats
+ratings.VnukStats=VnukStats
+ratings.HTitaVal=HTitaVal
+ratings.GardierStats=GardierStats
+
 MatchReportFormat.MatchReport=Raportul meciului
 MatchReportFormat.lineup=Primul 11
 MatchReportFormat.kickOff=Inceput de meci
@@ -862,23 +874,6 @@ MatchReportFormat.extraTime=Prelungiri
 MatchReportFormat.penaltyShootOut=Penaltiuri
 MatchReportFormat.result=Rezultat
 
-
-#matches
-matches.attackdefensebars=Atac vs Aparare
-matches.right=Dreapta
-matches.left=Stanga
-matches.center=Centru
-matches.defense=apar
-matches.attack=atac
-matches.indfreekick=Faze fixe indirecte
-matches.wronglang=Foxtrick\: Datele nu pot fi afisate pentru ca limba dumneavoastra nu este inregistrata sau pentru ca ati setat limba gresita la preferinte. Fiti sigur ca limba din Foxtrick este aceeasi ca si limba din Hattrick.
-
-# Context menu items
-# This would look like: Copy player ID: 123456789
-copy.id=Copiaza %s\: %i
-copy.link=Copiaza locatia linkului in HT-ML
-copy.ht-ml=Copiaza in HT-ML
-copy.table=Copiaza Tabel in HT-ML
 
 #teampopups
 Manager=Manager
@@ -898,12 +893,6 @@ LastLineup=Ultima asezare
 YouthMatches=Meciuri juniori
 more=Mai multe...
 less=Mai putine...
-TeamPopupLinks.prefsCaption=Preferinte Link
-TeamPopupLinks.ShowByDefault=Afiseaza implicit
-TeamPopupLinks.ShowOnMore=Afiseaza mai multe
-TeamPopupLinks.OpenNewTab=Deschide in fila noua
-
-total_stars=Numar total stele
 
 # FlagCollectionToMap
 flagCollectionToMap.ShowMap=Arata harta
@@ -915,12 +904,6 @@ flagCollectionToMap.MEast=Orientul Mijlociu
 flagCollectionToMap.SAmerica=America de Sud
 flagCollectionToMap.World=Lume
 
-# SkillTable
-Skill_table=Tabel calitati
-Switch_view=Schimba modul de vizualizare
-AddHomegrown=Adauga jucatorii crescuti la club
-showTimeInClub=Arata timpul de cand sunt la club
-
 team.status.booked=Friendly booked
 ShowFriendlyBooked.ShowFriendlies=Arata amicalele
 
@@ -931,10 +914,6 @@ TransferSearchResultFilters.hideInjured=Ascunde accidentarea
 TransferSearchResultFilters.hideSuspended=Ascunde jucatorii suspendati
 TransferSearchResultFilters.days=Zile\:
 
-# refer to transfer search form
-Filters.minimum=Cel putin
-Filters.maximum=Maxim
-
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
 RapidId.view=Vizualizeaza
 RapidId.viewById=Vizualizeaza dupa ID
@@ -943,33 +922,6 @@ RapidId.youth=Juniori
 RapidId.tournaments=Turnee
 RapidId.tournament=Turneu
 
-# SkillTable
-Switch_view.title=Schimba modul de vizualizare al tabelului.
-skillTable.addHomegrown=Adauga toti jucatorii crescuti la club din actualul
-skillTable.showTimeInClub=Arata timpul de cand jucatorul a sosit la echipa de seniori
-Nationality=Nationalitate
-Nationality.abbr=Nat
-Flag=Flag
-Flag.abbr=Flag
-Player=Jucator
-Player.abbr=Jucator
-Age=Varsta
-Age.abbr=Varsta
-Match=Meci
-Series=Serie
-
-TransferCompare=ComparaTransferul
-TransferCompare.abbr=CT
-Bookmark=Bookmark
-Bookmark.abbr=Bm
-Deadline=Termen limita
-Deadline.abbr=Term
-CurrentBid=Oferta actuala
-CurrentBid.abbr=Bid
-CurrentBidder=Cel mai mare ofertant actual
-CurrentBidder.abbr=Ofertant
-CurrentBidderShort=Cel mai mare ofertant actual
-CurrentBidderShort.abbr=Of
 
 # HTMSPrediction
 HTMSPrediction.prediction=Rezultat prevazut
@@ -1041,7 +993,15 @@ pageAction.mainContent=Arata continutul principal
 pageAction.leftMenu=Afisati bara stanga
 pageAction.all=Afisati totul
 
-sidebarBox.actions=Actiuni
+#Locales for date and time
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
+datetimestrings.days=zile
+datetimestrings.hours=ore
+datetimestrings.minutes=min
+datetimestrings.short_seasons=sez
+datetimestrings.short_weeks=sapt
+datetimestrings.short_days=zil
 
 # buttons
 button.ok=OK
@@ -1088,6 +1048,8 @@ log.header=FoxTrick Log
 # keep the following line untranslated
 log.env=Version %1, %2 platform, %3 locale, %4 layout, %5 direction
 
+ReadHtPrefs.HTLanguageChanged=FoxTrick a detectat o schimbare a limbii. Limba FoxTrick este acum setata ca fiind %s.
+
 # End of IN-GAME STRINGS.
 
 
@@ -1096,6 +1058,10 @@ log.env=Version %1, %2 platform, %3 locale, %4 layout, %5 direction
 Links.feeds=Fluxuri ale listei de linkuri (separata de linii)
 TickerAlert.enable=Autorizeaza
 TickerAlert.sound=Sunet
+TeamPopupLinks.prefsCaption=Preferinte Link
+TeamPopupLinks.ShowByDefault=Afiseaza implicit
+TeamPopupLinks.ShowOnMore=Afiseaza mai multe
+TeamPopupLinks.OpenNewTab=Deschide in fila noua
 
 #toolbar
 toolbar.title=FoxTrick
