--- a/content/locale/sl/foxtrick.properties
+++ b/content/locale/sl/foxtrick.properties
@@ -175,9 +175,6 @@ module.RatingsDisplay.HatStats.desc=Kot HatStati
 
 #Save for work
 
-#Embed Media
-EmbedMedia.EmbeddedImage=Vgnezdena slika
-
 #Extrashortcuts
 ExtraShortcuts.statistics=Statistika
 ExtraShortcuts.transfers=Prestopi
@@ -185,10 +182,8 @@ ExtraShortcuts.ManageCHPP=Upravljajte vaše CHPP izdelke
 ExtraShortcuts.prefs=Nastavitve
 ExtraShortcuts.ftprefs=FoxTrick nastavitve
 
-#lineupShortcut
-
-
 #HistoryStats
+HistoryStats.boxheader=Statistična zgodovina
 HistoryStats.season=Sezona
 HistoryStats.season.short=Sez
 HistoryStats.cup=Krog pokala
@@ -196,18 +191,15 @@ HistoryStats.cup.short=Pok
 HistoryStats.league=Serija
 HistoryStats.league.short=Ser.
 HistoryStats.finalPosition.short=P
-HistoryStats.boxheader=Statistična zgodovina
 HistoryStats.cupwinner=Zmagovalec pokala
 
 # YouthPromotes
 #following string uses pluralForms
 YouthPromotes.today=Igralec je lahko sprejet danes\!
 
-# links
-links.boxheader=Povezave
-
 #teamstats+filters
 TeamStats.boxheader=Pregled ekipe
+TeamStats.General=Splošno
 TeamStats.PlayerNotToOld=Igralci < 19 let
 TeamStats.PlayerToOld=Igralci >\= 19 let
 TeamStats.Cards=Kartoni
@@ -220,6 +212,12 @@ TeamStats.NotTransferListed=Ni na trgu prestopov
 TeamStats.ActivePlayers=Aktivni igralci
 TeamStats.PurchasedPlayers=Kupljenih igralcev
 TeamStats.FilterFor=Filter za
+
+#PlayerBirthday
+PlayerBirthday.boxheader=Rojstni dnevi
+PlayerBirthday.BirthdayToday=Današnji rojstni dnevi
+PlayerBirthday.BirthdayLastWeek=Rojstni dnevi prejšnji teden
+PlayerBirthday.BirthdayNextWeek=Rojstni dnevi naslednji teden
 
 #season stats
 #note to translators. use abreviations of league table where applicable
@@ -243,40 +241,47 @@ LeagueNewsFilter.friendlies=Prijateljske tekme & spremembe trenerja
 LeagueNewsFilter.transfers=Prestopi
 LeagueNewsFilter.lineupChanges=Spremembe postavitve
 
-# AddLeaveConfButton
-AddLeaveConfButton.alert=Kliknite na gumb 'Shrani' na naslednji strani, če želite zapustiti ta forum.
-AddLeaveConfButton.LeaveForum=Zapusti forum
+#team pages
+sidebarBox.actions=Dejanja
+TeamSelectBox.selectplayer=Izberi igralca
+ExtraPlayerInfo.defensiveTrainer=%s trener, ki je obrambno usmerjen.
+ExtraPlayerInfo.offensiveTrainer=%s trener, ki je napadalno usmerjen.
+ExtraPlayerInfo.balancedTrainer=%s trener, ki ni niti napadalno niti obrambno usmerjen.
+ManagerButtons.writeInGuestbook=Piši v knjigo gostov
 
-#ShowForumPrefButton
+#forum
+AddLeaveConfButton.LeaveForum=Zapusti forum
+AddLeaveConfButton.alert=Kliknite na gumb 'Shrani' na naslednji strani, če želite zapustiti ta forum.
 ShowForumPrefButton.forumPreferences=Nastavitve foruma
+FormatPostingText.ShowNestedQuotes=Pokaži ugnezdene citate  
+HideSignatures.signaturetoggle=Podpis
+MarkUnread.markunread=Označi kot neprebrano od tu naprej
+EmbedMedia.EmbeddedImage=Vgnezdena slika
 
 # ForumTemplates
 ForumTemplates.make=Ustvari predlogo iz prispevka
+ForumTemplates.make.error=Predloga že obstaja ali pa je prazna
 ForumTemplates.show=Pokaži predloge
 ForumTemplates.hide=Skrij predlogo
-ForumTemplates.make.error=Predloga že obstaja ali pa je prazna
 ForumTemplates.templateTitle=Naslov predloge\:
 ForumTemplates.delete.ask=Ali želite izbrisati predlogo?
 
-#PostPreview
+#ForumPreview
 ForumPreview.preview.title=Prikaži predogled napisanega
 ForumPreview.preview=Predogled
 ForumPreview.send=Pošlji
 
-
+#ForumYouthIcons
 ForumYouthIcons.toolbar.tournament=Turnirji
+ForumYouthIcons.toolbar.other=Drugo
 ForumYouthIcons.youthplayerid=Vstavi oznako mladinca.
 ForumYouthIcons.youthteamid=Vstavi oznako mladinske ekipe.
 ForumYouthIcons.youthmatchid=Vstavi oznako mladinske tekme.
 ForumYouthIcons.youthseries=Vstavi oznako mladinske lige.
 ForumYouthIcons.tournamentid=Vstavi oznako turnirja.
 ForumYouthIcons.tournamentmatchid=Vstavi oznako tekme na turnirju.
-
-ForumYouthIcons.toolbar.other=Drugo
 ForumYouthIcons.debug=Vstavi FoxTrickov dnevnik razhroščevanja.
 ForumYouthIcons.settings=Vstavi nastavitve FoxTricka.
-
-#special bbcode, not really youth icons
 ForumSpecialBBCode.q=Dodaj citat
 ForumSpecialBBCode.br=Dodaj prelom vrstice
 ForumSpecialBBCode.user=Dodaj userID
@@ -286,9 +291,6 @@ ForumSpecialBBCode.clock=Dodaj trenutni čas
 ForumSpecialBBCode.spoiler=Dodaj skrivača
 ForumSpecialBBCode.forumSymbol=Vstavi "%s"
 
-
-FormatPostingText.ShowNestedQuotes=Pokaži ugnezdene citate  
-
 #Transferlistfilters
 TransferSearchFilters.boxheader=FoxTrick filtri
 TransferSearchFilters.enterName=Vnesite ime filtra\:
@@ -297,6 +299,7 @@ TransferSearchFilters.saveFilter=Shrani nov filter
 
 #Filter
 Filters.label=Filtri
+Filters.addFilterOptions=Dodaj možnosti filtra
 Filters.ok=V redu
 Filters.clear=Počisti
 Filters.noFilter=Brez filtra
@@ -308,16 +311,8 @@ Filters.Form=Pripravljenost
 Filters.XP=Izkušnje
 Filters.specialty=Posebnost
 Filters.stars=Zvezdice
-Filters.addFilterOptions=Dodaj možnosti filtra
-
-#Locales for date and time
-#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
-#next 6 use pluralFroms
-datetimestrings.days=dni
-datetimestrings.hours=h
-datetimestrings.minutes=min
-datetimestrings.short_seasons=s
-datetimestrings.short_days=d
+Filters.minimum=Najmanj
+Filters.maximum=Največ
 
 #Transfer prices
 MedianTransferPrice.median=Srednja cena
@@ -372,6 +367,7 @@ categories.W=W
 categories.IM=IM
 categories.FW=FW
 
+#match positions
 match.pos.kp=Vratar
 match.pos.kp.abbr=VR
 match.pos.lb=Zadnji levi
@@ -408,45 +404,42 @@ match.role.captain.abbr=Kapet.
 
 match.player.unknown=Neznan igralec
 
-TeamStats.General=Splošno
-
+# SkillTable
+Skill_table=Tabela sposobnosti
+Switch_view=Preklopi pogled
+AddHomegrown=Dodaj doma vzgojene igralce
+showTimeInClub=Pokaži čas v klubu
+Switch_view.title=Preklopi pogled tabele.
+skillTable.showTimeInClub=Pokaže čas, od katerega je igralec v članski ekipi
+skilltable.youthplayer=mladinec
+skilltable.rebought_youthplayer=ponovno kupljen mladinec
 PlayerNumber=Igralčeva številka
 PlayerNumber.abbr=\#
-
 TSI=Total Skill Index
 TSI.abbr=TSI
-
-
 Personality=Osebnost
 Aggressiveness=Agresivnost
 Aggressiveness.abbr=Ag
 Honesty=Poštenost
-
 Leadership=Vodstvene sposobnosti
 Leadership.abbr=Vod
 Experience=Izkušnje
 Experience.abbr=IZ
-
 Stamina=Vzdržljivost
 Stamina.abbr=Stm
 Form=Pripravljenost
 Form.abbr=FO
-
 Loyalty=Pripadnost
 MotherClubBonus=Bonus matičnega kluba
 MotherClubBonus.abbr=MK
-
 Status=Stanje
 Status.abbr=Stanje
-
 Yellow_card=Rumen karton
 Yellow_card.abbr=R
 Red_card=Rdeč karton
 Red_card.abbr=D
-
 Speciality=Posebnost
 Speciality.abbr=Pos
-
 Last_match=Zadnja tekma
 Last_match.abbr=Zadnja
 Last_stars=Najnovejše zvezdice
@@ -454,18 +447,14 @@ Last_position=Zadnji položaj
 Last_position.abbr=Pos
 #following string uses pluralForms
 Last_match_didnot_play=Še ni igral.
-
 Bruised=Obtolčen
 Bruised.abbr=Bru
 Injured=Poškodovan
 Injured.abbr=Inj
-
 Salary=Plača
 Salary.abbr=Plača
-
 TransferListed=Na seznamu prestopov
 TransferListed.abbr=TL
-
 NrOfMatches=Število tekem
 NrOfMatches.abbr=NM
 LeagueGoals=Ligaški goli
@@ -478,36 +467,45 @@ CareerGoals=Karierni goli
 CareerGoals.abbr=G
 Hattricks=Hattricki
 Hattricks.abbr=HT
-
 Current_club=Trenutni klub
 Current_club.abbr=Klub
 Current_league=Trenutna liga
 Current_league.abbr=Liga
-
 JoinedSince=Pridružen od
 JoinedSince.abbr=Od
-
 Hotlist=Vroča lista
 Hotlist.abbr=Vroče
+Coach=Trener
+CurrentSquad=Trenutna ekipa
+Nationality=Nacionalnost
+Nationality.abbr=Nat
+Flag=Zastavica
+Flag.abbr=Zastavica
+Player=Igralec
+Player.abbr=Igralec
+Age=Starost
+Age.abbr=Starost
+Match=Tekma
+Series=Serija
+TransferCompare=Primerjava prestopov
+TransferCompare.abbr=TC
+Bookmark=Zaznamek
+Bookmark.abbr=Bm
+Deadline=Rok prestopa
+Deadline.abbr=Rok
+CurrentBid=Trenutna ponudba
+CurrentBid.abbr=Ponudba
+CurrentBidder=Trenutno najvišji ponudnik
+CurrentBidder.abbr=Ponudnik
+CurrentBidderShort=Trenutno najvišji ponudnik
 
-skilltable.youthplayer=mladinec
-skilltable.rebought_youthplayer=ponovno kupljen mladinec
-
-#matchdetail
-match.ratings.midfield=Sredina
-match.ratings.attack=Napad
-match.ratings.defence=Obramba
-match.ratings.total=Skupno
-
-match.ratings.right=Desno
-match.ratings.left=Levo
-match.ratings.leftshort=L
+#confirms
 ConfirmActions.transferlist=Ali res želite dodati tega igralca na seznam prestopov? Izklicna cena je %s.
 ConfirmActions.hirestaff=Ali želite najeti %num %kind?
 ConfirmActions.sackstaff=Ali želite odpustiti %num %kind?
-HideSignatures.signaturetoggle=Podpis
-MarkUnread.markunread=Označi kot neprebrano od tu naprej
-TeamSelectBox.selectplayer=Izberi igralca
+
+# links
+links.boxheader=Povezave
 links.custom.selecticon=Izberi ikono
 links.custom.addpersonallink=Dodaj osebno povezavo
 links.custom.addlink=Dodaj povezavo
@@ -518,16 +516,7 @@ links.custom.confirmremove=Ali res želite odstraniti?
 links.custom.addtag=Dodaj oznako
 links.custom.tags=Oznake
 links.custom.help=Pomoč
-matches.income=Prihodki\:
-PlayerBirthday.boxheader=Rojstni dnevi
-PlayerBirthday.BirthdayToday=Današnji rojstni dnevi
-PlayerBirthday.BirthdayLastWeek=Rojstni dnevi prejšnji teden
-PlayerBirthday.BirthdayNextWeek=Rojstni dnevi naslednji teden
-copy.matchid=Kliknite, če želite kopirati matchID v odložišče
 
-ExtraPlayerInfo.defensiveTrainer=%s trener, ki je obrambno usmerjen.
-ExtraPlayerInfo.offensiveTrainer=%s trener, ki je napadalno usmerjen.
-ExtraPlayerInfo.balancedTrainer=%s trener, ki ni niti napadalno niti obrambno usmerjen.
 
 #following string uses pluralForms
 notify.newMail=Prejeli ste %s sporočilo.;Prejeli ste %s sporočili.;Prejeli ste %s sporočila.;Prejeli ste %s sporočil.
@@ -536,23 +525,16 @@ notify.newForumMessage=Obstaja %s nov odgovor na forumu, namenjen vam.;Obstajata
 
 matchView.htLive=HT Live
 
-module.modules_allpages=Moduli, ki se izvajajo na vseh straneh
-ReadHtPrefs.HTLanguageChanged=FoxTrick je zaznal spremembo jezika. Jezik FoxTricka je sedaj nastavljen na %s.
-
-Coach=Trener
-CurrentSquad=Trenutna ekipa
-
-
-ManagerButtons.writeInGuestbook=Piši v knjigo gostov
-
-ratings.HatStats=HatStats
-ratings.LoddarStats=LoddarStats
-ratings.PeasoStats=PeasoStats
-ratings.VnukStats=VnukStats
-ratings.HTitaVal=HTitaVal
-ratings.GardierStats=GardierStats
+# Context menu items
+# This would look like: Copy player ID: 123456789
+copy.id=Kopiraj %s\: %i
+copy.link=Kopiraj mesto povezave v HT-ML
+copy.ht-ml=Kopiraj v HT-ML
+copy.table=Kopiraj tabelo v HT-ML
 
 #copy
+copy.matchid=Kliknite, če želite kopirati matchID v odložišče
+
 CopyPosting.style.ht-ml=HT-ML
 CopyPosting.style.wiki=wiki
 CopyPosting.style.last=zadnje
@@ -573,6 +555,35 @@ CopyYouth.goto=Pojdi na %s
 copy.copySelected=Kopirajte izbor s Ctrl + C.
 copy.operaPaste=Prilepite s Shift + levi klik.
 
+#matches
+matches.income=Prihodki\:
+matches.attackdefensebars=Napad proti obrambi
+matches.right=Desno
+matches.left=Levo
+matches.center=Osrednje
+matches.defense=obr
+matches.attack=nap
+matches.indfreekick=Indir. prosti streli
+matches.wronglang=FoxTrick\: Statistike ni mogoče prikazati, ker vaš jezik ni registriran ali, ker imate nastavljen napačen jezik v nastavitvah. Prosimo, prepričajte se, da je vaš jezik v FoxTricku enak jeziku v Hattricku.
+total_stars=Skupno zvezdic
+
+#matchdetail
+match.ratings.midfield=Sredina
+match.ratings.attack=Napad
+match.ratings.defence=Obramba
+match.ratings.total=Skupno
+
+match.ratings.right=Desno
+match.ratings.left=Levo
+match.ratings.leftshort=L
+
+ratings.HatStats=HatStats
+ratings.LoddarStats=LoddarStats
+ratings.PeasoStats=PeasoStats
+ratings.VnukStats=VnukStats
+ratings.HTitaVal=HTitaVal
+ratings.GardierStats=GardierStats
+
 MatchReportFormat.MatchReport=Poročilo tekme
 MatchReportFormat.lineup=Postavitev 
 MatchReportFormat.kickOff=Začetek tekme
@@ -582,23 +593,6 @@ MatchReportFormat.extraTime=Podaljški
 MatchReportFormat.penaltyShootOut=Izvajanje kazenskih strelov
 MatchReportFormat.result=Rezultat
 
-
-#matches
-matches.attackdefensebars=Napad proti obrambi
-matches.right=Desno
-matches.left=Levo
-matches.center=Osrednje
-matches.defense=obr
-matches.attack=nap
-matches.indfreekick=Indir. prosti streli
-matches.wronglang=FoxTrick\: Statistike ni mogoče prikazati, ker vaš jezik ni registriran ali, ker imate nastavljen napačen jezik v nastavitvah. Prosimo, prepričajte se, da je vaš jezik v FoxTricku enak jeziku v Hattricku.
-
-# Context menu items
-# This would look like: Copy player ID: 123456789
-copy.id=Kopiraj %s\: %i
-copy.link=Kopiraj mesto povezave v HT-ML
-copy.ht-ml=Kopiraj v HT-ML
-copy.table=Kopiraj tabelo v HT-ML
 
 #teampopups
 Manager=Uporabnik
@@ -618,12 +612,6 @@ LastLineup=Zadnja postavitev
 YouthMatches=Mladinske tekme
 more=več ...
 less=manj ...
-TeamPopupLinks.prefsCaption=Nastavitev povezav
-TeamPopupLinks.ShowByDefault=Pokaži privzeto
-TeamPopupLinks.ShowOnMore=Pokaži več
-TeamPopupLinks.OpenNewTab=Odpri v novem zavihku
-
-total_stars=Skupno zvezdic
 
 # FlagCollectionToMap
 flagCollectionToMap.ShowMap=Pokaži zemljevid
@@ -635,12 +623,6 @@ flagCollectionToMap.MEast=Bližnji vzhod
 flagCollectionToMap.SAmerica=Južna Amerika
 flagCollectionToMap.World=Svet
 
-# SkillTable
-Skill_table=Tabela sposobnosti
-Switch_view=Preklopi pogled
-AddHomegrown=Dodaj doma vzgojene igralce
-showTimeInClub=Pokaži čas v klubu
-
 team.status.booked=Prijateljska tekma organizirana
 ShowFriendlyBooked.ShowFriendlies=Pokaži prijateljske tekme
 
@@ -651,41 +633,12 @@ TransferSearchResultFilters.hideInjured=Skrij poškodovane
 TransferSearchResultFilters.hideSuspended=Skrij suspendirane
 TransferSearchResultFilters.days=Dni\:
 
-# refer to transfer search form
-Filters.minimum=Najmanj
-Filters.maximum=Največ
-
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
 RapidId.view=Pogled
 RapidId.viewById=Pogled po ID-ju
 RapidId.tournaments=Turnirji
 RapidId.tournament=Turnir
 
-# SkillTable
-Switch_view.title=Preklopi pogled tabele.
-skillTable.showTimeInClub=Pokaže čas, od katerega je igralec v članski ekipi
-Nationality=Nacionalnost
-Nationality.abbr=Nat
-Flag=Zastavica
-Flag.abbr=Zastavica
-Player=Igralec
-Player.abbr=Igralec
-Age=Starost
-Age.abbr=Starost
-Match=Tekma
-Series=Serija
-
-TransferCompare=Primerjava prestopov
-TransferCompare.abbr=TC
-Bookmark=Zaznamek
-Bookmark.abbr=Bm
-Deadline=Rok prestopa
-Deadline.abbr=Rok
-CurrentBid=Trenutna ponudba
-CurrentBid.abbr=Ponudba
-CurrentBidder=Trenutno najvišji ponudnik
-CurrentBidder.abbr=Ponudnik
-CurrentBidderShort=Trenutno najvišji ponudnik
 
 # HTMSPrediction
 HTMSPrediction.prediction=Predviden rezultat
@@ -751,7 +704,14 @@ pageAction.mainContent=Pokaži glavno vsebino
 pageAction.leftMenu=Pokaži levo vrstico
 pageAction.all=Pokaži vse
 
-sidebarBox.actions=Dejanja
+#Locales for date and time
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
+datetimestrings.days=dni
+datetimestrings.hours=h
+datetimestrings.minutes=min
+datetimestrings.short_seasons=s
+datetimestrings.short_days=d
 
 # buttons
 button.ok=V redu
@@ -793,6 +753,8 @@ exception.error=Napaka %s
 log.header=FoxTrick dnevnik
 # keep the following line untranslated
 
+ReadHtPrefs.HTLanguageChanged=FoxTrick je zaznal spremembo jezika. Jezik FoxTricka je sedaj nastavljen na %s.
+
 # End of IN-GAME STRINGS.
 
 
@@ -800,6 +762,10 @@ log.header=FoxTrick dnevnik
 # option function strings
 TickerAlert.enable=Omogoči
 TickerAlert.sound=Zvok
+TeamPopupLinks.prefsCaption=Nastavitev povezav
+TeamPopupLinks.ShowByDefault=Pokaži privzeto
+TeamPopupLinks.ShowOnMore=Pokaži več
+TeamPopupLinks.OpenNewTab=Odpri v novem zavihku
 
 #toolbar
 toolbar.title=FoxTrick
