--- a/content/locale/sq/foxtrick.properties
+++ b/content/locale/sq/foxtrick.properties
@@ -213,23 +213,15 @@ module.MatchTables.RemoveTime.desc=Heq kohet e ndeshjeve te tabela
 
 #Save for work
 
-#Embed Media
-
 #Extrashortcuts
 ExtraShortcuts.statistics=statistika
 ExtraShortcuts.transfers=transferta
 ExtraShortcuts.prefs=preferencat
 
-#lineupShortcut
-
-
 #HistoryStats
 
 # YouthPromotes
 #following string uses pluralForms
-
-# links
-links.boxheader=Link
 
 #teamstats+filters
 TeamStats.boxheader=Paraqitja e ekipit
@@ -241,6 +233,11 @@ TeamStats.TransferListed=Në shitje
 TeamStats.Pictures=Foto
 TeamStats.PlayedLatest=Luajtën ndeshjen e fundit
 TeamStats.NotPlayedLatest=Nuk luajtën ndeshjen e fundit
+
+#PlayerBirthday
+PlayerBirthday.boxheader=Ditëlindje
+PlayerBirthday.BirthdayLastWeek=Ditëlindje javës që shkoi
+PlayerBirthday.BirthdayNextWeek=Ditëlindje javës që vjen
 
 #season stats
 #note to translators. use abreviations of league table where applicable
@@ -267,44 +264,44 @@ LeagueNewsFilter.friendlies=Miqësore dhe ndryshim traineri
 LeagueNewsFilter.transfers=Transferta
 LeagueNewsFilter.lineupChanges=Ndryshime rreshtimi
 
-# AddLeaveConfButton
-AddLeaveConfButton.alert=Klikoni butonin "Ruaj" te faqa tjetër për të dal nga ky forum.
-AddLeaveConfButton.LeaveForum=dilni nga konferenca
+#team pages
+sidebarBox.actions=Veprime
+TeamSelectBox.selectplayer=Zgjidh lojtarin
+ExtendedPlayerDetails.perseason=/ sezon
+ManagerButtons.writeInGuestbook=Shkruani te Libri i Vizituesve
 
-#ShowForumPrefButton
+#forum
+AddLeaveConfButton.LeaveForum=dilni nga konferenca
+AddLeaveConfButton.alert=Klikoni butonin "Ruaj" te faqa tjetër për të dal nga ky forum.
+HideSignatures.signaturetoggle=Firma
 
 # ForumTemplates
 ForumTemplates.make=Kthejeni postimin në shëmbull standart
+ForumTemplates.make.error=Shëmbulli ekziston tashmë ose është bosh
 ForumTemplates.show=Trego shëmbujt
 ForumTemplates.hide=Fsheh shëmbujt
-ForumTemplates.make.error=Shëmbulli ekziston tashmë ose është bosh
 ForumTemplates.templateTitle=Titulli i shëmbullit\:
 ForumTemplates.templateTitle.error='[' dhe ']' nuk lejohen në tituj
 ForumTemplates.delete.ask=Fshini shëmbullin?
 
-#PostPreview
+#ForumPreview
 ForumPreview.preview.title=Trego paraqitjen e postimit
 ForumPreview.preview=Paraqitje
 ForumPreview.send=Dërgo
 
-
-ForumYouthIcons.toolbar.youth=Link Rinor
+#ForumYouthIcons
 ForumYouthIcons.toolbar.main=Link Kryesor
+ForumYouthIcons.toolbar.youth=Link Rinor
 ForumYouthIcons.youthplayerid=link te lojtari rinor
 ForumYouthIcons.youthteamid=link te ekipi rinor
 ForumYouthIcons.youthmatchid=shto link te ndeshja rinore
 ForumYouthIcons.youthseries=shto link te seria rinore
-
-
-#special bbcode, not really youth icons
 ForumSpecialBBCode.br=shto ndarje me vizë
 ForumSpecialBBCode.user=shto përdoruesID
 ForumSpecialBBCode.kit=shto uniformëID
 ForumSpecialBBCode.article=shto artikullID
 ForumSpecialBBCode.clock=shto kohen e tanishme
 ForumSpecialBBCode.spoiler=shto spoiler
-
-
 
 #Transferlistfilters
 TransferSearchFilters.boxheader=Filtrimet FoxTrick
@@ -313,16 +310,6 @@ TransferSearchFilters.deleteFilter.ask=Doni ta fshini këtë filtrim?
 TransferSearchFilters.saveFilter=Ruaj filtrimin e ri
 
 #Filter
-
-#Locales for date and time
-#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
-#next 6 use pluralFroms
-datetimestrings.days=ditë
-datetimestrings.hours=orë
-datetimestrings.minutes=min
-datetimestrings.short_seasons=s
-datetimestrings.short_weeks=jav
-datetimestrings.short_days=dit
 
 #Transfer prices
 MedianTransferPrice.median=Çmimi median
@@ -342,30 +329,69 @@ Set_pieces=Goditje_Standarte
 
 #note to translators. Copy abbreviations from HT translations using players page on HT (only supporters can see them in brackets next to players names)
 
+#match positions
 
 
 
-
-
-
-
-
-
+# SkillTable
 Stamina=Rrezistenca
+#following string uses pluralForms
+Coach=Trainer
+Player=Lojtari
 
+#confirms
+ConfirmActions.bid=Doni të dërgoni ofertë për këtë lojtar? Çmimi është %s.
+ConfirmActions.transferlist=Doni të shisni këtë lojtar? Çmimi kërkues është %s.
+ConfirmActions.ntremove=Doni të shtoni/hiqni këtë lojtar nga skuadra juaj?
 
-
+# links
+links.boxheader=Link
+links.custom.selecticon=Zgjidh ikonën
+links.custom.addpersonallink=Shtoni link personal
+links.custom.addlink=Shtoni link
+links.custom.remove=Hiqni
+links.custom.copy=Kopjo
+links.custom.export=Exporto
+links.custom.confirmremove=I sigurt ta heqësh?
+links.custom.addtag=Shtoni tag
+links.custom.tags=Tag
+links.custom.help=Ndihmë
+links.custom.helptext=Si për fillim kjo është në fazën editor. Duke klikuar te titulli i kësaj kutije bën ndryshimin midis pozicionit editor dhe normal. Vetëm në pozicionin normal, link tuaj do jenë funksional. Link të jashtëm janë të lehtë për tu shtuar, thjesht shtoni url të plotë (p.sh.\: http\: //alltid.org/league/427/). Për link të brëndshëm mos e shtoni pjesën e serverit (p.sh.\: /World/Series/Default.aspx?LeagueLevelUnitID\=427). Ju duhen tags vetëm për link dinamik. Me tags link ndryshohen duke përdorur informacionin e faqes ku jeni. P.SH. http\://alltid.org/league/[leagueid] do ju çojë te faqa e Alltid për serinë që ju po shikoni në Hattrick. Tags e mundëshme për çdo faqe janë te kutia. Ju mund të përdorni vetëm ato që janë te faqa ku ju po shtoni linkun e personalizuar. Teksti te kutia është një shëmbull. Ju mund të shkruani një tag (duke përdorur[]).
+links.custom.helptext2=Gjithashtu mund të eksportoni link. Klikoni te butoni eksporto dhe zgjidhini dosjen për ta ruajtur këtë link. Link ruhen te kjo dosje dhe ju mund të shtoni disa prej tyre. Për të importuar link shkoni te preferencat dhe te preferencat e importit. Vetëm ato që janë te dosja përkatëse do importohen, të cilat në këtë rast janë link tuaj. Asnjë nga link tuaj të mëparshëm do fshihet.
 
 
 #following string uses pluralForms
+#following string uses pluralForms
 
 
+# Context menu items
+# This would look like: Copy player ID: 123456789
+
+#copy
+copy.copyplayerad=Kopjoni reklamën e lojtarit te tabela
+copy.copied=Reklama e lojtarit është shtuar te tabela.
+copy.matchid=Kliko për të kopjuar ndeshjeID te tabela
+
+copy.PostID=Kopjo PostimID te tabela
+
+CopyRatings.copied=Vlerësimet janë shtuar te tabela.
 
 
+copy.copied.matchid=ID e ndeshjes është kopjuar te tabela.
+copy.copied.postid=ID e postimit është kopjuar te tabela.
+copy.copied.posting=Postimi është kopjuar te tabela.
 
-
-
-
+#matches
+matches.income=Të ardhura\:
+matches.attackdefensebars=Kollonat Sulm vs Mbrojtje
+matches.right=Djathtas
+matches.left=Majtas
+matches.center=Qëndër
+matches.defense=mbro
+matches.attack=sul
+matches.indfreekick=Godi. st. indi.
+matches.wronglang=FoxTrick\: Statistikat nuk mund të shfaqen sepse gjuha juaj nuk është e rregjistruar ose sepse keni zgjedhur gjuhën e gabuar te preferencat. Ju lutemi sigurohuni që gjuha juaj e Foxtrick është njësoj si ajo në Hattrick.
+total_stars=Numri total i yjeve
 
 #matchdetail
 match.ratings.midfield=Mesfusha
@@ -379,70 +405,9 @@ match.ratings.rightshort=D
 match.ratings.centershort=Q
 match.ratings.leftshort=M
 match.ratings.ifkshort=I-------------------------------------------------------------<<<<<<<<<<<<<<<<<<<<<<<<<
-ConfirmActions.bid=Doni të dërgoni ofertë për këtë lojtar? Çmimi është %s.
-ConfirmActions.transferlist=Doni të shisni këtë lojtar? Çmimi kërkues është %s.
-ConfirmActions.ntremove=Doni të shtoni/hiqni këtë lojtar nga skuadra juaj?
-HideSignatures.signaturetoggle=Firma
-TeamSelectBox.selectplayer=Zgjidh lojtarin
-links.custom.selecticon=Zgjidh ikonën
-links.custom.addpersonallink=Shtoni link personal
-links.custom.addlink=Shtoni link
-links.custom.remove=Hiqni
-links.custom.copy=Kopjo
-links.custom.export=Exporto
-links.custom.confirmremove=I sigurt ta heqësh?
-links.custom.addtag=Shtoni tag
-links.custom.tags=Tag
-links.custom.help=Ndihmë
-links.custom.helptext=Si për fillim kjo është në fazën editor. Duke klikuar te titulli i kësaj kutije bën ndryshimin midis pozicionit editor dhe normal. Vetëm në pozicionin normal, link tuaj do jenë funksional. Link të jashtëm janë të lehtë për tu shtuar, thjesht shtoni url të plotë (p.sh.\: http\: //alltid.org/league/427/). Për link të brëndshëm mos e shtoni pjesën e serverit (p.sh.\: /World/Series/Default.aspx?LeagueLevelUnitID\=427). Ju duhen tags vetëm për link dinamik. Me tags link ndryshohen duke përdorur informacionin e faqes ku jeni. P.SH. http\://alltid.org/league/[leagueid] do ju çojë te faqa e Alltid për serinë që ju po shikoni në Hattrick. Tags e mundëshme për çdo faqe janë te kutia. Ju mund të përdorni vetëm ato që janë te faqa ku ju po shtoni linkun e personalizuar. Teksti te kutia është një shëmbull. Ju mund të shkruani një tag (duke përdorur[]).
-links.custom.helptext2=Gjithashtu mund të eksportoni link. Klikoni te butoni eksporto dhe zgjidhini dosjen për ta ruajtur këtë link. Link ruhen te kjo dosje dhe ju mund të shtoni disa prej tyre. Për të importuar link shkoni te preferencat dhe te preferencat e importit. Vetëm ato që janë te dosja përkatëse do importohen, të cilat në këtë rast janë link tuaj. Asnjë nga link tuaj të mëparshëm do fshihet.
-matches.income=Të ardhura\:
-PlayerBirthday.boxheader=Ditëlindje
-PlayerBirthday.BirthdayLastWeek=Ditëlindje javës që shkoi
-PlayerBirthday.BirthdayNextWeek=Ditëlindje javës që vjen
-copy.matchid=Kliko për të kopjuar ndeshjeID te tabela
-ExtendedPlayerDetails.perseason=/ sezon
-
-
-#following string uses pluralForms
-#following string uses pluralForms
-
-
-module.modules_allpages=Modulet aplikuese ne faqe
-ReadHtPrefs.HTLanguageChanged=Ju keni vendosur te faqa kryesore e preferencave të FoxTrick që gjuha e FoxTrick ndryshon automatikisht sa herë që ju ndryshoni gjuhën në Hattrick. Gjuha juaj në FoxTrick tani është\: %s.
-
-Coach=Trainer
-
-
-ManagerButtons.writeInGuestbook=Shkruani te Libri i Vizituesve
-copy.copyplayerad=Kopjoni reklamën e lojtarit te tabela
-copy.copied=Reklama e lojtarit është shtuar te tabela.
-
-
-#copy
-copy.PostID=Kopjo PostimID te tabela
-
-CopyRatings.copied=Vlerësimet janë shtuar te tabela.
-
-
-copy.copied.matchid=ID e ndeshjes është kopjuar te tabela.
-copy.copied.postid=ID e postimit është kopjuar te tabela.
-copy.copied.posting=Postimi është kopjuar te tabela.
 
 
 
-#matches
-matches.attackdefensebars=Kollonat Sulm vs Mbrojtje
-matches.right=Djathtas
-matches.left=Majtas
-matches.center=Qëndër
-matches.defense=mbro
-matches.attack=sul
-matches.indfreekick=Godi. st. indi.
-matches.wronglang=FoxTrick\: Statistikat nuk mund të shfaqen sepse gjuha juaj nuk është e rregjistruar ose sepse keni zgjedhur gjuhën e gabuar te preferencat. Ju lutemi sigurohuni që gjuha juaj e Foxtrick është njësoj si ajo në Hattrick.
-
-# Context menu items
-# This would look like: Copy player ID: 123456789
 
 #teampopups
 Manager=Menaxher
@@ -463,8 +428,6 @@ YouthMatches=Ndeshjet rinore
 more=më shumë...
 less=më pak...
 
-total_stars=Numri total i yjeve
-
 # FlagCollectionToMap
 flagCollectionToMap.ShowMap=Trego hartën
 flagCollectionToMap.HideMap=Fsheh hartën
@@ -475,18 +438,11 @@ flagCollectionToMap.MEast=Lindja e Mesme
 flagCollectionToMap.SAmerica=Afrika Jugore
 flagCollectionToMap.World=Bota
 
-# SkillTable
-
 
 
 # TransferSearchResultFilters
 
-# refer to transfer search form
-
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
-
-# SkillTable
-Player=Lojtari
 
 
 # HTMSPrediction
@@ -513,7 +469,15 @@ CrossTable.table=Tabelen kryqezuese te sezonit
 
 # fennec ui
 
-sidebarBox.actions=Veprime
+#Locales for date and time
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
+datetimestrings.days=ditë
+datetimestrings.hours=orë
+datetimestrings.minutes=min
+datetimestrings.short_seasons=s
+datetimestrings.short_weeks=jav
+datetimestrings.short_days=dit
 
 # buttons
 button.save=Ruaj
@@ -528,6 +492,8 @@ button.disableAll=Fik të gjitha
 
 
 # keep the following line untranslated
+
+ReadHtPrefs.HTLanguageChanged=Ju keni vendosur te faqa kryesore e preferencave të FoxTrick që gjuha e FoxTrick ndryshon automatikisht sa herë që ju ndryshoni gjuhën në Hattrick. Gjuha juaj në FoxTrick tani është\: %s.
 
 # End of IN-GAME STRINGS.
 
