--- a/content/locale/sv-SE/foxtrick.properties
+++ b/content/locale/sv-SE/foxtrick.properties
@@ -369,9 +369,6 @@ module.RatingsDisplay.HatStats.desc=Som HatStats
 
 #Save for work
 
-#Embed Media
-EmbedMedia.EmbeddedImage=Inbäddad bild
-
 #Extrashortcuts
 ExtraShortcuts.statistics=Statistik
 ExtraShortcuts.transfers=Transfers
@@ -379,10 +376,8 @@ ExtraShortcuts.ManageCHPP=Hantera dina CHPP produkter
 ExtraShortcuts.prefs=Foruminställningar
 ExtraShortcuts.ftprefs=Inställningar FoxTrick
 
-#lineupShortcut
-
-
 #HistoryStats
+HistoryStats.boxheader=Historisk statistik
 HistoryStats.season=Säsong
 HistoryStats.season.short=S
 HistoryStats.cup=Cup
@@ -391,7 +386,6 @@ HistoryStats.league=Serie
 HistoryStats.league.short=Ser.
 HistoryStats.finalPosition=Placering
 HistoryStats.finalPosition.short=P
-HistoryStats.boxheader=Historisk statistik
 HistoryStats.cupwinner=Cupsegrare
 HistoryStats.cupwinner.short=CS
 
@@ -400,11 +394,9 @@ HistoryStats.cupwinner.short=CS
 YouthPromotes.future=Spelaren kan plockas upp om %1 dag(ar). [%2]
 YouthPromotes.today=Spelaren kan plockas upp idag\!
 
-# links
-links.boxheader=Länkar
-
 #teamstats+filters
 TeamStats.boxheader=Lagöversikt
+TeamStats.General=Generell
 TeamStats.PlayerNotToOld=Spelare < 19 år
 TeamStats.PlayerToOld=Spelare >\= 19 år
 TeamStats.Cards=Kort
@@ -417,6 +409,12 @@ TeamStats.NotTransferListed=Ej transferlistade
 TeamStats.ActivePlayers=Aktiva spelare
 TeamStats.HomeGrownPlayers=Egna produkter
 TeamStats.PurchasedPlayers=Inköpta spelare
+
+#PlayerBirthday
+PlayerBirthday.boxheader=Födelsedagar
+PlayerBirthday.BirthdayToday=Idag
+PlayerBirthday.BirthdayLastWeek=Tidigare
+PlayerBirthday.BirthdayNextWeek=Kommande
 
 #season stats
 #note to translators. use abreviations of league table where applicable
@@ -443,40 +441,49 @@ LeagueNewsFilter.friendlies=Träningsmatcher och bytta tränare
 LeagueNewsFilter.transfers=Transfers
 LeagueNewsFilter.lineupChanges=Laguppställningsändringar
 
-# AddLeaveConfButton
-AddLeaveConfButton.alert=Klicka på 'Spara'-knappen på nästa sida för att lämna det här forumet
-AddLeaveConfButton.LeaveForum=Lämna forum
+#team pages
+sidebarBox.actions=Handlingar
+TeamSelectBox.selectplayer=Välj spelare
+ExtendedPlayerDetails.perseason=/säsong
+ExtraPlayerInfo.defensiveTrainer=En %s tränare som är defensiv.
+ExtraPlayerInfo.offensiveTrainer=En %s tränare som är offensiv.
+ExtraPlayerInfo.balancedTrainer=En %s tränare som är varken offensiv eller defensiv.
+ManagerButtons.writeInGuestbook=Skriv i gästbok
 
-#ShowForumPrefButton
+#forum
+AddLeaveConfButton.LeaveForum=Lämna forum
+AddLeaveConfButton.alert=Klicka på 'Spara'-knappen på nästa sida för att lämna det här forumet
 ShowForumPrefButton.forumPreferences=Foruminställningar
+FormatPostingText.ShowNestedQuotes=Visa nästlade citat
+HideSignatures.signaturetoggle=Signatur
+MarkUnread.markunread=Markera som oläst härifrån
+EmbedMedia.EmbeddedImage=Inbäddad bild
+ForumStripHattrickLinks.ask=Vill du stippa/fixa länkarna från serverinformation för att göra dem användbara i forumet?
 
 # ForumTemplates
 ForumTemplates.make=Skapa en mall från inlägg
+ForumTemplates.make.error=Mallen finns redan eller är tom
 ForumTemplates.show=Visa mallar
 ForumTemplates.hide=Göm mallar
-ForumTemplates.make.error=Mallen finns redan eller är tom
 ForumTemplates.templateTitle=Malltitel\:
 ForumTemplates.templateTitle.error='[' och ']' är inte tillåtna i titlar
 ForumTemplates.delete.ask=Ta bort mall?
 
-#PostPreview
+#ForumPreview
 ForumPreview.preview.title=Visa en förhandsgranskning av inlägget
 ForumPreview.preview=Förhandsgranskning
 ForumPreview.send=Skicka
 
-
-ForumYouthIcons.toolbar.youth=Juniorlänkar
+#ForumYouthIcons
 ForumYouthIcons.toolbar.main=Huvudlänkar
+ForumYouthIcons.toolbar.youth=Juniorlänkar
+ForumYouthIcons.toolbar.other=Mer
 ForumYouthIcons.youthplayerid=Infoga länk till juniorspelare
 ForumYouthIcons.youthteamid=Infoga länk till juniorlag
 ForumYouthIcons.youthmatchid=Infoga länk till juniormatch
 ForumYouthIcons.youthseries=Infoga länk till juniorserie
-
-ForumYouthIcons.toolbar.other=Mer
 ForumYouthIcons.debug=Infoga FoxTrick debug log (felsökningslogg).
 ForumYouthIcons.settings=Infoga Foxtricks inställningar.
-
-#special bbcode, not really youth icons
 ForumSpecialBBCode.q=Lägg till citat
 ForumSpecialBBCode.br=Infoga radbrytning
 ForumSpecialBBCode.user=Infoga användarId
@@ -491,9 +498,6 @@ ForumSpecialBBCode.enterSeparator=Ange en anpassad avgränsare
 ForumSpecialBBCode.forumSymbol=Infoga "%s"
 ForumSpecialBBCode.symbols=Infoga symbol\: %s
 
-
-FormatPostingText.ShowNestedQuotes=Visa nästlade citat
-
 #Transferlistfilters
 TransferSearchFilters.boxheader=FoxTrick Filter
 TransferSearchFilters.enterName=Skriv in filternamn\:
@@ -502,6 +506,7 @@ TransferSearchFilters.saveFilter=Spara nytt filter
 
 #Filter
 Filters.label=Filter
+Filters.addFilterOptions=Lägg till alternativ för filter
 Filters.ok=Ok
 Filters.clear=Ångra
 Filters.noFilter=Inget filter
@@ -513,17 +518,8 @@ Filters.Form=Form
 Filters.XP=Rutin
 Filters.specialty=Specialitet
 Filters.stars=Stjärnor
-Filters.addFilterOptions=Lägg till alternativ för filter
-
-#Locales for date and time
-#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
-#next 6 use pluralFroms
-datetimestrings.days=dagar
-datetimestrings.hours=t
-datetimestrings.minutes=min
-datetimestrings.short_seasons=s
-datetimestrings.short_weeks=v
-datetimestrings.short_days=d
+Filters.minimum=Min
+Filters.maximum=Max
 
 #Transfer prices
 MedianTransferPrice.median=Medianpris
@@ -586,6 +582,7 @@ categories.R=R
 categories.E1=E1
 categories.E2=E2
 
+#match positions
 match.pos.kp=Målvakt
 match.pos.kp.abbr=MV
 match.pos.lb=Vänsterback
@@ -622,16 +619,21 @@ match.role.captain.abbr=Kapt.
 
 match.player.unknown=Okänd spelare
 
-TeamStats.General=Generell
-
+# SkillTable
+Skill_table=Förmågetabell
+Switch_view=Växla vy
+AddHomegrown=Add homegrown players
+showTimeInClub=Visa tid i klubben
+Switch_view.title=Växla vy
+skillTable.addHomegrown=Adds all homegrown players from the current
+skillTable.showTimeInClub=Visar tiden sedan spelaren gick med i klubbens seniorlag
+skilltable.youthplayer=juniorspelare
+skilltable.rebought_youthplayer=återköpt juniorspelare
 PlayerNumber=Tröjnummer
 PlayerNumber.abbr=\#
-
 TSI=Total Skill Index
 TSI.abbr=TSI
-
 CanBePromotedIn=Kan plockas upp om
-
 Personality=Personlighet
 Agreeability=Trevlighet
 Agreeability.abbr=Tr
@@ -639,33 +641,26 @@ Aggressiveness=Aggressivitet
 Aggressiveness.abbr=Ag
 Honesty=Hederlighet
 Honesty.abbr=He
-
 Leadership=Ledarförmåga
 Leadership.abbr=LF
 Experience=Rutin
 Experience.abbr=Ru
-
 Stamina=Kondition
 Stamina.abbr=Ko
 Form=Form
 Form.abbr=Fo
-
 Loyalty=Klubbkänsla
 Loyalty.abbr=Kk
 MotherClubBonus=Moderklubbsbonus
 MotherClubBonus.abbr=MoBo
-
 Status=Status
 Status.abbr=Status
-
 Yellow_card=Gult kort
 Yellow_card.abbr=G
 Red_card=Rött kort
 Red_card.abbr=R
-
 Speciality=Specialitet
 Speciality.abbr=Sp
-
 Last_match=Senaste match
 Last_match.abbr=Senaste
 Last_stars=Senaste stjärnbetyg
@@ -676,18 +671,14 @@ Last_position.abbr=Pos
 #following string uses pluralForms
 Last_match_played_as_at=Spelade %1 min som %2 i sin senaste match %3.
 Last_match_didnot_play=Har inte spelat ännu.
-
 Bruised=Plåster
 Bruised.abbr=Plå
 Injured=Skadad
 Injured.abbr=Ska
-
 Salary=Lön
 Salary.abbr=Lön
-
 TransferListed=Transferlistade
 TransferListed.abbr=TL
-
 NrOfMatches=Antal spelade matcher
 NrOfMatches.abbr=S
 LeagueGoals=Mål i serien
@@ -700,43 +691,48 @@ CareerGoals=Mål i karriären
 CareerGoals.abbr=MK
 Hattricks=Hattricks
 Hattricks.abbr=HT
-
 Current_club=Nuvarande klubb
 Current_club.abbr=Klubb
 Current_league=Nuvarande liga
 Current_league.abbr=Liga
-
 JoinedSince=Tid i klubben
 JoinedSince.abbr=TIK
-
 Hotlist=Hetlista
 Hotlist.abbr=Het
+Coach=Tränare
+CurrentSquad=Aktuell
+Nationality=Nationalitet
+Nationality.abbr=Nat
+Flag=Flagga
+Flag.abbr=Flagga
+Player=Spelare
+Player.abbr=Spelare
+Age=Ålder
+Age.abbr=År
+Match=Match
+Series=Serier
+TransferCompare=TransferJämförelse
+TransferCompare.abbr=TJ
+Bookmark=Bokmärk
+Bookmark.abbr=Bokmärk
+Deadline=Deadline
+Deadline.abbr=Deadline
+CurrentBid=Nuvarande bud
+CurrentBid.abbr=Bud
+CurrentBidder=Nuvarande högstbjudande
+CurrentBidder.abbr=Bidder
+CurrentBidderShort=Nuvarande högstbjudande
+CurrentBidderShort.abbr=Bd
 
-skilltable.youthplayer=juniorspelare
-skilltable.rebought_youthplayer=återköpt juniorspelare
-
-#matchdetail
-match.ratings.midfield=Mittfält
-match.ratings.attack=Anfall
-match.ratings.defence=Försvar
-match.ratings.total=Totalt
-
-match.ratings.right=Höger
-match.ratings.center=Mitten
-match.ratings.left=Vänster
-match.ratings.rightshort=H
-match.ratings.centershort=M
-match.ratings.leftshort=V
-match.ratings.ifkshort=I
+#confirms
 ConfirmActions.bid=Vill du bjuda på den här spelaren? Priset är %s.
 ConfirmActions.transferlist=Vill du lägga ut den här spelaren på transfern? Utropspriset är %s.
 ConfirmActions.hirestaff=Vill du anställa\! %num %kind?
 ConfirmActions.sackstaff=Vill du avskeda\! %num %kind?
 ConfirmActions.ntremove=Vill du verkligen lägga till/ta bort spelaren i/från laget?
-ForumStripHattrickLinks.ask=Vill du stippa/fixa länkarna från serverinformation för att göra dem användbara i forumet?
-HideSignatures.signaturetoggle=Signatur
-MarkUnread.markunread=Markera som oläst härifrån
-TeamSelectBox.selectplayer=Välj spelare
+
+# links
+links.boxheader=Länkar
 links.custom.selecticon=Välj ikon
 links.custom.addpersonallink=Lägg till egen länk
 links.custom.addlink=Lägg till länk
@@ -749,17 +745,7 @@ links.custom.tags=Etiketter
 links.custom.help=Hjälp
 links.custom.helptext=Till att börja med, det här är bara redigeringsläget. Byt mellan redigerings- och normalläge genom att klicka på den här rutans rubrik. Dina egna länkar fungerar endast i normalläge. Externa, statiska länkar är lätta att lägga till, lägg bara till hela adressen (Exempel\: http\: //alltid.org/league/427/) . För interna statiska länkar hoppar du över server-biten (Exempel\: /World/Series/Default.aspx?LeagueLevelUnitID\=427). Taggarna behöver du bara för ovanliga dynamiska länkar. Med taggar ändras länkarna dynamisk genom att använda information från sidan du är på, till exempel\: http\://alltid.org/league/[leagueid] leder alltid till Alltid-sidan för ligan du för närvarande tittar på. Taggarna som finns tillgängliga på varje sida är listade i valrutan. Du kan använda de som är listade på sidan där du lägger till din egna länk. Texten som produceras är bara en förlsagsmal. Du kan skriva taggen själv (med []). När du klickar på en länk så kommer taggen och dess hakparenteser att bytas ut mot den motsvarande texten.
 links.custom.helptext2=Du kan också exportera dina länkar och dela med dig av dem genom att klicka på 'Export'-knappen och välja en fil att spara till. Länkarna läggs till i den filen, dvs du kan ha flera länkar i en fil. För att importera länkarna går du till inställningsdialogen och går till importera inställningar. Endast inställningar som finns i den valda filen kommer importeras (i det här fallet dina länkar). Inga av dina tidigare länkar kommer att tas bort.
-matches.income=Intäkt\:
-PlayerBirthday.boxheader=Födelsedagar
-PlayerBirthday.BirthdayToday=Idag
-PlayerBirthday.BirthdayLastWeek=Tidigare
-PlayerBirthday.BirthdayNextWeek=Kommande
-copy.matchid=Klicka för att kopiera matchID till urklipp
-ExtendedPlayerDetails.perseason=/säsong
 
-ExtraPlayerInfo.defensiveTrainer=En %s tränare som är defensiv.
-ExtraPlayerInfo.offensiveTrainer=En %s tränare som är offensiv.
-ExtraPlayerInfo.balancedTrainer=En %s tränare som är varken offensiv eller defensiv.
 
 #following string uses pluralForms
 notify.newMail=Du har fått %s nya mail.
@@ -768,25 +754,18 @@ notify.newForumMessage=Det finns %s nya forumsvar till dig.
 
 matchView.htLive=HT Live
 
-module.modules_allpages=Moduler som körs på alla sidor
-ReadHtPrefs.HTLanguageChanged=Du har satt att ditt FoxTrick-språk automatiskt anpassas efter ditt HT-språk. Ditt FoxTrick-språk är nu satt till\: %s.
-
-Coach=Tränare
-CurrentSquad=Aktuell
-
-
-ManagerButtons.writeInGuestbook=Skriv i gästbok
-copy.copyplayerad=Kopiera som spelarannons till urklipp.
-copy.copied=Spelarannons har kopierats till urklipp.
-
-ratings.HatStats=HatStats
-ratings.LoddarStats=LoddarStats
-ratings.PeasoStats=PeasoStats
-ratings.VnukStats=VnukStats
-ratings.HTitaVal=HTitaVal
-ratings.GardierStats=GardierStats
+# Context menu items
+# This would look like: Copy player ID: 123456789
+copy.id=Kopiera %s\: %i
+copy.link=Kopiera länk i HT-ML
+copy.ht-ml=Kopiera innehåll i HT-ML
+copy.table=Kopiera tabell HT-ML
 
 #copy
+copy.copyplayerad=Kopiera som spelarannons till urklipp.
+copy.copied=Spelarannons har kopierats till urklipp.
+copy.matchid=Klicka för att kopiera matchID till urklipp
+
 copy.PostID=Kopiera InläggsId till urklipp
 CopyPosting=Kopiera post i %s stil
 CopyPosting.abbr=Kopiera i %s stil
@@ -818,6 +797,39 @@ copy.copied.posting=Post %s har kopierats till urklipp.
 copy.copySelected=Kopiera markering med Ctrl + C.
 copy.operaPaste=Klistra in med Shift + vänsterklick.
 
+#matches
+matches.income=Intäkt\:
+matches.attackdefensebars=Anfall vs Försvar staplar
+matches.right=Höger
+matches.left=Vänster
+matches.center=Mitten
+matches.defense=för
+matches.attack=anf
+matches.indfreekick=Ind. frisparkar
+matches.wronglang=Foxtrick\: Statistiken kan inte visas därför att ditt språk inte är registrerat eller för att du har satt fel språk i inställningarna. Säkerställ att ditt språk i Foxtrick och Hattrick är samma.
+total_stars=Totalt antal stjärnor
+
+#matchdetail
+match.ratings.midfield=Mittfält
+match.ratings.attack=Anfall
+match.ratings.defence=Försvar
+match.ratings.total=Totalt
+
+match.ratings.right=Höger
+match.ratings.center=Mitten
+match.ratings.left=Vänster
+match.ratings.rightshort=H
+match.ratings.centershort=M
+match.ratings.leftshort=V
+match.ratings.ifkshort=I
+
+ratings.HatStats=HatStats
+ratings.LoddarStats=LoddarStats
+ratings.PeasoStats=PeasoStats
+ratings.VnukStats=VnukStats
+ratings.HTitaVal=HTitaVal
+ratings.GardierStats=GardierStats
+
 MatchReportFormat.MatchReport=Matchrapport
 MatchReportFormat.lineup=Laguppställning
 MatchReportFormat.kickOff=Avspark
@@ -827,23 +839,6 @@ MatchReportFormat.extraTime=Förlängning
 MatchReportFormat.penaltyShootOut=Straffläggning
 MatchReportFormat.result=Resultat
 
-
-#matches
-matches.attackdefensebars=Anfall vs Försvar staplar
-matches.right=Höger
-matches.left=Vänster
-matches.center=Mitten
-matches.defense=för
-matches.attack=anf
-matches.indfreekick=Ind. frisparkar
-matches.wronglang=Foxtrick\: Statistiken kan inte visas därför att ditt språk inte är registrerat eller för att du har satt fel språk i inställningarna. Säkerställ att ditt språk i Foxtrick och Hattrick är samma.
-
-# Context menu items
-# This would look like: Copy player ID: 123456789
-copy.id=Kopiera %s\: %i
-copy.link=Kopiera länk i HT-ML
-copy.ht-ml=Kopiera innehåll i HT-ML
-copy.table=Kopiera tabell HT-ML
 
 #teampopups
 Manager=Manager
@@ -863,12 +858,6 @@ LastLineup=Senaste uppställning
 YouthMatches=Juniormatcher
 more=mera...
 less=mindre...
-TeamPopupLinks.prefsCaption=Länk preferenser
-TeamPopupLinks.ShowByDefault=Visa som standard
-TeamPopupLinks.ShowOnMore=Visa på mer..
-TeamPopupLinks.OpenNewTab=Öppna i ny flik
-
-total_stars=Totalt antal stjärnor
 
 # FlagCollectionToMap
 flagCollectionToMap.ShowMap=Visa karta
@@ -880,12 +869,6 @@ flagCollectionToMap.MEast=Mellanöstern
 flagCollectionToMap.SAmerica=Sydamerika
 flagCollectionToMap.World=Världen
 
-# SkillTable
-Skill_table=Förmågetabell
-Switch_view=Växla vy
-AddHomegrown=Add homegrown players
-showTimeInClub=Visa tid i klubben
-
 team.status.booked=Träningsmatch bokad
 ShowFriendlyBooked.ShowFriendlies=Visa träningsmatcher
 
@@ -896,43 +879,12 @@ TransferSearchResultFilters.hideInjured=Dölj skadade
 TransferSearchResultFilters.hideSuspended=Dölj avstängda
 TransferSearchResultFilters.days=Dagar\:
 
-# refer to transfer search form
-Filters.minimum=Min
-Filters.maximum=Max
-
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
 RapidId.view=View
 RapidId.viewById=Visa efter ID
 RapidId.senior=Senior
 RapidId.youth=Junior
 
-# SkillTable
-Switch_view.title=Växla vy
-skillTable.addHomegrown=Adds all homegrown players from the current
-skillTable.showTimeInClub=Visar tiden sedan spelaren gick med i klubbens seniorlag
-Nationality=Nationalitet
-Nationality.abbr=Nat
-Flag=Flagga
-Flag.abbr=Flagga
-Player=Spelare
-Player.abbr=Spelare
-Age=Ålder
-Age.abbr=År
-Match=Match
-Series=Serier
-
-TransferCompare=TransferJämförelse
-TransferCompare.abbr=TJ
-Bookmark=Bokmärk
-Bookmark.abbr=Bokmärk
-Deadline=Deadline
-Deadline.abbr=Deadline
-CurrentBid=Nuvarande bud
-CurrentBid.abbr=Bud
-CurrentBidder=Nuvarande högstbjudande
-CurrentBidder.abbr=Bidder
-CurrentBidderShort=Nuvarande högstbjudande
-CurrentBidderShort.abbr=Bd
 
 # HTMSPrediction
 HTMSPrediction.prediction=Förutspått resultat
@@ -1004,7 +956,15 @@ pageAction.mainContent=Visa huvudinnehåll
 pageAction.leftMenu=Visa vänstra fältet
 pageAction.all=Visa allt
 
-sidebarBox.actions=Handlingar
+#Locales for date and time
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
+datetimestrings.days=dagar
+datetimestrings.hours=t
+datetimestrings.minutes=min
+datetimestrings.short_seasons=s
+datetimestrings.short_weeks=v
+datetimestrings.short_days=d
 
 # buttons
 button.ok=OK
@@ -1050,6 +1010,8 @@ log.header=FoxTrick Log
 # keep the following line untranslated
 log.env=Version %1, %2 platform, %3 locale, %4 layout, %5 direction
 
+ReadHtPrefs.HTLanguageChanged=Du har satt att ditt FoxTrick-språk automatiskt anpassas efter ditt HT-språk. Ditt FoxTrick-språk är nu satt till\: %s.
+
 # End of IN-GAME STRINGS.
 
 
@@ -1058,6 +1020,10 @@ log.env=Version %1, %2 platform, %3 locale, %4 layout, %5 direction
 Links.feeds=Flöden av länklistor (separerade med radbrytningar)
 TickerAlert.enable=Aktivera
 TickerAlert.sound=Ljud
+TeamPopupLinks.prefsCaption=Länk preferenser
+TeamPopupLinks.ShowByDefault=Visa som standard
+TeamPopupLinks.ShowOnMore=Visa på mer..
+TeamPopupLinks.OpenNewTab=Öppna i ny flik
 
 #toolbar
 toolbar.title=FoxTrick
