--- a/content/locale/vi/foxtrick.properties
+++ b/content/locale/vi/foxtrick.properties
@@ -278,17 +278,13 @@ module.TableSort.desc=Làm cho tất cả các bảng  'hợp lệ' có thể ph
 
 #Save for work
 
-#Embed Media
-
 #Extrashortcuts
 ExtraShortcuts.statistics=Chi tiết
 ExtraShortcuts.transfers=Chuyển nhượng
 ExtraShortcuts.prefs=Tùy chọn
 
-#lineupShortcut
-
-
 #HistoryStats
+HistoryStats.boxheader=Chi tiết lịch sử
 HistoryStats.season=mùa giải
 HistoryStats.season.short=S
 HistoryStats.cup=cup quốc gia
@@ -297,7 +293,6 @@ HistoryStats.league=Giải
 HistoryStats.league.short=G.
 HistoryStats.finalPosition=Vị trí cuối mùa giải
 HistoryStats.finalPosition.short=P
-HistoryStats.boxheader=Chi tiết lịch sử
 HistoryStats.cupwinner=Vô địch cúp
 HistoryStats.cupwinner.short=VĐC
 
@@ -305,11 +300,9 @@ HistoryStats.cupwinner.short=VĐC
 #following string uses pluralForms
 YouthPromotes.today=Cầu thủ có thể được gọi lên hôm nay\!
 
-# links
-links.boxheader=Đường dẫn
-
 #teamstats+filters
 TeamStats.boxheader=Tổng quan đội bóng
+TeamStats.General=Nhìn chung
 TeamStats.PlayerNotToOld=Cầu thủ < 19 tuổi
 TeamStats.PlayerToOld=Cầu thủ >\= 19 tuổi
 TeamStats.Cards=Thẻ phạt
@@ -318,6 +311,12 @@ TeamStats.TransferListed=Lên thị trường chuyển nhượng
 TeamStats.Pictures=Hình ảnh
 TeamStats.PlayedLatest=Chơi ở trận đấu cuối
 TeamStats.NotPlayedLatest=Không chơi trận đấu cuối
+
+#PlayerBirthday
+PlayerBirthday.boxheader=Sinh nhật
+PlayerBirthday.BirthdayToday=Sinh nhật hôm nay
+PlayerBirthday.BirthdayLastWeek=Sinh nhật tuần trước
+PlayerBirthday.BirthdayNextWeek=Sinh nhật tuần tới
 
 #season stats
 #note to translators. use abreviations of league table where applicable
@@ -344,36 +343,43 @@ LeagueNewsFilter.friendlies=Giao hữu và thay đổi huấn luyện viên
 LeagueNewsFilter.transfers=Chuyển nhượng
 LeagueNewsFilter.lineupChanges=Thay đổi đội hình xuất phát
 
-# AddLeaveConfButton
-AddLeaveConfButton.alert=Click nút 'Lưu' ở trang tiếp theo để rời diễn đàn này.
-AddLeaveConfButton.LeaveForum=Rời diễn đàn
+#team pages
+sidebarBox.actions=Hành động
+TeamSelectBox.selectplayer=Chọn cầu thủ
+ExtendedPlayerDetails.perseason=/mùa giải
+ExtraPlayerInfo.defensiveTrainer=Một huấn luyện viên A %s thiên về phòng thủ.
+ExtraPlayerInfo.offensiveTrainer=Một huấn luyện viên A %s thiên về tấn công.
+ExtraPlayerInfo.balancedTrainer=Một huấn luyện viên A %s trung lập
+ManagerButtons.writeInGuestbook=Viết ở trong sổ lưu niệm
 
-#ShowForumPrefButton
+#forum
+AddLeaveConfButton.LeaveForum=Rời diễn đàn
+AddLeaveConfButton.alert=Click nút 'Lưu' ở trang tiếp theo để rời diễn đàn này.
+HideSignatures.signaturetoggle=Chữ ký
+MarkUnread.markunread=Đánh dấu chưa đọc từ đây
+ForumStripHattrickLinks.ask=Bạn có muốn từ các đường dẫn lấy thông tin từ server hattrick để có thể sử dụng được ở diễn đàn?
 
 # ForumTemplates
 ForumTemplates.make=Tạo mẫu từ những bài đã đăng
+ForumTemplates.make.error=Mẫu đã tồn tại hoặc trống rỗng
 ForumTemplates.show=Hiện mẫu
 ForumTemplates.hide=Ẩn mẫu
-ForumTemplates.make.error=Mẫu đã tồn tại hoặc trống rỗng
 ForumTemplates.templateTitle=Tiêu đề mẫu\:
 ForumTemplates.templateTitle.error='[' và ']' không cho phép ở tiêu đề
 ForumTemplates.delete.ask=Xóa mẫu?
 
-#PostPreview
+#ForumPreview
 ForumPreview.preview.title=Hiển thị sự duyệt một bài đã đăng
 ForumPreview.preview=Xem trước
 ForumPreview.send=Gửi
 
-
-ForumYouthIcons.toolbar.youth=Đường dẫn đội trẻ
+#ForumYouthIcons
 ForumYouthIcons.toolbar.main=Đường dẫn chính
+ForumYouthIcons.toolbar.youth=Đường dẫn đội trẻ
 ForumYouthIcons.youthplayerid=Thêm phần đuôi cầu thủ trẻ.
 ForumYouthIcons.youthteamid=Thêm phần đuôi đội trẻ.
 ForumYouthIcons.youthmatchid=Thêm phần đuôi trận đấu đội trẻ.
 ForumYouthIcons.youthseries=Thêm phần đuôi bảng đấu đội trẻ.
-
-
-#special bbcode, not really youth icons
 ForumSpecialBBCode.br=Thêm đường nghỉ
 ForumSpecialBBCode.user=Thêm ID người chơi
 ForumSpecialBBCode.kit=Thêm ID quần áo
@@ -384,8 +390,6 @@ ForumSpecialBBCode.pre=Thêm định dạng đuôi 'pre'
 ForumSpecialBBCode.tableSeparator=Chuyển đổi "%s" thành các ô
 ForumSpecialBBCode.enterSeparator=Nhập vào bộ chia tùy chọn
 
-
-
 #Transferlistfilters
 TransferSearchFilters.boxheader=Bộ lọc FoxTrick
 TransferSearchFilters.enterName=Nhập tên lọc\:
@@ -393,16 +397,8 @@ TransferSearchFilters.deleteFilter.ask=Bạn thực sự muốn xóa bộ lọc 
 TransferSearchFilters.saveFilter=Lưu bộ lọc mới
 
 #Filter
-
-#Locales for date and time
-#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
-#next 6 use pluralFroms
-datetimestrings.days=ngày
-datetimestrings.hours=giờ
-datetimestrings.minutes=phút
-datetimestrings.short_seasons=m
-datetimestrings.short_weeks=tu
-datetimestrings.short_days=ng
+Filters.minimum=Thấp nhất
+Filters.maximum=Cao nhất
 
 #Transfer prices
 MedianTransferPrice.median=Giá ở giữa
@@ -441,18 +437,18 @@ categories.R=R
 categories.E1=E1
 categories.E2=E2
 
+#match positions
 
 
 
-TeamStats.General=Nhìn chung
-
+# SkillTable
+Skill_table=Bảng kỹ năng
+Switch_view=Thay đổi cách xem
+Switch_view.title=Chuyển cách xem bảng.
 PlayerNumber=Số áo cầu thủ
 PlayerNumber.abbr=\#
-
 TSI=Tổng chỉ số kỹ năng
 TSI.abbr=TSI
-
-
 Personality=Tính cách
 Agreeability=Tính hòa đồng
 Agreeability.abbr=THĐ
@@ -460,29 +456,22 @@ Aggressiveness=Tính hung hăng
 Aggressiveness.abbr=THH
 Honesty=Tính trung thực
 Honesty.abbr=TTTh
-
 Leadership=Khả năng lãnh đạo
 Leadership.abbr=KNLĐ
 Experience=Kinh nghiệm
 Experience.abbr=XP
-
 Stamina=Thể lực
 Stamina.abbr=TL
 Form=Phong độ
 Form.abbr=PĐ
-
-
 Status=Tình trạng
 Status.abbr=TTr
-
 Yellow_card=Thẻ vàng
 Yellow_card.abbr=V
 Red_card=Thẻ đỏ
 Red_card.abbr=Đ
-
 Speciality=Đặc biệt
 Speciality.abbr=ĐB
-
 Last_match=Trận đấu cuối
 Last_match.abbr=Tđc
 Last_stars=Số sao cuối
@@ -490,18 +479,14 @@ Last_stars.abbr=Ssc
 Last_position=Vị trí cuối
 Last_position.abbr=Vtc
 #following string uses pluralForms
-
 Bruised=Đau nhẹ
 Bruised.abbr=Đn
 Injured=Chấn thương
 Injured.abbr=Ct
-
 Salary=Lương
 Salary.abbr=L
-
 TransferListed=Trên thị trường chuyển nhượng
 TransferListed.abbr=TTCN
-
 NrOfMatches=Tổng số trận
 NrOfMatches.abbr=TST
 LeagueGoals=Số bàn thắng giải
@@ -514,36 +499,41 @@ CareerGoals=Số bàn thắng trong sự nghiệp
 CareerGoals.abbr=BTSN
 Hattricks=Hattricks
 Hattricks.abbr=HT
-
 Current_club=Câu lạc bộ hiện tại
 Current_club.abbr=CLB
 Current_league=Giải hiện tại
 Current_league.abbr=Giải
+Coach=Huấn luyện viên
+Nationality=Quốc tịch
+Nationality.abbr=QT
+Flag=Cờ
+Flag.abbr=Cờ
+Player=Cầu thủ
+Player.abbr=Cầu thủ
+Age=Tuổi
+Age.abbr=Tuổi
+Match=Trận đấu
+Series=Bảng đấu
+Bookmark=Ghi nhớ
+Bookmark.abbr=GN
+Deadline=Hạn chót
+Deadline.abbr=Hạn chót
+CurrentBid=Giá hiện tại
+CurrentBid.abbr=GHT
+CurrentBidder=Người đặt giá cao nhất hiện tại
+CurrentBidder.abbr=NĐGCN
+CurrentBidderShort=Người đặt giá cao nhất
+CurrentBidderShort.abbr=ĐG
 
-
-
-
-#matchdetail
-match.ratings.midfield=Trung lộ
-match.ratings.attack=Tấn công
-match.ratings.defence=Phòng thủ
-
-match.ratings.right=Phải
-match.ratings.center=Chính giữa
-match.ratings.left=Trái
-match.ratings.rightshort=P
-match.ratings.centershort=G
-match.ratings.leftshort=T
-match.ratings.ifkshort=I
+#confirms
 ConfirmActions.bid=Bạn muốn đặt giá cho cầu thủ này? Giá tiền là %s.
 ConfirmActions.transferlist=Bạn muốn cho cầu thủ này lên thị trường chuyển nhượng? Giá  ban đầu là %s.
 ConfirmActions.hirestaff=Bạn muốn thuê\! %num %kind?
 ConfirmActions.sackstaff=Bạn muốn sa thải\! %num %kind?
 ConfirmActions.ntremove=Bạn có muốn thêm/loại bỏ cầu thủ này khỏi đội của bạn?
-ForumStripHattrickLinks.ask=Bạn có muốn từ các đường dẫn lấy thông tin từ server hattrick để có thể sử dụng được ở diễn đàn?
-HideSignatures.signaturetoggle=Chữ ký
-MarkUnread.markunread=Đánh dấu chưa đọc từ đây
-TeamSelectBox.selectplayer=Chọn cầu thủ
+
+# links
+links.boxheader=Đường dẫn
 links.custom.selecticon=Chọn biểu tượng
 links.custom.addpersonallink=Thêm đường dẫn cá nhân
 links.custom.addlink=Thêm đường dẫn
@@ -556,34 +546,24 @@ links.custom.tags=Đuôi
 links.custom.help=Giúp đỡ
 links.custom.helptext=Đầu tiên đây chỉ là chế độ sửa chữa. Chọn ở phần đầu của hộp thoại này để chuyển giữa chế độ sửa chữa và chế độ bình thường. Chỉ ở chế độ bình thường thì đường dẫn của bạn được tùy biến hoàn toàn. Những đường dẫn ngoài thì dễ thêm vào, như thêm đường dẫn (Ví dụ\: http\: //alltid.org/league/427/). Đối với những đường dẫn ngoài bỏ phần server (Ví dụ\: /World/Series/Default.aspx?LeagueLevelUnitID\=427). Bạn chỉ cần phần đuôi cho những đường dẫn khó kiếm. Với phần đuôi được cung cấp, đường dẫn sẽ tự động sử dụng phần thông tin ở trang bạn đang sử dụng. Ví dụ http\://alltid.org/league/[leagueid] sẽ luôn luôn dẫn bạn tới trang Alltid bảng đấu mà bạn chỉ cần xem ở trong Hattrick. Phần đuôi được sử dụng cho từng trang được liệt kê trong hộp lựa chọn. Bạn có thể sử dụng chúng ở trang mà bạn dùng để thêm đường dẫn của riêng mình. Văn bản được sử dụng trong hộp lựa chọn là một mẫu thử. Bạn có thể viết đuôi cho riêng mình (sử dụng []).
 links.custom.helptext2=Bạn cũng có thể lấy đường dẫn của bạn và chia sẻ. Để làm việc này bạn click nút cho ra và chọn chỗ để lưu đường dẫn. Đường dẫn được cho vào hồ sơ đã chọn, và bạn bây giờ có thể lưu vài đường dẫn trong hồ sơ đó. Để nhập đường dẫn, vào hộp thoại tùy chọn và đến mục tùy chọn nhập. Chỉ có những những phần mới trong hồ sơ được chọn sẽ được nhập, mà trong trường hợp này là đường dẫn của bạn. Không một đường dẫn nào từ trước sẽ bị xóa trong hồ sơ.
-matches.income=Thu nhập\:
-PlayerBirthday.boxheader=Sinh nhật
-PlayerBirthday.BirthdayToday=Sinh nhật hôm nay
-PlayerBirthday.BirthdayLastWeek=Sinh nhật tuần trước
-PlayerBirthday.BirthdayNextWeek=Sinh nhật tuần tới
-copy.matchid=Click chuột để lưu ID trận đấu vào bộ nhớ đệm
-ExtendedPlayerDetails.perseason=/mùa giải
 
-ExtraPlayerInfo.defensiveTrainer=Một huấn luyện viên A %s thiên về phòng thủ.
-ExtraPlayerInfo.offensiveTrainer=Một huấn luyện viên A %s thiên về tấn công.
-ExtraPlayerInfo.balancedTrainer=Một huấn luyện viên A %s trung lập
 
 #following string uses pluralForms
 #following string uses pluralForms
 
 
-module.modules_allpages=Hệ thống hoạt động trên tất cả các trang
-ReadHtPrefs.HTLanguageChanged=Bạn vừa thiết lập ở trang tùy chọn chính FoxTrick là ngôn ngữ của FoxTrick tự động thay đổi khi bạn thay đổi ngôn ngữ trong HT. Ngôn ngữ FoxTrick bây giờ được chuyển thành\: %s.
-
-Coach=Huấn luyện viên
-
-
-ManagerButtons.writeInGuestbook=Viết ở trong sổ lưu niệm
-copy.copyplayerad=Sao chép quảng cáo cầu thủ vào bộ nhớ đệm
-copy.copied=Quảng cáo cầu thủ này đã được sao chép vào bộ nhớ đệm.
-
+# Context menu items
+# This would look like: Copy player ID: 123456789
+copy.id=Sao chép %s\: %i
+copy.link=Sao chép đường dẫn trong HT-ML
+copy.ht-ml=Sao chép trong HT-ML
+copy.table=Sao chép bảng trong HT-ML
 
 #copy
+copy.copyplayerad=Sao chép quảng cáo cầu thủ vào bộ nhớ đệm
+copy.copied=Quảng cáo cầu thủ này đã được sao chép vào bộ nhớ đệm.
+copy.matchid=Click chuột để lưu ID trận đấu vào bộ nhớ đệm
+
 copy.PostID=Sao chép ID bài đã đăng vào bộ nhớ tạm
 CopyPosting=Sao chép bài theo kiểu %s
 CopyPosting.abbr=Sao chép theo kiểu %s
@@ -602,9 +582,8 @@ copy.copied.matchid=ID trận đấu vừa được sao chép vào bộ nhớ đ
 copy.copied.postid=ID bài đã đăng vừa được sao chép vào bộ nhớ đệm.
 copy.copied.posting=Bài vừa được đăng đã được sao chép vào bộ nhớ đệm.
 
-
-
 #matches
+matches.income=Thu nhập\:
 matches.attackdefensebars=Thanh Tấn công vs Phòng thủ
 matches.right=Phải
 matches.left=Trái
@@ -613,13 +592,23 @@ matches.defense=Thủ
 matches.attack=Công
 matches.indfreekick=Phạt gián tiếp
 matches.wronglang=FoxTrick\: Bảng chi tiết không được hiển thị tại vì ngôn ngữ của bạn chưa được đăng ký hoặc vì bạn chọn sai ngôn ngữ ở phần tùy chọn. Làm ơn chắc chắn rằng ngôn ngữ trong FoxTrick của bạn giống với ngôn ngữ trong Hattrick.
+total_stars=Tổng số sao
 
-# Context menu items
-# This would look like: Copy player ID: 123456789
-copy.id=Sao chép %s\: %i
-copy.link=Sao chép đường dẫn trong HT-ML
-copy.ht-ml=Sao chép trong HT-ML
-copy.table=Sao chép bảng trong HT-ML
+#matchdetail
+match.ratings.midfield=Trung lộ
+match.ratings.attack=Tấn công
+match.ratings.defence=Phòng thủ
+
+match.ratings.right=Phải
+match.ratings.center=Chính giữa
+match.ratings.left=Trái
+match.ratings.rightshort=P
+match.ratings.centershort=G
+match.ratings.leftshort=T
+match.ratings.ifkshort=I
+
+
+
 
 #teampopups
 Manager=Người quản lý
@@ -640,8 +629,6 @@ YouthMatches=Trận đấu đội trẻ
 more=nhiều hơn...
 less=ít hơn...
 
-total_stars=Tổng số sao
-
 # FlagCollectionToMap
 flagCollectionToMap.ShowMap=Hiện thị bản đồ
 flagCollectionToMap.HideMap=Ẩn bản đồ
@@ -652,18 +639,10 @@ flagCollectionToMap.MEast=Trung Đông
 flagCollectionToMap.SAmerica=Nam Mỹ
 flagCollectionToMap.World=Thế giới
 
-# SkillTable
-Skill_table=Bảng kỹ năng
-Switch_view=Thay đổi cách xem
-
 
 
 # TransferSearchResultFilters
 TransferSearchResultFilters.days=Ngày\:
-
-# refer to transfer search form
-Filters.minimum=Thấp nhất
-Filters.maximum=Cao nhất
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
 RapidId.view=Xem
@@ -671,29 +650,6 @@ RapidId.viewById=Xem theo ID
 RapidId.senior=Đội lớn
 RapidId.youth=Đội trẻ
 
-# SkillTable
-Switch_view.title=Chuyển cách xem bảng.
-Nationality=Quốc tịch
-Nationality.abbr=QT
-Flag=Cờ
-Flag.abbr=Cờ
-Player=Cầu thủ
-Player.abbr=Cầu thủ
-Age=Tuổi
-Age.abbr=Tuổi
-Match=Trận đấu
-Series=Bảng đấu
-
-Bookmark=Ghi nhớ
-Bookmark.abbr=GN
-Deadline=Hạn chót
-Deadline.abbr=Hạn chót
-CurrentBid=Giá hiện tại
-CurrentBid.abbr=GHT
-CurrentBidder=Người đặt giá cao nhất hiện tại
-CurrentBidder.abbr=NĐGCN
-CurrentBidderShort=Người đặt giá cao nhất
-CurrentBidderShort.abbr=ĐG
 
 # HTMSPrediction
 HTMSPrediction.prediction=Kết quả dự đoán
@@ -722,7 +678,15 @@ CrossTable.table=Bảng xếp hạng theo mùa
 
 # fennec ui
 
-sidebarBox.actions=Hành động
+#Locales for date and time
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
+datetimestrings.days=ngày
+datetimestrings.hours=giờ
+datetimestrings.minutes=phút
+datetimestrings.short_seasons=m
+datetimestrings.short_weeks=tu
+datetimestrings.short_days=ng
 
 # buttons
 button.ok=OK
@@ -742,6 +706,8 @@ button.copy=Sao chép
 
 
 # keep the following line untranslated
+
+ReadHtPrefs.HTLanguageChanged=Bạn vừa thiết lập ở trang tùy chọn chính FoxTrick là ngôn ngữ của FoxTrick tự động thay đổi khi bạn thay đổi ngôn ngữ trong HT. Ngôn ngữ FoxTrick bây giờ được chuyển thành\: %s.
 
 # End of IN-GAME STRINGS.
 
