--- a/content/locale/hu/foxtrick.properties
+++ b/content/locale/hu/foxtrick.properties
@@ -320,19 +320,14 @@ module.MyMonitor.desc=A barátok és riválisok legutóbbi meccseinek figyelése
 
 #Save for work
 
-#Embed Media
-EmbedMedia.EmbeddedImage=Beágyazott kép
-
 #Extrashortcuts
 ExtraShortcuts.statistics=Statisztikák
 ExtraShortcuts.transfers=Átigazolások
 ExtraShortcuts.prefs=Beállítások
 ExtraShortcuts.ftprefs=FoxTrick-beállítások
 
-#lineupShortcut
-
-
 #HistoryStats
+HistoryStats.boxheader=Korábbi statisztikák
 HistoryStats.season=Szezon
 HistoryStats.season.short=Sz
 HistoryStats.cup=Kupaforduló
@@ -341,7 +336,6 @@ HistoryStats.league=Csoport
 HistoryStats.league.short=Csop
 HistoryStats.finalPosition=Bajnoki helyezés
 HistoryStats.finalPosition.short=H
-HistoryStats.boxheader=Korábbi statisztikák
 HistoryStats.cupwinner=Kupagyőztes
 HistoryStats.cupwinner.short=Kgy
 
@@ -350,11 +344,9 @@ HistoryStats.cupwinner.short=Kgy
 YouthPromotes.future=A játékost %1 nap múlva, ekkor hozhatod fel\: %2.
 YouthPromotes.today=A játékost most azonnal felhozhatod\!
 
-# links
-links.boxheader=Hivatkozások
-
 #teamstats+filters
 TeamStats.boxheader=Csapatáttekintés
+TeamStats.General=Általános
 TeamStats.PlayerNotToOld=19 évesnél fiatalabb játékosok
 TeamStats.PlayerToOld=19 évesnél idősebb játékosok
 TeamStats.Cards=Lapok
@@ -364,6 +356,12 @@ TeamStats.Pictures=Arcképek
 TeamStats.PlayedLatest=Játszott a legutóbbi mérkőzésen
 TeamStats.NotPlayedLatest=Nem játszott a legutóbbi mérkőzésen
 TeamStats.HomeGrownPlayers=Saját nevelésű játékosok
+
+#PlayerBirthday
+PlayerBirthday.boxheader=Születésnapok
+PlayerBirthday.BirthdayToday=Mai születésnapok
+PlayerBirthday.BirthdayLastWeek=Születésnapok a múlt héten
+PlayerBirthday.BirthdayNextWeek=Születésnapok a jövő héten
 
 #season stats
 #note to translators. use abreviations of league table where applicable
@@ -390,41 +388,49 @@ LeagueNewsFilter.friendlies=Barátságos meccsek és edzőcserék
 LeagueNewsFilter.transfers=Átigazolások
 LeagueNewsFilter.lineupChanges=A felállás módosításai
 
-# AddLeaveConfButton
-AddLeaveConfButton.alert=A fórum elhagyásához kattints a „Mentés” gombra a következő oldalon
-AddLeaveConfButton.LeaveForum=A fórum elhagyása
+#team pages
+sidebarBox.actions=Műveletek
+TeamSelectBox.selectplayer=Játékos kiválasztása
+ExtendedPlayerDetails.perseason=/szezon
+ExtraPlayerInfo.defensiveTrainer=Egy %s edző, aki védekező felfogású
+ExtraPlayerInfo.offensiveTrainer=Egy %s edző, aki támadó szellemű
+ExtraPlayerInfo.balancedTrainer=Egy %s edző, aki nem támadó és nem védekező felfogású
+ManagerButtons.writeInGuestbook=Írj a vendégkönyvbe
 
-#ShowForumPrefButton
+#forum
+AddLeaveConfButton.LeaveForum=A fórum elhagyása
+AddLeaveConfButton.alert=A fórum elhagyásához kattints a „Mentés” gombra a következő oldalon
 ShowForumPrefButton.forumPreferences=Fórumbeállítások
+HideSignatures.signaturetoggle=Aláírás
+MarkUnread.markunread=Olvasatlannak jelölés innentől
+EmbedMedia.EmbeddedImage=Beágyazott kép
+ForumStripHattrickLinks.ask=Valóban eltávolítod a szerverszámokat a hivatkozásokból, hogy használhatóbbak legyenek a fórumban?
 
 # ForumTemplates
 ForumTemplates.make=Sablon készítése a hozzászólásból
+ForumTemplates.make.error=A sablon már létezik vagy üres
 ForumTemplates.show=A sablonok megjelenítése
 ForumTemplates.hide=A sablonok elrejtése
-ForumTemplates.make.error=A sablon már létezik vagy üres
 ForumTemplates.templateTitle=A sablon címe\:
 ForumTemplates.templateTitle.error=A(z) '[' és ']' használata nem engedélyezett a címekben
 ForumTemplates.delete.ask=Törlöd a sablont?
 
-#PostPreview
+#ForumPreview
 ForumPreview.preview.title=Megnézem a hozzászólás előnézetét
 ForumPreview.preview=Előnézet
 ForumPreview.send=Küldés
 
-
+#ForumYouthIcons
+ForumYouthIcons.toolbar.main=Fő hivatkozások
 ForumYouthIcons.toolbar.youth=Ifikre mutató hivatkozások
 ForumYouthIcons.toolbar.tournament=Versenyek
-ForumYouthIcons.toolbar.main=Fő hivatkozások
+ForumYouthIcons.toolbar.other=Egyéb
 ForumYouthIcons.youthplayerid=Ifijátékos-azonosító beszúrása
 ForumYouthIcons.youthteamid=Ificsapat-azonosító beszúrása
 ForumYouthIcons.youthmatchid=Ifimeccs-azonosító beszúrása
 ForumYouthIcons.youthseries=Ifibajnokság-azonosító beszúrása
-
-ForumYouthIcons.toolbar.other=Egyéb
 ForumYouthIcons.debug=Foxtrick hibakeresési napló beszúrása.
 ForumYouthIcons.settings=Foxtrick beállítások beszúrása.
-
-#special bbcode, not really youth icons
 ForumSpecialBBCode.q=Idézet beszúrása
 ForumSpecialBBCode.br=Sortörés beszúrása
 ForumSpecialBBCode.user=Felhasználói azonosító beszúrása
@@ -438,8 +444,6 @@ ForumSpecialBBCode.tableSeparator=A(z) „%s” cellákká alakítása
 ForumSpecialBBCode.enterSeparator=Egyéni elválasztó beszúrása
 ForumSpecialBBCode.forumSymbol="%s" beszúrása
 ForumSpecialBBCode.symbols=Szimbólum beszúrása\: %s
-
-
 
 #Transferlistfilters
 TransferSearchFilters.boxheader=FoxTrick-szűrők
@@ -460,16 +464,8 @@ Filters.Form=Forma
 Filters.XP=Tapasztalat
 Filters.specialty=Specialitás
 Filters.stars=Csillagok
-
-#Locales for date and time
-#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
-#next 6 use pluralFroms
-datetimestrings.days=nap
-datetimestrings.hours=ó
-datetimestrings.minutes=p
-datetimestrings.short_seasons=sz
-datetimestrings.short_weeks=h
-datetimestrings.short_days=n
+Filters.minimum=Legalább
+Filters.maximum=Legfeljebb
 
 #Transfer prices
 MedianTransferPrice.median=Középár
@@ -533,6 +529,7 @@ categories.R=T
 categories.E1=Ku
 categories.E2=Ko
 
+#match positions
 match.pos.kp=Kapus
 match.pos.kp.abbr=KA
 match.pos.lb=Bal szélső hátvéd
@@ -569,17 +566,20 @@ match.role.captain.abbr=CSK
 
 match.player.unknown=Ismeretlen játékos
 
-TeamStats.General=Általános
-
+# SkillTable
+Skill_table=Képességtáblázat
+Switch_view=A nézet felcserélése
+showTimeInClub=Mutassa a klubban töltött időt
+Switch_view.title=A táblázat nézetének felcserélése
+skillTable.showTimeInClub=Mutassa az időt, amióta a játékos csatlakozott a nagycsapathoz
+skilltable.youthplayer=ifijátékos
+skilltable.rebought_youthplayer=Visszavásárolt ifijátékos
 PlayerNumber=Mezszám
 PlayerNumber.abbr=\#
-
 TSI=Total Skill Index
 TSI.abbr=TSI
-
 CanBePromotedIn=Felvihető
 CanBePromotedIn.abbr=Fel
-
 Personality=Személyiség
 Agreeability=Együttműködőkészség
 Agreeability.abbr=Együttm.
@@ -587,33 +587,26 @@ Aggressiveness=Agresszivitás
 Aggressiveness.abbr=Agr.
 Honesty=Becsületesség
 Honesty.abbr=Becs.
-
 Leadership=Vezetői képesség
 Leadership.abbr=Vezkép
 Experience=Tapasztalat
 Experience.abbr=Tap.
-
 Stamina=Erőnlét
 Stamina.abbr=Erő.
 Form=Forma
 Form.abbr=Fo.
-
 Loyalty=Hűség
 Loyalty.abbr=Hű
 MotherClubBonus=Anyacsapati bónusz
 MotherClubBonus.abbr=AB
-
 Status=Státusz
 Status.abbr=Státusz
-
 Yellow_card=Sárga lap
 Yellow_card.abbr=SL
 Red_card=Piros lap
 Red_card.abbr=PL
-
 Speciality=Specialitás
 Speciality.abbr=Spec
-
 Last_match=A legutóbbi mérkőzés
 Last_match.abbr=Ut. mérk.
 Last_stars=A legutóbbi értékelés
@@ -624,18 +617,14 @@ Last_position.abbr=Ut. poszt
 #following string uses pluralForms
 Last_match_played_as_at=%1 percet játszott %2 pozícióban a legutóbbi mérkőzésén, ekkor\: %3.
 Last_match_didnot_play=Nem játszott még.
-
 Bruised=Tapaszos
 Bruised.abbr=Tap.
 Injured=Sérült
 Injured.abbr=Sér.
-
 Salary=Fizetés
 Salary.abbr=Fiz.
-
 TransferListed=Piacon van
 TransferListed.abbr=Piac
-
 NrOfMatches=Mérkőzésszám
 NrOfMatches.abbr=MSz
 LeagueGoals=Bajnoki gólok
@@ -648,41 +637,46 @@ CareerGoals=Összes gól
 CareerGoals.abbr=G
 Hattricks=Mesterhármasok
 Hattricks.abbr=M3
-
 Current_club=Jelenlegi klub
 Current_club.abbr=Klub
 Current_league=jelenlegi bajnokság
 Current_league.abbr=Bajn.
-
 JoinedSince.abbr=Amióta
-
 Hotlist=Gyorslista
+Coach=Edző
+CurrentSquad=Aktuális keret
+Nationality=Nemzetiség
+Nationality.abbr=Nemz.
+Flag=Zászló
+Flag.abbr=Zló
+Player=Játékos
+Player.abbr=Játékos
+Age=Életkor
+Age.abbr=Kor
+Match=Mérkőzés
+Series=Bajnokság
+TransferCompare=Árbecslés
+TransferCompare.abbr=Árbecsl.
+Bookmark=Kedvencek
+Bookmark.abbr=Ked
+Deadline=Határidő
+Deadline.abbr=Hi
+CurrentBid=Aktuális licit
+CurrentBid.abbr=Aktlic
+CurrentBidder=A legmagasabb licit
+CurrentBidder.abbr=Maglic
+CurrentBidderShort=A legmagasabb licit
+CurrentBidderShort.abbr=Mlic
 
-skilltable.youthplayer=ifijátékos
-skilltable.rebought_youthplayer=Visszavásárolt ifijátékos
-
-#matchdetail
-match.ratings.midfield=Középpálya
-match.ratings.attack=Támadás
-match.ratings.defence=Védelem
-match.ratings.total=Összesen
-
-match.ratings.right=Jobb oldali
-match.ratings.center=Középső
-match.ratings.left=Bal oldali
-match.ratings.rightshort=J
-match.ratings.centershort=K
-match.ratings.leftshort=B
-match.ratings.ifkshort=I
+#confirms
 ConfirmActions.bid=Valóban licitálsz erre a játékosra? Az ára %s.
 ConfirmActions.transferlist=Valóban eladod ezt a játékost? A kezdőár %s.
 ConfirmActions.hirestaff=Valóban alkalmazod a következő(ke)t\: %num %kind?
 ConfirmActions.sackstaff=Valóban elbocsátod a következő(ke)t\: %num %kind?
 ConfirmActions.ntremove=Valóban behívod/kirúgod ezt a játékost?
-ForumStripHattrickLinks.ask=Valóban eltávolítod a szerverszámokat a hivatkozásokból, hogy használhatóbbak legyenek a fórumban?
-HideSignatures.signaturetoggle=Aláírás
-MarkUnread.markunread=Olvasatlannak jelölés innentől
-TeamSelectBox.selectplayer=Játékos kiválasztása
+
+# links
+links.boxheader=Hivatkozások
 links.custom.selecticon=Ikon kiválasztása
 links.custom.addpersonallink=Személyes hivatkozás hozzáadása
 links.custom.addlink=Hivatkozás hozzáadása
@@ -695,42 +689,25 @@ links.custom.tags=Azonosítók
 links.custom.help=Súgó
 links.custom.helptext=Ez csak a szerkesztő mód. A szerkesztő és a normál mód között a mező fejlécére kattintva tudsz váltani. A saját hivatkozásaid csak normál módban működnek rendesen. A külső statikus hivatkozások hozzáadása egyszerű\: csak írd be a teljes URL-címet (pl. http\: //alltid.org/league/427/). Belső statikus hivatkozások hozzáadásánál hagyd ki a kiszolgálóra utaló részt (pl. /World/Series/Default.aspx?LeagueLevelUnitID\=427). Azonosítókra csak a ritkább dinamikus hivatkozások esetében van szükség. Az azonosítókkal a hivatkozások dinamikusan változnak, és felhasználják azt az információt is, hogy melyik oldalon vagy. Pl. a http\://alltid.org/league/[leagueid] mindig annak a csoportnak az Alltid-oldalára visz, amelyet éppen megtekintettél a Hattrickben. Az egyes oldalakhoz felhasználható azonosítók felsorolását a legördülő menüben találod. Csak azokat tudod felhasználni, amelyek fel vannak sorolva azon az oldalon, ahová a saját hivatkozásodat szeretnéd hozzáadni. A szövegmezőben létrehozott szöveg mindössze egyszerű sablon. Azonosítót Te magad is beírhatsz (a [] felhasználásával).
 links.custom.helptext2=A hivatkozásokat exportálhatod és megoszthatod. Ehhez kattints az Exportálás gombra, és a hivatkozás mentéséhez válaszd ki a fájlt. A hivatkozások az adott fájlhoz csatlakoznak, így egy fájllal több hivatkozást is menteni tudsz. A hivatkozások importálásához nyisd meg a Beállítások párbeszédpanelt, és válaszd ki „A beállítások importálása” lehetőséget. Importálni csak a kiválasztott fájlban megjelenő adatokat lehet, amelyek ebben az esetben a Te hivatkozásaid. A korábbi hivatkozásaid nem törlődnek.
-matches.income=Bevétel\:
-PlayerBirthday.boxheader=Születésnapok
-PlayerBirthday.BirthdayToday=Mai születésnapok
-PlayerBirthday.BirthdayLastWeek=Születésnapok a múlt héten
-PlayerBirthday.BirthdayNextWeek=Születésnapok a jövő héten
-copy.matchid=A mérkőzésazonosító vágólapra másolásához kattints ide
-ExtendedPlayerDetails.perseason=/szezon
 
-ExtraPlayerInfo.defensiveTrainer=Egy %s edző, aki védekező felfogású
-ExtraPlayerInfo.offensiveTrainer=Egy %s edző, aki támadó szellemű
-ExtraPlayerInfo.balancedTrainer=Egy %s edző, aki nem támadó és nem védekező felfogású
 
 #following string uses pluralForms
 #following string uses pluralForms
 
 matchView.htLive=HT Live
 
-module.modules_allpages=Minden oldalon érvényes modulműködés
-ReadHtPrefs.HTLanguageChanged=A FoxTrick azt érzékelte, hogy módosítottad a nyelvet. A FoxTrick nyelve jelenleg a(z) %s.
-
-Coach=Edző
-CurrentSquad=Aktuális keret
-
-
-ManagerButtons.writeInGuestbook=Írj a vendégkönyvbe
-copy.copyplayerad=A játékoshirdetés vágólapra másolása
-copy.copied=A játékoshirdetést vágólapra másoltad.
-
-ratings.HatStats=HatStats
-ratings.LoddarStats=LoddarStats
-ratings.PeasoStats=PeasoStats
-ratings.VnukStats=VnukStats
-ratings.HTitaVal=HTitaVal
-ratings.GardierStats=GardierStats
+# Context menu items
+# This would look like: Copy player ID: 123456789
+copy.id=%s másolása\: %i
+copy.link=Hivatkozás helyének másolása HT-ML-ben
+copy.ht-ml=Másolás HT-ML-ben
+copy.table=Tablázat másolása HT-ML-ben
 
 #copy
+copy.copyplayerad=A játékoshirdetés vágólapra másolása
+copy.copied=A játékoshirdetést vágólapra másoltad.
+copy.matchid=A mérkőzésazonosító vágólapra másolásához kattints ide
+
 copy.PostID=A hozzászólás számának vágólapra másolása
 CopyPosting=Hozzászólás másolása ebben a stílusban\: %s
 CopyPosting.abbr=Másolás ebben a stílusban\: %s
@@ -762,6 +739,39 @@ copy.copied.posting=A következő hozzászólást\: %s vágólapra másoltad.
 copy.copySelected=Kijelölés másolása\: Ctrl + C.
 copy.operaPaste=Beillesztés Shift + bal kattintás együtt.
 
+#matches
+matches.income=Bevétel\:
+matches.attackdefensebars=Támadás kontra védekezés
+matches.right=Jobb oldal
+matches.left=Bal oldal
+matches.center=Közép
+matches.defense=véd.
+matches.attack=tám.
+matches.indfreekick=Közv. pontrúgás
+matches.wronglang=FoxTrick\: a statisztikákat nem lehet megjeleníteni, mivel az általad használt nyelv nincs regisztrálva, vagy mert rossz nyelvet adtál meg a beállítások között. Ellenőrizd, hogy a FoxTrick nyelve megegyezik-e Hattricken használt nyelvvel.
+total_stars=Összes csillag
+
+#matchdetail
+match.ratings.midfield=Középpálya
+match.ratings.attack=Támadás
+match.ratings.defence=Védelem
+match.ratings.total=Összesen
+
+match.ratings.right=Jobb oldali
+match.ratings.center=Középső
+match.ratings.left=Bal oldali
+match.ratings.rightshort=J
+match.ratings.centershort=K
+match.ratings.leftshort=B
+match.ratings.ifkshort=I
+
+ratings.HatStats=HatStats
+ratings.LoddarStats=LoddarStats
+ratings.PeasoStats=PeasoStats
+ratings.VnukStats=VnukStats
+ratings.HTitaVal=HTitaVal
+ratings.GardierStats=GardierStats
+
 MatchReportFormat.MatchReport=Meccsriport
 MatchReportFormat.lineup=Felállás
 MatchReportFormat.kickOff=Kezdőrúgás
@@ -771,23 +781,6 @@ MatchReportFormat.extraTime=Hosszabbítás
 MatchReportFormat.penaltyShootOut=Tizenegyespárbaj
 MatchReportFormat.result=Eredmény
 
-
-#matches
-matches.attackdefensebars=Támadás kontra védekezés
-matches.right=Jobb oldal
-matches.left=Bal oldal
-matches.center=Közép
-matches.defense=véd.
-matches.attack=tám.
-matches.indfreekick=Közv. pontrúgás
-matches.wronglang=FoxTrick\: a statisztikákat nem lehet megjeleníteni, mivel az általad használt nyelv nincs regisztrálva, vagy mert rossz nyelvet adtál meg a beállítások között. Ellenőrizd, hogy a FoxTrick nyelve megegyezik-e Hattricken használt nyelvvel.
-
-# Context menu items
-# This would look like: Copy player ID: 123456789
-copy.id=%s másolása\: %i
-copy.link=Hivatkozás helyének másolása HT-ML-ben
-copy.ht-ml=Másolás HT-ML-ben
-copy.table=Tablázat másolása HT-ML-ben
 
 #teampopups
 Manager=Menedzser
@@ -807,12 +800,6 @@ LastLineup=A legutóbbi felállás
 YouthMatches=Ifimeccsek
 more=több információ...
 less=kevesebb információ...
-TeamPopupLinks.prefsCaption=Hivatkozásokra vonatkozó beállítások
-TeamPopupLinks.ShowByDefault=Megjelenítés alapértelmezettként
-TeamPopupLinks.ShowOnMore=Továbbiak megjelenítése
-TeamPopupLinks.OpenNewTab=Megnyitás új lapon
-
-total_stars=Összes csillag
 
 # FlagCollectionToMap
 flagCollectionToMap.ShowMap=A térkép megjelenítése
@@ -824,11 +811,6 @@ flagCollectionToMap.MEast=Közel-Kelet
 flagCollectionToMap.SAmerica=Dél-Amerika
 flagCollectionToMap.World=Világ
 
-# SkillTable
-Skill_table=Képességtáblázat
-Switch_view=A nézet felcserélése
-showTimeInClub=Mutassa a klubban töltött időt
-
 team.status.booked=Barátságos meccs lekötve
 ShowFriendlyBooked.ShowFriendlies=Barátságos mérkőzések megjelenítése
 
@@ -839,42 +821,12 @@ TransferSearchResultFilters.hideInjured=Sérültek elrejtése
 TransferSearchResultFilters.hideSuspended=Eltiltottak elrejtése
 TransferSearchResultFilters.days=Napok\:
 
-# refer to transfer search form
-Filters.minimum=Legalább
-Filters.maximum=Legfeljebb
-
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
 RapidId.view=Megtekintés
 RapidId.viewById=Megtekintés az azonosító alapján
 RapidId.senior=Felnőtt
 RapidId.youth=Ifi
 
-# SkillTable
-Switch_view.title=A táblázat nézetének felcserélése
-skillTable.showTimeInClub=Mutassa az időt, amióta a játékos csatlakozott a nagycsapathoz
-Nationality=Nemzetiség
-Nationality.abbr=Nemz.
-Flag=Zászló
-Flag.abbr=Zló
-Player=Játékos
-Player.abbr=Játékos
-Age=Életkor
-Age.abbr=Kor
-Match=Mérkőzés
-Series=Bajnokság
-
-TransferCompare=Árbecslés
-TransferCompare.abbr=Árbecsl.
-Bookmark=Kedvencek
-Bookmark.abbr=Ked
-Deadline=Határidő
-Deadline.abbr=Hi
-CurrentBid=Aktuális licit
-CurrentBid.abbr=Aktlic
-CurrentBidder=A legmagasabb licit
-CurrentBidder.abbr=Maglic
-CurrentBidderShort=A legmagasabb licit
-CurrentBidderShort.abbr=Mlic
 
 # HTMSPrediction
 HTMSPrediction.prediction=Becsült eredmény
@@ -944,7 +896,15 @@ pageAction.mainContent=Fő tartalom megjelenítése
 pageAction.leftMenu=Bal hasáb mutatása
 pageAction.all=Az összes megjelenítése
 
-sidebarBox.actions=Műveletek
+#Locales for date and time
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
+datetimestrings.days=nap
+datetimestrings.hours=ó
+datetimestrings.minutes=p
+datetimestrings.short_seasons=sz
+datetimestrings.short_weeks=h
+datetimestrings.short_days=n
 
 # buttons
 button.ok=OK
@@ -984,6 +944,8 @@ exception.error=Hiba\: %s
 
 # keep the following line untranslated
 
+ReadHtPrefs.HTLanguageChanged=A FoxTrick azt érzékelte, hogy módosítottad a nyelvet. A FoxTrick nyelve jelenleg a(z) %s.
+
 # End of IN-GAME STRINGS.
 
 
@@ -992,6 +954,10 @@ exception.error=Hiba\: %s
 Links.feeds=Linklisták forrása (sortörésekkel elválasztva)
 TickerAlert.enable=Engedélyezés
 TickerAlert.sound=Hang
+TeamPopupLinks.prefsCaption=Hivatkozásokra vonatkozó beállítások
+TeamPopupLinks.ShowByDefault=Megjelenítés alapértelmezettként
+TeamPopupLinks.ShowOnMore=Továbbiak megjelenítése
+TeamPopupLinks.OpenNewTab=Megnyitás új lapon
 
 #toolbar
 toolbar.title=FoxTrick
