--- a/content/locale/pt-BR/foxtrick.properties
+++ b/content/locale/pt-BR/foxtrick.properties
@@ -190,9 +190,6 @@ module.RatingsDisplay.HatStats.desc=Hatstats
 
 #Save for work
 
-#Embed Media
-EmbedMedia.EmbeddedImage=Imagem anexada
-
 #Extrashortcuts
 ExtraShortcuts.statistics=statistics
 ExtraShortcuts.transfers=transfers
@@ -200,26 +197,21 @@ ExtraShortcuts.ManageCHPP=Gerenciar seus produtos CHPP
 ExtraShortcuts.prefs=preferences
 ExtraShortcuts.ftprefs=Preferências do FoxTrick
 
-#lineupShortcut
-
-
 #HistoryStats
+HistoryStats.boxheader=Estatísticas históricas
 HistoryStats.season=Temporada
 HistoryStats.cup=Rodada da copa
 HistoryStats.league=Grupos
 HistoryStats.finalPosition=Posição final no grupo
-HistoryStats.boxheader=Estatísticas históricas
 HistoryStats.cupwinner=Vencedor da copa
 
 # YouthPromotes
 #following string uses pluralForms
 YouthPromotes.today=Jogador pode ser promovido hoje\!
 
-# links
-links.boxheader=Links
-
 #teamstats+filters
 TeamStats.boxheader=Visão Geral do Time
+TeamStats.General=Geral
 TeamStats.Cards=Cartões
 TeamStats.Injured=Lesões
 TeamStats.TransferListed=A Venda
@@ -227,6 +219,12 @@ TeamStats.NotTransferListed=Não listado no mercado de transferência
 TeamStats.ActivePlayers=Jogadores ativos
 TeamStats.HomeGrownPlayers=Jogadores recrutados pelo time
 TeamStats.PurchasedPlayers=Jogadores comprados
+
+#PlayerBirthday
+PlayerBirthday.boxheader=Aniversarios
+PlayerBirthday.BirthdayToday=Aniversários hoje
+PlayerBirthday.BirthdayLastWeek=Aniversarios ultima semana
+PlayerBirthday.BirthdayNextWeek=Aniversarios proxima semana
 
 #season stats
 #note to translators. use abreviations of league table where applicable
@@ -238,39 +236,48 @@ seasonstats.masters=Masters
 
 #Newsfeed filter
 
-# AddLeaveConfButton
-AddLeaveConfButton.alert=Clique no Botao 'Salvar' na proxima pagina para sair desse forum
-AddLeaveConfButton.LeaveForum=Sair da conferencia
+#team pages
+sidebarBox.actions=Ações
+TeamSelectBox.selectplayer=Selecionar jogador
+ExtendedPlayerDetails.perseason=/ season
+ExtraPlayerInfo.defensiveTrainer=Um técnico de qualidade %s que é defensivo.
+ExtraPlayerInfo.offensiveTrainer=Um técnico de qualidade %s que é ofensivo.
+ExtraPlayerInfo.balancedTrainer=Um técnico de qualidade %s que é equilibrado.
+ManagerButtons.writeInGuestbook=Escrever no Livro de Visitas
 
-#ShowForumPrefButton
+#forum
+AddLeaveConfButton.LeaveForum=Sair da conferencia
+AddLeaveConfButton.alert=Clique no Botao 'Salvar' na proxima pagina para sair desse forum
 ShowForumPrefButton.forumPreferences=Preferências do fórum
+FormatPostingText.ShowNestedQuotes=Mostrar citações agrupadas  
+HideSignatures.signaturetoggle=Assinatura
+MarkUnread.markunread=Marcar como não lido a partir daqui
+EmbedMedia.EmbeddedImage=Imagem anexada
+ForumStripHattrickLinks.ask=Você quer tirar o servidor hattrick dos links para deixá-lo utilizável no fórum?
 
 # ForumTemplates
 ForumTemplates.make=Criar template para post
+ForumTemplates.make.error=Template ja existe ou esta vazio
 ForumTemplates.show=Mostrar templates
 ForumTemplates.hide=Esconder templates
-ForumTemplates.make.error=Template ja existe ou esta vazio
 ForumTemplates.templateTitle=Titulo do template\:
 ForumTemplates.templateTitle.error='[' e ']' não é permitido como titulo
 ForumTemplates.delete.ask=Apagar template?
 
-#PostPreview
+#ForumPreview
 ForumPreview.preview.title=Mostrar uma previa do post
 ForumPreview.send=Enviar
 
-
-ForumYouthIcons.toolbar.youth=Links Juniors
+#ForumYouthIcons
 ForumYouthIcons.toolbar.main=Links Principais
+ForumYouthIcons.toolbar.youth=Links Juniors
+ForumYouthIcons.toolbar.other=Outros
 ForumYouthIcons.youthplayerid=Link para jogador junior
 ForumYouthIcons.youthteamid=Link para Time de juniors
 ForumYouthIcons.youthmatchid=Adicionar link para jogo de junior
 ForumYouthIcons.youthseries=Adicionar link para grupo de junior
-
-ForumYouthIcons.toolbar.other=Outros
 ForumYouthIcons.debug=Inserir log de depuração do FoxTrick.
 ForumYouthIcons.settings=Insira as configurações do FoxTrick.
-
-#special bbcode, not really youth icons
 ForumSpecialBBCode.q=Adicionar citação
 ForumSpecialBBCode.br=Adicionar linha divisoria
 ForumSpecialBBCode.user=Adicionar ID de usuario
@@ -283,9 +290,6 @@ ForumSpecialBBCode.tableSeparator=Converter "%s" para células
 ForumSpecialBBCode.enterSeparator=Digite um separador personalizado
 ForumSpecialBBCode.forumSymbol=Inserir "%s"
 ForumSpecialBBCode.symbols=Inserir símbolo\: %s
-
-
-FormatPostingText.ShowNestedQuotes=Mostrar citações agrupadas  
 
 #Transferlistfilters
 TransferSearchFilters.boxheader=Filtros Foxtrick
@@ -306,16 +310,8 @@ Filters.Form=Forma
 Filters.XP=Experiência
 Filters.specialty=Especialidade
 Filters.stars=Estrelas
-
-#Locales for date and time
-#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
-#next 6 use pluralFroms
-datetimestrings.days=dias
-datetimestrings.hours=hs
-datetimestrings.minutes=min
-datetimestrings.short_seasons=t
-datetimestrings.short_weeks=s
-datetimestrings.short_days=d
+Filters.minimum=Pelo menos
+Filters.maximum=Máximo
 
 #Transfer prices
 MedianTransferPrice.median=Média de Preço
@@ -362,6 +358,7 @@ HTMS_Potential.abbr=Potencial
 PlayerCategory=Categoria do jogador
 #note to translators. Copy abbreviations from HT translations using players page on HT (only supporters can see them in brackets next to players names)
 
+#match positions
 match.pos.kp=Goleiro
 match.pos.lb=Lateral-esquerdo
 match.pos.lcd=Zagueiro central esquerdo
@@ -384,60 +381,54 @@ match.role.captain.abbr=Capt.
 
 match.player.unknown=Jogador desconhecido
 
-TeamStats.General=Geral
-
+# SkillTable
+Skill_table=Tabela de habilidade
+Switch_view=Alternar o modo de exibição
+AddHomegrown=Adicionar jogadores da casa
+showTimeInClub=Mostrar hora no clube
+Switch_view.title=Alternar a exibição da tabela.
+skillTable.addHomegrown=Adicionar todos os jogadores vindos dos juniores da casa do time atual
+skillTable.showTimeInClub=Mostrar o tempo desde que o jogador se juntou à equipe principal do clube
+skilltable.youthplayer=junior
+skilltable.rebought_youthplayer=Recomprou junior
 PlayerNumber=Número do jogador
 PlayerNumber.abbr=\#
-
 TSI=TSI total
 TSI.abbr=TSI
-
 CanBePromotedIn=Pode ser promovido em
 CanBePromotedIn.abbr=Prom
-
 Personality=Personalidade
 Agreeability=Agressividade
 Aggressiveness=Agressividade
 Aggressiveness.abbr=Ag
 Honesty=Honestidade
 Honesty.abbr=Ho
-
 Leadership=Liderança
 Leadership.abbr=Lid
 Experience=Experiência
 Experience.abbr=XP
-
 Stamina=Resistencia
 Stamina.abbr=Resist
 Form=Forma
 Form.abbr=Fo
-
 Loyalty=Lealdade
 MotherClubBonus=Bônus de clube de origem
-
 Status=Status
 Status.abbr=Status
-
 Yellow_card=Cartão amarelo
 Red_card=Cartão vermelho
-
 Speciality=Especialidade
-
 Last_match=Último jogo
 Last_match.abbr=Último
 Last_stars=Estrelas mais recentes
 Last_stars_EndOfGame=Últimos estrelas ao final do jogo
 Last_position=Última posição
 #following string uses pluralForms
-
 Bruised=Lesionado mas jogando
 Injured=Lesionado
-
 Salary=Salário
 Salary.abbr=Salário
-
 TransferListed=Listado nas transferências
-
 NrOfMatches=Número de jogos
 LeagueGoals=Gols na liga
 CupGoals=Gols na copa
@@ -446,43 +437,44 @@ CareerGoals=Gols na carreira
 CareerGoals.abbr=G
 Hattricks=Hattricks
 Hattricks.abbr=HT
-
 Current_club=Clube atual
 Current_club.abbr=Clube
 Current_league=Liga atual
 Current_league.abbr=Liga
-
 JoinedSince=Juntou-se desde
 JoinedSince.abbr=Desde
-
 Hotlist=Listas de destaques
 Hotlist.abbr=Destaques
+Coach=Técnico
+CurrentSquad=Elenco atual
+Nationality=Nacionalidade
+Flag=Bandeira
+Flag.abbr=Bandeira
+Player.abbr=Jogador
+Age=Idade
+Age.abbr=Idade
+Match=Partida
+Series=Grupos
+TransferCompare=Comparação de mercado
+Bookmark=Favoritos
+Bookmark.abbr=Fav
+Deadline=Prazo final
+Deadline.abbr=Prazo final
+CurrentBid=Lance atual
+CurrentBid.abbr=Lance
+CurrentBidder=Ofertante com maior lance atual
+CurrentBidder.abbr=Ofertante
+CurrentBidderShort=Ofertante com maior lance atual
 
-skilltable.youthplayer=junior
-skilltable.rebought_youthplayer=Recomprou junior
-
-#matchdetail
-match.ratings.midfield=Meio Campo
-match.ratings.attack=Ataque
-match.ratings.defence=Defesa
-match.ratings.total=Total
-
-match.ratings.right=Direito
-match.ratings.center=Centro
-match.ratings.left=Esquerdo
-match.ratings.rightshort=D
-match.ratings.centershort=C
-match.ratings.leftshort=E
-match.ratings.ifkshort=I
+#confirms
 ConfirmActions.bid=Deseja dar lance a este jogador? O preco é %s.
 ConfirmActions.transferlist=Deseja colocar este jogador na lista de transferencias? O valor pedido é %s.
 ConfirmActions.hirestaff=Você deseja contratar %num %kind?
 ConfirmActions.sackstaff=Você deseja despedir %num %kind?
 ConfirmActions.ntremove=Voce realmente quer adicionar/remover este jogador de seu time?
-ForumStripHattrickLinks.ask=Você quer tirar o servidor hattrick dos links para deixá-lo utilizável no fórum?
-HideSignatures.signaturetoggle=Assinatura
-MarkUnread.markunread=Marcar como não lido a partir daqui
-TeamSelectBox.selectplayer=Selecionar jogador
+
+# links
+links.boxheader=Links
 links.custom.selecticon=Selecionar icone
 links.custom.addpersonallink=Adicionar link pessoal
 links.custom.addlink=Adicionar link
@@ -493,17 +485,7 @@ links.custom.confirmremove=Deseja realmente remover?
 links.custom.addtag=Adicionar uma tag
 links.custom.tags=Tags
 links.custom.help=Ajuda
-matches.income=Income\:
-PlayerBirthday.boxheader=Aniversarios
-PlayerBirthday.BirthdayToday=Aniversários hoje
-PlayerBirthday.BirthdayLastWeek=Aniversarios ultima semana
-PlayerBirthday.BirthdayNextWeek=Aniversarios proxima semana
-copy.matchid=Click para copiar o ID do jogo para a area de tranferencia
-ExtendedPlayerDetails.perseason=/ season
 
-ExtraPlayerInfo.defensiveTrainer=Um técnico de qualidade %s que é defensivo.
-ExtraPlayerInfo.offensiveTrainer=Um técnico de qualidade %s que é ofensivo.
-ExtraPlayerInfo.balancedTrainer=Um técnico de qualidade %s que é equilibrado.
 
 #following string uses pluralForms
 notify.newMail=Você recebeu %s novas mensagens.;Você recebeu %s novos e-mails.
@@ -511,24 +493,18 @@ notify.newMail=Você recebeu %s novas mensagens.;Você recebeu %s novos e-mails.
 
 matchView.htLive=HT Live
 
-module.modules_allpages=Módulos em execução em todas as páginas
-
-Coach=Técnico
-CurrentSquad=Elenco atual
-
-
-ManagerButtons.writeInGuestbook=Escrever no Livro de Visitas
-copy.copyplayerad=Copiar anuncio de jogador para a area de transferencia
-copy.copied=O Jogador anunciado foi copiado para o Area de tranferencia
-
-ratings.HatStats=HatStats
-ratings.LoddarStats=LoddarStats
-ratings.PeasoStats=PeasoStats
-ratings.VnukStats=VnukStats
-ratings.HTitaVal=HTitaVal
-ratings.GardierStats=GardierStats
+# Context menu items
+# This would look like: Copy player ID: 123456789
+copy.id=Copiar %s\: %i
+copy.link=Copiar localização do Link em HT-ML
+copy.ht-ml=Copiar em HT-ML
+copy.table=Copiar a tabela no HT-ML
 
 #copy
+copy.copyplayerad=Copiar anuncio de jogador para a area de transferencia
+copy.copied=O Jogador anunciado foi copiado para o Area de tranferencia
+copy.matchid=Click para copiar o ID do jogo para a area de tranferencia
+
 copy.PostID=Copiar para Area de Tranferencia
 CopyPosting=Copiar postando no estilo %s
 CopyPosting.abbr=Copiar em estilo %s
@@ -555,15 +531,8 @@ copy.copied.skilltable=A tabela de habilidades foi copiada para a área de trans
 copy.copySelected=Copiar seleção com Ctrl + C.
 copy.operaPaste=Colar com Shift + clique esquerdo.
 
-MatchReportFormat.MatchReport=Relatório do jogo
-MatchReportFormat.lineup=Escalação
-MatchReportFormat.halfTime=Meio tempo
-MatchReportFormat.fullTime=Tempo integral
-MatchReportFormat.extraTime=Prorrogação
-MatchReportFormat.result=Resultado
-
-
 #matches
+matches.income=Income\:
 matches.attackdefensebars=Barras Ataque vs Defesa
 matches.right=Direita
 matches.left=Esquerda
@@ -572,13 +541,36 @@ matches.defense=def
 matches.attack=ata
 matches.indfreekick=Falta Indireta
 matches.wronglang=Foxtrick\: As Estatisticas não podem ser exibidas porque seu idioma não esta registrado ou porque voce escolheu um idioma diferente nas preferencias. Por favor mude seu idioma no Foxtrick para o mesmo idioma do seu Hattrick.
+total_stars=Total de estrelas
 
-# Context menu items
-# This would look like: Copy player ID: 123456789
-copy.id=Copiar %s\: %i
-copy.link=Copiar localização do Link em HT-ML
-copy.ht-ml=Copiar em HT-ML
-copy.table=Copiar a tabela no HT-ML
+#matchdetail
+match.ratings.midfield=Meio Campo
+match.ratings.attack=Ataque
+match.ratings.defence=Defesa
+match.ratings.total=Total
+
+match.ratings.right=Direito
+match.ratings.center=Centro
+match.ratings.left=Esquerdo
+match.ratings.rightshort=D
+match.ratings.centershort=C
+match.ratings.leftshort=E
+match.ratings.ifkshort=I
+
+ratings.HatStats=HatStats
+ratings.LoddarStats=LoddarStats
+ratings.PeasoStats=PeasoStats
+ratings.VnukStats=VnukStats
+ratings.HTitaVal=HTitaVal
+ratings.GardierStats=GardierStats
+
+MatchReportFormat.MatchReport=Relatório do jogo
+MatchReportFormat.lineup=Escalação
+MatchReportFormat.halfTime=Meio tempo
+MatchReportFormat.fullTime=Tempo integral
+MatchReportFormat.extraTime=Prorrogação
+MatchReportFormat.result=Resultado
+
 
 #teampopups
 Manager=Manager
@@ -598,12 +590,6 @@ LastLineup=Ultima Formação
 YouthMatches=Jogos dos juniores
 more=mais...
 less=menos...
-TeamPopupLinks.prefsCaption=Preferências de links
-TeamPopupLinks.ShowByDefault=Mostrar por padrão
-TeamPopupLinks.ShowOnMore=Mostrar mais
-TeamPopupLinks.OpenNewTab=Abrir em nova aba
-
-total_stars=Total de estrelas
 
 # FlagCollectionToMap
 flagCollectionToMap.ShowMap=Mostrar mapa
@@ -615,12 +601,6 @@ flagCollectionToMap.MEast=Oriente Medio
 flagCollectionToMap.SAmerica=America do Sul
 flagCollectionToMap.World=Mundo
 
-# SkillTable
-Skill_table=Tabela de habilidade
-Switch_view=Alternar o modo de exibição
-AddHomegrown=Adicionar jogadores da casa
-showTimeInClub=Mostrar hora no clube
-
 team.status.booked=Amistoso marcado
 ShowFriendlyBooked.ShowFriendlies=Mostrar amistosos
 
@@ -631,39 +611,12 @@ TransferSearchResultFilters.hideInjured=Ocultar lesionados
 TransferSearchResultFilters.hideSuspended=Ocultar suspenso
 TransferSearchResultFilters.days=Dias\:
 
-# refer to transfer search form
-Filters.minimum=Pelo menos
-Filters.maximum=Máximo
-
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
 RapidId.view=Modo de exibição
 RapidId.viewById=Modo de exibição por ID
 RapidId.senior=Senior
 RapidId.youth=Junior
 
-# SkillTable
-Switch_view.title=Alternar a exibição da tabela.
-skillTable.addHomegrown=Adicionar todos os jogadores vindos dos juniores da casa do time atual
-skillTable.showTimeInClub=Mostrar o tempo desde que o jogador se juntou à equipe principal do clube
-Nationality=Nacionalidade
-Flag=Bandeira
-Flag.abbr=Bandeira
-Player.abbr=Jogador
-Age=Idade
-Age.abbr=Idade
-Match=Partida
-Series=Grupos
-
-TransferCompare=Comparação de mercado
-Bookmark=Favoritos
-Bookmark.abbr=Fav
-Deadline=Prazo final
-Deadline.abbr=Prazo final
-CurrentBid=Lance atual
-CurrentBid.abbr=Lance
-CurrentBidder=Ofertante com maior lance atual
-CurrentBidder.abbr=Ofertante
-CurrentBidderShort=Ofertante com maior lance atual
 
 # HTMSPrediction
 HTMSPrediction.prediction=Resultado previsto
@@ -726,7 +679,15 @@ pageAction.mainContent=Mostrar conteúdo principal
 pageAction.leftMenu=Mostrar barra esquerda
 pageAction.all=Mostrar tudo
 
-sidebarBox.actions=Ações
+#Locales for date and time
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
+datetimestrings.days=dias
+datetimestrings.hours=hs
+datetimestrings.minutes=min
+datetimestrings.short_seasons=t
+datetimestrings.short_weeks=s
+datetimestrings.short_days=d
 
 # buttons
 button.ok=OK
@@ -770,6 +731,7 @@ exception.error=Erro %s
 log.header=Registro de FoxTrick
 # keep the following line untranslated
 
+
 # End of IN-GAME STRINGS.
 
 
@@ -778,6 +740,10 @@ log.header=Registro de FoxTrick
 Links.feeds=Feeds de listas de links (separadas por quebras de linha)
 TickerAlert.enable=Habilitado
 TickerAlert.sound=Música
+TeamPopupLinks.prefsCaption=Preferências de links
+TeamPopupLinks.ShowByDefault=Mostrar por padrão
+TeamPopupLinks.ShowOnMore=Mostrar mais
+TeamPopupLinks.OpenNewTab=Abrir em nova aba
 
 #toolbar
 toolbar.title=FoxTrick
