--- a/content/locale/sk/foxtrick.properties
+++ b/content/locale/sk/foxtrick.properties
@@ -248,30 +248,22 @@ module.RapidId.desc=Chytré okienko na vrchu stránky pre zobrazenie tímu, hrá
 
 #Save for work
 
-#Embed Media
-
 #Extrashortcuts
 ExtraShortcuts.statistics=štatistiky
 ExtraShortcuts.transfers=prestupy
 ExtraShortcuts.prefs=preferencie
 ExtraShortcuts.ftprefs=FoxTrick nastavenia
 
-#lineupShortcut
-
-
 #HistoryStats
+HistoryStats.boxheader=Historické štatistiky
 HistoryStats.season=sezóna
 HistoryStats.cup=pohár
 HistoryStats.league=liga
 HistoryStats.finalPosition=poz.
-HistoryStats.boxheader=Historické štatistiky
 
 # YouthPromotes
 #following string uses pluralForms
 YouthPromotes.today=Hráč môže byť dnes preradený\!
-
-# links
-links.boxheader=Odkazy
 
 #teamstats+filters
 TeamStats.boxheader=Prehľad o tíme
@@ -283,6 +275,12 @@ TeamStats.TransferListed=Na trhu
 TeamStats.Pictures=Obrázky
 TeamStats.PlayedLatest=Hrali v poslednom zápase
 TeamStats.NotPlayedLatest=Nehrali v poslednom zápase
+
+#PlayerBirthday
+PlayerBirthday.boxheader=Narodeniny
+PlayerBirthday.BirthdayToday=Narodeniny dnes
+PlayerBirthday.BirthdayLastWeek=Narodeniny minulý týždeň
+PlayerBirthday.BirthdayNextWeek=Narodeniny budúci týždeň
 
 #season stats
 #note to translators. use abreviations of league table where applicable
@@ -308,36 +306,42 @@ LeagueNewsFilter.friendlies=Priateláky a zmeny trénerov
 LeagueNewsFilter.transfers=Prestupy
 LeagueNewsFilter.lineupChanges=Zmeny v zostavách
 
-# AddLeaveConfButton
-AddLeaveConfButton.alert=Pre opustenie tejto konferencie klikni na ďalšej stránke na tlačítko 'Uložiť'.
-AddLeaveConfButton.LeaveForum=Opustiť konferenciu
+#team pages
+sidebarBox.actions=Majiteľove kroky
+TeamSelectBox.selectplayer=Výber hráča
+ExtendedPlayerDetails.perseason=/za sezónu
+ExtraPlayerInfo.defensiveTrainer=%s je obranne zameraný tréner.
+ExtraPlayerInfo.offensiveTrainer=%s je útočne zameraný tréner.
+ExtraPlayerInfo.balancedTrainer=%s  je neutrálny tréner.
+ManagerButtons.writeInGuestbook=Zobraz knihu návštev
 
-#ShowForumPrefButton
+#forum
+AddLeaveConfButton.LeaveForum=Opustiť konferenciu
+AddLeaveConfButton.alert=Pre opustenie tejto konferencie klikni na ďalšej stránke na tlačítko 'Uložiť'.
+HideSignatures.signaturetoggle=Podpis
+ForumStripHattrickLinks.ask=Skutočne chceš odstrániť server z odkazov na fóre?
 
 # ForumTemplates
 ForumTemplates.make=Vytvoriť šablónu z príspevku
+ForumTemplates.make.error=Šablóna buď už existuje alebo je prázdna
 ForumTemplates.show=Zobraziť šablóny
 ForumTemplates.hide=Skryť šablóny
-ForumTemplates.make.error=Šablóna buď už existuje alebo je prázdna
 ForumTemplates.templateTitle=Názov šablóny\:
 ForumTemplates.templateTitle.error='[' a ']' nie sú dovolené v titulkoch
 ForumTemplates.delete.ask=Odstrániť šablónu?
 
-#PostPreview
+#ForumPreview
 ForumPreview.preview.title=Zobrazit náhľad príspevku
 ForumPreview.preview=Náhľad
 ForumPreview.send=Poslať
 
-
-ForumYouthIcons.toolbar.youth=Dorastenecké odkazy
+#ForumYouthIcons
 ForumYouthIcons.toolbar.main=Štandardné odkazy
+ForumYouthIcons.toolbar.youth=Dorastenecké odkazy
 ForumYouthIcons.youthplayerid=Vložiť odkaz na dorastenca
 ForumYouthIcons.youthteamid=Vložiť odkaz na dorastenecký tím
 ForumYouthIcons.youthmatchid=Vložiť odkaz na dorastenecký zápas
 ForumYouthIcons.youthseries=Vložiť odkaz na dorasteneckú ligu
-
-
-#special bbcode, not really youth icons
 ForumSpecialBBCode.br=Vložiť zalomenie riadku
 ForumSpecialBBCode.user=Vložiť ID užívateľa
 ForumSpecialBBCode.kit=Vložiť kitID
@@ -346,8 +350,6 @@ ForumSpecialBBCode.clock=Vložiť aktuálny čas
 ForumSpecialBBCode.spoiler=Vložiť spoiler
 ForumSpecialBBCode.pre=Vložiť 'pre' formátovaciu značku
 
-
-
 #Transferlistfilters
 TransferSearchFilters.boxheader=Foxtrick filtre
 TransferSearchFilters.enterName=Napíš názov filtra\:
@@ -355,16 +357,6 @@ TransferSearchFilters.deleteFilter.ask=Určite chceš odstrániť tento filter?
 TransferSearchFilters.saveFilter=Uložiť nový filter
 
 #Filter
-
-#Locales for date and time
-#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
-#next 6 use pluralFroms
-datetimestrings.days=dní
-datetimestrings.hours=h
-datetimestrings.minutes=m
-datetimestrings.short_seasons=s
-datetimestrings.short_weeks=t
-datetimestrings.short_days=d
 
 #Transfer prices
 MedianTransferPrice.median=Medián ceny
@@ -402,44 +394,38 @@ categories.R=R
 categories.E1=E1
 categories.E2=E2
 
+#match positions
 
 
 
-
+# SkillTable
+Skill_table=Tabuľka skillov
+Switch_view=Zmeniť pohľad
+Switch_view.title=Prehodiť zobrazenie tabuľky.
 PlayerNumber=Číslo hráća
 PlayerNumber.abbr=\#
-
 TSI=Total Skill Index
 TSI.abbr=TSI
-
-
 Agreeability=Obľúbenosť
 Agreeability.abbr=Ob
 Aggressiveness=Temperament
 Aggressiveness.abbr=Te
 Honesty=Čestnosť
 Honesty.abbr=Če
-
 Leadership=Vodcovstvo
 Leadership.abbr=LS
 Experience=Skúsenosti
 Experience.abbr=XP
-
 Stamina=Kondícia
 Stamina.abbr=Kon
 Form=Forma
 Form.abbr=Fo
-
-
-
 Yellow_card=Žltá karta
 Yellow_card.abbr=Ž
 Red_card=Červená karta
 Red_card.abbr=Č
-
 Speciality=Špecialita
 Speciality.abbr=Šp
-
 Last_match=Posledný zápas
 Last_match.abbr=Posledný
 Last_stars=Posledné hodnotenie
@@ -447,49 +433,41 @@ Last_stars.abbr=Hd
 Last_position=Posledná pozícia
 Last_position.abbr=Poz
 #following string uses pluralForms
-
 Bruised=Poranený
 Bruised.abbr=Por
 Injured=Zranený
 Injured.abbr=Zra
-
 Salary=Plat
 Salary.abbr=Plat
-
 TransferListed=Hráč na prestupovej listine
 TransferListed.abbr=PL
-
 NrOfMatches=Počet zápasov
 NrOfMatches.abbr=PZ
 LeagueGoals=Ligové góly
 LeagueGoals.abbr=LG
 CareerGoals=Góly v kariére
 CareerGoals.abbr=KG
+Coach=Tréner
+Nationality=Národnosť
+Nationality.abbr=Nár
+Flag=Vlajka
+Flag.abbr=Vlajka
+Player=Hráč
+Player.abbr=Hráč
+Age=Vek
+Age.abbr=Vek
+Match=Zápas
+Series=Liga
 
-
-
-
-
-#matchdetail
-match.ratings.midfield=Záloha
-match.ratings.attack=Útok
-match.ratings.defence=Obrana
-
-match.ratings.right=Pravý
-match.ratings.center=Stredný
-match.ratings.left=Ľavý
-match.ratings.rightshort=P
-match.ratings.centershort=S
-match.ratings.leftshort=L
-match.ratings.ifkshort=NK
+#confirms
 ConfirmActions.bid=Určite chceš za hráča ponúknuť sumu %s?
 ConfirmActions.transferlist=Určite chceš tohto hráča umiestniť na prestupovú listinu? Jeho vyvolávacia cena bude %s.
 ConfirmActions.hirestaff=Určite chceš najať %num %kind?
 ConfirmActions.sackstaff=Určite chceš vyhodiť %num %kind?
 ConfirmActions.ntremove=Skutočne chceš pridať/odstrániť tohto hráča?
-ForumStripHattrickLinks.ask=Skutočne chceš odstrániť server z odkazov na fóre?
-HideSignatures.signaturetoggle=Podpis
-TeamSelectBox.selectplayer=Výber hráča
+
+# links
+links.boxheader=Odkazy
 links.custom.selecticon=Vybrať ikonu
 links.custom.addpersonallink=Pridať vlastný odkaz
 links.custom.addlink=Pridať odkaz
@@ -502,34 +480,20 @@ links.custom.tags=Parametre
 links.custom.help=Nápoveda
 links.custom.helptext=Najskôr je treba povedať, že toto je iba editor. Kliknutím na hlavičku tohto okna môžete prepínať medzi módom editácie a normálnym zobrazením. Vaše vlastné odkazy sú funkčné len v normálnom zobrazení. Statické externé stránky pridáte jednoducho, stačí napísať celú URL adresu (príklad\: http\://alltid.org/league/427/). Pre odkaz na interné štatistické stránky vynechajte čast týkajúcu sa servera (príklad\: /World/Series/Default.aspx?LeagueLevelUnitID\=427). Stránky, na ktoré odkazujete s parametrami sa môžu meniť dynamicky na základe informácií, ktoré pomocou parametra poskytnete. Napríklad http\://alltid.org/league/[leagueid] vás vždy zavedie na stránku alltid.org s ligou, ktorú si teraz prehliadate. Parametre, ktoré sú na danej stránke k dispozícii sú uvedené vo výberovom poli. Môžete využiť len tie parametre, ktoré sú k dispozícii na stránke, na ktorej chcete vlastný odkaz vytvoriť. Text, ktorý sa potom objaví je len ukážkový. Parametre môžete písať aj ručne pomocou hranatých zátvoriek – [].
 links.custom.helptext2=Môžete exportovať odkazy a zdielať ich. Aby ste to urobili, musíte kliknúť na tlačítko 'export' a vybrať súbor, do ktorého sa odkazy uložia. Odkazy sú do toho súboru pridávané, takže môžete uložiť mnoho odkazov v jednom súbore. Aby ste importovali odkazy importovali, choďte do nastavení, konkrétne nastavenia importu. Iba nastavenia prítomné vo vybranom súbore budú importované, čo v tomto prípade sú odkazy. Žiadny z predošlých odkazov nebude vymazaný.
-matches.income=Príjem\:
-PlayerBirthday.boxheader=Narodeniny
-PlayerBirthday.BirthdayToday=Narodeniny dnes
-PlayerBirthday.BirthdayLastWeek=Narodeniny minulý týždeň
-PlayerBirthday.BirthdayNextWeek=Narodeniny budúci týždeň
-copy.matchid=Klikni pre skopírovanie ID zápasu do schránky
-ExtendedPlayerDetails.perseason=/za sezónu
 
-ExtraPlayerInfo.defensiveTrainer=%s je obranne zameraný tréner.
-ExtraPlayerInfo.offensiveTrainer=%s je útočne zameraný tréner.
-ExtraPlayerInfo.balancedTrainer=%s  je neutrálny tréner.
 
 #following string uses pluralForms
 #following string uses pluralForms
 
 
-module.modules_allpages=Moduly bežiace na všetkých stránkach
-ReadHtPrefs.HTLanguageChanged=Nastavil si v nastaveniach foxtricku aby sa jazyk foxtricku automaticky prisôsoboval zmenám jazyka na HT. Tvoj nový jazyk je\: %s.
-
-Coach=Tréner
-
-
-ManagerButtons.writeInGuestbook=Zobraz knihu návštev
-copy.copyplayerad=Kopírovať vlastnosti hráča do schránky
-copy.copied=Informácie o hráčovi boli vložené do schránky.
-
+# Context menu items
+# This would look like: Copy player ID: 123456789
 
 #copy
+copy.copyplayerad=Kopírovať vlastnosti hráča do schránky
+copy.copied=Informácie o hráčovi boli vložené do schránky.
+copy.matchid=Klikni pre skopírovanie ID zápasu do schránky
+
 copy.PostID=Kopírovať do schránky
 
 CopyRatings.home=Skopírovať ratingy domáceho tímu (v HT-ML formáte)
@@ -543,9 +507,8 @@ copy.copied.matchid=ID zápasu bolo skopírované do schránky.
 copy.copied.postid=ID príspevku bolo skopírované do schránky.
 copy.copied.posting=Príspevok bol skopírovaný do schránky.
 
-
-
 #matches
+matches.income=Príjem\:
 matches.attackdefensebars=Grafy útokov a obran
 matches.right=P
 matches.left=L
@@ -554,9 +517,23 @@ matches.defense=obrana
 matches.attack=útok
 matches.indfreekick=Nepriame kopy
 matches.wronglang=FoxTrick\: Štatistiky nemôžu byť zobrazené, lebo Váš jazyk nie je registrovaný, prípadne v nastaveniach je zvolený nesprávny jazyk. Uistite sa, že jazyk nastavený vo foxtricku je rovnaký ako Váš jazyk na HT.
+total_stars=Celkový počet hviezdičiek
 
-# Context menu items
-# This would look like: Copy player ID: 123456789
+#matchdetail
+match.ratings.midfield=Záloha
+match.ratings.attack=Útok
+match.ratings.defence=Obrana
+
+match.ratings.right=Pravý
+match.ratings.center=Stredný
+match.ratings.left=Ľavý
+match.ratings.rightshort=P
+match.ratings.centershort=S
+match.ratings.leftshort=L
+match.ratings.ifkshort=NK
+
+
+
 
 #teampopups
 Manager=Manažér
@@ -577,8 +554,6 @@ YouthMatches=Zápasy dorastu
 more=viac...
 less=menej...
 
-total_stars=Celkový počet hviezdičiek
-
 # FlagCollectionToMap
 flagCollectionToMap.ShowMap=Zobraziť mapu
 flagCollectionToMap.HideMap=Skryť mapu
@@ -589,34 +564,15 @@ flagCollectionToMap.MEast=Stredný Východ
 flagCollectionToMap.SAmerica=Južná Amerika
 flagCollectionToMap.World=Svet
 
-# SkillTable
-Skill_table=Tabuľka skillov
-Switch_view=Zmeniť pohľad
-
 
 
 # TransferSearchResultFilters
-
-# refer to transfer search form
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
 RapidId.view=Pozrieť
 RapidId.viewById=Zobraziť podľa ID
 RapidId.senior=Seniorský
 RapidId.youth=dorastenecký
-
-# SkillTable
-Switch_view.title=Prehodiť zobrazenie tabuľky.
-Nationality=Národnosť
-Nationality.abbr=Nár
-Flag=Vlajka
-Flag.abbr=Vlajka
-Player=Hráč
-Player.abbr=Hráč
-Age=Vek
-Age.abbr=Vek
-Match=Zápas
-Series=Liga
 
 
 # HTMSPrediction
@@ -646,7 +602,15 @@ CrossTable.table=Sezónna cross tabuľka
 
 # fennec ui
 
-sidebarBox.actions=Majiteľove kroky
+#Locales for date and time
+#Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
+#next 6 use pluralFroms
+datetimestrings.days=dní
+datetimestrings.hours=h
+datetimestrings.minutes=m
+datetimestrings.short_seasons=s
+datetimestrings.short_weeks=t
+datetimestrings.short_days=d
 
 # buttons
 button.customize=Prispôsobiť
@@ -663,6 +627,8 @@ button.copy=Kopírovať
 
 
 # keep the following line untranslated
+
+ReadHtPrefs.HTLanguageChanged=Nastavil si v nastaveniach foxtricku aby sa jazyk foxtricku automaticky prisôsoboval zmenám jazyka na HT. Tvoj nový jazyk je\: %s.
 
 # End of IN-GAME STRINGS.
 
